--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/01.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/01.md
@@ -2,210 +2,257 @@
 title = "०१"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/01_athAtaH_pAkayajnAnvyAkhyAsyAmaH.md">
-<details open><summary><h2>०१ अथातः पाकयज्ञान्व्याख्यास्यामः ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथातः पाकयज्ञान्व्याख्यास्यामः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/01_athAtaH_pAkayajnAnvyAkhyAsyAmaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथातः पाकयज्ञान्व्याख्यास्यामः १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now henceforth we shall declare the Pākayajñas.
 
 [^1]:  I, 1. The ceremonies to be treated of are defined here as the Pākayajñas (i.e. oblations of cooked offerings) just as in the opening sentence of the Pāraskara-Gṛhya they are called gṛhyasthālīpākās. This is indeed the most characteristic form of offerings belonging to the domain of the Gṛhya ritual, though it would not be correct to state that the Gṛhya-sūtras treat exclusively of sacrificial ceremonies of this kind.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/02_abhisamAvartsyamAno_yatrAntyAm.md">
-<details open><summary><h2>०२ अभिसमावर्त्स्यमानो यत्रान्त्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभिसमावर्त्स्यमानो यत्रान्त्यां समिधमभ्यादध्यात्तमग्निमिन्धीत २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/02_abhisamAvartsyamAno_yatrAntyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अभिसमावर्त्स्यमानो यत्रान्त्यां समिधमभ्यादध्यात्तमग्निमिन्धीत २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . When (a pupil) is going to return (from his teacher), let him keep that fire (as his domestic fire) on which he has put the last piece of wood (as required by the regulations for a student),
 
 [^2]:  As to the duty of the Vedic student of putting every day a piece of wood on the sacred fire of his teacher, see below, II, 6, 8, and compare the Gṛhya-saṃgraha-pariśiṣṭa II, 58. According to a Kārikā given by Nārāyaṇa, and the Karmapradīpa (I, 6, 13). the prescription of this Sūtra regarding the time for the kindling of the sacred fire refers exclusively to the case of vāgdāna (betrothal). Comp. also Dr. Bloomfield's note on the Gṛhya-saṃgraha-pariśiṣṭa I, 76 (Zeitschrift der Deutschen Morgenländischen Gesellschaft, XXXV, 560). In the Kārikā it is stated that if the betrothed girl dies after the fire has been kindled, but before the marriage, the sacrificer is not to forsake his fire, but to marry another girl; if he cannot find a bride, he should make the fire enter into himself according to the rules given by Śāṅkhāyana-Gṛhya V, 1, and himself become uttarāśramin, i.e. enter one of the two final Āśramas.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/03_vaivAhyaM_vA.md">
-<details open><summary><h2>०३ वैवाह्यं वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैवाह्यं वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/03_vaivAhyaM_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वैवाह्यं वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Or (he should keep) his nuptial fire.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/04_dAyAdyakAla_eke.md">
-<details open><summary><h2>०४ दायाद्यकाल एके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दायाद्यकाल एके ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/04_dAyAdyakAla_eke.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दायाद्यकाल एके ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Some declare (that the domestic fire should be kindled) at the time of the division of the inheritance.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/05_prete_vA_gRhapatau.md">
-<details open><summary><h2>०५ प्रेते वा गृहपतौ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रेते वा गृहपतौ स्वयं ज्यायान् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/05_prete_vA_gRhapatau.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रेते वा गृहपतौ स्वयं ज्यायान् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . Or that after the death of the householder the eldest one himself (should kindle it).
 
 [^3]:  Nārāyaṇa: 'If the fire has not been kindled at the time stated above, then, after the householder . . . i.e. the father, even if he should not have performed the ādhāna, or the elder brother has died, the eldest son (or the son who after his elder brother's death has become the eldest), after he has performed the Sapiṇḍīkaraṇa (for the dead father or brother; see below, IV, 3, and the ninth chapter of the Pariśiṣṭa [book V]), even if he has not divided the inheritance with his younger brothers (so that the time stated in the fourth Sūtra would not have arrived), should kindle the fire himself, i.e. without an officiating priest (ṛtvij). . . . Or the Sūtra should be divided into two; prete vā gṛhapatau (or after the death of the householder), and svayaṃ jyāyān (the eminent one himself), i.e. of Brāhmaṇas, Kṣatriyas, and Vaiśyas a jyāyān, which means a most eminent person, a Brāhmaṇa, performs the Pākayajñas himself; for the two other castes the Pākayajñas have to be performed through an officiating priest: this is the meaning of this svayaṃ (himself).' I have given this note of Nārāyaṇa as a specimen of the entirely arbitrary and obviously misleading explanations which are unfortunately so frequently found in this author, as indeed in most of the other Sūtra commentators. As to the true meaning of this svayaṃ I still adhere to the explanation which I proposed in my German edition of the text (p. 118), that in case no division of the inheritance takes place, the sacred fire should be kindled on behalf of all the joint-proprietors, but that only the eldest brother should act personally (svayaṃ).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/06_vaishAkhyAmamAvAsyAyAmanyasyAM_vA.md">
-<details open><summary><h2>०६ वैशाख्याममावास्यायामन्यस्यां वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैशाख्याममावास्यायामन्यस्यां वा ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/06_vaishAkhyAmamAvAsyAyAmanyasyAM_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वैशाख्याममावास्यायामन्यस्यां वा ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. (It should be kindled) on the day of the new moon of the month of Vaiśākha or on another (new moon day).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/07_kAmato_naxatra_eke.md">
-<details open><summary><h2>०७ कामतो नक्षत्र एके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कामतो नक्षत्र एके ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/07_kAmato_naxatra_eke.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कामतो नक्षत्र एके ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Some say (that the fire should be kindled) according to the (sacrificer's) wishes under the (corresponding) constellation.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/08_purupashuviTkulAmbarIShabahuyAjinAmanyatamasmAd.md">
-<details open><summary><h2>०८ पुरुपशुविट्कुलाम्बरीषबहुयाजिनामन्यतमस्मादग्निमिन्धीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुरुपशुविट्कुलाम्बरीषबहुयाजिनामन्यतमस्मादग्निमिन्धीत ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/08_purupashuviTkulAmbarIShabahuyAjinAmanyatamasmAd.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पुरुपशुविट्कुलाम्बरीषबहुयाजिनामन्यतमस्मादग्निमिन्धीत ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^4] . He should light his fire at one of the following places, viz. in the house of a Vaiśya who is rich in cattle, at a frying-pan, or (at the fire of) one who offers many sacrifices.
 
 [^4]:  Or, 'at (the fire of) a person rich in cattle, in the house of a Vaiśya,' &c.? The commentators (see p. 118 of the German p. 14 edition) differ as to whether in purupaśu-viṭkula one or two alternatives are contained, and it is interesting to see that the Sūtra authors themselves differed in this respect; Pāraskara (I, 2, 3), when declaring from what place the fire should be fetched, speaks of the house of a Vaiśya rich in cattle; Āśvalāyana, on the contrary, who in the Gṛhya-sūtra does not expressly treat of the kindling of the domestic fire, in the corresponding passage of the Śrauta-sūtra (II, 2, 1), gives the rule that the dakṣiṇāgni is to be fetched from the house of a Vaiśya or from a rich person.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/09_sAyamprAtareke.md">
-<details open><summary><h2>०९ सायम्प्रातरेके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायम्प्रातरेके ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/09_sAyamprAtareke.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सायम्प्रातरेके ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9 [^5] . Some say that (the fire should be fetched from one of the above-mentioned places) in the evening and in the morning.
 
 [^5]:  9-11. I now differ from the opinion which I pronounced in my German edition with regard to the relation in which these three Sūtras stand to each other. I think they ought to be understood thus: 9. Some teachers say that the fetching of the fire from its yoni, as taught in Sūtra 8, ought to be done twice; in the evening, so that the fire, after the necessary rites have been performed, goes out, and then again in the morning. 10. But my (the author's) teacher (comp. as to acāryāḥ, Kātyāyana's Śrauta-sūtra I, 3, 7; Professor Garbe's note on Vaitāna-sūtra 1, 3) is of opinion that the fire should be fetched only once, and that with this fire the ceremonies which are taught by the Adhvaryus are to be performed in the evening (see, for instance, Kāty. IV, 7. 8, which passage is paraphrased here by Nārāyaṇa). 11. In the morning (according to the same teacher, not, as I once understood this passage, according to the eke referred to in Sūtra 9), a full oblation is to be offered, &c.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/10_sAyamAhutisaMskAro-dhvaryupratyaya_ityAchAryAH.md">
-<details open><summary><h2>१० सायमाहुतिसंस्कारोऽध्वर्युप्रत्यय इत्याचार्याः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायमाहुतिसंस्कारोऽध्वर्युप्रत्यय इत्याचार्याः १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/10_sAyamAhutisaMskAro-dhvaryupratyaya_ityAchAryAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सायमाहुतिसंस्कारोऽध्वर्युप्रत्यय इत्याचार्याः १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. The inauguration (of the fire) by an evening offering should be learnt from the Adhvaryus, according to (my) teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/11_prAtaH_pUrNAhutiM_juhuyAdvaiShNavyarchA.md">
-<details open><summary><h2>११ प्रातः पूर्णाहुतिं जुहुयाद्वैष्णव्यर्चा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रातः पूर्णाहुतिं जुहुयाद्वैष्णव्यर्चा तूष्णीं वा ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/11_prAtaH_pUrNAhutiM_juhuyAdvaiShNavyarchA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रातः पूर्णाहुतिं जुहुयाद्वैष्णव्यर्चा तूष्णीं वा ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. In the morning he shall offer a full oblation with a verse sacred to Viṣṇu, or silently.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/12_tasya_prAduShkaraNahavanakAlAvagnihotreNa_vyAkh.md">
-<details open><summary><h2>१२ तस्य प्रादुष्करणहवनकालावग्निहोत्रेण व्याख्यातौ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्य प्रादुष्करणहवनकालावग्निहोत्रेण व्याख्यातौ १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/12_tasya_prAduShkaraNahavanakAlAvagnihotreNa_vyAkh.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तस्य प्रादुष्करणहवनकालावग्निहोत्रेण व्याख्यातौ १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12 [^6] . The time for setting it (i.e. the domestic fire) in a blaze and for sacrificing on it has been explained by (the rules given with regard to) the Agnihotra.
 
 [^6]:  Śrauta-sūtra II, 6, 2 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/13_yajnopavItItyAdi_cha_sambhavatsarvam.md">
-<details open><summary><h2>१३ यज्ञोपवीतीत्यादि च सम्भवत्सर्वम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यज्ञोपवीतीत्यादि च सम्भवत्सर्वं कल्पैकत्वात् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/13_yajnopavItItyAdi_cha_sambhavatsarvam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यज्ञोपवीतीत्यादि च सम्भवत्सर्वं कल्पैकत्वात् १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13 [^7] . And 'invested with the sacrificial cord,' &c., all these rules, as far as they are applicable, should be applied (here also) in consequence of the unity of the ritual.
 
 [^7]:  Śrauta-sūtra I, 1, 6. 7: yajñopavītī devakarmāṇi karoti, prācīnāvītī pitryāṇi, &c. The unity of the ritual of course means the unity of the two great domains of the Śrauta and Gṛhya ritual.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/14_tadapyAhuH.md">
-<details open><summary><h2>१४ तदप्याहुः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदप्याहुः १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/14_tadapyAhuH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तदप्याहुः १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. With regard to this they quote also (the following Śloka):
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/01/15_pAkasaMsthA_haviHsaMsthAH_somasaMsthAstathAparA.md">
-<details open><summary><h2>१५ पाकसंस्था हविःसंस्थाः सोमसंस्थास्तथापराः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पाकसंस्था हविःसंस्थाः सोमसंस्थास्तथापराः एकविँ शतिरित्येता यज्ञसंस्थाः प्रकीर्तिताः १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/01/15_pAkasaMsthA_haviHsaMsthAH_somasaMsthAstathAparA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पाकसंस्था हविःसंस्थाः सोमसंस्थास्तथापराः एकविँ शतिरित्येता यज्ञसंस्थाः प्रकीर्तिताः १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15 [^8] . 'The kinds of Pākayajñas, the kinds of Haviryajñas, and again the kinds of Soma sacrifices,
 
@@ -214,4 +261,3 @@ title = "०१"
 'Twenty-one by number, these are proclaimed to be the kinds of sacrifice.'
 
 </details>
-</div>
