--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/06.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/06.md
@@ -2,89 +2,108 @@
 title = "०६"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/06/01_jAyAmupagrahIShyamANo-nRxarA_iti.md">
-<details open><summary><h2>०१ जायामुपग्रहीष्यमाणोऽनृक्षरा इति ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जायामुपग्रहीष्यमाणोऽनृक्षरा इति वरकान्गच्छतोऽनुमन्त्रयते
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/06/01_jAyAmupagrahIShyamANo-nRxarA_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+जायामुपग्रहीष्यमाणोऽनृक्षरा इति वरकान्गच्छतोऽनुमन्त्रयते
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . If he will acquire a wife, let him recite over the wooers (whom he sends to the girl's father) when they go away, the verse, 'Thornless' (Rig-veda X, 85, 23).
 
 [^1]:  6, 1. 'The wooers, i.e. his own father, &c.' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/06/02_abhigamane_puShpaphalayavAnAdAyodakumbhaM_cha.md">
-<details open><summary><h2>०२ अभिगमने पुष्पफलयवानादायोदकुम्भं च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अभिगमने पुष्पफलयवानादायोदकुम्भं च
+</details>
+
+<details><summary>मूलम्</summary>
 
 अभिगमने पुष्पफलयवानादायोदकुम्भं च 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/06/02_abhigamane_puShpaphalayavAnAdAyodakumbhaM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. When they arrive, they take flowers, fruits, barley, and a pot of water.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/06/03_ayamahaM_bho3_iti.md">
-<details open><summary><h2>०३ अयमहं भो३ इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अयमहं भो३ इति त्रिः प्रोच्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 अयमहं भो३ इति त्रिः प्रोच्य 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/06/03_ayamahaM_bho3_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . They say thrice, 'Here I am, sir!'
 
 [^2]:  'When the father of the suitor and the others, together with their Ācārya, have arrived at the house of him who is to give away the girl, they station themselves in the hall, and the father of the suitor says thrice, "Here am I, N.N. (amukaśarman), Sir!" - in these words he announces himself three times . . . . For at the house of the person who gives the girl away, there arrive also, in order to see the festivities, many other people. In order to distinguish himself from these, he pronounces his name.' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/06/04_udite_prA~NmukhA_gRhyAH.md">
-<details open><summary><h2>०४ उदिते प्राङ्मुखा गृह्याः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+उदिते प्राङ्मुखा गृह्याः प्रत्यङ्मुखा आवहमाना गोत्रनामान्यनुकीर्तयन्तः कन्यां वरयन्ति
+</details>
+
+<details><summary>मूलम्</summary>
 
 उदिते प्राङ्मुखा गृह्याः प्रत्यङ्मुखा आवहमाना गोत्रनामान्यनुकीर्तयन्तः कन्यां वरयन्ति 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/06/04_udite_prA~NmukhA_gRhyAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. When these words have been uttered, they ask the girl in marriage, reciting the clan names, the dwellers turning their faces to the east, the visitors to the west.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/06/05_ubhayato_ruchite_pUrNapAtrImabhimRshanti.md">
-<details open><summary><h2>०५ उभयतो रुचिते पूर्णपात्रीमभिमृशन्ति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+उभयतो रुचिते पूर्णपात्रीमभिमृशन्ति पुष्पाक्षतफलयवहिरण्यमिश्राम् अनाधृष्टमस्यनाधृष्यं देवानामोजोऽनभिशस्त्यभिशस्तिपा अनभिशस्तेन्यम् अञ्जसा सत्यमुपगेषं सुविते मा धा इति
+</details>
+
+<details><summary>मूलम्</summary>
 
 उभयतो रुचिते पूर्णपात्रीमभिमृशन्ति पुष्पाक्षतफलयवहिरण्यमिश्राम् अनाधृष्टमस्यनाधृष्यं देवानामोजोऽनभिशस्त्यभिशस्तिपा अनभिशस्तेन्यम् अञ्जसा सत्यमुपगेषं सुविते मा धा इति
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/06/05_ubhayato_ruchite_pUrNapAtrImabhimRshanti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. When the matter pleases both sides, let them touch a full vessel into which have been put flowers, fried grain, fruits, barley, and gold, and let them recite (the formula), 'Undisturbed art thou, the undisturbable vigour of the gods, not cursed, protecting against a curse, unexposed to a curse. Might I straightway attain to truth. Put me into prosperity.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/06/06_A_naH_prajAmiti.md">
-<details open><summary><h2>०६ आ नः प्रजामिति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+आ नः प्रजामिति कन्याया आचार्य उत्थाय मूर्धनि करोति प्रजां त्वयि दधामि पशूँ स्त्वयि दधामि तेजो ब्रह्मवर्चसं त्वयि दधामीति ६
+</details>
+
+<details><summary>मूलम्</summary>
 
 आ नः प्रजामिति कन्याया आचार्य उत्थाय मूर्धनि करोति प्रजां त्वयि दधामि पशूँ स्त्वयि दधामि तेजो ब्रह्मवर्चसं त्वयि दधामीति ६
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/06/06_A_naH_prajAmiti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^3] . With the verse, 'Offspring may produce us' (Rig-veda X, 85, 43), the Ācārya of the girl's (family), standing up, places (the vessel) on her head (saying), 'Offspring I put into thee, cattle I put into thee, splendour and holy lustre I put into thee.'
 
 [^3]:  The position of the words as well as the sense favours combining the genitive kanyāyāḥ with ācāryaḥ, not with mūrdhani, though Rāmacandra says that the varapakṣācārya is to be understood.
 
 </details>
-</div>
