--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/08.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/08.md
@@ -2,296 +2,361 @@
 title = "०८"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/01_atha_paristaraNam.md">
-<details open><summary><h2>०१ अथ परिस्तरणम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ परिस्तरणं १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/01_atha_paristaraNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ परिस्तरणं १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now (follows) the strewing (of grass) around (the fire).
 
 [^1]:  8, 1. Comp. the passages quoted in Professor Eggeling's note on Śatapatha Br. I, 1, 1, 22.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/02_prAgagraiH_kushaiH_paristRNAti.md">
-<details open><summary><h2>०२ प्रागग्रैः कुशैः परिस्तृणाति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रागग्रैः कुशैः परिस्तृणाति त्रिवृत्पञ्चवृद्वा २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/02_prAgagraiH_kushaiH_paristRNAti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रागग्रैः कुशैः परिस्तृणाति त्रिवृत्पञ्चवृद्वा २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. He strews eastward-pointed Kuśa grass around it, in three layers or in five layers,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/03_purastAtprathamamatha_pashchAdatha_pashchAn.md">
-<details open><summary><h2>०३ पुरस्तात्प्रथममथ पश्चादथ पश्चान् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुरस्तात्प्रथममथ पश्चादथ पश्चान् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/03_purastAtprathamamatha_pashchAdatha_pashchAn.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पुरस्तात्प्रथममथ पश्चादथ पश्चान् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Beginning on the east side, then to the west, then to the west.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/04_mUlAnyagraiH_prachChAdayati.md">
-<details open><summary><h2>०४ मूलान्यग्रैः प्रच्छादयति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मूलान्यग्रैः प्रच्छादयति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/04_mUlAnyagraiH_prachChAdayati.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मूलान्यग्रैः प्रच्छादयति ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. He covers the roots (of the grass-blades) with the points.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/05_sarvAshchAvRto_daxiNataHpravRttaya_udaksaMsthA.md">
-<details open><summary><h2>०५ सर्वाश्चावृतो दक्षिणतःप्रवृत्तय उदक्संस्था ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वाश्चावृतो दक्षिणतःप्रवृत्तय उदक्संस्था भवन्ति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/05_sarvAshchAvRto_daxiNataHpravRttaya_udaksaMsthA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सर्वाश्चावृतो दक्षिणतःप्रवृत्तय उदक्संस्था भवन्ति ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. And all kinds of rites are to be performed beginning south, ending north.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/06_daxiNato_brahmANaM_pratiShThApya.md">
-<details open><summary><h2>०६ दक्षिणतो ब्रह्माणं प्रतिष्ठाप्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षिणतो ब्रह्माणं प्रतिष्ठाप्य भूर्भुवः स्वरिति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/06_daxiNato_brahmANaM_pratiShThApya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दक्षिणतो ब्रह्माणं प्रतिष्ठाप्य भूर्भुवः स्वरिति ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^2] . He places the Brahman south with the words, BHŪR BHUVAḤ SVAḤ,
 
 [^2]:  Ordinarily there was no real Brahman present, and his place was filled by a bundle of Kuśa grass that represented him. Nārāyaṇa states that this bundle should consist of fifty blades of Kuśa grass. Comp. also the Gṛhya-saṃgraha-pariśiṣṭa I, 89-90.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/07_sumanobhiralankRtya.md">
-<details open><summary><h2>०७ सुमनोभिरलङ्कृत्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुमनोभिरलङ्कृत्य
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/07_sumanobhiralankRtya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सुमनोभिरलङ्कृत्य
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Adorns him with flowers,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/08_uttarataH_praNItAH_praNIya.md">
-<details open><summary><h2>०८ उत्तरतः प्रणीताः प्रणीय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरतः प्रणीताः प्रणीय को वः प्रणयतीति ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/08_uttarataH_praNItAH_praNIya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उत्तरतः प्रणीताः प्रणीय को वः प्रणयतीति ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^3] . Carries forward on the north side the Praṇītā waters with the words, 'Who carries ye forward?' - 
 
 [^3]:  Comp. the passages quoted by Dr. Bloomfield, Zeitschrift der Deutschen Morgenländ. Gesellschaft, vol. xxxv, p. 565, note 2.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/09_savyena_kushAnAdAya_daxiNenApanauti.md">
-<details open><summary><h2>०९ सव्येन कुशानादाय दक्षिणेनापनौति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सव्येन कुशानादाय दक्षिणेनापनौति ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/09_savyena_kushAnAdAya_daxiNenApanauti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सव्येन कुशानादाय दक्षिणेनापनौति ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9 [^4] . Takes up with the left hand the Kuśa blades, and arranges them (on the ground) with the right hand,
 
 [^4]:  This Sūtra shows that the paristaraṇa, though already treated of in Sūtras 1-4, is not to be performed till after the 'carrying forward' of the Praṇītā water. Comp. Nārāyaṇa's note on Sūtra 1 (p. 123 of the German edition). That this is indeed the order of the different acts is confirmed by Pāraskara I, 1, 2.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/10_daxiNaM_jAnvAchya.md">
-<details open><summary><h2>१० दक्षिणं जान्वाच्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षिणं जान्वाच्य १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/10_daxiNaM_jAnvAchya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दक्षिणं जान्वाच्य १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. Bending his right knee,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/11_savyaM_pitrye.md">
-<details open><summary><h2>११ सव्यं पित्र्ये ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सव्यं पित्र्ये ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/11_savyaM_pitrye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सव्यं पित्र्ये ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. The left when worshipping the Manes.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/12_nAjyAhutiShu_nityaM_paristaraNam.md">
-<details open><summary><h2>१२ नाज्याहुतिषु नित्यं परिस्तरणम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नाज्याहुतिषु नित्यं परिस्तरणं १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/12_nAjyAhutiShu_nityaM_paristaraNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नाज्याहुतिषु नित्यं परिस्तरणं १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. The strewing around (of the grass) is not necessary in the Ājya offerings,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/13_nityAhutiShu_cheti_mANDUkeyaH.md">
-<details open><summary><h2>१३ नित्याहुतिषु चेति माण्डूकेयः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नित्याहुतिषु चेति माण्डूकेयः १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/13_nityAhutiShu_cheti_mANDUkeyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नित्याहुतिषु चेति माण्डूकेयः १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13 [^5] . Nor in the standing offerings, according to Māṇḍūkeya.
 
 [^5]:  'In the standing offerings, such as the Vaiśvadeva sacrifice in the morning and in the evening.' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/14_kushataruNe_aviShame_avichChinnAgre.md">
-<details open><summary><h2>१४ कुशतरुणे अविषमे अविच्छिन्नाग्रे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुशतरुणे अविषमे अविच्छिन्नाग्रे अनन्तर्गर्भे प्रादेशेन मापयित्वा कुशेन च्छिनत्ति पवित्रे स्थ इति १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/14_kushataruNe_aviShame_avichChinnAgre.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कुशतरुणे अविषमे अविच्छिन्नाग्रे अनन्तर्गर्भे प्रादेशेन मापयित्वा कुशेन च्छिनत्ति पवित्रे स्थ इति १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14 [^6] . He now measures off with the span (of his hand) two Kuśa blades, which are not unequal, with unbroken points, bearing no young shoots in them, and severs them (from their roots) with a Kuśa blade, saying, 'Purifiers are ye.'
 
 [^6]:  Vājasaneyi Saṃhitā I, 12 a.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/15_dve_trINi_vA.md">
-<details open><summary><h2>१५ द्वे त्रीणि वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 द्वे त्रीणि वा भवन्ति १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/15_dve_trINi_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+द्वे त्रीणि वा भवन्ति १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. There are two or three (of these Kuśa strainers).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/16_prAgagre_dhArayanvaiShNavyAvityabhyuxya.md">
-<details open><summary><h2>१६ प्रागग्रे धारयन्वैष्णव्यावित्यभ्युक्ष्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रागग्रे धारयन्वैष्णव्यावित्यभ्युक्ष्य १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/16_prAgagre_dhArayanvaiShNavyAvityabhyuxya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रागग्रे धारयन्वैष्णव्यावित्यभ्युक्ष्य १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. He holds them with their points to the east and sprinkles them (with water, saying), 'Belonging to Viṣṇu.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/17_kushataruNAbhyAM_pradaxiNamagniM_triH.md">
-<details open><summary><h2>१७ कुशतरुणाभ्यां प्रदक्षिणमग्निं त्रिः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुशतरुणाभ्यां प्रदक्षिणमग्निं त्रिः पर्युक्ष्य १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/17_kushataruNAbhyAM_pradaxiNamagniM_triH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कुशतरुणाभ्यां प्रदक्षिणमग्निं त्रिः पर्युक्ष्य १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17. With the two Kuśa blades he sprinkles (water) around the fire three times, keeping his right side turned towards it,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/18_mahInAM_payo-sItyAjyasthAlImAdAya.md">
-<details open><summary><h2>१८ महीनां पयोऽसीत्याज्यस्थालीमादाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+महीनां पयोऽसीत्याज्यस्थालीमादाय
+</details>
+
+<details><summary>मूलम्</summary>
 
 महीनां पयोऽसीत्याज्यस्थालीमादाय
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/18_mahInAM_payo-sItyAjyasthAlImAdAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 18 [^7] . Takes up the Ājya pot with the words, 'Milk of the cows art thou;'
 
 [^7]:  Vāj. Saṃh. IV, 3 a.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/19_iShe_tvetyadhishritya.md">
-<details open><summary><h2>१९ इषे त्वेत्यधिश्रित्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+इषे त्वेत्यधिश्रित्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 इषे त्वेत्यधिश्रित्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/19_iShe_tvetyadhishritya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 19 [^8] . Puts it on the fire with the words, 'For sap thee;'
 
 [^8]:  Vāj. Saṃh. I, 22 d.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/20_urje_tvetyudagudvAsya.md">
-<details open><summary><h2>२० उर्जे त्वेत्युदगुद्वास्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+उर्जे त्वेत्युदगुद्वास्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 उर्जे त्वेत्युदगुद्वास्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/20_urje_tvetyudagudvAsya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 20 [^9] . Takes it from the fire towards the north with the words, 'For juice thee;'
 
 [^9]:  Vāj. Saṃh. I, 30 c.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/21_udagagre_pavitre_dhArayannanguShThAbhyAm.md">
-<details open><summary><h2>२१ उदगग्रे पवित्रे धारयन्नङ्गुष्ठाभ्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+उदगग्रे पवित्रे धारयन्नङ्गुष्ठाभ्यां चोपकनिष्ठिकाभ्यां चोभयतः प्रतिगृह्योर्ध्वाग्रे प्रह्वे कृत्वाज्ये प्रत्यस्यति सवितुष्ट्वा प्रसव उत्पुनाम्यच्छिद्रे ण पवित्रेण वसोः सूर्यस्य रश्मिभिरिति
+</details>
+
+<details><summary>मूलम्</summary>
 
 उदगग्रे पवित्रे धारयन्नङ्गुष्ठाभ्यां चोपकनिष्ठिकाभ्यां चोभयतः प्रतिगृह्योर्ध्वाग्रे प्रह्वे कृत्वाज्ये प्रत्यस्यति सवितुष्ट्वा प्रसव उत्पुनाम्यच्छिद्रे ण पवित्रेण वसोः सूर्यस्य रश्मिभिरिति 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/21_udagagre_pavitre_dhArayannanguShThAbhyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 21 [^10] . And holding the two (Kuśa) strainers with their points to the north, seizing them on both sides with his two thumbs and fourth fingers, he bends them down, the points upwards, and dips them into the Ājya with the words,
 
@@ -300,58 +365,69 @@ title = "०८"
 'By the impulse of Savitar I purify thee with this uninjured purifier, with the rays of the good sun.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/22_AjyasaMskAraH_sarvatra.md">
-<details open><summary><h2>२२ आज्यसंस्कारः सर्वत्र ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आज्यसंस्कारः सर्वत्र २२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/22_AjyasaMskAraH_sarvatra.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आज्यसंस्कारः सर्वत्र २२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 22. (This) preparation of the Ājya (takes place) each time.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/23_nAsaMskRtena_juhuyAt.md">
-<details open><summary><h2>२३ नासंस्कृतेन जुहुयात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नासंस्कृतेन जुहुयात् २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/23_nAsaMskRtena_juhuyAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नासंस्कृतेन जुहुयात् २३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 23. Let him not offer (Ājya) which has not been (thus) prepared.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/24_sruve_chApaH_saviturva.md">
-<details open><summary><h2>२४ स्रुवे चापः सवितुर्व ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्रुवे चापः सवितुर्व इति २४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/24_sruve_chApaH_saviturva.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+स्रुवे चापः सवितुर्व इति २४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 24 [^11] . Also the waters in the Sruva spoon (he purifies) with the words, '(By the impulse) of Savitar (I purify) you.'
 
 [^11]:  24, 25. Rāmacandra: 'He pours water into the Sruva and purifies this also, as he had done with the Ājya (Sūtra 21) . . . . He then pours a little portion of that water on to the Praṇītā water (see above, Sūtra 8), and with the rest, which is called the Prokṣaṇī water, he sprinkles the sacrificial food, the fuel, and the Barhis.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/08/25_tAH_praNItAH_proxaNIshcha.md">
-<details open><summary><h2>२५ ताः प्रणीताः प्रोक्षणीश्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ताः प्रणीताः प्रोक्षणीश्च २५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/08/25_tAH_praNItAH_proxaNIshcha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ताः प्रणीताः प्रोक्षणीश्च २५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 25. This (is called) the PRAṆĪTĀ and the PROKṢAṆĪ water.
 
 </details>
-</div>
