--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/09.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/09.md
@@ -2,128 +2,157 @@
 title = "०९"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/01_sruvaH_pAtram.md">
-<details open><summary><h2>०१ स्रुवः पात्रम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्रुवः पात्रम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/01_sruvaH_pAtram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+स्रुवः पात्रम् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . The Sruva spoon (serves as) a vessel.
 
 [^1]:  9, 1. 'When no special rule is stated, the Sruva is to be understood as the vessel (for the offering). Thereby the rule, "The Juhū is the vessel" (Śrauta-sūtra III, 19, 5) is abolished (for the Gṛhya rites).' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/02_arthalaxaNagrahaNam.md">
-<details open><summary><h2>०२ अर्थलक्षणग्रहणम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अर्थलक्षणग्रहणं २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/02_arthalaxaNagrahaNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अर्थलक्षणग्रहणं २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. According to the purpose the properties (of the different things to be used at each oblation) should be chosen.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/03_savyena_kushAnAdAya_daxiNena.md">
-<details open><summary><h2>०३ सव्येन कुशानादाय दक्षिणेन ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सव्येन कुशानादाय दक्षिणेन मूले स्रुवं विष्णोर्हस्तोऽसीति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/03_savyena_kushAnAdAya_daxiNena.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सव्येन कुशानादाय दक्षिणेन मूले स्रुवं विष्णोर्हस्तोऽसीति ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . Taking up Kuśa blades with the left, and the Sruva at its bottom with the right hand, with the words, 'The hand of Viṣṇu art thou' - 
 
 [^2]:  The manner of holding the Sruva in which the Ājya is, is described by Kātyāyana, Śraut. I, 10, 6 seq., Stenzler's note on Pāraskara I, 1, 4.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/04_sruveNAjyAhutIrjuhoti.md">
-<details open><summary><h2>०४ स्रुवेणाज्याहुतीर्जुहोति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्रुवेणाज्याहुतीर्जुहोति
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/04_sruveNAjyAhutIrjuhoti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+स्रुवेणाज्याहुतीर्जुहोति
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4 [^3] . He offers with the Sruva the Ājya oblations.
 
 [^3]:  As to the characteristics of Ājya (sacrificial butter), which is the substance offered at most of the Gṛhya sacrifices, comp the statements of the Gṛhya-saṃgraha-pariśiṣṭa I, 105 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/05_uttarapashchArdhAdagnerArabhyAvichChinnaM_daxiN.md">
-<details open><summary><h2>०५ उत्तरपश्चार्धादग्नेरारभ्याविच्छिन्नं दक्षिणतो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरपश्चार्धादग्नेरारभ्याविच्छिन्नं दक्षिणतो जुहोति त्वमग्ने प्रमतिरिति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/05_uttarapashchArdhAdagnerArabhyAvichChinnaM_daxiN.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उत्तरपश्चार्धादग्नेरारभ्याविच्छिन्नं दक्षिणतो जुहोति त्वमग्ने प्रमतिरिति ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^4] . Beginning from the north-west side of the fire he offers (the Ājya) unintermittingly on the south side (of the fire) with (the verse), 'Thou Agni art full of foresight' (Rig-veda I, 31, 10).
 
 [^4]:  Avicchinnaṃ (unintermittingly) is explained in Nār.'s commentary by ekadhārayā.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/06_daxiNapashchArdhAdagnerArabhyAvichChinnamuttara.md">
-<details open><summary><h2>०६ दक्षिणपश्चार्धादग्नेरारभ्याविच्छिन्नमुत्तरतो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षिणपश्चार्धादग्नेरारभ्याविच्छिन्नमुत्तरतो जुहोति यस्येमे हिमवन्त इति
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/06_daxiNapashchArdhAdagnerArabhyAvichChinnamuttara.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दक्षिणपश्चार्धादग्नेरारभ्याविच्छिन्नमुत्तरतो जुहोति यस्येमे हिमवन्त इति
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Beginning from the south-west side of the fire he unintermittingly offers on the north side with (the verse), 'To whom these snowy mountains' (Rig-veda X, 121, 4).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/07_AgneyamuttaramAjyabhAgaM_saumyaM_daxiNam.md">
-<details open><summary><h2>०७ आग्नेयमुत्तरमाज्यभागं सौम्यं दक्षिणम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आग्नेयमुत्तरमाज्यभागं सौम्यं दक्षिणं ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/07_AgneyamuttaramAjyabhAgaM_saumyaM_daxiNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आग्नेयमुत्तरमाज्यभागं सौम्यं दक्षिणं ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. To Agni belongs the northern Ājya portion, to Soma the southern.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/08_madhye-nyA_AhutayaH.md">
-<details open><summary><h2>०८ मध्येऽन्या आहुतयः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मध्येऽन्या आहुतयः
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/08_madhye-nyA_AhutayaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मध्येऽन्या आहुतयः
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^5] . In the middle (are made) the other oblations,
 
 [^5]:  8 seq. Here are indicated the chief oblations of this sacrifice (anyā āhutayaḥ pradhānabhūtāḥ, Nār.), or the āvāpa (the insertion, Sūtra 12) which comes between the standing introductory and concluding oblations.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/09_agnirjanitA_sa_me-mUm.md">
-<details open><summary><h2>०९ अग्निर्जनिता स मेऽमूम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निर्जनिता स मेऽमूं जायां ददातु स्वाहा सोमो जनिमान्त्स मामुया जनिमन्तं करोतु स्वाहा पूषा ज्ञातिमान्त्स मामुष्यै पित्रा मात्रा भ्रातृभिर्ज्ञातिमन्तं करोतु स्वाहेति ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/09_agnirjanitA_sa_me-mUm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्निर्जनिता स मेऽमूं जायां ददातु स्वाहा सोमो जनिमान्त्स मामुया जनिमन्तं करोतु स्वाहा पूषा ज्ञातिमान्त्स मामुष्यै पित्रा मात्रा भ्रातृभिर्ज्ञातिमन्तं करोतु स्वाहेति ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. (With the words,) 'Agni is the begetter; may he give to me N.N. as my wife; svāhā!
 
@@ -132,144 +161,173 @@ title = "०९"
 'Pūṣan is rich in kindred; may he make me rich in kindred by the father, the mother, the brothers of N.N.; svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/10_nAjyAhutiShu_nityAvAjyabhAgau_sviShTakRchcha.md">
-<details open><summary><h2>१० नाज्याहुतिषु नित्यावाज्यभागौ स्विष्टकृच्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नाज्याहुतिषु नित्यावाज्यभागौ स्विष्टकृच्च १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/10_nAjyAhutiShu_nityAvAjyabhAgau_sviShTakRchcha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नाज्याहुतिषु नित्यावाज्यभागौ स्विष्टकृच्च १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10 [^6] . At the Ājya oblations the offering of the two Ājya portions and of the Sviṣṭakṛt oblation is not standing,
 
 [^6]:  On Sviṣṭakṛt, comp. Weber, Indische Studien, IX, 217.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/11_nityAhutiShu_cheti_mANDUkeyaH.md">
-<details open><summary><h2>११ नित्याहुतिषु चेति माण्डूकेयः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नित्याहुतिषु चेति माण्डूकेयः
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/11_nityAhutiShu_cheti_mANDUkeyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नित्याहुतिषु चेति माण्डूकेयः
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11 [^7] . Nor in the standing oblations, according to Māṇḍūkeya.
 
 [^7]:  See chap. 8, 13.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/12_mahAvyAhRtisarvaprAyashchittaprAjApatyAntaram.md">
-<details open><summary><h2>१२ महाव्याहृतिसर्वप्रायश्चित्तप्राजापत्यान्तरम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाव्याहृतिसर्वप्रायश्चित्तप्राजापत्यान्तरम् एतदावापस्थानम् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/12_mahAvyAhRtisarvaprAyashchittaprAjApatyAntaram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+महाव्याहृतिसर्वप्रायश्चित्तप्राजापत्यान्तरम् एतदावापस्थानम् १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12 [^8] . The place for the insertion is the interval between the Mahāvyāhṛtis, the general expiation, and the oblation to Prajāpati.
 
 [^8]:  This Sūtra prescribes where the āvāpa, i.e. the special characteristical offerings of each sacrifice, is to be inserted between the regular offerings that belong to the standing model. The same subject is treated of in the Śrauta-sūtra in the two rules, I, 16, 3 and 4: 'Whatsoever is offered between the two Ājya portions and the Sviṣṭakṛt, that is called āvāpa; this is the chief part (pradhāna) (of the sacrifice); the other (oblations) are subordinate thereto (tadaṅgāni).' The position of the āvāpa among the other oblations is indicated by Pāraskara in the following rule (I, 5, 6): Between the general expiation and the oblation to Prajāpati, this is the place for the āvāpa.' (The word vivāhe at the end of this Sūtra seems to me to belong not to this rule, but to Sūtra 7.) Our Sūtra is identical with that of Pāraskara word for word; only instead of sarvaprāyaścitta, as Pāraskara has, we read here, mahāvyāhṛtisarvaprāyaścitta. This means, I believe, that the āvāpa, preceded and followed by the Mahāvyāhṛti oblations (comp. below, I, 12, 13), should be placed between the Sarvaprāyaścitta and the Prājāpatya oblation. The oblations made with the Mahāvyāhṛtayas are four in number; the corresponding formulas are: bhūḥ svāhā, bhuvaḥ svāhā, svāḥ svāhā, bhūr bhuvaḥ svaḥ svāhā (comp. below, chap. 12, 12). The Sarvaprāyaścitta (general expiation) consists of two oblations, one with the three Mahāvyāhṛtayas, the other with the verse ayāś cāgne, quoted in the Śrauta-sūtra III, 19, 3, and in Āśvalāyana's Śrauta-sūtra I, 11, 13. (On the Sarvaprāyaścitta in the Śrauta ritual, compare Hillebrandt, Neu- und Vollmondsopfer, p. 166.) The Prājāpatya oblation is performed with the formula Prajāpataye svāhā. The discussions of Nārāyaṇa on this Sūtra (see p. 125 of the German edition) evidently fail to bring out the true meaning of the text; according to this commentator the oblations follow each other in this order: the two Ājyabhāgas, the principal oblations (pradhānāhutayaḥ), the Sviṣṭakṛt, the four Mahāvyāhṛti oblations, the two Sarvaprāyaścitta oblations, the Prājāpatya oblation. Finally we may mention the corrupt form in which the corresponding passage of the Śāmbavya-sūtra is preserved p. 29 in the MS. There the two Sūtras 10 and 11 are placed before the Mantra in Sūtra 9. This Mantra then is given down to svāheti, then follows ājyena, which seems to me to form part of the same Sūtra, and to refer to the oblations to which the Mantra belongs. Then the MS. goes on: mahāvyāhṛtishu sarvaprāyaścittāraṃ (sic) etad āvāpasthānaṃ ājyahavishi vyāhṛtishu sarvaprāyaścittāraṃ (the syllables prāyaścittāraṃ seem to be expunged) sviṣṭakṛto sthālīpāke. In the commentary I find the following Ślokas, which I give exactly as they are read in the MS.: tisṛṇāṃ vyāhṛtināṃ ca prāyaścittāhutīr api yad antaraṃ tad āpāpāsthānaṃ sarpiḥpradhānake. sthālīpāke vyāhṛtināṃ yat tat sviṣṭakṛtottaraṃ āhutīnāṃ pradhānānāṃ nānādaivatachandasāṃ yas tu kālas tad āvāpasthānam itācyate budhaiḥ tatas tat taṃ ma ārabhya prāyaścittāhutiḥ kramāt.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/13_Ajye_haviShi_savye.md">
-<details open><summary><h2>१३ आज्ये हविषि सव्ये ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आज्ये हविषि सव्ये पाणौ ये कुशास्तान्दक्षिणेनाग्रे सङ्गृह्य मूले सव्येन तेषामग्रं स्रुवे समनक्ति मध्यमाज्यस्थाल्यां मूलं च
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/13_Ajye_haviShi_savye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आज्ये हविषि सव्ये पाणौ ये कुशास्तान्दक्षिणेनाग्रे सङ्गृह्य मूले सव्येन तेषामग्रं स्रुवे समनक्ति मध्यमाज्यस्थाल्यां मूलं च
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. If the oblation consists in Ājya, let him seize the Kuśa blades in his left hand with his right hand at their points and with the left at their roots, and let him wet their points (with Ājya) in the Sruva, the middle and the roots in the Ājya pot;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/14_atha_chetsthAlIpAkeShu_sruchyagram.md">
-<details open><summary><h2>१४ अथ चेत्स्थालीपाकेषु स्रुच्यग्रम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ चेत्स्थालीपाकेषु स्रुच्यग्रं मध्यं स्रुवे मूलमाज्यस्थाल्यां १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/14_atha_chetsthAlIpAkeShu_sruchyagram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ चेत्स्थालीपाकेषु स्रुच्यग्रं मध्यं स्रुवे मूलमाज्यस्थाल्यां १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. In the oblations of cooked food, however, the points in the Sruc, the middle in the Sruva, the roots in the Ājya pot.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/15_tAnanuprahRtyAgnervAso-sIti.md">
-<details open><summary><h2>१५ ताननुप्रहृत्याग्नेर्वासोऽसीति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ताननुप्रहृत्याग्नेर्वासोऽसीति १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/15_tAnanuprahRtyAgnervAso-sIti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ताननुप्रहृत्याग्नेर्वासोऽसीति १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. When he then has thrown them (into the fire) with the words, 'Agni's garment art thou,'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/16_tisraH_samidho-bhyAdhAya.md">
-<details open><summary><h2>१६ तिस्रः समिधोऽभ्याधाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तिस्रः समिधोऽभ्याधाय १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/16_tisraH_samidho-bhyAdhAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तिस्रः समिधोऽभ्याधाय १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. And has put on (the fire) three pieces of wood,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/17_yathoktaM_paryuxaNam.md">
-<details open><summary><h2>१७ यथोक्तं पर्युक्षणम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यथोक्तं पर्युक्षणम् १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/17_yathoktaM_paryuxaNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यथोक्तं पर्युक्षणम् १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17 [^9] . (Water) is sprinkled round (the fire) as stated above.
 
 [^9]:  See above, chap. 8, 17.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/18_anAmnAtamantrAsvAdiShTadevatAsvamuShyai.md">
-<details open><summary><h2>१८ अनाम्नातमन्त्रास्वादिष्टदेवतास्वमुष्यै ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनाम्नातमन्त्रास्वादिष्टदेवतास्वमुष्यै स्वाहामुष्यै स्वाहेति जुहुयात् स्वाहाकारेण शुद्धेन १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/18_anAmnAtamantrAsvAdiShTadevatAsvamuShyai.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनाम्नातमन्त्रास्वादिष्टदेवतास्वमुष्यै स्वाहामुष्यै स्वाहेति जुहुयात् स्वाहाकारेण शुद्धेन १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18. Oblations for which only the deities are indicated, but no texts prescribed, are to be made merely with the word SVĀHĀ, 'To such and such a deity svāhā! To such and such a deity svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/09/19_vyAkhyAtaH_pratishrute_homakalpaH.md">
-<details open><summary><h2>१९ व्याख्यातः प्रतिश्रुते होमकल्पः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्याख्यातः प्रतिश्रुते होमकल्पः १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/09/19_vyAkhyAtaH_pratishrute_homakalpaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+व्याख्यातः प्रतिश्रुते होमकल्पः १९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 19 [^10] . The ritual (here) declared of the sacrifice (to be performed) when (the father's) assent (to give away his daughter) has been declared - 
 
 [^10]:  This Sūtra, though reckoned in the Indian tradition to p. 30 chap. 9, seems to me clearly to belong to the next chapter, and to contain the subject, to which the predicate is given in 10, 1. For pratiśrute, see chap. 7, 1.
 
 </details>
-</div>
