--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/10.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/10.md
@@ -2,134 +2,162 @@
 title = "१०"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/01_prakRtirbhUtikarmaNAm.md">
-<details open><summary><h2>०१ प्रकृतिर्भूतिकर्मणाम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रकृतिर्भूतिकर्मणां १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/01_prakRtirbhUtikarmaNAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रकृतिर्भूतिकर्मणां १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Forms the standard for all sacrifices that procure happiness,
 
 [^1]:  10, 1. 'As in the Śrauta ritual the sacrifice of the full and new moon forms the standard for the iṣṭis, the paśubandha, &c., thus the pratiśrut-kalpa is the standard for the vikṛtis of the Smārta ritual, such as the jātakarman (chap. 24), &c.' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/02_sarvAsAM_chAjyAhutInAm.md">
-<details open><summary><h2>०२ सर्वासां चाज्याहुतीनाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वासां चाज्याहुतीनां २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/02_sarvAsAM_chAjyAhutInAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सर्वासां चाज्याहुतीनां २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. And for all Ājya offerings,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/03_shAkhApashUnAm.md">
-<details open><summary><h2>०३ शाखापशूनाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शाखापशूनां ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/03_shAkhApashUnAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शाखापशूनां ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . For the sacrifice of animals which are tied to a branch,
 
 [^2]:  'It is the standard of the sacrifices prescribed in the rules, "The animal (offered) to the teacher is sacred to Agni; to an officiating priest, to Bṛhaspati, &c."' Nārāyaṇa. This refers to the sacrifice of animals which forms part of the Arghya ceremony; see II, 15, 4 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/04_charupAkayajnAnAM_cha.md">
-<details open><summary><h2>०४ चरुपाकयज्ञानां च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चरुपाकयज्ञानां च ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/04_charupAkayajnAnAM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+चरुपाकयज्ञानां च ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4 [^3] . And for the offerings of boiled (rice) grains and of cooked food.
 
 [^3]:  Carūṇāṃ pākayajñānāṃ ca. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/05_ta_ete-prayAjA_ananuyAjA.md">
-<details open><summary><h2>०५ त एतेऽप्रयाजा अननुयाजा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त एतेऽप्रयाजा अननुयाजा अनिळा अनिगदा असामिधेनीकाश्च च सर्वे पाकयज्ञा भवन्ति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/05_ta_ete-prayAjA_ananuyAjA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त एतेऽप्रयाजा अननुयाजा अनिळा अनिगदा असामिधेनीकाश्च च सर्वे पाकयज्ञा भवन्ति ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^4] . These are performed, all the offerings of cooked food, without PRAYĀJA and ANUYĀJA oblations, without (the invocation of) the IḶĀ, without NIGADA recitation, and without SĀMIDHENĪ verses.
 
 [^4]:  On the five Prayājas and the three Anuyājas (introductory oblations and oblations following on the principal offerings) prescribed in the Śrauta ritual, comp. Hillebrandt's Neu- und Vollmondsopfer, pp. 94 seq., 134 seq. On the Ilā, see ibid., 122 seq.; on nigada, Weber's Ind. Studien, IX, 217, &c. on the Sāmidhenī verses, Hillebrandt, loc. cit., pp. 74 seq. On this Sūtra compare also the passage in Kātyāyana's Śrauta-sūtra, VI, 10, 22 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/06_tadapi_shlokAH.md">
-<details open><summary><h2>०६ तदपि श्लोकाः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदपि श्लोकाः ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/06_tadapi_shlokAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तदपि श्लोकाः ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. There are also the following Ślokas:
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/07_huto-gnihotrahomenAhuto_balikarmaNA_prahutaH.md">
-<details open><summary><h2>०७ हुतोऽग्निहोत्रहोमेनाहुतो बलिकर्मणा प्रहुतः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हुतोऽग्निहोत्रहोमेनाहुतो बलिकर्मणा प्रहुतः पितृकर्मणा प्राशितो ब्राह्मणे हुतः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/07_huto-gnihotrahomenAhuto_balikarmaNA_prahutaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+हुतोऽग्निहोत्रहोमेनाहुतो बलिकर्मणा प्रहुतः पितृकर्मणा प्राशितो ब्राह्मणे हुतः ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7 [^5] . '(An oblation is called) HUTA, (if made) by the performing of the Agnihotra; AHUTA (i.e. unsacrificed, if) by the Bali offering; PRAHUTA (i.e. sacrificed up, if) by a sacrifice to the Manes; PRĀŚITA (i.e. tasted, if) deposited as an offering in a Brāhmaṇa.
 
 [^5]:  Comp. chap. 5, 1.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/08_anUrdhvajnurvyULhajAnurjuhuyAtsarvadA_haviH_na.md">
-<details open><summary><h2>०८ अनूर्ध्वज्ञुर्व्यूळ्हजानुर्जुहुयात्सर्वदा हविः न ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनूर्ध्वज्ञुर्व्यूळ्हजानुर्जुहुयात्सर्वदा हविः न हि बाह्यहुतं देवाः प्रतिगृह्णन्ति कर्हिचित् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/08_anUrdhvajnurvyULhajAnurjuhuyAtsarvadA_haviH_na.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनूर्ध्वज्ञुर्व्यूळ्हजानुर्जुहुयात्सर्वदा हविः न हि बाह्यहुतं देवाः प्रतिगृह्णन्ति कर्हिचित् ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^6] . 'Without raising his knees, with spread knees let him always offer his oblation; for the gods never accept an offering (that has been made holding the hand) not between (the knees).
 
 [^6]:  Comp. the Gṛhya-saṃgraha-pariśiṣṭa I, 46, and the note, Zeitschrift der Deutschen Morgenl. Gesellschaft, XXXV, 556. Nārāyaṇa: dakṣiṇaṃ bāhuṃ jānvor antare kṛtvety arthaḥ, sarvadā sarvasminn api karmaṇi havir homadravyaṃ juhuyāt.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/10/09_raudraM_tu_rAxasam.md">
-<details open><summary><h2>०९ रौद्रं तु राक्षसम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रौद्रं तु राक्षसं पित्र्यमासुरं चाभिचारिकम् उक्त्वा मन्त्रं स्पृशेदप आलभ्यात्मानमेव च ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/10/09_raudraM_tu_rAxasam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+रौद्रं तु राक्षसं पित्र्यमासुरं चाभिचारिकम् उक्त्वा मन्त्रं स्पृशेदप आलभ्यात्मानमेव च ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9 [^7] . 'But when he has repeated a text sacred to Rudra, to the Rakṣas, to the Manes, to the Asuras, or that contains an imprecation, let him touch water, and so also when he has touched his own body.'
 
 [^7]:  This verse is found also in the Karmapradīpa III, 8, 4.
 
 </details>
-</div>
