--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/11.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/11.md
@@ -2,102 +2,124 @@
 title = "११"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/01_athaitAM_rAtrIM_shvastRtIyAm.md">
-<details open><summary><h2>०१ अथैतां रात्रीं श्वस्तृतीयाम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथैतां रात्रीं श्वस्तृतीयां वा कन्यां वक्ष्यन्तीति १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/01_athaitAM_rAtrIM_shvastRtIyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथैतां रात्रीं श्वस्तृतीयां वा कन्यां वक्ष्यन्तीति १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now when the bride is to be carried away (to the bridegroom's house) that night, or on the next, or on the third night,
 
 [^1]:  11, 1. The ceremony described in this chapter is called Indrāṇīkarman. The goddess Indrāṇī is mentioned in Sūtra 4 among the deities to whom Ājya oblations are made.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/02_tasyAM_rAtryAmatIte_nishAkAle.md">
-<details open><summary><h2>०२ तस्यां रात्र्यामतीते निशाकाले ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्यां रात्र्यामतीते निशाकाले सर्वौषधिफलोत्तमैः सुरभिमिश्रैः सशिरस्कां कन्यामाप्लाव्य २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/02_tasyAM_rAtryAmatIte_nishAkAle.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तस्यां रात्र्यामतीते निशाकाले सर्वौषधिफलोत्तमैः सुरभिमिश्रैः सशिरस्कां कन्यामाप्लाव्य २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . On that night, when (the darkness of) night is gone, they wash the girl up to her head with (water that has been made fragrant by) all sorts of herbs and the choicest fruits together with scents;
 
 [^2]:  Niśākāle, niśā madhyasthaṃ praharadvayaṃ, tasmin kale atīte. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/03_raktamahataM_vA_vAsaH.md">
-<details open><summary><h2>०३ रक्तमहतं वा वासः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रक्तमहतं वा वासः परिधाय ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/03_raktamahataM_vA_vAsaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+रक्तमहतं वा वासः परिधाय ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. They put on her a newly-dyed garment or (a new one) which has not yet been washed;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/04_pashchAdagneH_kanyAmupaveshyAnvArabdhAyAm.md">
-<details open><summary><h2>०४ पश्चादग्नेः कन्यामुपवेश्यान्वारब्धायाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पश्चादग्नेः कन्यामुपवेश्यान्वारब्धायां महाव्याहृतिभिर्हुत्वाज्याहुतीर्जुहोत्यग्नये सोमाय प्रजापतये मित्राय वरुणायेन्द्रा येन्द्रा ण्यै गन्धर्वाय भगाय पूष्णे त्वष्ट्रे बृहस्पतये राज्ञे प्रत्यानीकायेति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/04_pashchAdagneH_kanyAmupaveshyAnvArabdhAyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पश्चादग्नेः कन्यामुपवेश्यान्वारब्धायां महाव्याहृतिभिर्हुत्वाज्याहुतीर्जुहोत्यग्नये सोमाय प्रजापतये मित्राय वरुणायेन्द्रा येन्द्रा ण्यै गन्धर्वाय भगाय पूष्णे त्वष्ट्रे बृहस्पतये राज्ञे प्रत्यानीकायेति ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4 [^3] . Then (the Ācārya of the bride's family) makes the girl sit down behind the fire, and while she takes hold of him he sacrifices with the Mahāvyāhṛtis, and then he makes Ājya oblations to Agni, to Soma, to Prajāpati, to Mitra, to Varuṇa, to Indra, to Indrāṇī, to the Gandharva, to Bhaga, to Pūṣan, to Tvaṣṭar, to Bṛhaspati, to the king Pratyānīka.
 
 [^3]:  The 'king Pratyānīka' has given origin to a very curious misunderstanding in the Śāmbavya-Gṛhya and its commentary; see p. 127 of the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/05_chatasro-ShTau_vAvidhavAH_shAkapiNDIbhiH.md">
-<details open><summary><h2>०५ चतस्रोऽष्टौ वाविधवाः शाकपिण्डीभिः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चतस्रोऽष्टौ वाविधवाः शाकपिण्डीभिः सुरयान्नेन च तर्पयित्वा चतुरानर्तनं कुर्युः एता एव देवताः पुँ सो वैश्रवणमीशानं चातो ब्राह्मणभोजनम् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/05_chatasro-ShTau_vAvidhavAH_shAkapiNDIbhiH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+चतस्रोऽष्टौ वाविधवाः शाकपिण्डीभिः सुरयान्नेन च तर्पयित्वा चतुरानर्तनं कुर्युः एता एव देवताः पुँ सो वैश्रवणमीशानं चातो ब्राह्मणभोजनम् ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. After they have regaled four or eight women, who are not widows, with lumps of vegetables, Surā, and food, these should perform a dance four times.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/06_etA_eva_devatAH.md">
-<details open><summary><h2>०६ एता एव देवताः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एता एव देवताः पुँसो वैश्रवणमीशानं च ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/06_etA_eva_devatAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एता एव देवताः पुँसो वैश्रवणमीशानं च ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. The same deities (they worship also) on behalf of the man,
 
 7. And Vaiśravaṇa and Īśāna.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/11/07_ato_brAhmaNabhojanam.md">
-<details open><summary><h2>०७ अतो ब्राह्मणभोजनम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अतो ब्राह्मणभोजनम्
+</details>
+
+<details><summary>मूलम्</summary>
 
 अतो ब्राह्मणभोजनम् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/11/07_ato_brAhmaNabhojanam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. Then follows the distribution of food to Brāhmaṇas.
 
 </details>
-</div>
