--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/15.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/15.md
@@ -2,295 +2,362 @@
 title = "१५"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/01_pra_tvA_munchAmIti.md">
-<details open><summary><h2>०१ प्र त्वा मुञ्चामीति ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्र त्वा मुञ्चामीति तृचं गृहात्प्रतिष्ठमानायां १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/01_pra_tvA_munchAmIti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्र त्वा मुञ्चामीति तृचं गृहात्प्रतिष्ठमानायां १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. The three verses, 'I loosen thee' (Rig-veda X, 85, 24), when she departs from the house.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/02_jIvaM_rudantIti_prarudantyAm.md">
-<details open><summary><h2>०२ जीवं रुदन्तीति प्ररुदन्त्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जीवं रुदन्तीति प्ररुदन्त्याम् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/02_jIvaM_rudantIti_prarudantyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+जीवं रुदन्तीति प्ररुदन्त्याम् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. 'The living one they bewail' (Rig-veda X, 40, 10), if she begins to cry.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/03_atha_rathAxasyopAnjanaM_patnI.md">
-<details open><summary><h2>०३ अथ रथाक्षस्योपाञ्जनं पत्नी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ रथाक्षस्योपाञ्जनं पत्नी कुरुतेऽक्षन्नमीमदन्तेत्येतया सर्पिषा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/03_atha_rathAxasyopAnjanaM_patnI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ रथाक्षस्योपाञ्जनं पत्नी कुरुतेऽक्षन्नमीमदन्तेत्येतया सर्पिषा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^1] . The wife then smears the axle of the chariot with clarified butter with this (verse), 'They feasted, they got drunk' (Rig-veda I, 82, 2),
 
 [^1]:  15, 3. Probably the use of this verse on this occasion rests on the assonance of its opening word akṣan and akṣa (rathākṣa).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/04_shuchI_te_chakre.md">
-<details open><summary><h2>०४ शुची ते चक्रे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शुची ते चक्रे द्वे ते चक्रे इति चैताभ्यां चक्रयोः पूर्वया पूर्वमुत्तरयोत्तरम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/04_shuchI_te_chakre.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शुची ते चक्रे द्वे ते चक्रे इति चैताभ्यां चक्रयोः पूर्वया पूर्वमुत्तरयोत्तरम् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. And with the two (verses), 'Pure are thy wheels,' 'Thy two wheels' (Rig-veda X, 85, 12. 16), of the two wheels the first with the first (verse) and the second with the second (verse),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/05_usrau_cha.md">
-<details open><summary><h2>०५ उस्रौ च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उस्रौ च ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/05_usrau_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उस्रौ च ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. And the two bulls.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/06_khe_rathasyetyetayA_phalavato.md">
-<details open><summary><h2>०६ खे रथस्येत्येतया फलवतो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 खे रथस्येत्येतया फलवतो वृक्षस्य शम्यागर्तेष्वेकैकां वयां निखाय ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/06_khe_rathasyetyetayA_phalavato.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+खे रथस्येत्येतया फलवतो वृक्षस्य शम्यागर्तेष्वेकैकां वयां निखाय ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^2] . After (the wife?) has put, with this (verse), 'In the box of the wheel' (Rig-veda VIII, 80, 7), a branch of a fruit-bearing tree into each of the holes destined for the pins,
 
 [^2]:  See Nārāyaṇa's note on śamyāgarta, p. 129 of the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/07_nityA_vAbhimantrya.md">
-<details open><summary><h2>०७ नित्या वाभिमन्त्र्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+नित्या वाभिमन्त्र्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 नित्या वाभिमन्त्र्य 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/07_nityA_vAbhimantrya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. Or, if (such branches) are (already) fixed, has recited (that verse) over them,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/08_athosrau_yunjanti_yuktaste.md">
-<details open><summary><h2>०८ अथोस्रौ युञ्जन्ति युक्तस्ते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अथोस्रौ युञ्जन्ति युक्तस्ते अस्तु दक्षिण इति द्वाभ्यां शुक्रावनड्वाहावित्येतेनार्धर्चेन युक्तावभिमन्त्र्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 अथोस्रौ युञ्जन्ति युक्तस्ते अस्तु दक्षिण इति द्वाभ्यां शुक्रावनड्वाहावित्येतेनार्धर्चेन युक्तावभिमन्त्र्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/08_athosrau_yunjanti_yuktaste.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. They then harness the two bulls with the two (verses), 'Harnessed be thy right one' (Rig-veda I, 82, 5-6), (the bridegroom) reciting the half-verse, 'White the two bulls' (Rig-veda X, 85, 10), over them when they have been harnessed.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/09_atha_yadi_rathAngam.md">
-<details open><summary><h2>०९ अथ यदि रथाङ्गम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अथ यदि रथाङ्गं विशीर्येत छिद्येत वाहिताग्नेर्गृहान्कन्यां प्रपाद्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 अथ यदि रथाङ्गं विशीर्येत छिद्येत वाहिताग्नेर्गृहान्कन्यां प्रपाद्य 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/09_atha_yadi_rathAngam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. Now should any part of the chariot break or burst, let him take the girl to the house of one who keeps the sacred fires,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/10_abhi_vyayasva_khadirasyetyetayA.md">
-<details open><summary><h2>१० अभि व्ययस्व खदिरस्येत्येतया ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभि व्ययस्व खदिरस्येत्येतया प्रतिदध्यात् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/10_abhi_vyayasva_khadirasyetyetayA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अभि व्ययस्व खदिरस्येत्येतया प्रतिदध्यात् १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. And repair (the damage) with the verse, 'Cover thyself with the Khadiras' (Rig-veda III, 53, 19).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/11_tyaM_chidashvamiti_granthim.md">
-<details open><summary><h2>११ त्यं चिदश्वमिति ग्रन्थिम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्यं चिदश्वमिति ग्रन्थिं ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/11_tyaM_chidashvamiti_granthim.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्यं चिदश्वमिति ग्रन्थिं ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. A knot with the verse, 'Him like a horse' (Rig-veda X, 143, 2).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/12_svasti_no_mimItAmiti.md">
-<details open><summary><h2>१२ स्वस्ति नो मिमीतामिति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्वस्ति नो मिमीतामिति पञ्चर्चं जपति १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/12_svasti_no_mimItAmiti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+स्वस्ति नो मिमीतामिति पञ्चर्चं जपति १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. He then murmurs the five verses, 'May prosperity give us' (Rig-veda V, 51, 11-15).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/13_suki.N_shukamiti_rathamArohantyAm.md">
-<details open><summary><h2>१३ सुकिँ शुकमिति रथमारोहन्त्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुकिँ शुकमिति रथमारोहन्त्यां १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/13_suki.N_shukamiti_rathamArohantyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सुकिँ शुकमिति रथमारोहन्त्यां १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. 'Adorned with Kiṃsuka flowers' (Rig-veda X, 85, 20), when she mounts the chariot;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/14_mA_vidanparipanthina_iti.md">
-<details open><summary><h2>१४ मा विदन्परिपन्थिन इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मा विदन्परिपन्थिन इति चतुष्पथे १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/14_mA_vidanparipanthina_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मा विदन्परिपन्थिन इति चतुष्पथे १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. 'May no waylayers meet us' (ibid. 32), at a cross-way;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/15_ye_vadhva_iti.md">
-<details open><summary><h2>१५ ये वध्व इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ये वध्व इति श्मशाने १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/15_ye_vadhva_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ये वध्व इति श्मशाने १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. 'Which the woman’s' (ibid. 31), near a cemetery;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/16_vanaspate_shatavalsha_iti.md">
-<details open><summary><h2>१६ वनस्पते शतवल्श इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वनस्पते शतवल्श इति वनस्पतावर्धर्चं जपति १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/16_vanaspate_shatavalsha_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वनस्पते शतवल्श इति वनस्पतावर्धर्चं जपति १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. The half-verse, 'O tree with thy hundred branches' (Rig-veda III, 8, 11), he mutters near a big tree;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/17_sutrAmANamiti_nAvamArohantyAm.md">
-<details open><summary><h2>१७ सुत्रामाणमिति नावमारोहन्त्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सुत्रामाणमिति नावमारोहन्त्याम् १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/17_sutrAmANamiti_nAvamArohantyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सुत्रामाणमिति नावमारोहन्त्याम् १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17. 'The good protectress' (Rig-Veda X, 63, 10), when she ascends a ship;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/18_ashmanvatIti_nadIM_tarantyAm.md">
-<details open><summary><h2>१८ अश्मन्वतीति नदीं तरन्त्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अश्मन्वतीति नदीं तरन्त्याम् १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/18_ashmanvatIti_nadIM_tarantyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अश्मन्वतीति नदीं तरन्त्याम् १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18. 'Carrying stones' (Rig-veda X, 53, 8), when she crosses a river;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/19_api_vA_yuktenaiva.md">
-<details open><summary><h2>१९ अपि वा युक्तेनैव ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अपि वा युक्तेनैव
+</details>
+
+<details><summary>मूलम्</summary>
 
 अपि वा युक्तेनैव 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/19_api_vA_yuktenaiva.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 19. Optionally (he) also (murmurs the same verse, if that is done) with the harnessed chariot;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/20_udva_UrmirityagAdhe.md">
-<details open><summary><h2>२० उद्व ऊर्मिरित्यगाधे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उद्व ऊर्मिरित्यगाधे
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/20_udva_UrmirityagAdhe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उद्व ऊर्मिरित्यगाधे
+</details>
+
+<details><summary>Oldenberg</summary>
 
 20. 'Up may your wave' (Rig-veda III, 33, 13), at deep places (in the river);
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/21_aprexaNaM_cha.md">
-<details open><summary><h2>२१ अप्रेक्षणं च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अप्रेक्षणं च २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/21_aprexaNaM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अप्रेक्षणं च २१
+</details>
+
+<details><summary>Oldenberg</summary>
 
 21. And (at such places) let her not look out.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/15/22_iha_priyamiti_sapta.md">
-<details open><summary><h2>२२ इह प्रियमिति सप्त ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+इह प्रियमिति सप्त गृहान्प्राप्तायाः कृताः परिहाप्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 इह प्रियमिति सप्त गृहान्प्राप्तायाः कृताः परिहाप्य 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/15/22_iha_priyamiti_sapta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 22. The seven verses, 'Here may delight' (Rig-veda X, 85, 27 seq.), when she has reached the house, omitting the verses already employed.
 
 </details>
-</div>
