--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/16.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/16.md
@@ -2,45 +2,56 @@
 title = "१६"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/01_AnaDuhamityuktam.md">
-<details open><summary><h2>०१ आनडुहमित्युक्तम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आनडुहमित्युक्तं १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/01_AnaDuhamityuktam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आनडुहमित्युक्तं १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . 'A bull's hide' - this has been declared.
 
 [^1]:  16, 1. In chap. 15, 22 it is said that the bride arrives at the house; in 16, 12, that she enters the house. Probably we are to understand, therefore, that the sacrifice prescribed in this chapter, Sūtras 2 seq., is performed before the house, like the Vāstoṣpatīya karman (below, III, 4). The words, 'has been declared,' refer to the Śrauta-sūtra (IV, r6, 2), 'Having spread a red bull's skin, with the neck to the north or to the east, with the hair outside, behind the fire, they sit down,' &c.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/02_tasminnupaveshyAnvArabdhAyAM_patishchatasro_juh.md">
-<details open><summary><h2>०२ तस्मिन्नुपवेश्यान्वारब्धायां पतिश्चतस्रो जुहोत्य् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+तस्मिन्नुपवेश्यान्वारब्धायां पतिश्चतस्रो जुहोत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 तस्मिन्नुपवेश्यान्वारब्धायां पतिश्चतस्रो जुहोत्य्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/02_tasminnupaveshyAnvArabdhAyAM_patishchatasro_juh.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . On that hide the husband makes her sit down and sacrifices, while she takes hold of him, four oblations (with the following formulas),
 
 [^2]:  On anvārambha comp. the quotation in the note on chap. II, 2.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/03_agninA_devena_pRthivIlokena.md">
-<details open><summary><h2>०३ अग्निना देवेन पृथिवीलोकेन ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निना देवेन पृथिवीलोकेन लोकानामृग्वेदेन वेदानां तेन त्वा शमयाम्यसौ स्वाहा वायुना देवेनान्तरिक्षलोकेन लोकानां यजुर्वेदेन वेदानां तेन त्वा शमयाम्यसौ स्वाहा सूर्येण देवेन द्यौर्लोकेन लोकानां सामवेदेन वेदानां तेन त्वा शमयाम्यसौ स्वाहा चन्द्रे ण देवेन दिशां लोकेन लोकानां ब्रह्मवेदेन वेदानां तेन त्वा शमयाम्यसौ स्वाहा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/03_agninA_devena_pRthivIlokena.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्निना देवेन पृथिवीलोकेन लोकानामृग्वेदेन वेदानां तेन त्वा शमयाम्यसौ स्वाहा वायुना देवेनान्तरिक्षलोकेन लोकानां यजुर्वेदेन वेदानां तेन त्वा शमयाम्यसौ स्वाहा सूर्येण देवेन द्यौर्लोकेन लोकानां सामवेदेन वेदानां तेन त्वा शमयाम्यसौ स्वाहा चन्द्रे ण देवेन दिशां लोकेन लोकानां ब्रह्मवेदेन वेदानां तेन त्वा शमयाम्यसौ स्वाहा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. 'With god Agni, with the earth-world of the worlds, and the Rig-veda of the Vedas: therewith I appease thee, N.N., svāhā!
 
@@ -51,126 +62,152 @@ title = "१६"
 'With god Candra, with the world of the quarters (of the horizon) of the worlds, with the Brahma-veda of the Vedas: therewith I appease thee, N.N., svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/04_bhUryA_te_patighnyalaxmI.md">
-<details open><summary><h2>०४ भूर्या ते पतिघ्न्यलक्ष्मी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+भूर्या ते पतिघ्न्यलक्ष्मी देवरघ्नी जारघ्नीं तां करोम्यसौ स्वाहेति वा प्रथमया महाव्याहृत्या प्रथमोपहिता द्वितीयया द्वितीया तृतीयया तृतीया समस्ताभिश्चतुर्थ्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 भूर्या ते पतिघ्न्यलक्ष्मी देवरघ्नी जारघ्नीं तां करोम्यसौ स्वाहेति वा प्रथमया महाव्याहृत्या प्रथमोपहिता द्वितीयया द्वितीया तृतीयया तृतीया समस्ताभिश्चतुर्थ्य्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/04_bhUryA_te_patighnyalaxmI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. Or, 'Bhūḥ! What harm dwells in thee, bringing death to thy husband, death to thy husband's brother, that I make death-bringing to thy paramour, N.N., svāhā!' - thus the first (of the before-mentioned formulas) may be joined with the first Mahāvyāhṛti, the second with the second, the third with the third, the fourth with (the three Mahāvyāhṛtis) together.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/05_aghorachaxurityAjyalepena_chaxuShI_vimRjIta.md">
-<details open><summary><h2>०५ अघोरचक्षुरित्याज्यलेपेन चक्षुषी विमृजीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अघोरचक्षुरित्याज्यलेपेन चक्षुषी विमृजीत ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/05_aghorachaxurityAjyalepena_chaxuShI_vimRjIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अघोरचक्षुरित्याज्यलेपेन चक्षुषी विमृजीत ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. With (the verse), 'With no evil eye' (Rig-veda X, 85, 44), let him besmear (her) eyes with Ājya salve.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/06_kayA_nashchitra_iti.md">
-<details open><summary><h2>०६ कया नश्चित्र इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+कया नश्चित्र इति तिसृभिः केशान्तानभिमृश्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 कया नश्चित्र इति तिसृभिः केशान्तानभिमृश्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/06_kayA_nashchitra_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. (The bridegroom,) having touched the ends of her hair with the three (verses), 'How may us the resplendent one . . .' (Rig-veda IV, 31, 1-3),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/07_uta_tyA_daivyA.md">
-<details open><summary><h2>०७ उत त्या दैव्या ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत त्या दैव्या भिषजेति चतस्रोऽनुद्रुत्यान्ते स्वाहाकारेण मूर्धनि संस्रावम् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/07_uta_tyA_daivyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उत त्या दैव्या भिषजेति चतस्रोऽनुद्रुत्यान्ते स्वाहाकारेण मूर्धनि संस्रावम् ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. And having quickly recited the four verses, 'And those divine medicines' (Rig-veda VIII, 18, 8), at the end (of that text) with the word svāhā (pours out) the remainder on (her) head.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/08_atra_haike_kumAramutsangamAnayantyubhayataH.md">
-<details open><summary><h2>०८ अत्र हैके कुमारमुत्सङ्गमानयन्त्युभयतः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अत्र हैके कुमारमुत्सङ्गमानयन्त्युभयतः सुजातमा ते योनिमित्येतय
+</details>
+
+<details><summary>मूलम्</summary>
 
 अत्र हैके कुमारमुत्सङ्गमानयन्त्युभयतः सुजातमा ते योनिमित्येतय
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/08_atra_haike_kumAramutsangamAnayantyubhayataH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^3] . Here some place a boy of good birth on both sides, in her lap, with this (verse), 'Into thy womb' (see below, chap. 19, 6),
 
 [^3]:  It should be noted that the verse ā te yonim is quoted here only with the Pratika, while its full text is given below, chap. 19, 6. Can the Sūtras describing this ceremony with the kumāra ubhayataḥ-sujāta be a later addition?
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/09_api_vA_tUShNIm.md">
-<details open><summary><h2>०९ अपि वा तूष्णीम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपि वा तूष्णीं ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/09_api_vA_tUShNIm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अपि वा तूष्णीं ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. Or also silently.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/10_tasyAnjalau_phalAni_dattvA.md">
-<details open><summary><h2>१० तस्याञ्जलौ फलानि दत्त्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्याञ्जलौ फलानि दत्त्वा पुण्याहं वाचयति १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/10_tasyAnjalau_phalAni_dattvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तस्याञ्जलौ फलानि दत्त्वा पुण्याहं वाचयति १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. Into this (boy's) joined hands (the bridegroom) gives fruits and causes (the Brāhmaṇas) to wish an auspicious day.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/11_pu.NsavatI_ha_bhavati.md">
-<details open><summary><h2>११ पुँसवती ह भवति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+पुँसवती ह भवति
+</details>
+
+<details><summary>मूलम्</summary>
 
 पुँसवती ह भवति 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/11_pu.NsavatI_ha_bhavati.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. Thus she becomes the mother of male children.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/16/12_ihaiva_stamiti_sUktasheSheNa.md">
-<details open><summary><h2>१२ इहैव स्तमिति सूक्तशेषेण ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इहैव स्तमिति सूक्तशेषेण गृहान्प्रपादयन्ति १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/16/12_ihaiva_stamiti_sUktasheSheNa.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इहैव स्तमिति सूक्तशेषेण गृहान्प्रपादयन्ति १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. With the rest of the hymn, 'Stay ye here both' (Rig-veda X, 85, 42 seq.), they make them enter the house.
 
 </details>
-</div>
