--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/17.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/17.md
@@ -2,135 +2,166 @@
 title = "१७"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/01_dadhikrAvNo_akAriShamiti_dadhi.md">
-<details open><summary><h2>०१ दधिक्राव्णो अकारिषमिति दधि ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दधिक्राव्णो अकारिषमिति दधि सम्पिबेयातां १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/01_dadhikrAvNo_akAriShamiti_dadhi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दधिक्राव्णो अकारिषमिति दधि सम्पिबेयातां १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. With the verse, 'I praised Dadhikrāvan' (Rig-veda IV, 39, 6), let them drink together curds.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/02_vAgyatAvAsIyAtAmA_dhruvadarshanAd.md">
-<details open><summary><h2>०२ वाग्यतावासीयातामा ध्रुवदर्शनाद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वाग्यतावासीयातामा ध्रुवदर्शनाद् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/02_vAgyatAvAsIyAtAmA_dhruvadarshanAd.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वाग्यतावासीयातामा ध्रुवदर्शनाद् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . Let them sit silent, when the sun has set, until the polar-star appears.
 
 [^1]:  17, 2, 3. I have changed in the translation the division of these Sūtras; the native authorities divide after dhruvadarśanāt, while I propose to divide after astamite.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/03_astamite_dhruvaM_darshayati.md">
-<details open><summary><h2>०३ अस्तमिते ध्रुवं दर्शयति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अस्तमिते ध्रुवं दर्शयति ध्रुवैधि पोष्या मयीति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/03_astamite_dhruvaM_darshayati.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अस्तमिते ध्रुवं दर्शयति ध्रुवैधि पोष्या मयीति ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. He shows her the polar-star with the words, 'Firm be thou, thriving with me!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/04_dhruvaM_pashyAmi_prajAm.md">
-<details open><summary><h2>०४ ध्रुवं पश्यामि प्रजाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ध्रुवं पश्यामि प्रजां विन्देयेति ब्रूयात् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/04_dhruvaM_pashyAmi_prajAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ध्रुवं पश्यामि प्रजां विन्देयेति ब्रूयात् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Let her say, 'I see the polar-star; may I obtain offspring.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/05_trirAtraM_brahmacharyaM_chareyAtAm.md">
-<details open><summary><h2>०५ त्रिरात्रं ब्रह्मचर्यं चरेयाताम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रिरात्रं ब्रह्मचर्यं चरेयाताम् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/05_trirAtraM_brahmacharyaM_chareyAtAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्रिरात्रं ब्रह्मचर्यं चरेयाताम् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. Through a period of three nights let them refrain from conjugal intercourse.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/06_adhaH_shayIyAtAm.md">
-<details open><summary><h2>०६ अधः शयीयाताम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधः शयीयातां ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/06_adhaH_shayIyAtAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अधः शयीयातां ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Let them sleep on the ground.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/07_dadhyodanaM_sambhunjIyAtAM_pibatam.md">
-<details open><summary><h2>०७ दध्योदनं सम्भुञ्जीयातां पिबतम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दध्योदनं सम्भुञ्जीयातां पिबतं च तृप्णुतं चेति तृचेन ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/07_dadhyodanaM_sambhunjIyAtAM_pibatam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दध्योदनं सम्भुञ्जीयातां पिबतं च तृप्णुतं चेति तृचेन ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Let them eat together boiled rice with curds, with the three verses, 'Drink and satiate yourselves' (Rig-veda VIII, 35, 10).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/08_sAyamprAtarvaivAhyamagniM_parichareyAtAmagnaye.md">
-<details open><summary><h2>०८ सायम्प्रातर्वैवाह्यमग्निं परिचरेयातामग्नये ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायम्प्रातर्वैवाह्यमग्निं परिचरेयातामग्नये स्वाहाग्नये स्विष्टकृते स्वाहेति ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/08_sAyamprAtarvaivAhyamagniM_parichareyAtAmagnaye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सायम्प्रातर्वैवाह्यमग्निं परिचरेयातामग्नये स्वाहाग्नये स्विष्टकृते स्वाहेति ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. Let them serve the nuptial fire in the evening and in the morning with the words, 'To Agni svāhā! To Agni Sviṣṭakṛt svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/09_pumA.N_sau_mitrAvaruNau.md">
-<details open><summary><h2>०९ पुमाँ सौ मित्रावरुणौ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुमाँ सौ मित्रावरुणौ पुमाँ सावश्विनावुभौ । पुमानिन्द्र श्चाग्निश्च पुमाँ सं वर्धतां मयि स्वाहेति पूर्वां गर्भकामा ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/09_pumA.N_sau_mitrAvaruNau.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पुमाँ सौ मित्रावरुणौ पुमाँ सावश्विनावुभौ । पुमानिन्द्र श्चाग्निश्च पुमाँ सं वर्धतां मयि स्वाहेति पूर्वां गर्भकामा ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. 'Let the two men Mitra and Varuṇa, let the two men, the Aśvins both, let the man Indra and also Agni make a man grow in me. Svāhā!' - with (these words she offers) the first oblation if she is desirous of pregnancy.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/17/10_dasharAtramavipravAsaH.md">
-<details open><summary><h2>१० दशरात्रमविप्रवासः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दशरात्रमविप्रवासः १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/17/10_dasharAtramavipravAsaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दशरात्रमविप्रवासः १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. For ten days they are not to set out (from home).
 
 </details>
-</div>
