--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/18.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/18.md
@@ -2,40 +2,51 @@
 title = "१८"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/18/01_atha_chaturthIkarma.md">
-<details open><summary><h2>०१ अथ चतुर्थीकर्म ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ चतुर्थीकर्म १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/18/01_atha_chaturthIkarma.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ चतुर्थीकर्म १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. Now the rites of the fourth day.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/18/02_trirAtre_nivRtte_sthAlIpAkasya.md">
-<details open><summary><h2>०२ त्रिरात्रे निवृत्ते स्थालीपाकस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रिरात्रे निवृत्ते स्थालीपाकस्य जुहोति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/18/02_trirAtre_nivRtte_sthAlIpAkasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्रिरात्रे निवृत्ते स्थालीपाकस्य जुहोति २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. When the three nights have elapsed, he makes offerings of cooked food (with the texts),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/18/03_agne_prAyashchittirasi_tvam.md">
-<details open><summary><h2>०३ अग्ने प्रायश्चित्तिरसि त्वम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्ने प्रायश्चित्तिरसि त्वं देवानां प्रायश्चित्तिरसि यास्याः पतिघ्नी तनूस्तामस्या अप जहि वायो प्रायश्चित्तिरसि त्वं देवानां प्रायश्चित्तिरसि यास्या अपुत्रिया तनूस्तामस्या अप जहि सूर्य प्रायश्चित्तिरसि त्वं देवानां प्रायश्चित्तिरसि यास्या अपशव्या तनूस्तामस्या अप जहि अर्यमणं नु देवं कन्या अग्निमयक्षत सेमां देवो अर्यमा प्रेतो मुञ्चातु मामुतः वरुणं नु देवं कन्या अग्निमयक्षत सेमां देवो वरुणः प्रेतो मुञ्चातु मामुतः पूषणं नु देवं कन्या अग्निमयक्षत सेमां देवः पूषा प्रेतो मुञ्चातु मामुतः ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/18/03_agne_prAyashchittirasi_tvam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्ने प्रायश्चित्तिरसि त्वं देवानां प्रायश्चित्तिरसि यास्याः पतिघ्नी तनूस्तामस्या अप जहि वायो प्रायश्चित्तिरसि त्वं देवानां प्रायश्चित्तिरसि यास्या अपुत्रिया तनूस्तामस्या अप जहि सूर्य प्रायश्चित्तिरसि त्वं देवानां प्रायश्चित्तिरसि यास्या अपशव्या तनूस्तामस्या अप जहि अर्यमणं नु देवं कन्या अग्निमयक्षत सेमां देवो अर्यमा प्रेतो मुञ्चातु मामुतः वरुणं नु देवं कन्या अग्निमयक्षत सेमां देवो वरुणः प्रेतो मुञ्चातु मामुतः पूषणं नु देवं कन्या अग्निमयक्षत सेमां देवः पूषा प्रेतो मुञ्चातु मामुतः ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^1] . 'Agni! Thou art expiation; thou art the expiation of the gods. What substance dwells in her that brings death to her husband, that drive away from her.
 
@@ -52,30 +63,35 @@ title = "१८"
 'To god Pūṣan the girls have made sacrifice, to Agni; may he, god Pūṣan, &c.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/18/04_prajApata_iti_saptamI.md">
-<details open><summary><h2>०४ प्रजापत इति सप्तमी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रजापत इति सप्तमी ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/18/04_prajApata_iti_saptamI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रजापत इति सप्तमी ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. The seventh oblation with the verse, 'Prajāpati' (Rig-veda X, 121, 10).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/18/05_sauviShTakRtyaShTamI.md">
-<details open><summary><h2>०५ सौविष्टकृत्यष्टमी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सौविष्टकृत्यष्टमी ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/18/05_sauviShTakRtyaShTamI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सौविष्टकृत्यष्टमी ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. The eighth to (Agni) Sviṣṭakṛt.
 
 </details>
-</div>
