--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/22.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/22.md
@@ -2,93 +2,116 @@
 title = "२२"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/01_saptame_mAsi_prathamagarbhe.md">
-<details open><summary><h2>०१ सप्तमे मासि प्रथमगर्भे ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सप्तमे मासि प्रथमगर्भे सीमन्तोन्नयनं १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/01_saptame_mAsi_prathamagarbhe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सप्तमे मासि प्रथमगर्भे सीमन्तोन्नयनं १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. In the seventh month, at her first pregnancy, the Sīmantonnayana (or parting of the hair).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/02_snAtAmahatavAsasaM_pashchAdagnerupaveshya.md">
-<details open><summary><h2>०२ स्नातामहतवाससं पश्चादग्नेरुपवेश्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+स्नातामहतवाससं पश्चादग्नेरुपवेश्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 स्नातामहतवाससं पश्चादग्नेरुपवेश्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/02_snAtAmahatavAsasaM_pashchAdagnerupaveshya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. He causes her, after she has bathed and put on a (new) garment which has not yet been washed, to sit down behind the fire.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/03_anvArabdhAyAM_mahAvyAhRtibhirhutvA.md">
-<details open><summary><h2>०३ अन्वारब्धायां महाव्याहृतिभिर्हुत्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्वारब्धायां महाव्याहृतिभिर्हुत्वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/03_anvArabdhAyAM_mahAvyAhRtibhirhutvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अन्वारब्धायां महाव्याहृतिभिर्हुत्वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. He sacrifices, while she takes hold of him, with the Mahāvyāhṛtis.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/04_sthAlIpAkaM_shrapayitvA.md">
-<details open><summary><h2>०४ स्थालीपाकं श्रपयित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्थालीपाकं श्रपयित्वा ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/04_sthAlIpAkaM_shrapayitvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+स्थालीपाकं श्रपयित्वा ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. He cooks a mess of food,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/05_mudgaudanamityeke.md">
-<details open><summary><h2>०५ मुद्गौदनमित्येके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मुद्गौदनमित्येके ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/05_mudgaudanamityeke.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मुद्गौदनमित्येके ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. According to some (teachers) boiled rice with Mudga beans.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/06_puMvadupakaraNAni_syurnaxatraM_cha.md">
-<details open><summary><h2>०६ पुंवदुपकरणानि स्युर्नक्षत्रं च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुंवदुपकरणानि स्युर्नक्षत्रं च ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/06_puMvadupakaraNAni_syurnaxatraM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पुंवदुपकरणानि स्युर्नक्षत्रं च ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. The implements used and the Nakṣatra should be of male gender.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/07_dhAtA_dadAtu_dAshuShe.md">
-<details open><summary><h2>०७ धाता ददातु दाशुषे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धाता ददातु दाशुषे प्राचीं जीवातुमक्षितिम् वयं देवस्य धीमहि सुमतिं सत्यधर्मणः धाता प्रजाया उत राय ईशे धातेदं विश्वं भुवनं जजान धाता पुत्रं यजमानाय दाता तस्मा उ हव्यं घृतवज्जुहोतेति नेजमेष परापतेति तिस्रः प्रजापत इति षष्ठी ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/07_dhAtA_dadAtu_dAshuShe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+धाता ददातु दाशुषे प्राचीं जीवातुमक्षितिम् वयं देवस्य धीमहि सुमतिं सत्यधर्मणः धाता प्रजाया उत राय ईशे धातेदं विश्वं भुवनं जजान धाता पुत्रं यजमानाय दाता तस्मा उ हव्यं घृतवज्जुहोतेति नेजमेष परापतेति तिस्रः प्रजापत इति षष्ठी ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. (He then sacrifices with the following texts,) 'May Dhātar give to his worshipper further life and safety; may we obtain the favour of the god whose laws are truthful.
 
@@ -97,88 +120,106 @@ title = "२२"
 (Besides) with the three verses, 'Nejameṣa, fly away' (Rig-veda Khailika sūkta, after X, 184, vol. vi, p. 31), and in the sixth place the verse, 'Prajāpati' (Rig-veda X, 121, 10).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/08_triHshvetayA_shalalyA_darbhasUchyA.md">
-<details open><summary><h2>०८ त्रिःश्वेतया शलल्या दर्भसूच्या ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+त्रिःश्वेतया शलल्या दर्भसूच्या वोदुम्बरशलाटुभिः सह मध्यादूर्ध्वं सीमन्तमुन्नयति भूर्भुवः स्वरित्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 त्रिःश्वेतया शलल्या दर्भसूच्या वोदुम्बरशलाटुभिः सह मध्यादूर्ध्वं सीमन्तमुन्नयति भूर्भुवः स्वरित्य्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/08_triHshvetayA_shalalyA_darbhasUchyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^1] . (The husband then) parts her hair, upwards, beginning from the middle, with a porcupine's quill that has three white spots, or with a Darbha needle together with unripe Udumbara fruits, with the words, 'Bhūr bhuvaḥ svaḥ.'
 
 [^1]:  22, 8. Comp. above, chap. 12, 6.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/09_utsange_nidhAya.md">
-<details open><summary><h2>०९ उत्सङ्गे निधाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्सङ्गे निधाय ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/09_utsange_nidhAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उत्सङ्गे निधाय ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. He lays down (the thing he has used) in her lap,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/10_trivRti_pratimuchya_kaNThe.md">
-<details open><summary><h2>१० त्रिवृति प्रतिमुच्य कण्ठे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+त्रिवृति प्रतिमुच्य कण्ठे बध्नात्ययमूर्जावतो वृक्ष ऊर्जीव फलिनी भवेत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 त्रिवृति प्रतिमुच्य कण्ठे बध्नात्ययमूर्जावतो वृक्ष ऊर्जीव फलिनी भवेत्य्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/10_trivRti_pratimuchya_kaNThe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^2] . Ties (the fruits) to a string of three twisted threads and fastens them to her neck with the words, 'Rich in sap is this tree; like the sappy one be thou fruitful.'
 
 [^2]:  Nārāyaṇa: tisṛbhis tantubhir vṛtte sūtre udumbaraphalāni . . . gale . . . badhnāti. I have translated accordingly. Pāraskara I, 15, 6 uses the same expression trivṛt. Professor Stenzler there translates it, on the authority of Jayarāma, 'dreifache Haarflechte,' and says in his note on that passage that, according to Śāṅkhāyana, he would have to tie the things with a threefold string to the neck of the woman, as if Śāṅkhāyana's statement were different from that of Pāraskara. But both authors have the same word, and only the commentators differ in their explanations thereof.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/11_athAha_vINAgAthino_rAjAnam.md">
-<details open><summary><h2>११ अथाह वीणागाथिनो राजानम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथाह वीणागाथिनो राजानं सङ्गायतेति ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/11_athAha_vINAgAthino_rAjAnam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथाह वीणागाथिनो राजानं सङ्गायतेति ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11 [^3] . (The husband) then says to lute-players, 'Sing ye the king - 
 
 [^3]:  Āśvalāyana more explicitly says (I, 14, 6), Somaṃ rājānaṃ saṃgāyetām iti.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/12_yo_vApyanyo_vIratara.md">
-<details open><summary><h2>१२ यो वाप्यन्यो वीरतर ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+यो वाप्यन्यो वीरतर इत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 यो वाप्यन्यो वीरतर इत्य् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/12_yo_vApyanyo_vIratara.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. 'Or if anybody else is still more valiant.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/13_udapAtre-xatAnavaninIya_viShNuryoniM_kalpayatu.md">
-<details open><summary><h2>१३ उदपात्रेऽक्षतानवनिनीय विष्णुर्योनिं कल्पयतु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदपात्रेऽक्षतानवनिनीय विष्णुर्योनिं कल्पयतु राकामहमिति इति षळृचेन पाययेद् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/13_udapAtre-xatAnavaninIya_viShNuryoniM_kalpayatu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उदपात्रेऽक्षतानवनिनीय विष्णुर्योनिं कल्पयतु राकामहमिति इति षळृचेन पाययेद् १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13 [^4] . Having poured fried grain into a water-pot, let him cause her to drink it with the six verses,
 
@@ -187,74 +228,88 @@ title = "२२"
 'May Viṣṇu take care of thy womb,' 'I call Rākā' (Rig-veda X, 184, 1; II, 32, 4-8).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/14_athAsyA_udaramabhimRshet.md">
-<details open><summary><h2>१४ अथास्या उदरमभिमृशेत् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथास्या उदरमभिमृशेत् १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/14_athAsyA_udaramabhimRshet.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथास्या उदरमभिमृशेत् १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. Let him then touch her (with the words),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/15_suparNo-si_garutmA.N_strivRtte.md">
-<details open><summary><h2>१५ सुपर्णोऽसि गरुत्माँ स्त्रिवृत्ते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+सुपर्णोऽसि गरुत्माँ स्त्रिवृत्ते शिरो गायत्रं चक्षुः छन्दाँ स्यङ्गानि यजूँषि नाम साम ते तनूर्
+</details>
+
+<details><summary>मूलम्</summary>
 
 सुपर्णोऽसि गरुत्माँ स्त्रिवृत्ते शिरो गायत्रं चक्षुः छन्दाँ स्यङ्गानि यजूँषि नाम साम ते तनूर्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/15_suparNo-si_garutmA.N_strivRtte.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 15 [^5] . 'The winged one art thou, the Garutmat; the Trivṛt (stoma) is thy head, the Gāyatra thy eye, the metres thy limbs, the Yajus thy name, the Sāman thy body.'
 
 [^5]:  Vājasaneyi Saṃhitā XII, 4.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/16_modamAnIM_gApayen.md">
-<details open><summary><h2>१६ मोदमानीं गापयेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मोदमानीं गापयेन् १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/16_modamAnIM_gApayen.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मोदमानीं गापयेन् १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16 [^6] . Let him cause her to sing merrily,
 
 [^6]:  16, 17. Nārāyaṇa: modamānīṃ harshayuktāṃ taṃ māṅgalikair gītair gāyayet . . . mahāhemavatīṃ bahvābharaṇayuktāṃ vā gāyayet.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/17_mahAhemavatIM_vA.md">
-<details open><summary><h2>१७ महाहेमवतीं वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाहेमवतीं वा १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/17_mahAhemavatIM_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+महाहेमवतीं वा १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17. Wearing, if she likes, many gold ornaments.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/22/18_RShabho_daxiNA.md">
-<details open><summary><h2>१८ ऋषभो दक्षिणा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऋषभो दक्षिणा १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/22/18_RShabho_daxiNA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ऋषभो दक्षिणा १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18. A bull is the fee for the sacrifice.
 
 </details>
-</div>
