--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/26.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/26.md
@@ -2,372 +2,457 @@
 title = "२६"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/01_agnaye_kRtikAbhyaH.md">
-<details open><summary><h2>०१ अग्नये कृतिकाभ्यः ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्नये कृतिकाभ्यः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/01_agnaye_kRtikAbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्नये कृतिकाभ्यः १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . To Agni, to the Kṛttikās.
 
 [^1]:  26, 1. This chapter is not found in the Śāmbavya-Gṛhya, and Nārāyaṇa expressly designates it as kṣepaka khaṇḍa. It is a sort of appendix to the Sūtras 25, 5. 6; a sacrifice having there been prescribed to three Nakṣatras with their presiding deities, an enumeration of the Nakṣatras and deities is here given. Compare, on similar lists, Weber's second article on the Nakṣatras seq. (Abhandlungen der Berliner Akademie der Wissenschaften, 1861), pp. 289 , 315, 367 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/02_prajApataye_rohiNyai.md">
-<details open><summary><h2>०२ प्रजापतये रोहिण्यै ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रजापतये रोहिण्यै २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/02_prajApataye_rohiNyai.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रजापतये रोहिण्यै २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. To Prajāpati, to Rohiṇī.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/03_somAya_mRgashirase.md">
-<details open><summary><h2>०३ सोमाय मृगशिरसे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोमाय मृगशिरसे ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/03_somAya_mRgashirase.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सोमाय मृगशिरसे ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. To Soma, to Mṛgaśiras.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/04_rudrAyAdrAbhyaH.md">
-<details open><summary><h2>०४ रुद्रायाद्राभ्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+रुद्रायाद्राभ्यः
+</details>
+
+<details><summary>मूलम्</summary>
 
 रुद्रायाद्राभ्यः 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/04_rudrAyAdrAbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. To Rudra, to the Ārdrās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/05_aditaye_punarvasubhyAm.md">
-<details open><summary><h2>०५ अदितये पुनर्वसुभ्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अदितये पुनर्वसुभ्यां ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/05_aditaye_punarvasubhyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अदितये पुनर्वसुभ्यां ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. To Aditi, to the two Punarvasus.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/06_bRhaspataye_puShyAya.md">
-<details open><summary><h2>०६ बृहस्पतये पुष्याय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बृहस्पतये पुष्याय ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/06_bRhaspataye_puShyAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+बृहस्पतये पुष्याय ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. To Bṛhaspati, to Puṣya.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/07_sarpebhyo-shleShAbhyaH.md">
-<details open><summary><h2>०७ सर्पेभ्योऽश्लेषाभ्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्पेभ्योऽश्लेषाभ्यः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/07_sarpebhyo-shleShAbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सर्पेभ्योऽश्लेषाभ्यः ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. To the Serpents, to the Aśleṣās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/08_pitRbhyo_maghAbhyo.md">
-<details open><summary><h2>०८ पितृभ्यो मघाभ्यो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पितृभ्यो मघाभ्यो ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/08_pitRbhyo_maghAbhyo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पितृभ्यो मघाभ्यो ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. To the Manes, to the Maghās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/09_bhagAya_phalgunIbhyAm.md">
-<details open><summary><h2>०९ भगाय फल्गुनीभ्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भगाय फल्गुनीभ्याम् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/09_bhagAya_phalgunIbhyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+भगाय फल्गुनीभ्याम् ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. To Bhaga, to the two Phalgunīs.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/10_aryamNe_phalgunIbhyAm.md">
-<details open><summary><h2>१० अर्यम्णे फल्गुनीभ्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अर्यम्णे फल्गुनीभ्यां १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/10_aryamNe_phalgunIbhyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अर्यम्णे फल्गुनीभ्यां १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. To Aryaman, to the two Phalgunīs.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/11_savitre_hastAya.md">
-<details open><summary><h2>११ सवित्रे हस्ताय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सवित्रे हस्ताय ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/11_savitre_hastAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सवित्रे हस्ताय ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. To Savitar, to Hasta.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/12_tvaShTre_chitrAyai.md">
-<details open><summary><h2>१२ त्वष्ट्रे चित्रायै ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वष्ट्रे चित्रायै १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/12_tvaShTre_chitrAyai.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्वष्ट्रे चित्रायै १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. To Tvaṣṭar, to Citrā.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/13_vAyave_svAtaya.md">
-<details open><summary><h2>१३ वायवे स्वातय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वायवे स्वातय १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/13_vAyave_svAtaya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वायवे स्वातय १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. To Vāyu, to Svāti.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/14_indrA_gnibhyAM_vishAkhAbhyAm.md">
-<details open><summary><h2>१४ इन्द्रा ग्निभ्यां विशाखाभ्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इन्द्रा ग्निभ्यां विशाखाभ्यां १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/14_indrA_gnibhyAM_vishAkhAbhyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इन्द्रा ग्निभ्यां विशाखाभ्यां १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. To Indra and Agni, to the two Viśākhās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/15_mitrAyAnurAdhAyA.md">
-<details open><summary><h2>१५ मित्रायानुराधाया ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मित्रायानुराधाया १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/15_mitrAyAnurAdhAyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मित्रायानुराधाया १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. To Mitra, to Anurādhā.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/16_indrA_ya_jyeShThAya.md">
-<details open><summary><h2>१६ इन्द्रा य ज्येष्ठाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इन्द्रा य ज्येष्ठाय १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/16_indrA_ya_jyeShThAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इन्द्रा य ज्येष्ठाय १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. To Indra, to Jyeṣṭha.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/17_nirRtyai_mUlAya.md">
-<details open><summary><h2>१७ निरृत्यै मूलाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+निरृत्यै मूलाय
+</details>
+
+<details><summary>मूलम्</summary>
 
 निरृत्यै मूलाय
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/17_nirRtyai_mUlAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 17. To Nirṛti, to Mūla.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/18_adbhyo-ShADhAbhyaH.md">
-<details open><summary><h2>१८ अद्भ्योऽषाढाभ्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अद्भ्योऽषाढाभ्यः
+</details>
+
+<details><summary>मूलम्</summary>
 
 अद्भ्योऽषाढाभ्यः
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/18_adbhyo-ShADhAbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 18. To the Waters, to the Aṣāḍhās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/19_vishvebhyo_devebhyo-ShADhAbhyaH.md">
-<details open><summary><h2>१९ विश्वेभ्यो देवेभ्योऽषाढाभ्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+विश्वेभ्यो देवेभ्योऽषाढाभ्यः
+</details>
+
+<details><summary>मूलम्</summary>
 
 विश्वेभ्यो देवेभ्योऽषाढाभ्यः 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/19_vishvebhyo_devebhyo-ShADhAbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 19. To the Viśve devās, to the Aṣāḍhās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/20_brahmaNe-bhijite.md">
-<details open><summary><h2>२० ब्रह्मणेऽभिजिते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्मणेऽभिजिते २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/20_brahmaNe-bhijite.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ब्रह्मणेऽभिजिते २०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 20. To Brahman, to Abhijit.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/21_viShNave_shravaNAya.md">
-<details open><summary><h2>२१ विष्णवे श्रवणाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विष्णवे श्रवणाय २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/21_viShNave_shravaNAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+विष्णवे श्रवणाय २१
+</details>
+
+<details><summary>Oldenberg</summary>
 
 21. To Viṣṇu, to Śravaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/22_vasubhyo_dhaniShThAbhyaH.md">
-<details open><summary><h2>२२ वसुभ्यो धनिष्ठाभ्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+वसुभ्यो धनिष्ठाभ्यः
+</details>
+
+<details><summary>मूलम्</summary>
 
 वसुभ्यो धनिष्ठाभ्यः 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/22_vasubhyo_dhaniShThAbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 22. To the Vasus, to the Dhaniṣṭhās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/23_varuNAya_shatabhiShaje.md">
-<details open><summary><h2>२३ वरुणाय शतभिषजे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वरुणाय शतभिषजे २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/23_varuNAya_shatabhiShaje.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वरुणाय शतभिषजे २३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 23. To Varuṇa, to Śatabhiṣaj.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/24_ajAyaikapade_proShThapadAbhyaH.md">
-<details open><summary><h2>२४ अजायैकपदे प्रोष्ठपदाभ्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अजायैकपदे प्रोष्ठपदाभ्यः
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/24_ajAyaikapade_proShThapadAbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अजायैकपदे प्रोष्ठपदाभ्यः
+</details>
+
+<details><summary>Oldenberg</summary>
 
 24. To Aja ekapad, to the Proṣṭhapadās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/25_ahirbuyAya_proShThapadAbhyaH.md">
-<details open><summary><h2>२५ अहिर्बुÞयाय प्रोष्ठपदाभ्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहिर्बुÞयाय प्रोष्ठपदाभ्यः २५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/25_ahirbuyAya_proShThapadAbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अहिर्बुÞयाय प्रोष्ठपदाभ्यः २५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 25. To Ahi budhnya, to the Proṣṭhapadās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/26_pUShNe_revatyA.md">
-<details open><summary><h2>२६ पूष्णे रेवत्या ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पूष्णे रेवत्या २६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/26_pUShNe_revatyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पूष्णे रेवत्या २६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 26. To Pūṣan, to Revatī.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/27_ashvibhyAmashvinIbhyAm.md">
-<details open><summary><h2>२७ अश्विभ्यामश्विनीभ्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अश्विभ्यामश्विनीभ्यां २७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/27_ashvibhyAmashvinIbhyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अश्विभ्यामश्विनीभ्यां २७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 27. To the two Aśvins, to the two Aśvinīs.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/26/28_yamAya_bharaNIbhyaH.md">
-<details open><summary><h2>२८ यमाय भरणीभ्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यमाय भरणीभ्यः २८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/26/28_yamAya_bharaNIbhyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यमाय भरणीभ्यः २८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 28. To Yama, to the Bharaṇīs.
 
 </details>
-</div>
