--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/27.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/27.md
@@ -2,159 +2,195 @@
 title = "२७"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/01_ShaShThe_mAsyannaprAshanam.md">
-<details open><summary><h2>०१ षष्ठे मास्यन्नप्राशनम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 षष्ठे मास्यन्नप्राशनम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/01_ShaShThe_mAsyannaprAshanam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+षष्ठे मास्यन्नप्राशनम् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. In the sixth month the Annaprāśana (i.e. the first feeding with solid food).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/02_AjamannAdyakAmas.md">
-<details open><summary><h2>०२ आजमन्नाद्यकामस् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आजमन्नाद्यकामस् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/02_AjamannAdyakAmas.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आजमन्नाद्यकामस् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . Goat's flesh, if he is desirous of nouṛṣment,
 
 [^1]:  27, 2-6. These rules stand here, in the beginning of the chapter, as introductory remarks; the act of feeding itself (Sūtra 10) does not follow till after the sacrifice and the other performances prescribed in Sūtras 7-9.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/03_taittiraM_brahmavarchasakAmaH.md">
-<details open><summary><h2>०३ तैत्तिरं ब्रह्मवर्चसकामः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+तैत्तिरं ब्रह्मवर्चसकामः
+</details>
+
+<details><summary>मूलम्</summary>
 
 तैत्तिरं ब्रह्मवर्चसकामः
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/03_taittiraM_brahmavarchasakAmaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . Flesh of partridge, if desirous of holy lustre,
 
 [^2]:  This rule evidently rests on the allusion of taittira (partridge flesh) to the Taittirīya school.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/04_mAtsyaM_javanakAmaH.md">
-<details open><summary><h2>०४ मात्स्यं जवनकामः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+मात्स्यं जवनकामः
+</details>
+
+<details><summary>मूलम्</summary>
 
 मात्स्यं जवनकामः
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/04_mAtsyaM_javanakAmaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. Fish, if desirous of swiftness,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/05_ghRtaudanaM_tejaskAmaH.md">
-<details open><summary><h2>०५ घृतौदनं तेजस्कामः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+घृतौदनं तेजस्कामः
+</details>
+
+<details><summary>मूलम्</summary>
 
 घृतौदनं तेजस्कामः 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/05_ghRtaudanaM_tejaskAmaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Boiled rice with ghee, if desirous of splendour - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/06_dadhimadhughRtamishramannaM_prAshayet.md">
-<details open><summary><h2>०६ दधिमधुघृतमिश्रमन्नं प्राशयेत् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दधिमधुघृतमिश्रमन्नं प्राशयेत् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/06_dadhimadhughRtamishramannaM_prAshayet.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दधिमधुघृतमिश्रमन्नं प्राशयेत् ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. (Such) food, prepared with milk curds, honey, and ghee, he should give (to the child) to eat.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/07_annapate-nnasya_no_dehyanamIvasya.md">
-<details open><summary><h2>०७ अन्नपतेऽन्नस्य नो देह्यनमीवस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अन्नपतेऽन्नस्य नो देह्यनमीवस्य शुष्मिणः । प्र प्रदातारं तारिष ऊर्जं नो धेहि द्विपदे चतुष्पदे ।  
+यच्चिद्धि महश्चिदिममग्न आयुषे वर्चसे तिग्ममोजो वरुण सोम राजन् ।  
+मातेवास्मा अदितिः शर्म यँसद्विश्वे देवा जरदष्टिर्यथासदिति हुत्वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 अन्नपतेऽन्नस्य नो देह्यनमीवस्य शुष्मिणः । प्र प्रदातारं तारिष ऊर्जं नो धेहि द्विपदे चतुष्पदे ।  
 यच्चिद्धि महश्चिदिममग्न आयुषे वर्चसे तिग्ममोजो वरुण सोम राजन् ।  
 मातेवास्मा अदितिः शर्म यँसद्विश्वे देवा जरदष्टिर्यथासदिति हुत्वा
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/07_annapate-nnasya_no_dehyanamIvasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7 [^3] . After he has made oblations with (the verses), 'Lord of food, give us food, painless and strong; bring forward the giver; bestow power on us, on men and animals;' 'Whatsoever' (Rig-veda IV, 12, 4); 'Even of great' (ibid. 5), 'Him, Agni, (lead) to long life and splendour; sharp strength (mayst thou), Varuṇa, king Soma, protection may Aditi, like a mother, afford to him, and all the gods that he may reach old age' - 
 
 [^3]:  Both metre and construction show that the Pāda imam Agna āyushe varcase is incomplete; the Śāmbavya-Gṛhya and Taitt. Saṃhitā II, 3, 10, 3 add kṛdhi after varcase.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/08_agna_AyU.NShItyabhimantrya.md">
-<details open><summary><h2>०८ अग्न आयूँषीत्यभिमन्त्र्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अग्न आयूँषीत्यभिमन्त्र्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 अग्न आयूँषीत्यभिमन्त्र्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/08_agna_AyU.NShItyabhimantrya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. And has recited over (the child) the verse, 'Powers of life, Agni' (Rig-veda IX, 66, 19),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/09_udagagreShu_kusheShu_syonA.md">
-<details open><summary><h2>०९ उदगग्रेषु कुशेषु स्योना ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदगग्रेषु कुशेषु स्योना पृथिवि भवेत्युपवेश्य ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/09_udagagreShu_kusheShu_syonA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उदगग्रेषु कुशेषु स्योना पृथिवि भवेत्युपवेश्य ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. And has set him down on northward pointed Kuśa grass with (the verse), 'Be soft, O earth' (Rig-veda I, 22, 15) - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/10_mahAvyAhRtibhiH_prAshanam.md">
-<details open><summary><h2>१० महाव्याहृतिभिः प्राशनम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाव्याहृतिभिः प्राशनं १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/10_mahAvyAhRtibhiH_prAshanam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+महाव्याहृतिभिः प्राशनं १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. The act of feeding is performed with the Mahāvyāhṛtis.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/27/11_sheShaM_mAtA_prAshnIyAt.md">
-<details open><summary><h2>११ शेषं माता प्राश्नीयात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शेषं माता प्राश्नीयात् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/27/11_sheShaM_mAtA_prAshnIyAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शेषं माता प्राश्नीयात् ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. Let the mother eat the remnant.
 
 </details>
-</div>
