--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/05.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/05.md
@@ -2,171 +2,208 @@
 title = "०५"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/01_saMvatsare_sAvitrImanvAha.md">
-<details open><summary><h2>०१ संवत्सरे सावित्रीमन्वाह ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संवत्सरे सावित्रीमन्वाह १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/01_saMvatsare_sAvitrImanvAha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+संवत्सरे सावित्रीमन्वाह १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . After one year (the teacher) recites the Sāvitrī (to the student),
 
 [^1]:  5, 1. The study of the Veda is opened by the Sāvitrī. Comp. Śatapatha Brāhmaṇa, loc. cit., §§ 6 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/02_trirAtre.md">
-<details open><summary><h2>०२ त्रिरात्रे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रिरात्रे २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/02_trirAtre.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्रिरात्रे २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. (Or) after three nights,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/03_anvaxaM_vA.md">
-<details open><summary><h2>०३ अन्वक्षं वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्वक्षं वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/03_anvaxaM_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अन्वक्षं वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Or immediately.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/04_gAyatrIM_brAhmaNAyAnubrUyAt.md">
-<details open><summary><h2>०४ गायत्रीं ब्राह्मणायानुब्रूयात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गायत्रीं ब्राह्मणायानुब्रूयात् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/04_gAyatrIM_brAhmaNAyAnubrUyAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गायत्रीं ब्राह्मणायानुब्रूयात् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4 [^2] . Let him recite a Gāyatrī to a Brāhmaṇa,
 
 [^2]:  The Gāyatrī which the teacher shall recite to a Brāhmaṇa is the same verse of which it is said below, chap. q, II, that it belongs to Viśvāmitra (Rig-veda III, 62, to); the Tṛṣṭubh which is taught to the Kṣatriya is a verse ascribed to Hiraṇyastūpa, Rig-veda I, 35, 2; the Jagatī which is to be repeated to a Vaiśya is Rig-veda IV, 40, 5, belonging to Vāmadeva, or Rig-veda I, 35, 9, belonging to Hiraṇyastūpa. See the note on chap. 7, 10.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/05_triShTubhaM_xatriyAya.md">
-<details open><summary><h2>०५ त्रिष्टुभं क्षत्रियाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रिष्टुभं क्षत्रियाय ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/05_triShTubhaM_xatriyAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्रिष्टुभं क्षत्रियाय ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. A Tṛṣṭubh to a Kṣatriya,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/06_jagatIM_vaishyAya.md">
-<details open><summary><h2>०६ जगतीं वैश्याय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जगतीं वैश्याय ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/06_jagatIM_vaishyAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+जगतीं वैश्याय ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. A Jagatī to a Vaiśya.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/07_sAvitrIM_tveva.md">
-<details open><summary><h2>०७ सावित्रीं त्वेव ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+सावित्रीं त्वेव
+</details>
+
+<details><summary>मूलम्</summary>
 
 सावित्रीं त्वेव
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/07_sAvitrIM_tveva.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. But let it be anyhow a verse sacred to Savitar.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/08_uttareNAgnimupavishataH.md">
-<details open><summary><h2>०८ उत्तरेणाग्निमुपविशतः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उत्तरेणाग्निमुपविशतः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/08_uttareNAgnimupavishataH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उत्तरेणाग्निमुपविशतः ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. They seat themselves to the north of the fire,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/09_prA~Nmukha_AchAryaH_pratya~Nmukha.md">
-<details open><summary><h2>०९ प्राङ्मुख आचार्यः प्रत्यङ्मुख ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+प्राङ्मुख आचार्यः प्रत्यङ्मुख इतरो
+</details>
+
+<details><summary>मूलम्</summary>
 
 प्राङ्मुख आचार्यः प्रत्यङ्मुख इतरो
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/09_prA~Nmukha_AchAryaH_pratya~Nmukha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 9 [^3] . The teacher with his face turned eastward, the other westward.
 
 [^3]:  The same position is prescribed, in the same words, for the study of the main part of the Veda, below, chap. 7, 3; during p. 67 the study of the Āraṇyaka the position is slightly different (VI, 3, 2). According to Nārāyaṇa this Sūtra would contain a nishedha of the Sūtras 828 and 829 of the Rig-veda-Prātiśākhya (p. ccxcii of Professor Max Müller's edition).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/10_adhIhi_bho3_ityuktvA.md">
-<details open><summary><h2>१० अधीहि भो३ इत्युक्त्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अधीहि भो३ इत्युक्त्वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 अधीहि भो३ इत्युक्त्वा
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/10_adhIhi_bho3_ityuktvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^4] . After (the student) has said, 'Recite, sir!' - 
 
 [^4]:  10, 11. The Indian tradition divides these Sūtras after ācāryaḥ, so that the words adhīhi bho would have to be pronounced by the teacher. Thus also Nārāyaṇa explains, ācārya adhīhi bho 3 iti māṇavakam uktvā, &c. In my opinion it is the student or the students who say adhīhi bho. Thus the Prātiśākhya (Sūtra 831, ed. Max Müller) says, 'They invite him with the words adhīhi bho 3, all the students the teacher, having embraced his feet.' Comp. also below, IV, 8, 12, the greater part of which Sūtra is word for word identical with these rules; VI, 3, 6; Gautama I, 46; Gobhila II, 10, 38.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/11_AchArya_OMkAraM_prayujyAthetaram.md">
-<details open><summary><h2>११ आचार्य ॐकारं प्रयुज्याथेतरम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्य ॐकारं प्रयुज्याथेतरं वाचयति सावित्रीं भो३ अनुब्रूहीत्य्
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/11_AchArya_OMkAraM_prayujyAthetaram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आचार्य ॐकारं प्रयुज्याथेतरं वाचयति सावित्रीं भो३ अनुब्रूहीत्य्
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. The teacher, having pronounced the word OM, then causes the other one to say, 'Recite the Sāvitrī, sir!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/05/12_athAsmai_sAvitrImanvAha_tatsaviturvareNyamityet.md">
-<details open><summary><h2>१२ अथास्मै सावित्रीमन्वाह तत्सवितुर्वरेण्यमित्येताम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अथास्मै सावित्रीमन्वाह तत्सवितुर्वरेण्यमित्येतां पच्छोऽर्धर्चशोऽनवानम् १२
+</details>
+
+<details><summary>मूलम्</summary>
 
 अथास्मै सावित्रीमन्वाह तत्सवितुर्वरेण्यमित्येतां पच्छोऽर्धर्चशोऽनवानम् १२   
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/05/12_athAsmai_sAvitrImanvAha_tatsaviturvareNyamityet.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. He then recites the Sāvitrī to him, the verse 'That glorious (splendour) of Savitar' (Rig-Veda III, 62, 10); (firstly) pāda by pāda, (then) hemistich by hemistich, (and finally) without a stop.
 
 </details>
-</div>
