--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/07.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/07.md
@@ -2,147 +2,181 @@
 title = "०७"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/01_athAnuvAchanasya.md">
-<details open><summary><h2>०१ अथानुवाचनस्य ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथानुवाचनस्य १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/01_athAnuvAchanasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथानुवाचनस्य १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now (follows the exposition) of the study of the Veda.
 
 [^1]:  7, 1. Nārāyaṇa: 'Now (atha), i.e. after the observance of the Śukriya vrata,' &c. On the Sukriya vrata which has to be undergone before the Anuvacana treated of in this chapter can be performed, see the note on chap. 4, 1, and below, chap. II, 9. One would have expected that in the arrangement of Śāṅkhāyana the rites belonging to the Sukriya vrata would precede the exposition of the Anuvacana. Perhaps it was in consequence of the exact analogy of the Sukriya with the Śākvara, Vrātika, Aupaniṣada vratas, that the description of the former has been postponed till the latter had to be treated of.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/02_agneruttarata_upavishataH.md">
-<details open><summary><h2>०२ अग्नेरुत्तरत उपविशतः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्नेरुत्तरत उपविशतः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/02_agneruttarata_upavishataH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्नेरुत्तरत उपविशतः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . Both sit down to the north of the fire,
 
 [^2]:  2 seq. Comp. above, chap. 2, 8 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/03_prA~Nmukha_AchAryaH_pratya~Nmukha.md">
-<details open><summary><h2>०३ प्राङ्मुख आचार्यः प्रत्यङ्मुख ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+प्राङ्मुख आचार्यः प्रत्यङ्मुख इतरो
+</details>
+
+<details><summary>मूलम्</summary>
 
 प्राङ्मुख आचार्यः प्रत्यङ्मुख इतरो
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/03_prA~Nmukha_AchAryaH_pratya~Nmukha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. The teacher with his face to the east, the other one to the west.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/04_abhivAdya_pAdAvAchAryasya_pANI.md">
-<details open><summary><h2>०४ अभिवाद्य पादावाचार्यस्य पाणी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभिवाद्य पादावाचार्यस्य पाणी प्रक्षाल्य ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/04_abhivAdya_pAdAvAchAryasya_pANI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अभिवाद्य पादावाचार्यस्य पाणी प्रक्षाल्य ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4 [^3] . After (the student) has reverentially saluted the teacher's feet and has sprinkled his (own) hands (with water),
 
 [^3]:  The way in which this reverential salutation should be performed is described below, IV, 12, 1 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/05_daxiNena_jAnunAkramya_mUle.md">
-<details open><summary><h2>०५ दक्षिणेन जानुनाक्रम्य मूले ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षिणेन जानुनाक्रम्य मूले कुशतरुणान् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/05_daxiNena_jAnunAkramya_mUle.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दक्षिणेन जानुनाक्रम्य मूले कुशतरुणान् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. And has kneeled down with his right knee on young Kuśa shoots at their roots,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/06_daxiNottarAbhyAM_pANibhyAM_madhye.md">
-<details open><summary><h2>०६ दक्षिणोत्तराभ्यां पाणिभ्यां मध्ये ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षिणोत्तराभ्यां पाणिभ्यां मध्ये परिगृह्य ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/06_daxiNottarAbhyAM_pANibhyAM_madhye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दक्षिणोत्तराभ्यां पाणिभ्यां मध्ये परिगृह्य ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^4] . And has grasped round (those Kuśa shoots) in 'heir middle with his hands, holding the right uppermost,
 
 [^4]:  On dakṣiṇottarābhyām, see chap. 2, 11 and Nārāyaṇa's note there.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/07_tAntsavyenAchAryo-gre_sangRhya_daxiNenAdbhiH.md">
-<details open><summary><h2>०७ तान्त्सव्येनाचार्योऽग्रे सङ्गृह्य दक्षिणेनाद्भिः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तान्त्सव्येनाचार्योऽग्रे सङ्गृह्य दक्षिणेनाद्भिः परिषिञ्चन्नथेतरं वाचयति ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/07_tAntsavyenAchAryo-gre_sangRhya_daxiNenAdbhiH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तान्त्सव्येनाचार्योऽग्रे सङ्गृह्य दक्षिणेनाद्भिः परिषिञ्चन्नथेतरं वाचयति ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. The teacher, having seized them at their tops with his left hand, and with his right hand sprinkling them with water, then makes the other say:
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/08_sAvitrIM_bho3_anubrUhItItaraH.md">
-<details open><summary><h2>०८ सावित्रीं भो३ अनुब्रूहीतीतरः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+सावित्रीं भो३ अनु-ब्रूहीतीतरः ८
+</details>
+
+<details><summary>मूलम्</summary>
 
 सावित्रीं भो३ अनु-ब्रूहीतीतरः ८   
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/08_sAvitrIM_bho3_anubrUhItItaraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 8 [^5] . 'Recite the Sāvitrī, sir!' says the other.
 
 [^5]:  8 seq. Comp. Weber's Indische Studien, vol. x, p. 131 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/09_sAvitrIM_te-nubravImItyAchAryo.md">
-<details open><summary><h2>०९ सावित्रीं तेऽनुब्रवीमीत्याचार्यो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+सावित्रीं तेऽनुब्रवीमीत्याचार्यो
+</details>
+
+<details><summary>मूलम्</summary>
 
 सावित्रीं तेऽनुब्रवीमीत्याचार्यो 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/09_sAvitrIM_te-nubravImItyAchAryo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. 'I recite the Sāvitrī to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/10_gAyatrIM_bho3_anubrUhItItaro.md">
-<details open><summary><h2>१० गायत्रीं भो३ अनुब्रूहीतीतरो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+गायत्रीं भो३ अनुब्रूहीतीतरो
+
+गायत्रीं तेऽनुब्रवीमीत्याचार्यो
+</details>
+
+<details><summary>मूलम्</summary>
 
 गायत्रीं भो३ अनुब्रूहीतीतरो
 
 गायत्रीं तेऽनुब्रवीमीत्याचार्यो 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/10_gAyatrIM_bho3_anubrUhItItaro.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 10 [^6] . 'Recite the Gāyatrī, sir!' says the other.
 
@@ -151,108 +185,129 @@ title = "०७"
 'I recite the Gāyatrī to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/11_vaishvAmitrIM_bho3_anubrUhItItaro.md">
-<details open><summary><h2>११ वैश्वामित्रीं भो३ अनुब्रूहीतीतरो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+वैश्वामित्रीं भो३ अनुब्रूहीतीतरो वैश्वामित्रीं तेऽनुब्रवीमीत्याचार्य ११
+</details>
+
+<details><summary>मूलम्</summary>
 
 वैश्वामित्रीं भो३ अनुब्रूहीतीतरो वैश्वामित्रीं तेऽनुब्रवीमीत्याचार्य ११   
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/11_vaishvAmitrIM_bho3_anubrUhItItaro.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. 'Recite the verse of Viśvāmitra, sir!' says the other.
 
 'I recite the verse of Viśvāmitra to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/12_RShInbho3_anubrUhItItara_RShI.N.md">
-<details open><summary><h2>१२ ऋषीन्भो३ अनुब्रूहीतीतर ऋषीँ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+ऋषीन्भो३ अनुब्रूहीतीतर ऋषीँ स्तेऽनुब्रवीमीत्याचार्यो
+</details>
+
+<details><summary>मूलम्</summary>
 
 ऋषीन्भो३ अनुब्रूहीतीतर ऋषीँ स्तेऽनुब्रवीमीत्याचार्यो
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/12_RShInbho3_anubrUhItItara_RShI.N.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. 'Recite the Ṛṣis, sir!' says the other.
 
 I recite the Ṛṣis to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/13_devatA_bho3_anubrUhItItaro.md">
-<details open><summary><h2>१३ देवता भो३ अनुब्रूहीतीतरो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+देवता भो३ अनुब्रूहीतीतरो देवतास्तेऽनुब्रवीमीत्याचार्यश्
+</details>
+
+<details><summary>मूलम्</summary>
 
 देवता भो३ अनुब्रूहीतीतरो देवतास्तेऽनुब्रवीमीत्याचार्यश्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/13_devatA_bho3_anubrUhItItaro.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 13. 'Recite the deities, sir!' says the other.
 
 'I recite the deities to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/14_ChandA.Nsi_bho3_anubrUhItItarashChandA.N.md">
-<details open><summary><h2>१४ छन्दाँसि भो३ अनुब्रूहीतीतरश्छन्दाँ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 छन्दाँसि भो३ अनु-ब्रूहीतीतरश्छन्दाँ सि तेऽनुब्रवीमीत्याचार्यः १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/14_ChandA.Nsi_bho3_anubrUhItItarashChandA.N.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+छन्दाँसि भो३ अनु-ब्रूहीतीतरश्छन्दाँ सि तेऽनुब्रवीमीत्याचार्यः १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. 'Recite the metres, sir!' says the other.
 
 'I recite the metres to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/15_shrutiM_bho3_anubrUhItItaraH.md">
-<details open><summary><h2>१५ श्रुतिं भो३ अनुब्रूहीतीतरः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुतिं भो३ अनुब्रूहीतीतरः श्रुतिं तेऽनुब्रवीमीत्याचार्यः १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/15_shrutiM_bho3_anubrUhItItaraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+श्रुतिं भो३ अनुब्रूहीतीतरः श्रुतिं तेऽनुब्रवीमीत्याचार्यः १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. 'Recite the Śruti, sir!' says the other.
 
 'I recite the Śruti to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/16_smRtiM_bho3_anubrUhItItaraH.md">
-<details open><summary><h2>१६ स्मृतिं भो३ अनुब्रूहीतीतरः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्मृतिं भो३ अनुब्रूहीतीतरः स्मृतिं तेऽनुब्रवी-मीत्याचार्यः १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/16_smRtiM_bho3_anubrUhItItaraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+स्मृतिं भो३ अनुब्रूहीतीतरः स्मृतिं तेऽनुब्रवी-मीत्याचार्यः १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. 'Recite the Smṛti, sir!' says the other.
 
 'I recite the Smṛti to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/17_shraddhAmedhe_bho3_anubrUhItItaraH.md">
-<details open><summary><h2>१७ श्रद्धामेधे भो३ अनुब्रूहीतीतरः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रद्धामेधे भो३ अनुब्रूहीतीतरः श्रद्धामेधे तेऽनुब्रवीमीत्याचार्य १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/17_shraddhAmedhe_bho3_anubrUhItItaraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+श्रद्धामेधे भो३ अनुब्रूहीतीतरः श्रद्धामेधे तेऽनुब्रवीमीत्याचार्य १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17 [^7] . 'Recite faith and insight, sir!' says the other.
 
@@ -261,178 +316,213 @@ I recite the Ṛṣis to thee!' says the teacher.
 'I recite faith and insight to thee!' says the teacher.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/18_evamevamRSheryasyayasya_yoyo_mantro.md">
-<details open><summary><h2>१८ एवमेवमृषेर्यस्ययस्य योयो मन्त्रो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवमेवमृषेर्यस्ययस्य योयो मन्त्रो यद्देवत्यो यच्छन्दाश्च तथातथा तन्तं मन्त्रमनुब्रूयाद् १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/18_evamevamRSheryasyayasya_yoyo_mantro.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एवमेवमृषेर्यस्ययस्य योयो मन्त्रो यद्देवत्यो यच्छन्दाश्च तथातथा तन्तं मन्त्रमनुब्रूयाद् १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18 [^8] . In that way, according to what Ṛṣi each hymn belongs to and what its deity and its metre is, thus (with the corresponding indications of Ṛṣi, &c.) let him recite each hymn;
 
 [^8]:  I do not think that Professor Weber (Indische Studien, X, 132) has quite exactly rendered the meaning of these Sūtras when he says, 'The teacher then (i.e. after the formula of Sūtra 17 has been pronounced) teaches him first the Ṛṣi, the deity, and the metre of each Mantra. In case he does not know them himself for a Mantra, he recites the holy Sāvitrī (tat Savitur vareṇyam). After this he teaches him in due order either (1) the single Ṛṣis, i.e. the hymns belonging to each Ṛṣi, or (2) the single Anuvākas,' &C. - It does not seem quite probable to me that the student should have had to learn first the Ṛṣis, deities, and metres of the whole Veda, before the text of the hymns was taught him; I rather believe that hymn by hymn the indication of the Ṛṣis, &c. preceded the anuvacana of the text itself, and with this opinion the statement of Nārāyaṇa agrees, 'Evaṃ pūrvoktena prakāreṇa ṛṣidevatāchandaḥpūrvakaṃ taṃtaṃ Agnim īḷa ityādikaṃ mantraṃ māṇavakāyācāryoऽnubrūyāt.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/19_api_vAvidannRShidaivatachChandA.N_si.md">
-<details open><summary><h2>१९ अपि वाविदन्नृषिदैवतच्छन्दाँ सि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपि वाविदन्नृषिदैवतच्छन्दाँ सि तत्सवितुर्वरेण्यमित्येतां पच्छोऽर्धर्चशोऽनवानमित्येषेति समाप्त आहाचार्य १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/19_api_vAvidannRShidaivatachChandA.N_si.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अपि वाविदन्नृषिदैवतच्छन्दाँ सि तत्सवितुर्वरेण्यमित्येतां पच्छोऽर्धर्चशोऽनवानमित्येषेति समाप्त आहाचार्य १९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 19 [^9] . Or also, if he does not know the Ṛṣis, deities, and metres, the teacher recites this verse, 'That glorious (splendour) of Savitar' (Rig-veda III, 62, 10), pāda by pāda, hemistich by hemistich, (and finally) without a stop, and says, when he has finished, 'This (verse belongs to Savitar; it is a Gāyatrī; Viśvāmitra is its Ṛṣi).'
 
 [^9]:  According to Nārāyaṇa by esheti (literally, 'This [is the Ṛc]') it is meant that the teacher, after having recited the Sāvitrī in the three ways mentioned, should say to the student, 'This Ṛc is in the Gāyatrī metre. If recited pāda by pāda, it has three pādas. Thus also this Ṛc, if recited hemistich by hemistich, has two Avasānas (pauses), the first at the end of the hemistich, the second at the end of the third carma (or pāda). Thus also this Ṛc is recited without stopping; at the end of the three caraṇas, or of the twenty-four syllables, the pause (avasāna) should be made. Thus I recite to thee the Sāvitrī; I recite to thee the Gāyatrī; I recite to thee the verse of Viśvāmitra.' 'For,' adds Nārāyaṇa, 'if the Gāyatrī has been recited, the whole complex of the Veda being of that very p. 72 substance, a complete knowledge thereof has been produced.' The commentator then indicates a shorter form for the teacher's words which our Sūtra prescribes by esheti, 'This verse belongs to Savitar; it is a Gāyatrī; its Ṛṣi is Viśvāmitra.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/20_evamekaikamRShimanuvAkaM_vAnubrUyAt.md">
-<details open><summary><h2>२० एवमेकैकमृषिमनुवाकं वानुब्रूयात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवमेकैकमृषिमनुवाकं वानुब्रूयात् २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/20_evamekaikamRShimanuvAkaM_vAnubrUyAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एवमेकैकमृषिमनुवाकं वानुब्रूयात् २०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 20. Let him thus recite (the hymns belonging to) each Ṛṣi, or (each) Anuvāka;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/21_xudra_sUkteShvanuvAkam.md">
-<details open><summary><h2>२१ क्षुद्र सूक्तेष्वनुवाकम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्षुद्र सूक्तेष्वनुवाकं २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/21_xudra_sUkteShvanuvAkam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+क्षुद्र सूक्तेष्वनुवाकं २१
+</details>
+
+<details><summary>Oldenberg</summary>
 
 21 [^10] . Of the short hymns (in the tenth Maṇḍala) an Anuvāka,
 
 [^10]:  The Kṣudrasūktas are the hymns Rig-veda X, 129-191.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/22_yAvadvA_gururmanyeta.md">
-<details open><summary><h2>२२ यावद्वा गुरुर्मन्येत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+यावद्वा गुरुर्मन्येत
+</details>
+
+<details><summary>मूलम्</summary>
 
 यावद्वा गुरुर्मन्येत
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/22_yAvadvA_gururmanyeta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 22. Or as much as the master may think fit.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/23_adyottame_kAmaM_sUkte.md">
-<details open><summary><h2>२३ अद्योत्तमे कामं सूक्ते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अद्योत्तमे कामं सूक्ते वानुब्रूयादृषेः
+</details>
+
+<details><summary>मूलम्</summary>
 
 अद्योत्तमे कामं सूक्ते वानुब्रूयादृषेः
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/23_adyottame_kAmaM_sUkte.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 23. Or optionally he may recite the first and last hymn of (each) Ṛṣi,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/24_anuvAkasya_vA.md">
-<details open><summary><h2>२४ अनुवाकस्य वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अनुवाकस्य वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 अनुवाकस्य वा
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/24_anuvAkasya_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 24 [^11] . Or of (each) Anuvāka,
 
 [^11]:  24 seq. This seems to be an abridged method by which students who had not the intention of becoming Vedic scholars, and probably chiefly students of the Kṣatriya and Vaiśya caste, could fulfil their duty of learning the Veda; a student who knew the first and last hymn of a Ṛṣi, or of an Anuvāka, was, as would seem from these Sūtras, by a sort of fiction considered as though he had known the whole portion belonging to that Ṛṣi, or the whole Anuvāka.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/25_ekaikaM_sUktAdAv.md">
-<details open><summary><h2>२५ एकैकं सूक्तादाव् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+एकैकं सूक्तादाव्
+</details>
+
+<details><summary>मूलम्</summary>
 
 एकैकं सूक्तादाव् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/25_ekaikaM_sUktAdAv.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 25. (Or) one (verse) of the beginning of each hymn.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/26_ityeShA_prabhRtiriti_kAmam.md">
-<details open><summary><h2>२६ इत्येषा प्रभृतिरिति कामम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+इत्येषा प्रभृतिरिति कामं सूक्तादावाचार्यः
+</details>
+
+<details><summary>मूलम्</summary>
 
 इत्येषा प्रभृतिरिति कामं सूक्तादावाचार्यः 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/26_ityeShA_prabhRtiriti_kAmam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 26. The teacher may optionally say at the beginning of the hymn, 'This is the commencement.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/27_ityetadRShisvAdhyAye_vyAkhyAtam.md">
-<details open><summary><h2>२७ इत्येतदृषिस्वाध्याये व्याख्यातम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इत्येतदृषिस्वाध्याये व्याख्यातं २७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/27_ityetadRShisvAdhyAye_vyAkhyAtam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इत्येतदृषिस्वाध्याये व्याख्यातं २७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 27 [^12] . This has been (further) explained in (the treatise about) the Ṛṣisvādhyāya.
 
 [^12]:  Nārāyaṇa explains Ṛṣisvādhyāya by mantrasaṃhitā. He says, The Anuvācana which has been declared here, is to be understood also with regard to the svādhyāya, i.e. to the Saṃhitā of the Mantras.' I think there is a blunder in the MS., and instead of tad api svādhyāye . . . jñeyaṃ we ought to read tad ṛṣisvādhyāye . . . jñeyaṃ. In this case we should have to translate the quoted passage, '. . . is to be understood with regard to the Ṛṣisvādhyāya, i.e. to, &c.' - I think, however, that the true meaning of the Sūtra is different from what Nārāyaṇa believes it to be. The expression vyākhyātam apparently conveys a reference to another treatise in which the rules regarding the Ṛṣisvādhyāya would seem to have been fully set forth. The Śrauta-sūtra contains p. 73 no passage which could be the one here referred to; we may suppose, therefore, that either a chapter of a Prātiśākhya is quoted here, or a separate treatise on the special subject of the Ṛṣisvādhyāya. References to such treatises are found in the Sūtra texts in several instances, of which the most important is that in the Gobhila-Gṛhya I, 5, 13, 'On what day the moon becomes full, the knowledge thereof is contained in a special text; that one either should study or ascertain when the Parvan is from those who have studied it.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/28_samApte_kushataruNAnAdAyAnaDuhena_mUle.md">
-<details open><summary><h2>२८ समाप्ते कुशतरुणानादायानडुहेन मूले ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+समाप्ते कुशतरुणानादायानडुहेन मूले कुण्डं कृत्वा यथासूक्तं कुशेष्वपो निषिञ्चत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 समाप्ते कुशतरुणानादायानडुहेन मूले कुण्डं कृत्वा यथासूक्तं कुशेष्वपो निषिञ्चत्य्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/28_samApte_kushataruNAnAdAyAnaDuhena_mUle.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 28 [^13] . When (the lesson) is finished, he takes the young Kuśa shoots, makes of cow-dung a pit at their roots, and sprinkles water on the Kuśa (shoots) for each hymn.
 
 [^13]:  Nārāyaṇa: 'First stand the Mantras, then the Brāhmaṇa, because it contains the viniyoga (the ritual use of the Mantras), then the Smṛti texts such as Manu, &c. When he has repeated these texts to the student, after the end of the Anuvācana, the teacher should take from the student the Kuśa blades which had been taken up before for the sake of the Anuvācana (see Sūtras 5 seq.),' &c. - The teacher is made the subject of this rule also by Rāmacandra. On yathāsūktam Nārāyaṇa observes that according to some teachers these water oblations were directed to the Ṛṣis of the different hymns (ṛṣīn uddiśyeti kecit). This statement seems to be countenanced by IV, 6, 6. Comp. the note below on IV, 9, 1.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/07/29_ahaHsheShaM_sthAnamupavAsashcha.md">
-<details open><summary><h2>२९ अहःशेषं स्थानमुपवासश्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहःशेषं स्थानमुपवासश्च २९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/07/29_ahaHsheShaM_sthAnamupavAsashcha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अहःशेषं स्थानमुपवासश्च २९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 29 [^14] . For the rest of the day standing and fasting.
 
 [^14]:  'This rule concerns the Brahmacārin.' Nārāyaṇa. See also Āśvalāyana I, 22, 11.
 
 </details>
-</div>
