--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/08.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/08.md
@@ -2,33 +2,40 @@
 title = "०८"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/08/01_aparAhNe-xatadhAnA_bhixitvAjyAhutidharmeNAgnau.md">
-<details open><summary><h2>०१ अपराह्णेऽक्षतधाना भिक्षित्वाज्याहुतिधर्मेणाग्नौ ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपराह्णेऽक्षतधाना भिक्षित्वाज्याहुतिधर्मेणाग्नौ पाणिना जुहुयात् सदसस्पतिमद्भुतमिति प्रत्यृचं सूक्तशेषेण १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/08/01_aparAhNe-xatadhAnA_bhixitvAjyAhutidharmeNAgnau.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अपराह्णेऽक्षतधाना भिक्षित्वाज्याहुतिधर्मेणाग्नौ पाणिना जुहुयात् सदसस्पतिमद्भुतमिति प्रत्यृचं सूक्तशेषेण १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . In the afternoon, having obtained by begging fried barley grains, he shall sacrifice them with his hand on the fire according to the rites of the Ājya oblations with the text, 'The lord of the seat, the wonderful' (Rig-veda I, 18, 6 seq.), verse by verse, down to the end of the hymn,
 
 [^1]:  8, 1. This is the Anupravacanīyahoma treated of by Āśvalāyana at I, 22, 12 seq. There it is stated that this sacrifice should be performed as well after the recitation of the Sāvitrī as after the other p. 74 portions of the Veda, for instance, as the commentary there has it, after the Mahānāmnīs, the Mahāvrata, and the Upaniṣad have been recited. Nārāyaṇa indicates the time of this sacrifice in the words, 'On that same fast-day (chap. 7, 29) in the afternoon.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/08/02_bhaxairAchAryaM_svastivAchya.md">
-<details open><summary><h2>०२ भक्षैराचार्यं स्वस्तिवाच्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भक्षैराचार्यं स्वस्तिवाच्य २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/08/02_bhaxairAchAryaM_svastivAchya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+भक्षैराचार्यं स्वस्तिवाच्य २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . Causing the teacher by (the gift of) food to pronounce auspicious wishes.
 
 [^2]:  'He shall, by pronouncing such words as svasti bhavanto bruvantu, dispose the teacher favourably so that he may say svasti!' Nārāyaṇa.
 
 </details>
-</div>
