--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/10.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/10.md
@@ -2,48 +2,67 @@
 title = "१०"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/10/01_udite_prAdhyayanam.md">
-<details open><summary><h2>०१ उदिते प्राध्ययनम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदिते प्राध्ययनम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/10/01_udite_prAdhyayanam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उदिते प्राध्ययनम् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. When (the sun) has risen, the study (of the Veda) goes on.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/10/02_aharahaH_sAyamprAtar.md">
-<details open><summary><h2>०२ अहरहः सायम्प्रातर् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अहरहः सायम्प्रातर्
+</details>
+
+<details><summary>मूलम्</summary>
 
 अहरहः सायम्प्रातर् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/10/02_aharahaH_sAyamprAtar.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Every day in the evening and in the morning,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/10/03_agnimupasamAdhAya_parisamuhya_paryuxya.md">
-<details open><summary><h2>०३ अग्निमुपसमाधाय परिसमुह्य पर्युक्ष्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अग्निमुपसमाधाय परिसमुह्य पर्युक्ष्य दक्षिणं जान्वाच्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 अग्निमुपसमाधाय परिसमुह्य पर्युक्ष्य दक्षिणं जान्वाच्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/10/03_agnimupasamAdhAya_parisamuhya_paryuxya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. He establishes the fire (in its proper place), wipes (with his hand the ground) round (it), sprinkles (water) round (it), bends his right knee,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/10/04_agnaye_samidhamahArShaM_bRhate.md">
-<details open><summary><h2>०४ अग्नये समिधमहार्षं बृहते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अग्नये समिधमहार्षं बृहते जातवेदसे ।  
+स मे श्रद्धां च मेधां च जातवेदाः प्रयच्छतु स्वाहा ।  
+एधोऽस्येधिषीमहि समिदसि तेजोऽसि तेजो मयि धेहि स्वाहा ।  
+समिद्धो मां समर्धय प्रजया च धनेन च स्वाहा ।  
+एषा ते अग्ने समित्तया वर्धस्व चाप्यायस्व । वर्धिषीमहि च वयमा च प्यासिषीमहि स्वाहा
+</details>
+
+<details><summary>मूलम्</summary>
 
 अग्नये समिधमहार्षं बृहते जातवेदसे ।  
 स मे श्रद्धां च मेधां च जातवेदाः प्रयच्छतु स्वाहा ।  
@@ -52,9 +71,8 @@ title = "१०"
 एषा ते अग्ने समित्तया वर्धस्व चाप्यायस्व । वर्धिषीमहि च वयमा च प्यासिषीमहि स्वाहा
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/10/04_agnaye_samidhamahArShaM_bRhate.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^1] . (And puts fuel on the fire with the texts,) 'To Agni I have brought a piece of wood, to the great Jātavedas; may he, Jātavedas, give faith and insight to me. Svāhā!
 
@@ -67,59 +85,70 @@ title = "१०"
 Thine is this fuel, Agni; thereby thou shalt grow and gain vigour. And may we grow and gain vigour. Svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/10/05_ityatha_paryuxya.md">
-<details open><summary><h2>०५ इत्यथ पर्युक्ष्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+इत्यथ पर्युक्ष्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 इत्यथ पर्युक्ष्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/10/05_ityatha_paryuxya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Having then sprinkled (water) round (the fire),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/10/06_agniH_shraddhAM_cha.md">
-<details open><summary><h2>०६ अग्निः श्रद्धां च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निः श्रद्धां च मेधां चाविनिपातं स्मृतिं च मे । ईळितो जातवेदा अयं शुनं नः सम्प्रयच्छत्वित्यग्निमुपतिष्ठते ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/10/06_agniH_shraddhAM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्निः श्रद्धां च मेधां चाविनिपातं स्मृतिं च मे । ईळितो जातवेदा अयं शुनं नः सम्प्रयच्छत्वित्यग्निमुपतिष्ठते ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. He approaches the fire with the verse, 'May Agni (vouchsafe) to me faith and insight, not-forgetting (what I have learned) and memory; may this praiseful Jātavedas give blessing to us.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/10/07_sauparNavratabhAShitaM_dRShTaM_vRddhasampradAyA.md">
-<details open><summary><h2>०७ सौपर्णव्रतभाषितं दृष्टं वृद्धसम्प्रदायानुष्ठितम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सौपर्णव्रतभाषितं दृष्टं वृद्धसम्प्रदायानुष्ठितं त्र्यायुषं पञ्चभिर्मन्त्रैः प्रतिमन्त्रं ललाटे हृदये दक्षिणस्कन्धे वामे च ततः पृष्ठे च पञ्चसु भस्मना त्रिपुण्ड्रं करोति ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/10/07_sauparNavratabhAShitaM_dRShTaM_vRddhasampradAyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सौपर्णव्रतभाषितं दृष्टं वृद्धसम्प्रदायानुष्ठितं त्र्यायुषं पञ्चभिर्मन्त्रैः प्रतिमन्त्रं ललाटे हृदये दक्षिणस्कन्धे वामे च ततः पृष्ठे च पञ्चसु भस्मना त्रिपुण्ड्रं करोति ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 [7 [^2] . He makes with ashes the tripuṇḍhra sign (the sign of three strokes) which is set forth in the (treatise on the) Sauparṇavrata, which is revealed, which agrees with the tradition handed down by the ancients, with the five formulas 'The threefold age' (see above, I, 28, 9), one by one, on five (places), viz. the forehead, the heart, the right shoulder and the left, and then on the back.]
 
 [^2]:  This Sūtra is wanting in one of the Haug MSS. and in the Śāmbavya MS.; Rāmacandra's Paddhati takes no notice of it. I take it for a later addition. It should be noticed that the words dakṣiṇaskandhe . . . ca pañcasu form a half Śloka.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/10/08_sa_eteShAM_vedAnAmekam.md">
-<details open><summary><h2>०८ स एतेषां वेदानामेकम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स एतेषां वेदानामेकं द्वौ त्रीन्सर्वान्वाधीते य एवं हुत्वाग्निमुपतिष्ठते ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/10/08_sa_eteShAM_vedAnAmekam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+स एतेषां वेदानामेकं द्वौ त्रीन्सर्वान्वाधीते य एवं हुत्वाग्निमुपतिष्ठते ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. He who approaches the fire after having sacrificed thus, studies of these Vedas, one, two, three, or all.
 
 </details>
-</div>
