--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/13.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/13.md
@@ -2,64 +2,88 @@
 title = "१३"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/13/01_athAto_daNDaniyamA.md">
-<details open><summary><h2>०१ अथातो दण्डनियमा ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथातो दण्डनियमा १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/13/01_athAto_daNDaniyamA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथातो दण्डनियमा १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. Now (follow) the rules regarding the staff.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/13/02_nAntarA_gamanaM_kuryAdAtmano.md">
-<details open><summary><h2>०२ नान्तरा गमनं कुर्यादात्मनो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+नान्तरा गमनं कुर्यादात्मनो दण्डस्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 नान्तरा गमनं कुर्यादात्मनो दण्डस्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/13/02_nAntarA_gamanaM_kuryAdAtmano.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Let him not leave a passage between himself and the staff.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/13/03_atha_cheddaNDamekhalopavItAnAmanyatamadvishIrye.md">
-<details open><summary><h2>०३ अथ चेद्दण्डमेखलोपवीतानामन्यतमद्विशीर्येत छिद्येत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अथ चेद्दण्डमेखलोपवीतानामन्यतमद्विशीर्येत छिद्येत वा तस्य तत्प्रायश्चित्तं यदुद्वाहे रथस्य ३
+</details>
+
+<details><summary>मूलम्</summary>
 
 अथ चेद्दण्डमेखलोपवीतानामन्यतमद्विशीर्येत छिद्येत वा तस्य तत्प्रायश्चित्तं यदुद्वाहे रथस्य ३
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/13/03_atha_cheddaNDamekhalopavItAnAmanyatamadvishIrye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 3 [^1] . Now should any one of these things, viz. staff, girdle, or sacrificial cord, break or rend, the same penance (takes place) therefore which (has been prescribed) at the wedding with regard to the chariot.
 
 [^1]:  13, 3. 'See above, I, 15, 9 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/13/04_mekhalA_chedasandheyA_bhavatyanyAm.md">
-<details open><summary><h2>०४ मेखला चेदसन्धेया भवत्यन्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मेखला चेदसन्धेया भवत्यन्यां कृत्वानुमन्त्रयते ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/13/04_mekhalA_chedasandheyA_bhavatyanyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मेखला चेदसन्धेया भवत्यन्यां कृत्वानुमन्त्रयते ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. If the girdle cannot be repaired, he makes another and speaks over it (the following verses):
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/13/05_medhyAmedhyavibhAgajne_devi_goptri.md">
-<details open><summary><h2>०५ मेध्यामेध्यविभागज्ञे देवि गोप्त्रि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+मेध्यामेध्यविभागज्ञे  
+देवि गोप्त्रि सरस्वति  
+मेखलेऽस्कन्नमच्छिन्नं  
+सन्तनुष्व व्रतं मम  
+त्वमग्ने व्रतभृच्छुचिरग्ने देवानिहावह  
+उप यज्ञं हविश्च नः व्रतानि बिभ्रद्व्रतपा अदाभ्यो भवा  
+नो दूतो अजरः सुवीरः दधद्रत्नानि सुमृळीको अग्ने गोपाय नो जीवसे जातवेद
+</details>
+
+<details><summary>मूलम्</summary>
 
 मेध्यामेध्यविभागज्ञे  
 देवि गोप्त्रि सरस्वति  
@@ -69,9 +93,8 @@ title = "१३"
 उप यज्ञं हविश्च नः व्रतानि बिभ्रद्व्रतपा अदाभ्यो भवा  
 नो दूतो अजरः सुवीरः दधद्रत्नानि सुमृळीको अग्ने गोपाय नो जीवसे जातवेद 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/13/05_medhyAmedhyavibhAgajne_devi_goptri.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. 'Thou who knowest the distinction of pure and impure, divine protectress Sarasvatī, O girdle, prolong my vow unimpaired, unbroken.
 
@@ -80,45 +103,53 @@ title = "१३"
 'Bearing the vows, the infallible protector of vows, be our messenger, undecaying and mighty. Giving treasures, merciful, Agni, protect us, that we may live, Jātavedas!
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/13/06_ityupavItaM_cha_daNDe.md">
-<details open><summary><h2>०६ इत्युपवीतं च दण्डे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इत्युपवीतं च दण्डे बध्नाति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/13/06_ityupavItaM_cha_daNDe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इत्युपवीतं च दण्डे बध्नाति ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. And he ties the sacrificial cord to the staff.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/13/07_tadapyetat.md">
-<details open><summary><h2>०७ तदप्येतत् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदप्येतत् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/13/07_tadapyetat.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तदप्येतत् ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Here it is said also:
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/13/08_yajnopavItaM_daNDaM_cha.md">
-<details open><summary><h2>०८ यज्ञोपवीतं दण्डं च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यज्ञोपवीतं दण्डं च मेखलामजिनं तथा जुहुयादप्सु व्रते पूर्णे वारुण्यर्चा रसेन वा ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/13/08_yajnopavItaM_daNDaM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यज्ञोपवीतं दण्डं च मेखलामजिनं तथा जुहुयादप्सु व्रते पूर्णे वारुण्यर्चा रसेन वा ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^2] . 'Let him sacrifice the sacrificial cord and the staff, the girdle and also the skin in water after the completion of his vow with a Varuṇa-verse or with the essence (of the Vedas, i.e. the syllable Om).
 
 [^2]:  Nārāyaṇa here quotes Rig-veda I, 24, 6, which is the first verse in the Rig-veda addressed to Varuṇa (i.e. to Varuṇa alone, not to Mitra and Varuṇa, &c.).
 
 </details>
-</div>
