--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/14.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/14.md
@@ -2,103 +2,137 @@
 title = "१४"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/01_1_Now_the.md">
-<details open><summary><h2>०१ 1 Now the ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+1 [^1] . Now (follows) the Vaiśvadeva (sacrifice).
+
+[^1]:  14, 1. The rules regarding the Vaiśvadeva sacrifice stand here, as I have already pointed out in the German edition, p. 142, in a very strange position amid the matter that concerns the student, and before the description of the ceremony that concludes studentship (the Samāvartana; III, 1). On the first word of the chapter, atha, Nārāyaṇa observes that thereby the householder is marked as the subject of the following rules. It seems rather forced to explain the position of this chapter, as Nārāyaṇa does, by pointing out that in some cases, for instance when the teacher is away on a journey, a student also can eventually be called upon to perform the Vaiśvadeva sacrifice (comp. below, chap. 17, 3).
+</details>
+
+<details><summary>मूलम्</summary>
 
 1 [^1] . Now (follows) the Vaiśvadeva (sacrifice).
 
 [^1]:  14, 1. The rules regarding the Vaiśvadeva sacrifice stand here, as I have already pointed out in the German edition, p. 142, in a very strange position amid the matter that concerns the student, and before the description of the ceremony that concludes studentship (the Samāvartana; III, 1). On the first word of the chapter, atha, Nārāyaṇa observes that thereby the householder is marked as the subject of the following rules. It seems rather forced to explain the position of this chapter, as Nārāyaṇa does, by pointing out that in some cases, for instance when the teacher is away on a journey, a student also can eventually be called upon to perform the Vaiśvadeva sacrifice (comp. below, chap. 17, 3).
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/01_1_Now_the.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now (follows) the Vaiśvadeva (sacrifice).
 
 [^1]:  14, 1. The rules regarding the Vaiśvadeva sacrifice stand here, as I have already pointed out in the German edition, p. 142, in a very strange position amid the matter that concerns the student, and before the description of the ceremony that concludes studentship (the Samāvartana; III, 1). On the first word of the chapter, atha, Nārāyaṇa observes that thereby the householder is marked as the subject of the following rules. It seems rather forced to explain the position of this chapter, as Nārāyaṇa does, by pointing out that in some cases, for instance when the teacher is away on a journey, a student also can eventually be called upon to perform the Vaiśvadeva sacrifice (comp. below, chap. 17, 3).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/02_2_The_rite.md">
-<details open><summary><h2>०२ 2 The rite ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+2 [^2] . The rite of the sacrifice has been explained.
+
+[^2]:  This Sūtra shows, according to Nārāyaṇa, that the Vaiśvadeva offering does not follow the ordinary type of sacrifice (the Pratiśrute homakalpa, as it is termed above, I, 9, 19), but the form described in the Agnikāryaprakaraṇa, above, chap. 10, 3 seq.
+</details>
+
+<details><summary>मूलम्</summary>
 
 2 [^2] . The rite of the sacrifice has been explained.
 
 [^2]:  This Sūtra shows, according to Nārāyaṇa, that the Vaiśvadeva offering does not follow the ordinary type of sacrifice (the Pratiśrute homakalpa, as it is termed above, I, 9, 19), but the form described in the Agnikāryaprakaraṇa, above, chap. 10, 3 seq.
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/02_2_The_rite.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . The rite of the sacrifice has been explained.
 
 [^2]:  This Sūtra shows, according to Nārāyaṇa, that the Vaiśvadeva offering does not follow the ordinary type of sacrifice (the Pratiśrute homakalpa, as it is termed above, I, 9, 19), but the form described in the Agnikāryaprakaraṇa, above, chap. 10, 3 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/03_atha_vaishvadevo_vyAkhyAto.md">
-<details open><summary><h2>०३ अथ वैश्वदेवो व्याख्यातो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ वैश्वदेवो व्याख्यातो होमकल्पो वैश्वदेवस्य सिद्धस्य सायम्प्रातर्गृह्येऽग्नौ जुहुयाद् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/03_atha_vaishvadevo_vyAkhyAto.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ वैश्वदेवो व्याख्यातो होमकल्पो वैश्वदेवस्य सिद्धस्य सायम्प्रातर्गृह्येऽग्नौ जुहुयाद् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Let him pour oblations of prepared Vaiśvadeva food in the evening and in the morning into the (sacred) domestic fire.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/04_agnaye_svAhA_somAya.md">
-<details open><summary><h2>०४ अग्नये स्वाहा सोमाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्नये स्वाहा सोमाय स्वाहेन्द्रा ग्निभ्यां स्वाहा विष्णवे स्वाहा भरद्वाजधन्वन्तरये स्वाहा विश्वेभ्यो देवेभ्यः स्वाहा प्रजापतये स्वाहादितये स्वाहानुमतये स्वाहाग्नये स्विष्टकृते स्वाहेति हुत्वैतासां देवतानाम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/04_agnaye_svAhA_somAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्नये स्वाहा सोमाय स्वाहेन्द्रा ग्निभ्यां स्वाहा विष्णवे स्वाहा भरद्वाजधन्वन्तरये स्वाहा विश्वेभ्यो देवेभ्यः स्वाहा प्रजापतये स्वाहादितये स्वाहानुमतये स्वाहाग्नये स्विष्टकृते स्वाहेति हुत्वैतासां देवतानाम् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. 'To Agni svāhā! To Soma svāhā! To Indra and Agni svāhā! To Viṣṇu svāhā! To Bharadvāja Dhanvantari svāhā! To the Viśve devās svāhā! To Prajāpati svāhā! To Aditi svāhā! To Anumati svāhā! To Agni Sviṣṭakṛt svāhā!' - having thus offered the oblations belonging to those deities,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/05_5_He_shall.md">
-<details open><summary><h2>०५ 5 'He shall ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+5. 'He shall offer a Bali to those deities, i.e. to those ten deities to whom he has sacrificed, to Agni, &c. (see Sūtra 4), addressing them with the word, "Adoration (to such and such a deity") - because in the other cases the word "adoration" (namaḥ) has been prescribed for the Bali.' Nārāyaṇa.
+
+to the Nakṣatras, to seasons, to months, to half-months, to days and nights, to years!'
+</details>
+
+<details><summary>मूलम्</summary>
 
 5. 'He shall offer a Bali to those deities, i.e. to those ten deities to whom he has sacrificed, to Agni, &c. (see Sūtra 4), addressing them with the word, "Adoration (to such and such a deity") - because in the other cases the word "adoration" (namaḥ) has been prescribed for the Bali.' Nārāyaṇa.
 
 to the Nakṣatras, to seasons, to months, to half-months, to days and nights, to years!'
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/05_5_He_shall.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. 'He shall offer a Bali to those deities, i.e. to those ten deities to whom he has sacrificed, to Agni, &c. (see Sūtra 4), addressing them with the word, "Adoration (to such and such a deity") - because in the other cases the word "adoration" (namaḥ) has been prescribed for the Bali.' Nārāyaṇa.
 
 to the Nakṣatras, to seasons, to months, to half-months, to days and nights, to years!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/06_atha_vAstumadhye_balim.md">
-<details open><summary><h2>०६ अथ वास्तुमध्ये बलिम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ वास्तुमध्ये बलिं हरेदेताभ्यश्चैव देवताभ्यो नमो ब्रह्मणे ब्राह्मणेभ्यश्च वास्तोष्पते प्रतिजानीह्यस्मानिति वास्तुमध्ये वास्तोष्पतये चाथ दिशां प्रदक्षिणं यथारूपं बलिं हरति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/06_atha_vAstumadhye_balim.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ वास्तुमध्ये बलिं हरेदेताभ्यश्चैव देवताभ्यो नमो ब्रह्मणे ब्राह्मणेभ्यश्च वास्तोष्पते प्रतिजानीह्यस्मानिति वास्तुमध्ये वास्तोष्पतये चाथ दिशां प्रदक्षिणं यथारूपं बलिं हरति ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^3] . He then distributes Balis, from the left to the right, through the different quarters (of the horizon, to the presiding deities) in due order (with the words),
 
 [^3]:  6, 7. The distribution of Balis begins in the east, which is the part of the horizon sacred to Indra; it then proceeds to the south, the west, the north, which are sacred respectively to Yama, Varuṇa, and Soma. Finally the Bali belonging to Bṛhaspati and the Bārhaspatyas is offered, according to Nārāyaṇa, to the north-east.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/07_nama_indrAyaindrebhyashcha_namo.md">
-<details open><summary><h2>०७ नम इन्द्रायैन्द्रेभ्यश्च नमो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+नम इन्द्रायैन्द्रेभ्यश्च  
+नमो यमाय याम्येभ्यश्च  
+नमो वरुणाय वारुणेभ्यश्च  
+नमः सोमाय सौम्येभ्यश्च  
+नमो बृहस्पतये बार्हस्पत्येभ्यश्च
+</details>
+
+<details><summary>मूलम्</summary>
 
 नम इन्द्रायैन्द्रेभ्यश्च  
 नमो यमाय याम्येभ्यश्च  
@@ -107,269 +141,324 @@ to the Nakṣatras, to seasons, to months, to half-months, to days and nights, t
 नमो बृहस्पतये बार्हस्पत्येभ्यश्च
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/07_nama_indrAyaindrebhyashcha_namo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. 'Adoration to Indra and to those belonging to Indra! Adoration to Yama and to those belonging to Yama! Adoration to Varuṇa and to those belonging to Varuṇa! Adoration to Soma and to those belonging to Soma! Adoration to Bṛhaspati and to those belonging to Bṛhaspati!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/08_athAdityamaNDale_namo-ditaya_Adityebhyashcha.md">
-<details open><summary><h2>०८ अथादित्यमण्डले नमोऽदितय आदित्येभ्यश्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथादित्यमण्डले नमोऽदितय आदित्येभ्यश्च नमो नक्षत्रेभ्य ऋतुभ्यो मासेभ्योऽर्धमासेभ्योऽहोरात्रेभ्यः संवत्सरेभ्यः ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/08_athAdityamaNDale_namo-ditaya_Adityebhyashcha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथादित्यमण्डले नमोऽदितय आदित्येभ्यश्च नमो नक्षत्रेभ्य ऋतुभ्यो मासेभ्योऽर्धमासेभ्योऽहोरात्रेभ्यः संवत्सरेभ्यः ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^4] . Then (turned) towards the disk of the sun, 'Adoration to Aditi and to the Ādityas! Adoration
 
 [^4]:  The commentators (see p. 142 of the German edition) differ as to whether ādityamaṇḍala means the disk of the sun towards which this Bali should be offered, or a place or an apartment of circular form (ādityamaṇḍalarūpe maṇḍalāgāre, as in my opinion we ought to correct the reading in Nārāyaṇa's note).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/09_pUShNe_pathikRte_dhAtre.md">
-<details open><summary><h2>०९ पूष्णे पथिकृते धात्रे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पूष्णे पथिकृते धात्रे विधात्रे मरुद्भ्यश्चेति देहलीषु ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/09_pUShNe_pathikRte_dhAtre.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पूष्णे पथिकृते धात्रे विधात्रे मरुद्भ्यश्चेति देहलीषु ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. 'To Pūṣan, the path-maker; to Dhātar, to Vidhātar, and to the Maruts' - (thus) on the thresholds.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/10_viShNave_dRShadi.md">
-<details open><summary><h2>१० विष्णवे दृषदि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विष्णवे दृषदि १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/10_viShNave_dRShadi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+विष्णवे दृषदि १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. To Viṣṇu on the grindstone.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/11_vanaspataya_ityulUkhala.md">
-<details open><summary><h2>११ वनस्पतय इत्युलूखल ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वनस्पतय इत्युलूखल ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/11_vanaspataya_ityulUkhala.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वनस्पतय इत्युलूखल ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. 'To the tree' - (thus) in the mortar.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/12_oShadhIbhya_ityoShadhInAM_sthAne.md">
-<details open><summary><h2>१२ ओषधीभ्य इत्योषधीनां स्थाने ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ओषधीभ्य इत्योषधीनां स्थाने १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/12_oShadhIbhya_ityoShadhInAM_sthAne.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ओषधीभ्य इत्योषधीनां स्थाने १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. 'To the herbs' - (thus) where the herbs are kept.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/13_parjanyAyAdbhya_iti_maNike.md">
-<details open><summary><h2>१३ पर्जन्यायाद्भ्य इति मणिके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पर्जन्यायाद्भ्य इति मणिके १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/13_parjanyAyAdbhya_iti_maNike.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पर्जन्यायाद्भ्य इति मणिके १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. 'To Parjanya, to the waters' - (thus) near the water-pot.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/14_namaH_shriyai_shayyAyAm.md">
-<details open><summary><h2>१४ नमः श्रियै शय्यायाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नमः श्रियै शय्यायां शिरसि पादतो भद्र काल्या १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/14_namaH_shriyai_shayyAyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नमः श्रियै शय्यायां शिरसि पादतो भद्र काल्या १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. 'Adoration to Śrī' - (thus) in the bed at the head, 'to Bhadrakālī at the foot.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/15_anugupte_deshe_namaH.md">
-<details open><summary><h2>१५ अनुगुप्ते देशे नमः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनुगुप्ते देशे नमः सर्वानुभूतये १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/15_anugupte_deshe_namaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनुगुप्ते देशे नमः सर्वानुभूतये १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. In the privy, 'Adoration to Sarvānnabhūti!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/16_athAntarixe_naktancharebhya_iti.md">
-<details open><summary><h2>१६ अथान्तरिक्षे नक्तञ्चरेभ्य इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथान्तरिक्षे नक्तञ्चरेभ्य इति सायमहश्चरेभ्य इति प्रातर्ये देवास इति च
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/16_athAntarixe_naktancharebhya_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथान्तरिक्षे नक्तञ्चरेभ्य इति सायमहश्चरेभ्य इति प्रातर्ये देवास इति च
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. Then (he throws a Bali) into the air, in the evening with the words, 'To the night-walkers,' in the morning with the words, 'To the day-walkers,' and with the Verse,' Which gods' (Rig-veda I, 139, 11).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/17_avijnAtAbhyo_devatAbhya_uttarato.md">
-<details open><summary><h2>१७ अविज्ञाताभ्यो देवताभ्य उत्तरतो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अविज्ञाताभ्यो देवताभ्य उत्तरतो धनपतये च १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/17_avijnAtAbhyo_devatAbhya_uttarato.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अविज्ञाताभ्यो देवताभ्य उत्तरतो धनपतये च १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17. To the unknown deities to the north, and to Dhanapati (i.e. the Lord of treasures).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/18_prAchInAvItI_daxiNataH_sheSham.md">
-<details open><summary><h2>१८ प्राचीनावीती दक्षिणतः शेषम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राचीनावीती दक्षिणतः शेषं निनयति ये अग्निदग्धा इति १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/18_prAchInAvItI_daxiNataH_sheSham.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्राचीनावीती दक्षिणतः शेषं निनयति ये अग्निदग्धा इति १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18. With the sacrificial cord suspended over the right shoulder he pours out the remnant to the south with the verse, 'They whom the fire has burnt' (Rig-veda X, 15, 14).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/19_devapitRnarebhyo_dattvA_shrotriyam.md">
-<details open><summary><h2>१९ देवपितृनरेभ्यो दत्त्वा श्रोत्रियम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवपितृनरेभ्यो दत्त्वा श्रोत्रियं भोजयेद् १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/19_devapitRnarebhyo_dattvA_shrotriyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+देवपितृनरेभ्यो दत्त्वा श्रोत्रियं भोजयेद् १९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 19. When he has made his offerings to gods, fathers (i.e. Manes), and men, let him give food to a Śrotriya (i.e. to a learned Brāhmaṇa).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/20_brahmachAriNe_vA_bhixAm.md">
-<details open><summary><h2>२० ब्रह्मचारिणे वा भिक्षाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्मचारिणे वा भिक्षां दद्याद् २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/20_brahmachAriNe_vA_bhixAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ब्रह्मचारिणे वा भिक्षां दद्याद् २०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 20. Or let him give alms (of food) to a student.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/21_anantaraM_sauvAsinIM_garbhiNIm.md">
-<details open><summary><h2>२१ अनन्तरं सौवासिनीं गर्भिणीम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अनन्तरं सौवासिनीं गर्भिणीं कुमारान्स्थविराँश्च भोजयेत्
+</details>
+
+<details><summary>मूलम्</summary>
 
 अनन्तरं सौवासिनीं गर्भिणीं कुमारान्स्थविराँश्च भोजयेत्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/21_anantaraM_sauvAsinIM_garbhiNIm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 21 [^5] . Let him immediately afterwards offer food to a female under his protection, to a pregnant woman, to boys, and to old people.
 
 [^5]:  Comp. Böhtlingk-Roth s. v. suvāsinī, and Professor Bühler's note on Gautama V, 25.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/22_shvabhyaH_shvapachebhyashcha_vayobhyashchAvaped.md">
-<details open><summary><h2>२२ श्वभ्यः श्वपचेभ्यश्च वयोभ्यश्चावपेद्भूमाविति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+श्वभ्यः श्वपचेभ्यश्च वयोभ्यश्चावपेद्भूमाविति
+</details>
+
+<details><summary>मूलम्</summary>
 
 श्वभ्यः श्वपचेभ्यश्च वयोभ्यश्चावपेद्भूमाविति 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/22_shvabhyaH_shvapachebhyashcha_vayobhyashchAvaped.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 22 [^6] . Let him throw (some food) on the ground for the dogs, for the dog-butchers, and for the birds.
 
 [^6]:  22, 23. Probably these Sūtras should be divided after iti.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/23_nAnavattamashnIyAt.md">
-<details open><summary><h2>२३ नानवत्तमश्नीयात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+नानवत्तमश्नीयात्
+</details>
+
+<details><summary>मूलम्</summary>
 
 नानवत्तमश्नीयात्
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/23_nAnavattamashnIyAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 23 [^7] . Let him eat nothing without having cut off (and offered as a Bali) a portion thereof.
 
 [^7]:  'Pūrvaṃ means, he should not eat before his relations (bandhubhyaḥ pūrvaṃ prathamataḥ).' Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/24_naiko.md">
-<details open><summary><h2>२४ नैको ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+नैको
+</details>
+
+<details><summary>मूलम्</summary>
 
 नैको 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/24_naiko.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 24. (Let him) not (eat) alone,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/25_na_pUrvam.md">
-<details open><summary><h2>२५ न पूर्वम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न पूर्वं २५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/25_na_pUrvam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न पूर्वं २५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 25. Nor before (the others).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/14/26_tadapyetadRchoktaM_moghamannaM_vindate.md">
-<details open><summary><h2>२६ तदप्येतदृचोक्तं मोघमन्नं विन्दते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदप्येतदृचोक्तं मोघमन्नं विन्दते अप्रचेता इति २६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/14/26_tadapyetadRchoktaM_moghamannaM_vindate.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तदप्येतदृचोक्तं मोघमन्नं विन्दते अप्रचेता इति २६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 26. With regard thereto it has been said also in the Ṛc,' In vain the fool gains food' (Rig-veda X, 117, 6).
 
 </details>
-</div>
