--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/16.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/16.md
@@ -2,85 +2,104 @@
 title = "१६"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/16/01_madhuparke_cha_some.md">
-<details open><summary><h2>०१ मधुपर्के च सोमे ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मधुपर्के च सोमे च पितृदैवतकर्मणि अत्रैव पशवो हिँ स्या नान्यत्रेत्यब्रवीन्मनुः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/16/01_madhuparke_cha_some.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मधुपर्के च सोमे च पितृदैवतकर्मणि अत्रैव पशवो हिँ स्या नान्यत्रेत्यब्रवीन्मनुः १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. 'At the Madhuparka and at the Soma sacrifice, at the sacred rites for fathers (Manes) and gods only animals may be killed, not elsewhere: thus has Manu said.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/16/02_AchAryashcha_pitA_chobhau.md">
-<details open><summary><h2>०२ आचार्यश्च पिता चोभौ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्यश्च पिता चोभौ सखा चानतिथिर्गृहे ते यद्विदध्युस्तत्कुर्यादिति धर्मो विधीयते २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/16/02_AchAryashcha_pitA_chobhau.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आचार्यश्च पिता चोभौ सखा चानतिथिर्गृहे ते यद्विदध्युस्तत्कुर्यादिति धर्मो विधीयते २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. 'Both his teacher and his father, and also a friend who does not stay in his house as a guest: whatever these dispose, that let him do; such is the established custom.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/16/03_naikagrAmINamatithiM_viproShyAgatameva_cha.md">
-<details open><summary><h2>०३ नैकग्रामीणमतिथिं विप्रोष्यागतमेव च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नैकग्रामीणमतिथिं विप्रोष्यागतमेव च उपस्थितं गृहे विद्याद्भार्या यत्राग्नयोऽपि वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/16/03_naikagrAmINamatithiM_viproShyAgatameva_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नैकग्रामीणमतिथिं विप्रोष्यागतमेव च उपस्थितं गृहे विद्याद्भार्या यत्राग्नयोऽपि वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^1] . 'Let him not consider as a guest a person living in the same village, or one that comes in returning from a journey; (but let him consider as a guest only) one who has arrived at his house where the wife or the fires (of the host) are.
 
 [^1]:  16, 3. Comp. Gautama V, 40, &c.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/16/04_agnihotraM_balivardAH_kAle.md">
-<details open><summary><h2>०४ अग्निहोत्रं बलिवर्दाः काले ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निहोत्रं बलिवर्दाः काले चातिथिरागतः बालाश्च कुलवृद्धाश्च निर्दहन्त्यपमानिताः ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/16/04_agnihotraM_balivardAH_kAle.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्निहोत्रं बलिवर्दाः काले चातिथिरागतः बालाश्च कुलवृद्धाश्च निर्दहन्त्यपमानिताः ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4 [^2] . '(The fire of) the Agnihotra, bulls, and a guest that has come in at the right time, children and persons of noble families: these burn up him who neglects them.
 
 [^2]:  On the right time for the arrival of a guest, see Gautama, loc. cit.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/16/05_anaDvAnagnihotraM_cha_brahmachArI.md">
-<details open><summary><h2>०५ अनड्वानग्निहोत्रं च ब्रह्मचारी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनड्वानग्निहोत्रं च ब्रह्मचारी च ते त्रयः अश्नन्त एव सिध्यन्ति नैषां सिद्धिरनश्नताम् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/16/05_anaDvAnagnihotraM_cha_brahmachArI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनड्वानग्निहोत्रं च ब्रह्मचारी च ते त्रयः अश्नन्त एव सिध्यन्ति नैषां सिद्धिरनश्नताम् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. 'A bull, the Agnihotra, and a student, these three prosper only if they eat; there is no prosperity for them, if they do not eat.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/16/06_devatAH_puruShaM_gRhyA.md">
-<details open><summary><h2>०६ देवताः पुरुषं गृह्या ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवताः पुरुषं गृह्या अहरहर्गृहमेधिनम् भागार्थमुपसर्पन्ति ताभ्यो निर्वप्तुमर्हति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/16/06_devatAH_puruShaM_gRhyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+देवताः पुरुषं गृह्या अहरहर्गृहमेधिनम् भागार्थमुपसर्पन्ति ताभ्यो निर्वप्तुमर्हति ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. 'Day by day the domestic deities approach the man who performs the domestic rites, in order to receive their share; (that) let him pour out to them.
 
 </details>
-</div>
