--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/17.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/17.md
@@ -2,55 +2,68 @@
 title = "१७"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/01_tRNAnyapyunChato_nityamagnihotraM_cha.md">
-<details open><summary><h2>०१ तृणान्यप्युञ्छतो नित्यमग्निहोत्रं च ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तृणान्यप्युञ्छतो नित्यमग्निहोत्रं च जुह्वतः सर्वं सुकृतमादत्ते ब्राह्मणोऽनर्चितो वसन् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/17/01_tRNAnyapyunChato_nityamagnihotraM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तृणान्यप्युञ्छतो नित्यमग्निहोत्रं च जुह्वतः सर्वं सुकृतमादत्ते ब्राह्मणोऽनर्चितो वसन् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. 'Even if a man constantly gather grass and perform the Agnihotra, a Brāhmaṇa who stays (in his house) without receiving honour takes away all his good works.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/02_odapAtrAttu_dAtavyamA_kAShThAjjuhuyAdapi.md">
-<details open><summary><h2>०२ ओदपात्रात्तु दातव्यमा काष्ठाज्जुहुयादपि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ओदपात्रात्तु दातव्यमा काष्ठाज्जुहुयादपि आ सूक्तादानुवाकाद्वा ब्रह्मयज्ञो विधीयते २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/17/02_odapAtrAttu_dAtavyamA_kAShThAjjuhuyAdapi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ओदपात्रात्तु दातव्यमा काष्ठाज्जुहुयादपि आ सूक्तादानुवाकाद्वा ब्रह्मयज्ञो विधीयते २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. 'One should give (even) if it were only a water-pot; one should sacrifice (even) if it were a piece of wood; (even) down to one hymn or to one Anuvāka the Brahmayajña is enjoined.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/03_nopavAsaH_pravAse_syAtpatnI.md">
-<details open><summary><h2>०३ नोपवासः प्रवासे स्यात्पत्नी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नोपवासः प्रवासे स्यात्पत्नी धारयते व्रतम् पुत्रो भ्राताथवा पत्नी शिष्यो वास्य बलिं हरेत् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/17/03_nopavAsaH_pravAse_syAtpatnI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नोपवासः प्रवासे स्यात्पत्नी धारयते व्रतम् पुत्रो भ्राताथवा पत्नी शिष्यो वास्य बलिं हरेत् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. 'When on a journey let him not fast; (during that time) the wife keeps the vow. Let his son, his brother, or his wife, or his pupil offer the Bali oblation.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/17/04_vaishvadevamimaM_ye_tu.md">
-<details open><summary><h2>०४ वैश्वदेवमिमं ये तु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैश्वदेवमिमं ये तु सायम्प्रातः प्रकुर्वते ते अर्थैरायुषा कीर्त्या प्रजाभिश्च समृध्नुयुरिति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/17/04_vaishvadevamimaM_ye_tu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वैश्वदेवमिमं ये तु सायम्प्रातः प्रकुर्वते ते अर्थैरायुषा कीर्त्या प्रजाभिश्च समृध्नुयुरिति ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. 'Those who perform this Vaiśvadeva sacrifice in the evening and in the morning, they will prosper in wealth and (long) life, in fame and offspring.'
 
 </details>
-</div>
