--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/18.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/18.md
@@ -2,59 +2,72 @@
 title = "१८"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/18/01_brahmachArI_pravatsyannAchAryamAmantrayate.md">
-<details open><summary><h2>०१ ब्रह्मचारी प्रवत्स्यन्नाचार्यमामन्त्रयते ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्मचारी प्रवत्स्यन्नाचार्यमामन्त्रयते १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/01_brahmachArI_pravatsyannAchAryamAmantrayate.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ब्रह्मचारी प्रवत्स्यन्नाचार्यमामन्त्रयते १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. A student who is going to set out on a journey, speaks thus to his teacher:
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/18/02_prANApAnayorityupA.N_shvomahaM_vatsyAmi.md">
-<details open><summary><h2>०२ प्राणापानयोरित्युपाँ श्वोमहं वत्स्यामि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राणापानयोरित्युपाँ श्वोमहं वत्स्यामि भो३ इत्युच्चैः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/02_prANApAnayorityupA.N_shvomahaM_vatsyAmi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्राणापानयोरित्युपाँ श्वोमहं वत्स्यामि भो३ इत्युच्चैः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . 'Of inhalation and exhalation' - (this he says) in a low voice; 'Om, I will dwell' - this aloud.
 
 [^1]:  18, 2. Perhaps vatsyāmi (I will dwell) is a sort of euphemism for pravatsyāmi (I will go away).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/18/03_prANApAnA_uruvyachAstvayA_prapadye.md">
-<details open><summary><h2>०३ प्राणापाना उरुव्यचास्त्वया प्रपद्ये ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राणापाना उरुव्यचास्त्वया प्रपद्ये देवाय त्वा गोप्त्रे परिददामि देव सवितरेष ते ब्रह्मचारी तं ते परिददामि तं गोपायस्व तं मा मृध इत्युपाँशु
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/03_prANApAnA_uruvyachAstvayA_prapadye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्राणापाना उरुव्यचास्त्वया प्रपद्ये देवाय त्वा गोप्त्रे परिददामि देव सवितरेष ते ब्रह्मचारी तं ते परिददामि तं गोपायस्व तं मा मृध इत्युपाँशु
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. (The teacher) in a low voice (replies), 'To inhalation and exhalation I, the wide-extended one, resort with thee. To the protecting god I give thee in charge. God Savitar; this student belongs to thee; I give him in charge to thee; protect him; do not forsake him.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/18/04_OM_svastItyuchchairAchAryaH_svastItyuchchairAch.md">
-<details open><summary><h2>०४ ॐ स्वस्तीत्युच्चैराचार्यः स्वस्तीत्युच्चैराचार्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ॐ स्वस्तीत्युच्चैराचार्यः स्वस्तीत्युच्चैराचार्यः ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/18/04_OM_svastItyuchchairAchAryaH_svastItyuchchairAch.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ॐ स्वस्तीत्युच्चैराचार्यः स्वस्तीत्युच्चैराचार्यः ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. 'Om, hail!' the teacher aloud. 'Hail!' the teacher aloud.
 
 Here ends the Second Adhyāya.
 
 </details>
-</div>
