--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/01.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/01.md
@@ -2,252 +2,308 @@
 title = "०१"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/01_snAnaM_samAvartsyamAnasya.md">
-<details open><summary><h2>०१ स्नानं समावर्त्स्यमानस्य ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+स्नानं समावर्त्स्यमानस्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 स्नानं समावर्त्स्यमानस्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/01_snAnaM_samAvartsyamAnasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. A bath (shall be taken by the student) when he is going to return home (from his teacher).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/02_AnaDuhamityuktaM_tasminnupaveshya_keshashmashrU.md">
-<details open><summary><h2>०२ आनडुहमित्युक्तं तस्मिन्नुपवेश्य केशश्मश्रूणि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आनडुहमित्युक्तं तस्मिन्नुपवेश्य केशश्मश्रूणि वापयति लोमनखानि च २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/02_AnaDuhamityuktaM_tasminnupaveshya_keshashmashrU.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आनडुहमित्युक्तं तस्मिन्नुपवेश्य केशश्मश्रूणि वापयति लोमनखानि च २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . 'A bull's hide' - this has been declared. On that hide he makes him sit down and have his hair and beard cut and the hair of the body and the nails.
 
 [^1]:  1, 2. Comp. above, I, 16, 1, and the note there.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/03_vrIhiyavaistilasarShapairapAmArgaiH.md">
-<details open><summary><h2>०३ व्रीहियवैस्तिलसर्षपैरपामार्गैः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+व्रीहियवैस्तिलसर्षपैरपामार्गैः सदापुष्पीभिरित्युद्वाप्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 व्रीहियवैस्तिलसर्षपैरपामार्गैः सदापुष्पीभिरित्युद्वाप्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/03_vrIhiyavaistilasarShapairapAmArgaiH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. Having had (the cut-off hair-ends, &c.) thrown away together with rice and barley, with sesamum-seed and mustard-seed, with Apāmārga and Sadāpuṣpī flowers,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/04_ApohiShThIyenAbhiShichya.md">
-<details open><summary><h2>०४ आपोहिष्ठीयेनाभिषिच्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+आपोहिष्ठीयेनाभिषिच्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 आपोहिष्ठीयेनाभिषिच्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/04_ApohiShThIyenAbhiShichya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^2] . Having sprinkled him (with water) with the Āpohiṣṭhīyā-hymn (Rig-veda X, 9),
 
 [^2]:  Nārāyaṇa says here, enaṃ māṇavakam abhishicya abhishekaṃ snānaṃ kārayitvā. Comp. Pāraskara II, 6, 9 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/05_alankRtya.md">
-<details open><summary><h2>०५ अलङ्कृत्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अलङ्कृत्य ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/05_alankRtya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अलङ्कृत्य ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. Having adorned him,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/06_yuvaM_vastrANIti_vAsasI.md">
-<details open><summary><h2>०६ युवं वस्त्राणीति वाससी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+युवं वस्त्राणीति वाससी परिधाय
+</details>
+
+<details><summary>मूलम्</summary>
 
 युवं वस्त्राणीति वाससी परिधाय
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/06_yuvaM_vastrANIti_vAsasI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. Having dressed him with two garments with (the verse), 'The garments both of you' (Rig-veda I, 152, 1),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/07_athAsmai_niShkaM_badhnAtyAyuShyam.md">
-<details open><summary><h2>०७ अथास्मै निष्कं बध्नात्यायुष्यम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथास्मै निष्कं बध्नात्यायुष्यं वर्चस्यं ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/07_athAsmai_niShkaM_badhnAtyAyuShyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथास्मै निष्कं बध्नात्यायुष्यं वर्चस्यं ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. He then puts on him a golden ornament (with the words), 'Giving life and vigour' (Vājasaneyi Saṃhitā XXXIV, 50).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/08_mamAgne_varcha_iti.md">
-<details open><summary><h2>०८ ममाग्ने वर्च इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ममाग्ने वर्च इति वेष्टनं ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/08_mamAgne_varcha_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ममाग्ने वर्च इति वेष्टनं ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. With (the verse), 'Mine, Agni, be vigour' (Rig-veda X, 128, 1), the veiling (of the head is done).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/09_gRhangRhamahaneti_Chattram.md">
-<details open><summary><h2>०९ गृहङ्गृहमहनेति छत्त्रम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृहङ्गृहमहनेति छत्त्रम् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/09_gRhangRhamahaneti_Chattram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गृहङ्गृहमहनेति छत्त्रम् ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. With (the verse), 'House by house the shining one' (Rig-veda I, 123, 4) (he takes) the parasol,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/10_ArohatetyupAnahau.md">
-<details open><summary><h2>१० आरोहतेत्युपानहौ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आरोहतेत्युपानहौ १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/10_ArohatetyupAnahau.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आरोहतेत्युपानहौ १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. With (the verse), 'Rise up' (Rig-veda X, 18, 6), the shoes,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/11_dIrghaste_astvankusha_iti.md">
-<details open><summary><h2>११ दीर्घस्ते अस्त्वङ्कुश इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दीर्घस्ते अस्त्वङ्कुश इति वैणवं दण्डमादत्ते ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/11_dIrghaste_astvankusha_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दीर्घस्ते अस्त्वङ्कुश इति वैणवं दण्डमादत्ते ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. With (the verse), 'Long be thy hook' (Rig-veda VIII, 17, 10) he takes a bamboo staff.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/12_pratilInastadaharAsIta.md">
-<details open><summary><h2>१२ प्रतिलीनस्तदहरासीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रतिलीनस्तदहरासीत १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/12_pratilInastadaharAsIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रतिलीनस्तदहरासीत १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12 [^3] . Let him sit that day in solitude.
 
 [^3]:  Pratilīna evidently means the same thing that is so often expressed in the Buddhist texts by paṭisallīna.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/13_vanaspate_vIDvangaH_shAsa.md">
-<details open><summary><h2>१३ वनस्पते वीड्वङ्गः शास ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वनस्पते वीड्वङ्गः शास इत्थेति रथमारोहेद् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/13_vanaspate_vIDvangaH_shAsa.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वनस्पते वीड्वङ्गः शास इत्थेति रथमारोहेद् १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. With (the verses), 'O tree! with strong limbs,' and, 'A ruler indeed' (Rig-veda VI, 47, 26; X, 152, 1) let him mount the chariot.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/14_yatrainaM_gavA_vA.md">
-<details open><summary><h2>१४ यत्रैनं गवा वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्रैनं गवा वा पशुना वा अर्हयेयुस्तत्पूर्वमुपतिष्ठेत १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/14_yatrainaM_gavA_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यत्रैनं गवा वा पशुना वा अर्हयेयुस्तत्पूर्वमुपतिष्ठेत १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. (Before returning home) let him first approach a place where they will perform Argha for him with a cow or a goat.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/15_gobhyo_vA_samAvarteta.md">
-<details open><summary><h2>१५ गोभ्यो वा समावर्तेत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गोभ्यो वा समावर्तेत फलवतो वा वृक्षाद् १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/15_gobhyo_vA_samAvarteta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गोभ्यो वा समावर्तेत फलवतो वा वृक्षाद् १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. Or let him return (making his start) from cows or from a fruit-bearing tree.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/16_indra_shreShThAni_draviNAni.md">
-<details open><summary><h2>१६ इन्द्र श्रेष्ठानि द्रविणानि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+इन्द्र श्रेष्ठानि द्रविणानि धेहि  
+स्योना पृथिवि भवेत्यवरोहति
+</details>
+
+<details><summary>मूलम्</summary>
 
 इन्द्र श्रेष्ठानि द्रविणानि धेहि  
 स्योना पृथिवि भवेत्यवरोहति 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/16_indra_shreShThAni_draviNAni.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 16. With (the verses), 'Indra, give us best goods,' and, 'Be friendly, O earth' (Rig-veda II, 21, 6; I, 22, 15) he descends (from the chariot).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/17_IpsitamannaM_tadaharbhunjIta.md">
-<details open><summary><h2>१७ ईप्सितमन्नं तदहर्भुञ्जीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+ईप्सितमन्नं तदहर्भुञ्जीत
+</details>
+
+<details><summary>मूलम्</summary>
 
 ईप्सितमन्नं तदहर्भुञ्जीत
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/17_IpsitamannaM_tadaharbhunjIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 17. Let him eat that day his favourite food.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/01/18_AchAryAya_vastrayugaM_dadyAduShNISham.md">
-<details open><summary><h2>१८ आचार्याय वस्त्रयुगं दद्यादुष्णीषम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्याय वस्त्रयुगं दद्यादुष्णीषं मणिकुण्डलं दण्डोपानहं छत्त्रं च १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/01/18_AchAryAya_vastrayugaM_dadyAduShNISham.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आचार्याय वस्त्रयुगं दद्यादुष्णीषं मणिकुण्डलं दण्डोपानहं छत्त्रं च १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18 [^4] . To his teacher he shall give (that) pair of garments, the turban, ear-rings and jewel, staff and shoes, and the parasol.
 
 [^4]:  The pair of garments are those referred to in Sūtra 6; on the turban see Sūtra 8. On staff and shoes comp. Sūtras 10, 11; on the parasol, Sūtra 9.
 
 </details>
-</div>
