--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/03.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/03.md
@@ -2,14 +2,19 @@
 title = "०३"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/01_ihaiva_sthUNe_pratitiShTha.md">
-<details open><summary><h2>०१ इहैव स्थूणे प्रतितिष्ठ ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इहैव स्थूणे प्रतितिष्ठ ध्रुवाश्वावती गोमती सीलमावती क्षेमे तिष्ठ घृतमुक्षमाणेहैव तिष्ठ निमिता तिल्विला स्थाजिरावती मध्ये पोषस्य तृम्पतां मा त्वा प्रापन्नघायवः उपहूता इह गाव उपहूता अजावयः अथो अन्नस्य कीलाल उपहूतो गृहेषु नः रथन्तरे प्रतितिष्ठ वामदेव्ये श्रयस्व बृहति स्तभायेति स्थूणाराजमभिमृशति १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/01_ihaiva_sthUNe_pratitiShTha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इहैव स्थूणे प्रतितिष्ठ ध्रुवाश्वावती गोमती सीलमावती क्षेमे तिष्ठ घृतमुक्षमाणेहैव तिष्ठ निमिता तिल्विला स्थाजिरावती मध्ये पोषस्य तृम्पतां मा त्वा प्रापन्नघायवः उपहूता इह गाव उपहूता अजावयः अथो अन्नस्य कीलाल उपहूतो गृहेषु नः रथन्तरे प्रतितिष्ठ वामदेव्ये श्रयस्व बृहति स्तभायेति स्थूणाराजमभिमृशति १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . 'Stand here, O post, firm, rich in horses and cows, . . . .; stand safely, dropping ghee; stand here, fixed in the ground, prosperous, long-lasting(?), amid the prosperity of people who satiate themselves. May the malevolent ones not reach thee!
 
@@ -20,123 +25,149 @@ title = "०३"
 'Stand fast in the Rathantara; recline on the Vāmadevya; establish thyself on the Bṛhat' - with (these texts) he touches the chief post.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/02_sammitasya_sthUNAH_sammRshati.md">
-<details open><summary><h2>०२ सम्मितस्य स्थूणाः सम्मृशति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्मितस्य स्थूणाः सम्मृशति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/02_sammitasya_sthUNAH_sammRshati.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सम्मितस्य स्थूणाः सम्मृशति २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. When the house has been built conformably (to its proper dimensions), he touches the posts.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/03_satyaM_cha_shraddhA.md">
-<details open><summary><h2>०३ सत्यं च श्रद्धा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सत्यं च श्रद्धा चेति पूर्वे ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/03_satyaM_cha_shraddhA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सत्यं च श्रद्धा चेति पूर्वे ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. The two (posts) to the east with (the words), 'Truth and faith!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/04_yajnashcha_daxiNA_cheti.md">
-<details open><summary><h2>०४ यज्ञश्च दक्षिणा चेति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यज्ञश्च दक्षिणा चेति दक्षिणे ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/04_yajnashcha_daxiNA_cheti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यज्ञश्च दक्षिणा चेति दक्षिणे ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Those to the south with (the words), 'Sacrifice and gift!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/05_balaM_chaujashchetyapare.md">
-<details open><summary><h2>०५ बलं चौजश्चेत्यपरे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बलं चौजश्चेत्यपरे ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/05_balaM_chaujashchetyapare.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+बलं चौजश्चेत्यपरे ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. Those to the west with (the words), 'Strength and power!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/06_brahma_cha_xatram.md">
-<details open><summary><h2>०६ ब्रह्म च क्षत्रम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्रह्म च क्षत्रं चेत्युत्तरे ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/06_brahma_cha_xatram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ब्रह्म च क्षत्रं चेत्युत्तरे ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Those to the north with (the words), 'The Brahman and the Kṣatra!
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/07_shrI_stUpo_dharma.md">
-<details open><summary><h2>०७ श्री स्तूपो धर्म ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्री स्तूपो धर्म स्थूणाराजो ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/07_shrI_stUpo_dharma.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+श्री स्तूपो धर्म स्थूणाराजो ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7 [^2] . 'Fortune the pinnacle, law the chief post!
 
 [^2]:  Comp. Pāraskara III, 4, 18.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/08_ahorAtre_dvAraphalake.md">
-<details open><summary><h2>०८ अहोरात्रे द्वारफलके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहोरात्रे द्वारफलके ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/08_ahorAtre_dvAraphalake.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अहोरात्रे द्वारफलके ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. 'Day and night the two door jambs!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/09_saMvatsaro-pidhAnam.md">
-<details open><summary><h2>०९ संवत्सरोऽपिधानम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संवत्सरोऽपिधानम् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/09_saMvatsaro-pidhAnam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+संवत्सरोऽपिधानम् ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. 'The year the roof!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/03/10_uxA_samudra_ityabhyaktamashmAnam.md">
-<details open><summary><h2>१० उक्षा समुद्र इत्यभ्यक्तमश्मानम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उक्षा समुद्र इत्यभ्यक्तमश्मानं स्तूपस्याधस्तान्निखनेत् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/03/10_uxA_samudra_ityabhyaktamashmAnam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उक्षा समुद्र इत्यभ्यक्तमश्मानं स्तूपस्याधस्तान्निखनेत् १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. With (the verse), 'A bull, an ocean' (Rig-veda V, 47, 3)' let him bury an anointed stone under the pinnacle.
 
 </details>
-</div>
