--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/06.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/06.md
@@ -2,42 +2,52 @@
 title = "०६"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/06/01_anAhitAgniH_pravatsyangRhAnsamIxate.md">
-<details open><summary><h2>०१ अनाहिताग्निः प्रवत्स्यन्गृहान्समीक्षते ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनाहिताग्निः प्रवत्स्यन्गृहान्समीक्षते १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/01_anAhitAgniH_pravatsyangRhAnsamIxate.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनाहिताग्निः प्रवत्स्यन्गृहान्समीक्षते १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. One who has not set up the (sacred Śrauta) fires, when setting out on a journey, looks at his house.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/06/02_imAnme_mitrAvaruNau_gRhAngopAyatam.md">
-<details open><summary><h2>०२ इमान्मे मित्रावरुणौ गृहान्गोपायतम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इमान्मे मित्रावरुणौ गृहान्गोपायतं युवम् अविनष्टानविह्रुतान्पूषैनानभिरक्षत्वास्माकं पुनरागमात् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/02_imAnme_mitrAvaruNau_gRhAngopAyatam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इमान्मे मित्रावरुणौ गृहान्गोपायतं युवम् अविनष्टानविह्रुतान्पूषैनानभिरक्षत्वास्माकं पुनरागमात् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. (He murmurs the text,) 'Do ye both, Mitra and Varuṇa, protect this house for me; unscathed, undisturbed, may Pūṣan guard it till our return;'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/06/03_api_panthAmaganmahIti_cha.md">
-<details open><summary><h2>०३ अपि पन्थामगन्महीति च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अपि पन्थामगन्महीति च जपति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/06/03_api_panthAmaganmahIti_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अपि पन्थामगन्महीति च जपति ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. And murmurs (the verse), 'Upon the path we have entered' (Rig-veda VI, 51, 16).
 
 </details>
-</div>
