--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/08.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/08.md
@@ -2,98 +2,120 @@
 title = "०८"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/08/01_anAhitAgnirnavaM_prAshiShyannAgrayaNadevatAbhya.md">
-<details open><summary><h2>०१ अनाहिताग्निर्नवं प्राशिष्यन्नाग्रयणदेवताभ्यः ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनाहिताग्निर्नवं प्राशिष्यन्नाग्रयणदेवताभ्यः स्विष्टकृच्चतुर्थीभ्यः स्वाहाकारेण गृह्येऽग्नौ जुहुयात् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/08/01_anAhitAgnirnavaM_prAshiShyannAgrayaNadevatAbhya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनाहिताग्निर्नवं प्राशिष्यन्नाग्रयणदेवताभ्यः स्विष्टकृच्चतुर्थीभ्यः स्वाहाकारेण गृह्येऽग्नौ जुहुयात् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . When one who has not set up the (sacred Śrauta) fires, is going to partake of the first-fruits (of the harvest), let him sacrifice to the Āgrayaṇa deities with (Agni) Sviṣṭakṛt as the fourth, and with the word SVĀHĀ, on his (sacred) domestic fire.
 
 [^1]:  8, 1. The Āgrayaṇeṣṭi is the corresponding rite of the Śrauta ritual. Comp. Indische Studien, X, 343. The deities of that sacrifice are Indra and Agni; the Viśve devās; Heaven and Earth.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/08/02_prajApataye_tvA_graham.md">
-<details open><summary><h2>०२ प्रजापतये त्वा ग्रहम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रजापतये त्वा ग्रहं गृह्णामि मह्यं श्रियै मह्यं यशसे मह्यमन्नाद्यायेति प्राशनार्थीयमभिमन्त्र्य २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/08/02_prajApataye_tvA_graham.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रजापतये त्वा ग्रहं गृह्णामि मह्यं श्रियै मह्यं यशसे मह्यमन्नाद्यायेति प्राशनार्थीयमभिमन्त्र्य २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. Having recited over (the food) which he is going to eat (the formula), 'To Prajāpati I draw thee, the proper portion, for luck to me, for glory to me, for food to me!' - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/08/03_bhadrA_nnaH_shreyaH.md">
-<details open><summary><h2>०३ भद्रा न्नः श्रेयः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भद्रा न्नः श्रेयः समनैष्ट देवास्त्वयावसेन समशीमहि त्वा । स नो मयोभूः पितवाविशस्व शं नो भव द्विपदे शं चतुष्पद इत्यद्भिरभ्युत्सिञ्चँ स्त्रिः प्राश्नाति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/08/03_bhadrA_nnaH_shreyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+भद्रा न्नः श्रेयः समनैष्ट देवास्त्वयावसेन समशीमहि त्वा । स नो मयोभूः पितवाविशस्व शं नो भव द्विपदे शं चतुष्पद इत्यद्भिरभ्युत्सिञ्चँ स्त्रिः प्राश्नाति ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . He thrice eats of it, sprinkling it with water, with (the verse), 'From the good you have led us to the better, ye gods! Through thee, the nouṛṣment, may we obtain thee. Thus enter into us, O potion, bringing refreshment; be a saviour to us, to men and animals!'
 
 [^2]:  In the text read for tvayā jvasena, tvayāऽvasena.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/08/04_amo-si_prANa_tadRtam.md">
-<details open><summary><h2>०४ अमोऽसि प्राण तदृतम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अमोऽसि प्राण तदृतं ब्रवीम्यमोऽसि सर्वाङसि प्रविष्टः । स मे जरां रोगमपनुद्य शरीरादमा म एधि मा मृधा न इन्द्रे ति हृदयदेशमभिमृशति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/08/04_amo-si_prANa_tadRtam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अमोऽसि प्राण तदृतं ब्रवीम्यमोऽसि सर्वाङसि प्रविष्टः । स मे जरां रोगमपनुद्य शरीरादमा म एधि मा मृधा न इन्द्रे ति हृदयदेशमभिमृशति ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. With (the verse), 'This art thou, breath; the truth I speak This art thou; from all directions thou hast entered (into all beings). Thou driving away old age and sickness from my body be at home with me. Do not forsake us, Indra!' - he touches the place of the heart;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/08/05_nAbhirasi_mA_bibhIthAH.md">
-<details open><summary><h2>०५ नाभिरसि मा बिभीथाः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नाभिरसि मा बिभीथाः प्राणानां ग्रन्थिरसि मा विस्रस इति नाभिं ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/08/05_nAbhirasi_mA_bibhIthAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नाभिरसि मा बिभीथाः प्राणानां ग्रन्थिरसि मा विस्रस इति नाभिं ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. With (the words), 'The navel art thou; do not fear; the knot of the breathing powers art thou; do not loosen thyself,' (he touches) the navel;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/08/06_bhadraM_karNebhiriti_yathAlingam.md">
-<details open><summary><h2>०६ भद्रं कर्णेभिरिति यथालिङ्गम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भद्रं कर्णेभिरिति यथालिङ्गम् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/08/06_bhadraM_karNebhiriti_yathAlingam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+भद्रं कर्णेभिरिति यथालिङ्गम् ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. With the verse, 'Bliss with our ears' (Rig-veda I, 89, 8), (lie touches) the limbs as stated (in that verse);
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/08/07_tachchaxurityAdityamupasthAya.md">
-<details open><summary><h2>०७ तच्चक्षुरित्यादित्यमुपस्थाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तच्चक्षुरित्यादित्यमुपस्थाय ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/08/07_tachchaxurityAdityamupasthAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तच्चक्षुरित्यादित्यमुपस्थाय ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Worshipping the sun with the verse, 'Yonder eye' (Rig-veda VII, 66, 16).
 
 </details>
-</div>
