--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/10.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/10.md
@@ -2,57 +2,70 @@
 title = "१०"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/10/01_yA_phAlgunyA_uttarAmAvAsyA.md">
-<details open><summary><h2>०१ या फाल्गुन्या उत्तरामावास्या ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 या फाल्गुन्या उत्तरामावास्या सा रेवत्या सम्पद्यते तस्यामङ्कलक्षणानि कारयेद् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/10/01_yA_phAlgunyA_uttarAmAvAsyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+या फाल्गुन्या उत्तरामावास्या सा रेवत्या सम्पद्यते तस्यामङ्कलक्षणानि कारयेद् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. The new moon that follows after the Phālguna full moon, falls under (the Nakṣatra) Revatī: on that (new moon day) he shall have the marks made (on his cattle),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/10/02_bhuvanamasi_sahasrapoShamindrA_ya.md">
-<details open><summary><h2>०२ भुवनमसि सहस्रपोषमिन्द्रा य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भुवनमसि सहस्रपोषमिन्द्रा य त्वा श्रमो ददत् । अक्षतमस्यरिष्टमिळान्नं गोपायनं यावतीनामिदं करिष्यामि भूयसीनामुत्तमां समां क्रियासमिति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/10/02_bhuvanamasi_sahasrapoShamindrA_ya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+भुवनमसि सहस्रपोषमिन्द्रा य त्वा श्रमो ददत् । अक्षतमस्यरिष्टमिळान्नं गोपायनं यावतीनामिदं करिष्यामि भूयसीनामुत्तमां समां क्रियासमिति २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . With (the words), 'Thou art the world, thousandfold prospering. To Indra may exertion (?) give thee. Inviolate art thou, unhurt, sap, food, protection. For as many (cows) I shall do this now, for more (than these) may I do it in the latest year.'
 
 [^1]:  10, 2. The reading of tvā śramo dadat is doubtful. See the Various Readings in the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/10/03_yA_prathamA_prajAyeta.md">
-<details open><summary><h2>०३ या प्रथमा प्रजायेत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 या प्रथमा प्रजायेत तस्याः पीयूषं जुहुयात्संवत्सरीणं पय उस्रियाया इत्येताभ्यामृग्भ्यां ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/10/03_yA_prathamA_prajAyeta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+या प्रथमा प्रजायेत तस्याः पीयूषं जुहुयात्संवत्सरीणं पय उस्रियाया इत्येताभ्यामृग्भ्यां ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Of that (cow) that calves first let him sacrifice the biestings with the two verses, 'Yearly the milk of the cow' (Rig-veda X, 87, 17. 18).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/10/04_yadi_yamau_prajAyeta.md">
-<details open><summary><h2>०४ यदि यमौ प्रजायेत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदि यमौ प्रजायेत महाव्याहृतिभिर्हुत्वा यमसूं दद्यात् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/10/04_yadi_yamau_prajAyeta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यदि यमौ प्रजायेत महाव्याहृतिभिर्हुत्वा यमसूं दद्यात् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. If she brings forth twin-calves, let him sacrifice with the Mahāvyāhṛtis, and give the mother of the twins (to the Brāhmaṇas).
 
 </details>
-</div>
