--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/11.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/11.md
@@ -2,55 +2,69 @@
 title = "११"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/01_atha_vRShotsargaH.md">
-<details open><summary><h2>०१ अथ वृषोत्सर्गः ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ वृषोत्सर्गः १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/01_atha_vRShotsargaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ वृषोत्सर्गः १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now (follows) the Vṛṣotsarga (i.e. setting a bull at liberty).
 
 [^1]:  11, 1. A part of this chapter is nearly identical with the corresponding section of the Kātḥaka-gṛhya; see Jolly's article, Das Dharma-sūtra des Viṣṇu, &c. (Sitzung der philos. philol. Classe der Bairischen Academie, 7 Juni, 1879), p. 39. Comp. also Pāraskara III, 9; Viṣṇu LXXXVI, and Jolly's remarks, in Deutsche Rundschau X, p. 428.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/02_kArttikyAM_paurNamAsyAM_revatyAm.md">
-<details open><summary><h2>०२ कार्त्तिक्यां पौर्णमास्यां रेवत्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कार्त्तिक्यां पौर्णमास्यां रेवत्यां वाश्वयुज्यस्य २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/02_kArttikyAM_paurNamAsyAM_revatyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कार्त्तिक्यां पौर्णमास्यां रेवत्यां वाश्वयुज्यस्य २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. On the Kārttika full moon day or on that day of the Āśvayuja (month) that falls under (the Nakṣatra) Revatī - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/03_gavAM_madhye_susamiddhamagnim.md">
-<details open><summary><h2>०३ गवां मध्ये सुसमिद्धमग्निम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गवां मध्ये सुसमिद्धमग्निं कृत्वाज्याहुतीर्जुहोति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/03_gavAM_madhye_susamiddhamagnim.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गवां मध्ये सुसमिद्धमग्निं कृत्वाज्याहुतीर्जुहोति ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. He sacrifices, after having kindled amid the cows a well-inflamed fire, Ājya oblations (with the words),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/04_iha_ratiriha_ramadhvam.md">
-<details open><summary><h2>०४ इह रतिरिह रमध्वम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इह रतिरिह रमध्वं स्वाहा इह धृतिरिह स्वधृतिः स्वाहा उपसृजं धरुणं मात्रे धरुणो मातरं धयन्रायस्पोषमस्मासु दीधरत्स्वाहा ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/04_iha_ratiriha_ramadhvam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इह रतिरिह रमध्वं स्वाहा इह धृतिरिह स्वधृतिः स्वाहा उपसृजं धरुणं मात्रे धरुणो मातरं धयन्रायस्पोषमस्मासु दीधरत्स्वाहा ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Here is delight; take delight here. Svāhā!
 
@@ -59,166 +73,201 @@ Here is still-standing; here is (your) own still-standing. Svāhā!
 'I have let the calf join its mother. May the calf, sucking its mother's breast, support increase of wealth among us. Svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/05_pUShA_gA_anvetu.md">
-<details open><summary><h2>०५ पूषा गा अन्वेतु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पूषा गा अन्वेतु न इति पौष्णस्य जुहोति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/05_pUShA_gA_anvetu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पूषा गा अन्वेतु न इति पौष्णस्य जुहोति ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. With the verse, 'May Pūṣan go after our cows' (Rig-veda VI, 54, 5) he sacrifices from (a mess of sacrificial food) belonging to Pūṣan.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/06_rudrAn_japitvA.md">
-<details open><summary><h2>०६ रुद्रान् जपित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+रुद्रान् जपित्वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 रुद्रान् जपित्वा
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/06_rudrAn_japitvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^2] . Having murmured the Rudra-(hymns),
 
 [^2]:  Rig-veda I, 43. 114; II, 33; VII, 46.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/07_ekavarNaM_dvivarNaM_trivarNam.md">
-<details open><summary><h2>०७ एकवर्णं द्विवर्णं त्रिवर्णम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकवर्णं द्विवर्णं त्रिवर्णं वा ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/07_ekavarNaM_dvivarNaM_trivarNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एकवर्णं द्विवर्णं त्रिवर्णं वा ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. (He takes) a one-coloured, two-coloured, or three-coloured (bull),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/08_yo_vA_yUtham.md">
-<details open><summary><h2>०८ यो वा यूथम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यो वा यूथं छादयति ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/08_yo_vA_yUtham.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यो वा यूथं छादयति ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. Or one that protects the herd,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/09_yo_vA_yUthena.md">
-<details open><summary><h2>०९ यो वा यूथेन ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यो वा यूथेन छाद्यते ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/09_yo_vA_yUthena.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यो वा यूथेन छाद्यते ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. Or that is protected by the herd,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/10_rohito_vaiva_syAt.md">
-<details open><summary><h2>१० रोहितो वैव स्यात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रोहितो वैव स्यात् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/10_rohito_vaiva_syAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+रोहितो वैव स्यात् १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. Or it may also be red.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/11_sarvAngairupeto_yUthe_varchasvitamaH.md">
-<details open><summary><h2>११ सर्वाङ्गैरुपेतो यूथे वर्चस्वितमः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वाङ्गैरुपेतो यूथे वर्चस्वितमः स्यात् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/11_sarvAngairupeto_yUthe_varchasvitamaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सर्वाङ्गैरुपेतो यूथे वर्चस्वितमः स्यात् ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. It should have all its limbs complete, and be the finest (bull) in the herd.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/12_tamalankRtya.md">
-<details open><summary><h2>१२ तमलङ्कृत्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तमलङ्कृत्य १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/12_tamalankRtya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तमलङ्कृत्य १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. Having adorned that (bull),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/13_yUthe_mukhyAshchatasro_vatsataryastAshchAlankRt.md">
-<details open><summary><h2>१३ यूथे मुख्याश्चतस्रो वत्सतर्यस्ताश्चालङ्कृत्य् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+यूथे मुख्याश्चतस्रो वत्सतर्यस्ताश्चालङ्कृत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 यूथे मुख्याश्चतस्रो वत्सतर्यस्ताश्चालङ्कृत्य् 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/13_yUthe_mukhyAshchatasro_vatsataryastAshchAlankRt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 13. And the four best young cows of the herd, having adorned those too,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/14_etaM_yuvAnaM_patim.md">
-<details open><summary><h2>१४ एतं युवानं पतिम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतं युवानं पतिं वो ददामि तेन क्रीळन्तीश्चरथ प्रियेण । मावश्वात्र जनुषा संविदाना रायस्पोषेण समिषा मदेम स्वाहेति १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/14_etaM_yuvAnaM_patim.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एतं युवानं पतिं वो ददामि तेन क्रीळन्तीश्चरथ प्रियेण । मावश्वात्र जनुषा संविदाना रायस्पोषेण समिषा मदेम स्वाहेति १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14 [^3] . (He says,) 'This young (bull) I give you as your husband; sporting with him, your lover, walk about. Do not desert us (?), being joined (with us) from your birth. In increase of wealth, in food may we rejoice. Svāhā!'
 
 [^3]:  The translation 'do not desert us,' rests on the conjecture māvasthāta; see the Various Readings, and the note on p. 245 of the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/15_nabhyasthe-numantrayate_mayobhUrityanuvAkasheSh.md">
-<details open><summary><h2>१५ नभ्यस्थेऽनुमन्त्रयते मयोभूरित्यनुवाकशेषेण ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नभ्यस्थेऽनुमन्त्रयते मयोभूरित्यनुवाकशेषेण १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/15_nabhyasthe-numantrayate_mayobhUrityanuvAkasheSh.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नभ्यस्थेऽनुमन्त्रयते मयोभूरित्यनुवाकशेषेण १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. When (the bull) is in the midst (of the cows), he recites over (them), 'Refreshing,' &c. (Rig-veda X, 169, I seq.) down to the end of the Anuvāka.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/11/16_sarvAsAM_payasi_pAyasam.md">
-<details open><summary><h2>१६ सर्वासां पयसि पायसम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वासां पयसि पायसं श्रपयित्वा ब्राह्मणान्भोजयेत् १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/11/16_sarvAsAM_payasi_pAyasam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सर्वासां पयसि पायसं श्रपयित्वा ब्राह्मणान्भोजयेत् १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. With the milk of all of them he shall cook milk-rice and feed Brāhmaṇas with it.
 
 </details>
-</div>
