--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/12.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/12.md
@@ -2,70 +2,87 @@
 title = "१२"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/12/01_UrdhvamAgrahAyaNyAstisro-ShTakA_aparapaxeShu.md">
-<details open><summary><h2>०१ ऊर्ध्वमाग्रहायण्यास्तिस्रोऽष्टका अपरपक्षेषु ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऊर्ध्वमाग्रहायण्यास्तिस्रोऽष्टका अपरपक्षेषु १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/12/01_UrdhvamAgrahAyaNyAstisro-ShTakA_aparapaxeShu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ऊर्ध्वमाग्रहायण्यास्तिस्रोऽष्टका अपरपक्षेषु १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . After the Āgrahāyaṇī (or the full moon day of the month Mārgaśīrṣa) (follow) the three Aṣṭakās in the second fortnight (of the Mārgaśīrṣa and of the two following months).
 
 [^1]:  12, 1. On the Aṣṭakā festivals, of which some texts reckon three, while others have four, comp. Weber, Naxatra (second article), pp. 337, 341 seq.; Bühler, S.B.E., II, p. 214; Ludwig, Rig-veda, vol. iv, pp. 424 seq.; Atharva-veda III, 10. The last Aṣṭakā, which is celebrated in the dark fortnight of Māgha, is called Ekāṣṭakā; this Aṣṭakā is called the 'wife of the year,' 'the image of the year,' 'the disposer of the days.' If the Phālguna month is reckoned as the first of the year, this Aṣṭakā precedes the year's beginning only by a few days; there are also some Vedic passages which point to the Ekāṣṭakā's following shortly after the beginning of the year; see Weber, loc. cit., p. 342.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/12/02_tAsAM_prathamAyAM_shAkam.md">
-<details open><summary><h2>०२ तासां प्रथमायां शाकम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तासां प्रथमायां शाकं जुहोति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/12/02_tAsAM_prathamAyAM_shAkam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तासां प्रथमायां शाकं जुहोति २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. At the first of these he sacrifices vegetables,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/12/03_iyameva_sA_yA.md">
-<details open><summary><h2>०३ इयमेव सा या ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इयमेव सा या प्रथमा व्युच्छदन्तरस्यां चरति प्रविष्टा । वधूर्जजान नवकृज्जनित्री त्रय एनां महिमानः सचन्तां स्वाहेति ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/12/03_iyameva_sA_yA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इयमेव सा या प्रथमा व्युच्छदन्तरस्यां चरति प्रविष्टा । वधूर्जजान नवकृज्जनित्री त्रय एनां महिमानः सचन्तां स्वाहेति ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . With (the verse), 'She who shone forth first is this (earth); she walks, having entered into this (earth). The wife has brought forth (children), the new-creating mother. May the three powers follow her. Svāhā!'
 
 [^2]:  Instead of navakṛt the parallel texts (except the Mantrabrāhmaṇa II, 2, 12) have navagat, which is explained by nūtanavivāhavatī (Ludwig, loc. cit.); the 'three powers' are understood by Mādhava (in the commentary on Taitt. Saṃh. IV, 3, 11) as Agni, Sūrya, and Candra.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/12/04_atha_sviShTakRtaH.md">
-<details open><summary><h2>०४ अथ स्विष्टकृतः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ स्विष्टकृतः
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/12/04_atha_sviShTakRtaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ स्विष्टकृतः
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Now (the oblation for Agni) Sviṣṭakṛt,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/12/05_yasyAM_vaivasvato_yamaH.md">
-<details open><summary><h2>०५ यस्यां वैवस्वतो यमः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यस्यां वैवस्वतो यमः सर्वे देवाः समाहिताः अष्टका सर्वतोमुखी सा मे कामानतीतृपत् आहुस्ते ग्रावाणो दन्तानूधः पवमाणः मासाश्चार्धमासाश्च नमस्ते सुमनामुखि स्वाहेति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/12/05_yasyAM_vaivasvato_yamaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यस्यां वैवस्वतो यमः सर्वे देवाः समाहिताः अष्टका सर्वतोमुखी सा मे कामानतीतृपत् आहुस्ते ग्रावाणो दन्तानूधः पवमाणः मासाश्चार्धमासाश्च नमस्ते सुमनामुखि स्वाहेति ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . With (the verses), 'She in whom Yama, the son of Vivasvat, and all gods are contained, the Aṣṭakā whose face is turned to all sides, she has satiated my desires.
 
@@ -74,4 +91,3 @@ title = "१२"
 'They call thy teeth "the pressing-stones;" thy udder is (Soma) Pavamāna; . . . . are the months and half-months. Adoration to thee, O glad-faced one! Svāhā!'
 
 </details>
-</div>
