--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/02.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/02.md
@@ -2,115 +2,140 @@
 title = "०२"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/01_athAta_ekoddiShTam.md">
-<details open><summary><h2>०१ अथात एकोद्दिष्टम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथात एकोद्दिष्टम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/01_athAta_ekoddiShTam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथात एकोद्दिष्टम् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1]  Now (follows) the Ekoddiṣṭa (i.e. the Śrāddha ceremony directed to a single dead person),
 
 [^1]:  2, 1. Eka uddiṣṭo yasmin śrāddhe tad ekoddiṣṭam (Nār.). This is the kind of Śrāddha sacrifice which is to be performed for one twice-born during the first year after his death; see Manu III, 247; Yājñavalkya I, 250.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/02_ekapavitram.md">
-<details open><summary><h2>०२ एकपवित्रम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकपवित्रं २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/02_ekapavitram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एकपवित्रं २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. With one strainer,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/03_ekArghyam.md">
-<details open><summary><h2>०३ एकार्घ्यम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकार्घ्यम् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/03_ekArghyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एकार्घ्यम् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . One (pot of) Argha-water,
 
 [^2]:  This rule about the Argha water corresponds to those given with regard to the Pārvaṇa Śrāddha in the Sūtras 3 and 4 of the preceding chapter.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/04_ekapiNDam.md">
-<details open><summary><h2>०४ एकपिण्डम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एकपिण्डम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/04_ekapiNDam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एकपिण्डम् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. One lump (of flour).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/05_nAvAhanaM_nAgnaukaraNaM_nAtra.md">
-<details open><summary><h2>०५ नावाहनं नाग्नौकरणं नात्र ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नावाहनं नाग्नौकरणं नात्र विश्वे देवाः स्वदितमिति तृप्तिप्रश्न उपतिष्ठतामित्यक्षय्यस्थाने ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/05_nAvAhanaM_nAgnaukaraNaM_nAtra.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नावाहनं नाग्नौकरणं नात्र विश्वे देवाः स्वदितमिति तृप्तिप्रश्न उपतिष्ठतामित्यक्षय्यस्थाने ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . No inviting (takes place here), nor the putting (of food) into the fire, nor (do) the Viśve devās (take part in this ceremony). 'Relished?' - thus are they to be asked whether they are satiated. 'May it approach (the fathers),' instead of 'imperishable.'
 
 [^3]:  'Because the āvāhana (inviting) is forbidden here, it follows p. 109 that it must take place at the Pārvaṇa Śrāddha' (Nār.). According to Rāmacandra's Paddhati he shall say to the Brāhmaṇas, 'I will invite hither the fathers;' and when they give their consent, he invites them with Rig-veda X, 16, 12. Comp. Yājñavalkya I, 232 seq., &c. Regarding the Viśve devās comp. the note on chap. 1, 2; as to the tṛptapraśna (the question whether they are satiated) comp. Manu III, 251; Yājñ. I, 240. At the Pārvaṇa Śrāddha, after the Brāhmaṇas have finished their dinner and rinsed their mouths, and after the Piṇḍas have been offered, the sacrificer says, 'May what has been given at this Śrāddha to our father N.N., who belongs to the gotra N.N., be imperishable!' (comp. Yājñ. I, 242.) This phrase is to be altered at the Ekoddiṣṭa Śrāddha in the way indicated in this Sūtra.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/06_abhiramyatAmiti_visargaH.md">
-<details open><summary><h2>०६ अभिरम्यतामिति विसर्गः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अभिरम्यतामिति विसर्गः ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/06_abhiramyatAmiti_visargaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अभिरम्यतामिति विसर्गः ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. 'Be satisfied,' when sending them away.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/07_saMvatsaramevaM_prete.md">
-<details open><summary><h2>०७ संवत्सरमेवं प्रेते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संवत्सरमेवं प्रेते ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/07_saMvatsaramevaM_prete.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+संवत्सरमेवं प्रेते ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Thus through one year, when one has died.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/02/08_chaturthavisargashcha.md">
-<details open><summary><h2>०८ चतुर्थविसर्गश्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चतुर्थविसर्गश्च ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/02/08_chaturthavisargashcha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+चतुर्थविसर्गश्च ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^4] . And (then) omission of the fourth one.
 
 [^4]:  After the Ekoddiṣṭa Śrāddha has been performed for a dead person during the first year after his death, he is to be admitted, by the Sapiṇḍīkaraṇa ceremony, among the other Manes, and receives thenceforward his Piṇḍa together with them at the ordinary Pārvaṇa Śrāddha. As the ritual of this Śrāddha requires that the number of the 'fathers' worshipped should be three, the accession of a new person makes necessary the omission of the pra-pra-pitāmaha, who has now become fourth among the fathers.
 
 </details>
-</div>
