--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/05.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/05.md
@@ -2,238 +2,290 @@
 title = "०५"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/01_athopAkaraNam.md">
-<details open><summary><h2>०१ अथोपाकरणम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथोपाकरणम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/01_athopAkaraNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथोपाकरणम् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now (follows) the Upākaraṇa (i.e. the ceremony by which the annual course of study is opened).
 
 [^1]:  5, 1. As to the Upākaraṇa, see the statements of Professor Weber in his second article on the Nakṣatras, Abhandlungen der Berliner Akademie, 1861, p. 338, and of Professor Bühler in his notes on Āpastamba, S.B.E., II, pp. 110, 111.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/02_oShadhInAM_prAdurbhAve_hastena.md">
-<details open><summary><h2>०२ ओषधीनां प्रादुर्भावे हस्तेन ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ओषधीनां प्रादुर्भावे हस्तेन श्रवणेन वा
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/02_oShadhInAM_prAdurbhAve_hastena.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ओषधीनां प्रादुर्भावे हस्तेन श्रवणेन वा
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . When the herbs appear, under the Nakṣatra Hasta or Śravaṇa,
 
 [^2]:  The Nakṣatra Śravaṇa is evidently considered as particularly fit for this occasion because of its name containing an allusion to śruti, &c.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/03_axatasaktUnAM_dhAnAnAM_cha.md">
-<details open><summary><h2>०३ अक्षतसक्तूनां धानानां च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अक्षतसक्तूनां धानानां च दधिघृतमिश्राणां प्रत्यृचं वेदेन जुहुयादिति हैक आहुः ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/03_axatasaktUnAM_dhAnAnAM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अक्षतसक्तूनां धानानां च दधिघृतमिश्राणां प्रत्यृचं वेदेन जुहुयादिति हैक आहुः ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Let him make oblations of the flour of fried barley and of grains, mixed with curds and ghee, with the (whole) Veda, verse by verse: thus say some (teachers).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/04_sUktAnuvAkAdyAbhiriti_vA.md">
-<details open><summary><h2>०४ सूक्तानुवाकाद्याभिरिति वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सूक्तानुवाकाद्याभिरिति वा
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/04_sUktAnuvAkAdyAbhiriti_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सूक्तानुवाकाद्याभिरिति वा
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4 [^3] . Or with the first verses of the Sūktas and Anuvākas.
 
 [^3]:  I have followed Nārāyaṇa, but perhaps I ought to have translated, 'Sūktas or Anuvākas,' and in the fifth Sūtra, 'Adhyāyas or the sections, &c.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/05_adhyAyArSheyAdyAbhiriti_mANDUkeyaH.md">
-<details open><summary><h2>०५ अध्यायार्षेयाद्याभिरिति माण्डूकेयः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अध्यायार्षेयाद्याभिरिति माण्डूकेयः
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/05_adhyAyArSheyAdyAbhiriti_mANDUkeyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अध्यायार्षेयाद्याभिरिति माण्डूकेयः
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. With the first verses of the Adhyāyas and of the sections belonging to the (different) Ṛṣis, according to Māṇḍūkeya.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/06_atha_ha_smAha.md">
-<details open><summary><h2>०६ अथ ह स्माह ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अथ ह स्माह कौषीतकिर्
+</details>
+
+<details><summary>मूलम्</summary>
 
 अथ ह स्माह कौषीतकिर् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/06_atha_ha_smAha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. But Kauṣītaki has said:
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/07_agnimILe_purohitamityekA.md">
-<details open><summary><h2>०७ अग्निमीळे पुरोहितमित्येका ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निमीळे पुरोहितमित्येका ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/07_agnimILe_purohitamityekA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्निमीळे पुरोहितमित्येका ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. 'I praise Agni the Purohita' (Rig-veda I, 1, 1), this one verse,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/08_kuShumbhakastadabravIdAvada.N_stvaM_shakune.md">
-<details open><summary><h2>०८ कुषुम्भकस्तदब्रवीदावदँ स्त्वं शकुने ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कुषुम्भकस्तदब्रवीदावदँ स्त्वं शकुने भद्र मावद गृणाना जमदग्निना धामन्ते विश्वं भुवनमधि श्रितं गन्ता नो यज्ञं यज्ञियाः सुशमि यो नः स्वो अरणः प्रतिचक्ष्व विचक्ष्वाग्ने याहि मरुत्सखा यत्ते राजञ्छृतं हविरिति द्वृचास् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/08_kuShumbhakastadabravIdAvada.N_stvaM_shakune.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कुषुम्भकस्तदब्रवीदावदँ स्त्वं शकुने भद्र मावद गृणाना जमदग्निना धामन्ते विश्वं भुवनमधि श्रितं गन्ता नो यज्ञं यज्ञियाः सुशमि यो नः स्वो अरणः प्रतिचक्ष्व विचक्ष्वाग्ने याहि मरुत्सखा यत्ते राजञ्छृतं हविरिति द्वृचास् ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. 'The Kuṣumbhaka (mungoose?) has said it;' 'If thou criest, O bird, announce luck to us;' 'Sung by Jamadagni;' 'In thy abode the whole world rests;'
 
 'Come to our sacrifice, O you that are worthy of sacrifice, with care;' 'Whosoever, be he ours, be he alien;' 'Look on, look about;' 'Come here, Agni, the Maruts’ friend;' 'The oblation, O king, cooked for thee:' each time two verses,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/09_tachChaM_yorAvRNImaha_ityekA.md">
-<details open><summary><h2>०९ तच्छं योरावृणीमह इत्येका ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तच्छं योरावृणीमह इत्येका ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/09_tachChaM_yorAvRNImaha_ityekA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तच्छं योरावृणीमह इत्येका ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9 [^4] . 'That blessing and bliss we choose' - this one verse (the first and last verse of each Maṇḍala).
 
 [^4]:  According to Kauṣītaki, the oblations are made with the first and last ṛcas of each Maṇḍala. The last ṛc of the tenth Maṇḍala quoted here, tac chaṃ yor ā vṛṇīmahe, is different from the verse with which our Saṃhitā (the Śākala Saṃhitā of the Rig-veda) closes. It is well known that tac chaṃ yor ā vṛṇīmahe is the last verse in the Bāṣkala Śākhā which was adopted by the Śāṅkhāyana school (comp. Indische Studien, IV, 431; Weber, Verzeichniss der Berliner Sanskrit-Handschriften, p. 314, &c. Indische Literaturgeschichte, second edition, Nachtrag, p. 2). It was also known long since that the Bāṣkala Sākhā of the Rig-veda contains eight hymns more than the Śākala Śākhā. The Caraṇavyūha Bhāṣya (comp. Dr. von Schroeder's Introduction to his excellent edition of the Maitrāyaṇī Saṃhitā, vol. i, p. xxiv), known to me through the kindness of Professor Weber, tells which eight hymns these are. There it is said (folio 22 of Professor Weber's MS.) that in the Bāṣkala Saṃhitā there followed after VIII, 48 the first two of the Vālakhilya hymns, after VIII, 94 the Vālakhilya hymns 3-7, and at the end of the whole collection the so-called saṃjñāna hymn (see Professor Max Müller's edition, vol. vi, p. 32), which ends with the very verse quoted in our Sūtra, tac chaṃ yor ā vṛṇīmahe.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/10_hutasheShAddhaviH_prAshnanti_dadhikrAvNo.md">
-<details open><summary><h2>१० हुतशेषाद्धविः प्राश्नन्ति दधिक्राव्णो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हुतशेषाद्धविः प्राश्नन्ति दधिक्राव्णो अकारिषमित्येतया
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/10_hutasheShAddhaviH_prAshnanti_dadhikrAvNo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+हुतशेषाद्धविः प्राश्नन्ति दधिक्राव्णो अकारिषमित्येतया
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. (Taking something) of the remnants of the sacrificed (food) they partake of that sacrificial food with this (verse), 'I praised Dadhikrāvan' (Rig-veda IV, 39, 6).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/11_Achamyopavishya.md">
-<details open><summary><h2>११ आचम्योपविश्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचम्योपविश्य ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/11_Achamyopavishya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आचम्योपविश्य ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. They sip water, sit down,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/12_mahAvyAhRtIH_sAvitrIM_vedAdiprabhRtIni.md">
-<details open><summary><h2>१२ महाव्याहृतीः सावित्रीं वेदादिप्रभृतीनि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाव्याहृतीः सावित्रीं वेदादिप्रभृतीनि स्वस्त्ययनानि च जपित्वा
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/12_mahAvyAhRtIH_sAvitrIM_vedAdiprabhRtIni.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+महाव्याहृतीः सावित्रीं वेदादिप्रभृतीनि स्वस्त्ययनानि च जपित्वा
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. Murmur the Mahāvyāhṛtis, the Sāvitrī, and the auspicious hymns commencing from the beginning of the Veda,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/13_AchAryaM_svasti_vAchya.md">
-<details open><summary><h2>१३ आचार्यं स्वस्ति वाच्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्यं स्वस्ति वाच्य १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/13_AchAryaM_svasti_vAchya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आचार्यं स्वस्ति वाच्य १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. And cause the teacher to pronounce auspicious wishes.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/14_tadapi_bhavati.md">
-<details open><summary><h2>१४ तदपि भवति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदपि भवति १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/14_tadapi_bhavati.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तदपि भवति १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. Of this (ceremony) it is also said,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/15_ayAtayAmatAM_pUjAM_sAratvam.md">
-<details open><summary><h2>१५ अयातयामतां पूजां सारत्वम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयातयामतां पूजां सारत्वं छन्दसां तथा इच्छन्त ऋषयोऽपश्यन्नुपाकर्म तपोबलात् १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/15_ayAtayAmatAM_pUjAM_sAratvam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अयातयामतां पूजां सारत्वं छन्दसां तथा इच्छन्त ऋषयोऽपश्यन्नुपाकर्म तपोबलात् १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. 'Desirous (of acquiring) for the hymns inexhaustible vigour, reverence, and also soundness, the Ṛṣis, by the power of their austerities, have discovered the Upākarman.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/16_tasmAtShaTkarmanityenAtmano_mantrasiddhaye.md">
-<details open><summary><h2>१६ तस्मात्षट्कर्मनित्येनात्मनो मन्त्रसिद्धये ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तस्मात्षट्कर्मनित्येनात्मनो मन्त्रसिद्धये उपाकर्तव्यमित्याहुः कर्मणां सिद्धिमिच्छता १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/16_tasmAtShaTkarmanityenAtmano_mantrasiddhaye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तस्मात्षट्कर्मनित्येनात्मनो मन्त्रसिद्धये उपाकर्तव्यमित्याहुः कर्मणां सिद्धिमिच्छता १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16 [^5] . 'Therefore a constant performer of the six kinds of works should, in order that his Mantras might be successful, perform the Upākarman - so they say - if he wishes for success of his (holy) works.
 
 [^5]:  The six kinds of works are, performing sacrifices (yajana), officiating at the sacrifices of others (yājana), studying the Veda (adhyayana), teaching the Veda to others (adhyāpana), giving (dāna), and accepting gifts (pratigraha). Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/05/17_upAkarmaNi_chotsarge_trirAtram.md">
-<details open><summary><h2>१७ उपाकर्मणि चोत्सर्गे त्रिरात्रम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपाकर्मणि चोत्सर्गे त्रिरात्रं क्षपणं भवेत् अष्टकासु त्वहोरात्रमृत्वन्त्यासु च रात्रिषु १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/05/17_upAkarmaNi_chotsarge_trirAtram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उपाकर्मणि चोत्सर्गे त्रिरात्रं क्षपणं भवेत् अष्टकासु त्वहोरात्रमृत्वन्त्यासु च रात्रिषु १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17 [^6] . 'At the time of the Upākarman and of the Utsarga an interruption (of the Veda-study) shall take place for (three days and) three nights, likewise at the Aṣṭakās for one day and one night, and so on the last night of each season.'
 
 [^6]:  Concerning the Utsarga, see chap. 6. This Śloka occurs also Manu IV, 119 with the reading kṣepaṇam instead of kṣapaṇam ('kṣapaṇaṃ chandasāṃ virāma anadhyāyaḥ,' Nārāyaṇa). Kṣapaṇam is correct.
 
 </details>
-</div>
