--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/08.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/08.md
@@ -2,272 +2,333 @@
 title = "०८"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/01_nyAyopetebhyashcha_vartayet.md">
-<details open><summary><h2>०१ न्यायोपेतेभ्यश्च वर्तयेत् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न्यायोपेतेभ्यश्च वर्तयेत् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/01_nyAyopetebhyashcha_vartayet.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न्यायोपेतेभ्यश्च वर्तयेत् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . And to (students) who have been duly initiated he shall set forth (the Veda);
 
 [^1]:  8, 1. Nyāyena śiṣyadharmeṇa upetāḥ prāptās tebhyaḥ śiṣyebhyo vartayed adhyayanam ācāryaḥ pravartayet. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/02_prA~Navoda~NvAsIna_AchAryo_daxiNata.md">
-<details open><summary><h2>०२ प्राङवोदङ्वासीन आचार्यो दक्षिणत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राङवोदङ्वासीन आचार्यो दक्षिणत उदङ्मुख इतरो
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/02_prA~Navoda~NvAsIna_AchAryo_daxiNata.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्राङवोदङ्वासीन आचार्यो दक्षिणत उदङ्मुख इतरो
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. The teacher sitting to the east or to the north, the other one to the south, with his face turned to the north.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/03_dvau_vA.md">
-<details open><summary><h2>०३ द्वौ वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+द्वौ वा ३
+</details>
+
+<details><summary>मूलम्</summary>
 
 द्वौ वा ३   
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/03_dvau_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. Or two (students shall be so seated).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/04_bhUyA.Nsastu_yathAvakAsham.md">
-<details open><summary><h2>०४ भूयाँसस्तु यथावकाशम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भूयाँसस्तु यथावकाशं ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/04_bhUyA.Nsastu_yathAvakAsham.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+भूयाँसस्तु यथावकाशं ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. But more (than two) as there is room (for them).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/05_nochChritAsanopaviShTo_gurusamIpe.md">
-<details open><summary><h2>०५ नोच्छ्रितासनोपविष्टो गुरुसमीपे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नोच्छ्रितासनोपविष्टो गुरुसमीपे ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/05_nochChritAsanopaviShTo_gurusamIpe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नोच्छ्रितासनोपविष्टो गुरुसमीपे ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. He should not sit on a high seat in presence of a Guru,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/06_naikAsanastho.md">
-<details open><summary><h2>०६ नैकासनस्थो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नैकासनस्थो
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/06_naikAsanastho.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नैकासनस्थो
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Nor on the same seat (with him),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/07_na_prasAritapAdo.md">
-<details open><summary><h2>०७ न प्रसारितपादो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+न प्रसारितपादो
+</details>
+
+<details><summary>मूलम्</summary>
 
 न प्रसारितपादो 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/07_na_prasAritapAdo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. Nor with outstretched feet,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/08_na_bAhubhyAM_jAnUpasangRhya.md">
-<details open><summary><h2>०८ न बाहुभ्यां जानूपसङ्गृह्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न बाहुभ्यां जानूपसङ्गृह्य ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/08_na_bAhubhyAM_jAnUpasangRhya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न बाहुभ्यां जानूपसङ्गृह्य ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. Nor stretching his arms under his knees,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/09_nopAshritasharIro.md">
-<details open><summary><h2>०९ नोपाश्रितशरीरो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नोपाश्रितशरीरो ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/09_nopAshritasharIro.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नोपाश्रितशरीरो ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. Nor leaning his body (against a support), to. 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/10_nopasthakRtapAdo.md">
-<details open><summary><h2>१० नोपस्थकृतपादो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नोपस्थकृतपादो १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/10_nopasthakRtapAdo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नोपस्थकृतपादो १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 Nor forming with his feet a lap,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/11_na_pAdakuThArikAM_kRtvA.md">
-<details open><summary><h2>११ न पादकुठारिकां कृत्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+न पादकुठारिकां कृत्वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 न पादकुठारिकां कृत्वा
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/11_na_pAdakuThArikAM_kRtvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 11 [^2] . Nor holding his feet like an axe.
 
 [^2]:  Caraṇaṃ kuṭhārikārūpaṃ kṛtvā na paṭhed ity arthaḥ. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/12_adhIhi_bho3_ityuktvAchArya.md">
-<details open><summary><h2>१२ अधीहि भो३ इत्युक्त्वाचार्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अधीहि भो३ इत्युक्त्वाचार्य ॐकारं प्रचोदयेद् १२
+</details>
+
+<details><summary>मूलम्</summary>
 
 अधीहि भो३ इत्युक्त्वाचार्य ॐकारं प्रचोदयेद् १२  
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/12_adhIhi_bho3_ityuktvAchArya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 12 [^3] . After (the student) has said, Recite, sir!' the teacher shall cause him to pronounce the syllable OM.
 
 [^3]:  The words adhīhi bho (recite, sir!) are pronounced by the student; this follows from the passages quoted in the note on 1I, 5, 10. Nārāyaṇa states that those words are pronounced by the teacher (ācāryo guruḥ śiṣyam adhyāpanārtham adhīhi bho 3 iti śabdam uktvā . . .).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/13_omitItaraH_pratipadyate.md">
-<details open><summary><h2>१३ ओमितीतरः प्रतिपद्यते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ओमितीतरः प्रतिपद्यते १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/13_omitItaraH_pratipadyate.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ओमितीतरः प्रतिपद्यते १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. 'OM,' replies the other.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/14_tatsantatamadhIyIta.md">
-<details open><summary><h2>१४ तत्सन्ततमधीयीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तत्सन्ततमधीयीत
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/14_tatsantatamadhIyIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तत्सन्ततमधीयीत
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. Thereafter let him recite uninterruptedly.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/15_adhItyopasangRhya.md">
-<details open><summary><h2>१५ अधीत्योपसङ्गृह्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधीत्योपसङ्गृह्य १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/15_adhItyopasangRhya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अधीत्योपसङ्गृह्य १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. When he has recited, he embraces (his teacher's feet),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/16_viratAH_sma_bho3.md">
-<details open><summary><h2>१६ विरताः स्म भो३ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विरताः स्म भो३ इत्युक्त्वा यथार्थं १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/16_viratAH_sma_bho3.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+विरताः स्म भो३ इत्युक्त्वा यथार्थं १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. Says, 'We have finished, sir!' and (goes away) according to his business.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/17_visRShTaM_virAmastAvadityeke.md">
-<details open><summary><h2>१७ विसृष्टं विरामस्तावदित्येके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विसृष्टं विरामस्तावदित्येके १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/17_visRShTaM_virAmastAvadityeke.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+विसृष्टं विरामस्तावदित्येके १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17. (He shall say,) 'Leave! Pause meanwhile!' according to some (teachers).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/18_nAdhIyatAmantarA_gachChen.md">
-<details open><summary><h2>१८ नाधीयतामन्तरा गच्छेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नाधीयतामन्तरा गच्छेन् १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/18_nAdhIyatAmantarA_gachChen.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नाधीयतामन्तरा गच्छेन् १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18. Let no one step between (a teacher and students) who study.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/19_nAtmAnaM_vipariharedadhIyAno.md">
-<details open><summary><h2>१९ नात्मानं विपरिहरेदधीयानो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नात्मानं विपरिहरेदधीयानो १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/19_nAtmAnaM_vipariharedadhIyAno.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नात्मानं विपरिहरेदधीयानो १९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 19 [^4] . Let no one change his place during the recitation.
 
 [^4]:  The translation of ātmānaṃ vipariharet is conjectural; comp. also Nārāyaṇa's note, p. 151 of the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/08/20_yadi_cheddoShaH_syAttrirAtramupoShyAhorAtram.md">
-<details open><summary><h2>२० यदि चेद्दोषः स्यात्त्रिरात्रमुपोष्याहोरात्रम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदि चेद्दोषः स्यात्त्रिरात्रमुपोष्याहोरात्रं वा सावित्रीमभ्यावर्तयेद्यावच्छक्नुयाद् ब्राह्मणेभ्यः किञ्चिद्दद्यादहोरात्रमुपरम्य प्राध्ययनम् २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/08/20_yadi_cheddoShaH_syAttrirAtramupoShyAhorAtram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यदि चेद्दोषः स्यात्त्रिरात्रमुपोष्याहोरात्रं वा सावित्रीमभ्यावर्तयेद्यावच्छक्नुयाद् ब्राह्मणेभ्यः किञ्चिद्दद्यादहोरात्रमुपरम्य प्राध्ययनम् २०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 20. Should any fault be committed, let him fast three days, or one day and one night, repeat the Sāvitrī as long as he can, and give something to the Brāhmaṇas; then after an interruption of one day and one night the study should go on.
 
 </details>
-</div>
