--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/10.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/10.md
@@ -2,83 +2,102 @@
 title = "१०"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/10/01_atha_prAchInAvItI.md">
-<details open><summary><h2>०१ अथ प्राचीनावीती ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ प्राचीनावीती १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/10/01_atha_prAchInAvItI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ प्राचीनावीती १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. Now with the sacrificial cord suspended over the right shoulder,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/10/02_pitryAM_dishamIxamANaH.md">
-<details open><summary><h2>०२ पित्र्यां दिशमीक्षमाणः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पित्र्यां दिशमीक्षमाणः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/10/02_pitryAM_dishamIxamANaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पित्र्यां दिशमीक्षमाणः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. Looking in the direction that belongs to the Manes (i.e. the south):
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/10/03_shatarchinaH_mAdhyamAH_gRtsamadaH.md">
-<details open><summary><h2>०३ शतर्चिनः माध्यमाः गृत्समदः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शतर्चिनः माध्यमाः गृत्समदः विश्वामित्रः जमदग्निः वामदेवः अत्रिः भरद्वाजः वसिष्ठः प्रगाथाः पावमानाः क्षुद्र सूक्तमहासूक्ताः सुमन्तुः जैमिनिवैशम्पायनपैलसूत्रभाष्यागार्ग्यबभ्रुबाभ्रव्यमण्डुमाण्डव्याः गार्गी वाचक्नवी वडवा प्रातिथेयी सुलभा मैत्रेयी कहोलं कौषीतकिं महाकौषीतकिं सुयज्ञं शाङ्खायनमाश्वलायनमैतरेयं महैतरेयं भारद्वाजं जातूकर्ण्यं पैङ्ग्यं महापैङ्ग्यं बाष्कलं गार्ग्यं शाकल्यं माण्डूकेयं महादमत्रम् औदवाहिं महौदवाहिं सौयामिं शौनकिं शाकपूणिं गौतमिं ये चान्य आचार्यास्ते सर्वे तृप्यन्त्विति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/10/03_shatarchinaH_mAdhyamAH_gRtsamadaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शतर्चिनः माध्यमाः गृत्समदः विश्वामित्रः जमदग्निः वामदेवः अत्रिः भरद्वाजः वसिष्ठः प्रगाथाः पावमानाः क्षुद्र सूक्तमहासूक्ताः सुमन्तुः जैमिनिवैशम्पायनपैलसूत्रभाष्यागार्ग्यबभ्रुबाभ्रव्यमण्डुमाण्डव्याः गार्गी वाचक्नवी वडवा प्रातिथेयी सुलभा मैत्रेयी कहोलं कौषीतकिं महाकौषीतकिं सुयज्ञं शाङ्खायनमाश्वलायनमैतरेयं महैतरेयं भारद्वाजं जातूकर्ण्यं पैङ्ग्यं महापैङ्ग्यं बाष्कलं गार्ग्यं शाकल्यं माण्डूकेयं महादमत्रम् औदवाहिं महौदवाहिं सौयामिं शौनकिं शाकपूणिं गौतमिं ये चान्य आचार्यास्ते सर्वे तृप्यन्त्विति ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. 'The (Ṛṣis) of the hundred (Ṛcas), the (Ṛṣis) of the middle (Maṇḍalas), Gṛtsamada, Viśvāmitra, Jamadagni, Vāmadeva, Atri, Bharadvāja, Vasiṣṭha, the Pragāthas, the (Ṛṣis) of the Pavamāna hymns, the (Ṛṣis) of the short hymns and of the long hymns, Sumantu, Jaimini, Vaiśampāyana, Paila, the Sūtras, the Bhāṣyas, Gārgya, Babhru, Bābhravya, Maṇḍu, Māṇḍavya, Gārgī Vācaknavī, Vadavā Prātitheyī, Sulabhā Maitreyī (may satiate themselves).
 
 '(I satiate) Kahola Kauṣītaki, Mahākauṣītaki, Suyajña Śāṅkhāyana, Āśvalāyana, Aitareya, Mahaitareya, Bhāradvāja, Jātūkarṇya, Paiṅgya, Mahāpaṅgya, Bāṣkala, Gārgya, Śākalya, Māṇḍūkeya, Mahādamatra, Audavāhi, Mahaudavāhi, Sauyāmi, Śaunaki, Śākapūṇi, Gautami; and whatsoever other teachers there are, may they all satiate themselves.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/10/04_pratipuruShaM_pitaraH.md">
-<details open><summary><h2>०४ प्रतिपुरुषं पितरः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रतिपुरुषं पितरः ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/10/04_pratipuruShaM_pitaraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रतिपुरुषं पितरः ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. 'The fathers man by man.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/10/05_pitRva.N_shastRpyatu.md">
-<details open><summary><h2>०५ पितृवँ शस्तृप्यतु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पितृवँ शस्तृप्यतु ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/10/05_pitRva.N_shastRpyatu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पितृवँ शस्तृप्यतु ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. 'The ancestry of the father may satiate itself.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/10/06_mAtRva.N_shastRpyatu.md">
-<details open><summary><h2>०६ मातृवँ शस्तृप्यतु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मातृवँ शस्तृप्यतु ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/10/06_mAtRva.N_shastRpyatu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मातृवँ शस्तृप्यतु ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. 'The ancestry of the mother may satiate itself.'
 
 </details>
-</div>
