--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/11.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/11.md
@@ -2,342 +2,418 @@
 title = "११"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/01_na_nagnAM_striyamIxetAnyatra.md">
-<details open><summary><h2>०१ न नग्नां स्त्रियमीक्षेतान्यत्र ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न नग्नां स्त्रियमीक्षेतान्यत्र मैथुनान् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/01_na_nagnAM_striyamIxetAnyatra.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न नग्नां स्त्रियमीक्षेतान्यत्र मैथुनान् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Let him not look at a naked woman, except during sexual intercourse,
 
 [^1]:  11, 1 seq. Rules of conduct for a Snātaka, i.e. a man who has completed his studentship.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/02_nAdityaM_sandhivelayor.md">
-<details open><summary><h2>०२ नादित्यं सन्धिवेलयोर् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+नादित्यं सन्धिवेलयोर्
+</details>
+
+<details><summary>मूलम्</summary>
 
 नादित्यं सन्धिवेलयोर् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/02_nAdityaM_sandhivelayor.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Nor (look) at the sun while it rises or sets,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/03_anAptam.md">
-<details open><summary><h2>०३ अनाप्तम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनाप्तम् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/03_anAptam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनाप्तम् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. At an enemy,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/04_akAryakAriNam.md">
-<details open><summary><h2>०४ अकार्यकारिणम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अकार्यकारिणं ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/04_akAryakAriNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अकार्यकारिणं ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. At an evil-doer,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/05_pretasparshinam.md">
-<details open><summary><h2>०५ प्रेतस्पर्शिनम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रेतस्पर्शिनं ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/05_pretasparshinam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रेतस्पर्शिनं ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. At a person that has to touch dead bodies.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/06_sUtikodakyAbhyAM_na_saMvaded.md">
-<details open><summary><h2>०६ सूतिकोदक्याभ्यां न संवदेद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सूतिकोदक्याभ्यां न संवदेद् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/06_sUtikodakyAbhyAM_na_saMvaded.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सूतिकोदक्याभ्यां न संवदेद् ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Let him not talk with a woman who has recently been confined or who has her courses,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/07_etaishcha.md">
-<details open><summary><h2>०७ एतैश्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+एतैश्च
+</details>
+
+<details><summary>मूलम्</summary>
 
 एतैश्च
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/07_etaishcha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7 [^2] . Nor with those (mentioned before).
 
 [^2]:  Etaiḥ pūrvoktaiḥ anāptādibhir na saṃvadet. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/08_uddhRtatejA.Nsi_na_bhunjIta.md">
-<details open><summary><h2>०८ उद्धृततेजाँसि न भुञ्जीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उद्धृततेजाँसि न भुञ्जीत ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/08_uddhRtatejA.Nsi_na_bhunjIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उद्धृततेजाँसि न भुञ्जीत ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. Let him not eat food from which its strength is taken away.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/09_na_yAtayAmaiH_kAryam.md">
-<details open><summary><h2>०९ न यातयामैः कार्यम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न यातयामैः कार्यं कुर्यान् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/09_na_yAtayAmaiH_kAryam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न यातयामैः कार्यं कुर्यान् ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. Let him not do his work with implements wasted by use.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/10_na_saha_bhunjIta.md">
-<details open><summary><h2>१० न सह भुञ्जीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न सह भुञ्जीत १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/10_na_saha_bhunjIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न सह भुञ्जीत १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10 [^3] . Let him not eat together (with his wife),
 
 [^3]:  Nārāyaṇa states that 'with his wife' is to be supplied to this Sūtra, which indeed is rendered probable through the comparison of Gautama IX, 32; Manu IV, 43, &c.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/11_na_sheSham.md">
-<details open><summary><h2>११ न शेषम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न शेषं ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/11_na_sheSham.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न शेषं ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11 [^4] . Nor remnants (of food).
 
 [^4]:  Here also Nārāyaṇa understands bhāryāyā bhuktaśeṣam.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/12_pitRdevatAtithibhRtyAnAM_sheShaM_bhunjIta.md">
-<details open><summary><h2>१२ पितृदेवतातिथिभृत्यानां शेषं भुञ्जीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पितृदेवतातिथिभृत्यानां शेषं भुञ्जीत
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/12_pitRdevatAtithibhRtyAnAM_sheShaM_bhunjIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पितृदेवतातिथिभृत्यानां शेषं भुञ्जीत
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. Remnants of (food belonging to the) Manes, gods, guests, and servants he may eat.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/13_unChashilamayAchitapratigrahaH_sAdhubhyo_yAchit.md">
-<details open><summary><h2>१३ उञ्छशिलमयाचितप्रतिग्रहः साधुभ्यो याचितो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उञ्छशिलमयाचितप्रतिग्रहः साधुभ्यो याचितो वा याजनं वृत्तिः १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/13_unChashilamayAchitapratigrahaH_sAdhubhyo_yAchit.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उञ्छशिलमयाचितप्रतिग्रहः साधुभ्यो याचितो वा याजनं वृत्तिः १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. Gleaning ears of corn, receiving alms unasked for, or for which he has asked the good, performing sacrifices for others, are the means of livelihood;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/14_pUrvampUrvaM_garIyo.md">
-<details open><summary><h2>१४ पूर्वम्पूर्वं गरीयो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पूर्वम्पूर्वं गरीयो
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/14_pUrvampUrvaM_garIyo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पूर्वम्पूर्वं गरीयो
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. (Of these) each preceding one is the more respectable.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/15_asaMsidhyamAnAyAM_vaishyavRttirvA.md">
-<details open><summary><h2>१५ असंसिध्यमानायां वैश्यवृत्तिर्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+असंसिध्यमानायां वैश्यवृत्तिर्वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 असंसिध्यमानायां वैश्यवृत्तिर्वा
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/15_asaMsidhyamAnAyAM_vaishyavRttirvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 15 [^5] . Or if (his livelihood) cannot be gained (in one of the ways mentioned), let him follow the occupation of a Vaiśya.
 
 [^5]:  Comp. Professor Bühler's note on Gautama X, 5, S.B.E., vol. ii, p. 225.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/16_apramattaH_pitRdaivatakAryeShv.md">
-<details open><summary><h2>१६ अप्रमत्तः पितृदैवतकार्येष्व् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अप्रमत्तः पितृदैवतकार्येष्व्
+</details>
+
+<details><summary>मूलम्</summary>
 
 अप्रमत्तः पितृदैवतकार्येष्व् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/16_apramattaH_pitRdaivatakAryeShv.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 16. (He shall be) careful about his duties towards Manes and gods.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/17_Rtau_svadAragAmI.md">
-<details open><summary><h2>१७ ऋतौ स्वदारगामी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऋतौ स्वदारगामी १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/17_Rtau_svadAragAmI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ऋतौ स्वदारगामी १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17. In due time (he shall) have intercourse with his wife.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/18_na_divA_shayIta.md">
-<details open><summary><h2>१८ न दिवा शयीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न दिवा शयीत १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/18_na_divA_shayIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न दिवा शयीत १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18. He shall not lie down (to sleep) in the day-time,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/19_na_pUrvApararAtrau.md">
-<details open><summary><h2>१९ न पूर्वापररात्रौ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न पूर्वापररात्रौ १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/19_na_pUrvApararAtrau.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न पूर्वापररात्रौ १९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 19 [^6] . Nor during the first or the last watch of the night.
 
 [^6]:  Rātreḥ pūrvaprahare rātreḥ paścimaprahare ca. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/20_na_bhUmAvanantarhitAyAmAsIta.md">
-<details open><summary><h2>२० न भूमावनन्तर्हितायामासीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न भूमावनन्तर्हितायामासीत २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/20_na_bhUmAvanantarhitAyAmAsIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न भूमावनन्तर्हितायामासीत २०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 20. Let him not sit on the bare ground.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/21_nityodakI.md">
-<details open><summary><h2>२१ नित्योदकी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नित्योदकी २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/21_nityodakI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नित्योदकी २१
+</details>
+
+<details><summary>Oldenberg</summary>
 
 21. He shall constantly perform the prescribed duties regarding the use of water.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/22_yajnopavItI.md">
-<details open><summary><h2>२२ यज्ञोपवीती ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यज्ञोपवीती २२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/22_yajnopavItI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यज्ञोपवीती २२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 22. (And constantly) have his sacrificial cord suspended over his left shoulder.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/23_na_virahayedAchAryam.md">
-<details open><summary><h2>२३ न विरहयेदाचार्यम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न विरहयेदाचार्यम् २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/23_na_virahayedAchAryam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न विरहयेदाचार्यम् २३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 23. Let him not abandon his teacher,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/24_anyatra_niyogAd.md">
-<details open><summary><h2>२४ अन्यत्र नियोगाद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्यत्र नियोगाद् २४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/24_anyatra_niyogAd.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अन्यत्र नियोगाद् २४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 24. Except on (his teacher's) command,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/11/25_anujnAto_vA.md">
-<details open><summary><h2>२५ अनुज्ञातो वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनुज्ञातो वा २५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/11/25_anujnAto_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनुज्ञातो वा २५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 25. Or with (his) permission.
 
 </details>
-</div>
