--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/12.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/12.md
@@ -2,428 +2,525 @@
 title = "१२"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/01_aharaharAchAryAyAbhivAdayeta.md">
-<details open><summary><h2>०१ अहरहराचार्यायाभिवादयेत ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहरहराचार्यायाभिवादयेत १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/01_aharaharAchAryAyAbhivAdayeta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अहरहराचार्यायाभिवादयेत १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. Every day he shall respectfully salute his teacher,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/02_gurubhyashcha.md">
-<details open><summary><h2>०२ गुरुभ्यश्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गुरुभ्यश्च २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/02_gurubhyashcha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गुरुभ्यश्च २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. And his Gurus,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/03_sametya_shrotriyasya.md">
-<details open><summary><h2>०३ समेत्य श्रोत्रियस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समेत्य श्रोत्रियस्य ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/03_sametya_shrotriyasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+समेत्य श्रोत्रियस्य ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. A Śrotriya when meeting him,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/04_proShya_pratyetyAshrotriyasya.md">
-<details open><summary><h2>०४ प्रोष्य प्रत्येत्याश्रोत्रियस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+प्रोष्य प्रत्येत्याश्रोत्रियस्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 प्रोष्य प्रत्येत्याश्रोत्रियस्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/04_proShya_pratyetyAshrotriyasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. When he returns from a journey, (also) one who is not a Śrotriya.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/05_asAvahaM_bho3_ityAtmano.md">
-<details open><summary><h2>०५ असावहं भो३ इत्यात्मनो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 असावहं भो३ इत्यात्मनो नामादिश्य व्यत्यस्य पाणी ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/05_asAvahaM_bho3_ityAtmano.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+असावहं भो३ इत्यात्मनो नामादिश्य व्यत्यस्य पाणी ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^1] . In the words, 'I am N.N., sir!' pronouncing his own name, crossing his hands (so as to seize with his right hand the right foot, and with his left hand the left of the other person).
 
 [^1]:  12, 5. Nārāyaṇa: 'As to how that respectful salutation (abhivādana) should he performed, he says . . . with his own right hand he touches the right foot of the Ācārya or other person (whom he salutes), and with his left hand the left foot (comp. Manu II, 72) (and says), "I am N.N. (amukaśarman) of the Gotra N.N., sir! I offer my respectful salutation!"'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/06_asAvityasya_pANI_sangRhyAshiShamAshAste.md">
-<details open><summary><h2>०६ असावित्यस्य पाणी सङ्गृह्याशिषमाशास्ते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 असावित्यस्य पाणी सङ्गृह्याशिषमाशास्ते ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/06_asAvityasya_pANI_sangRhyAshiShamAshAste.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+असावित्यस्य पाणी सङ्गृह्याशिषमाशास्ते ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^2] . (The person who has been thus saluted, in reply addressing him with his name,) 'N.N.!' and seizing his hands, pronounces a wish to him.
 
 [^2]:  'The Ācārya or other person seizes the hands of the saluting person,' &c. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/07_nAvRto_yajnaM_gachChed.md">
-<details open><summary><h2>०७ नावृतो यज्ञं गच्छेद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नावृतो यज्ञं गच्छेद् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/07_nAvRto_yajnaM_gachChed.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नावृतो यज्ञं गच्छेद् ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Let him not go to a sacrifice without being chosen (thereto).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/08_adharmAchcha_jugupseta.md">
-<details open><summary><h2>०८ अधर्माच्च जुगुप्सेत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधर्माच्च जुगुप्सेत ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/08_adharmAchcha_jugupseta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अधर्माच्च जुगुप्सेत ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. And let him beware of (doing) wrong.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/09_na_janasamavAyaM_gachChen.md">
-<details open><summary><h2>०९ न जनसमवायं गच्छेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न जनसमवायं गच्छेन् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/09_na_janasamavAyaM_gachChen.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न जनसमवायं गच्छेन् ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. Let him not go to assemblies of people.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/10_noparyuddishetsametya.md">
-<details open><summary><h2>१० नोपर्युद्दिशेत्समेत्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नोपर्युद्दिशेत्समेत्य
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/10_noparyuddishetsametya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नोपर्युद्दिशेत्समेत्य
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10 [^3] . If he has come upon (such assemblies), let him not point out (anything evil) against (anybody).
 
 [^3]:  See Nārāyaṇa's commentary, p. 154 of the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/11_anAkroshako-pishunaH_kulankulo_netihetiH.md">
-<details open><summary><h2>११ अनाक्रोशकोऽपिशुनः कुलङ्कुलो नेतिहेतिः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनाक्रोशकोऽपिशुनः कुलङ्कुलो नेतिहेतिः स्यान् ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/11_anAkroshako-pishunaH_kulankulo_netihetiH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनाक्रोशकोऽपिशुनः कुलङ्कुलो नेतिहेतिः स्यान् ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. He shall not be a reviler, nor slanderous, nor a wanderer from house to house, nor a prattler.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/12_naikashcharen.md">
-<details open><summary><h2>१२ नैकश्चरेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नैकश्चरेन् १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/12_naikashcharen.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नैकश्चरेन् १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. He shall not walk alone,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/13_na_nagno.md">
-<details open><summary><h2>१३ न नग्नो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न नग्नो १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/13_na_nagno.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न नग्नो १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. Nor naked,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/14_nApihitapANir.md">
-<details open><summary><h2>१४ नापिहितपाणिर् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नापिहितपाणिर् १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/14_nApihitapANir.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नापिहितपाणिर् १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. Nor with veiled hands.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/15_devAyatanAni_pradaxiNam.md">
-<details open><summary><h2>१५ देवायतनानि प्रदक्षिणम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवायतनानि प्रदक्षिणं १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/15_devAyatanAni_pradaxiNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+देवायतनानि प्रदक्षिणं १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. Gods’-houses (he shall walk round) keeping the right side turned to them.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/16_na_dhAven.md">
-<details open><summary><h2>१६ न धावेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न धावेन् १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/16_na_dhAven.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न धावेन् १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16 [^4] . Let him not run.
 
 [^4]:  According to Nārāyaṇa we should have to supply, 'while it is raining,' which is countenanced by a number of parallel texts, for instance, Āśv.-Gṛhya III, 9, 6.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/17_na_niShThIven.md">
-<details open><summary><h2>१७ न निष्ठीवेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न निष्ठीवेन् १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/17_na_niShThIven.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न निष्ठीवेन् १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17. Let him not spit.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/18_na_kaNDUyen.md">
-<details open><summary><h2>१८ न कण्डूयेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न कण्डूयेन् १८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/18_na_kaNDUyen.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न कण्डूयेन् १८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 18. Let him not scratch himself.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/19_mUtrapurIShe_nAvexeta.md">
-<details open><summary><h2>१९ मूत्रपुरीषे नावेक्षेत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मूत्रपुरीषे नावेक्षेत
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/19_mUtrapurIShe_nAvexeta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मूत्रपुरीषे नावेक्षेत
+</details>
+
+<details><summary>Oldenberg</summary>
 
 19. Let him not look on urine and excrements.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/20_avaguNThyAsIta.md">
-<details open><summary><h2>२० अवगुण्ठ्यासीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अवगुण्ठ्यासीत २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/20_avaguNThyAsIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अवगुण्ठ्यासीत २०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 20. Let him sit with veiled head,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/21_nAnantarhitAyAm.md">
-<details open><summary><h2>२१ नानन्तर्हितायाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नानन्तर्हितायां २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/21_nAnantarhitAyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नानन्तर्हितायां २१
+</details>
+
+<details><summary>Oldenberg</summary>
 
 21. Not on the bare (ground),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/22_yadyekavastro_yajnopavItaM_karNe.md">
-<details open><summary><h2>२२ यद्येकवस्त्रो यज्ञोपवीतं कर्णे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्येकवस्त्रो यज्ञोपवीतं कर्णे कृत्वा २२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/22_yadyekavastro_yajnopavItaM_karNe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यद्येकवस्त्रो यज्ञोपवीतं कर्णे कृत्वा २२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 22. If he has only one garment, suspending his sacrificial cord on his ear,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/23_nAdityamabhimukho.md">
-<details open><summary><h2>२३ नादित्यमभिमुखो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+नादित्यमभिमुखो
+</details>
+
+<details><summary>मूलम्</summary>
 
 नादित्यमभिमुखो 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/23_nAdityamabhimukho.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 23. Not turning his face to the sun,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/24_na_jaghanena.md">
-<details open><summary><h2>२४ न जघनेन ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+न जघनेन
+</details>
+
+<details><summary>मूलम्</summary>
 
 न जघनेन 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/24_na_jaghanena.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 24. Nor his rump,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/25_aharuda~Nmukho_naktaM_daxiNAmukho.md">
-<details open><summary><h2>२५ अहरुदङ्मुखो नक्तं दक्षिणामुखो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अहरुदङ्मुखो नक्तं दक्षिणामुखो
+</details>
+
+<details><summary>मूलम्</summary>
 
 अहरुदङ्मुखो नक्तं दक्षिणामुखो 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/25_aharuda~Nmukho_naktaM_daxiNAmukho.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 25. In the day-time with his face to the north, at night to the south.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/26_na_chApsu_shleShma.md">
-<details open><summary><h2>२६ न चाप्सु श्लेष्म ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न चाप्सु श्लेष्म न च समीपे २६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/26_na_chApsu_shleShma.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न चाप्सु श्लेष्म न च समीपे २६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 26. He shall not (eject) phlegm into water, nor in the neighbourhood (of water).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/27_na_vRxamArohen.md">
-<details open><summary><h2>२७ न वृक्षमारोहेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न वृक्षमारोहेन् २७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/27_na_vRxamArohen.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न वृक्षमारोहेन् २७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 27. He shall not climb up a tree.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/28_na_kUpamavexeta.md">
-<details open><summary><h2>२८ न कूपमवेक्षेत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न कूपमवेक्षेत २८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/28_na_kUpamavexeta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न कूपमवेक्षेत २८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 28. He shall not look down into a well.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/29_na_dhuvanaM_gachChen.md">
-<details open><summary><h2>२९ न धुवनं गच्छेन् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न धुवनं गच्छेन् २९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/29_na_dhuvanaM_gachChen.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न धुवनं गच्छेन् २९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 29. He shall not go to an execution-place,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/30_na_tveva_tu.md">
-<details open><summary><h2>३० न त्वेव तु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न त्वेव तु श्मशानं ३०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/30_na_tveva_tu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न त्वेव तु श्मशानं ३०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 30. And in no case to a cemetery.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/31_savastro-haraharAplaved.md">
-<details open><summary><h2>३१ सवस्त्रोऽहरहराप्लवेद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सवस्त्रोऽहरहराप्लवेद् ३१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/31_savastro-haraharAplaved.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सवस्त्रोऽहरहराप्लवेद् ३१
+</details>
+
+<details><summary>Oldenberg</summary>
 
 31. Let him bathe day by day with his clothes on.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/12/32_AplutyAvyudako-nyadvastramAchChAdayet.md">
-<details open><summary><h2>३२ आप्लुत्याव्युदकोऽन्यद्वस्त्रमाच्छादयेत् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आप्लुत्याव्युदकोऽन्यद्वस्त्रमाच्छादयेत् ३२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/12/32_AplutyAvyudako-nyadvastramAchChAdayet.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आप्लुत्याव्युदकोऽन्यद्वस्त्रमाच्छादयेत् ३२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 32. When he has bathed, let him put on another garment before he is dry.
 
 </details>
-</div>
