--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/14.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/14.md
@@ -2,68 +2,84 @@
 title = "१४"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/14/01_udakaM_tariShyansvastyayanaM_karoty.md">
-<details open><summary><h2>०१ उदकं तरिष्यन्स्वस्त्ययनं करोत्य् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+उदकं तरिष्यन्स्वस्त्ययनं करोत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 उदकं तरिष्यन्स्वस्त्ययनं करोत्य् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/14/01_udakaM_tariShyansvastyayanaM_karoty.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. When going to cross water, he performs the Svastyayana (ceremony for lucky progress).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/14/02_udakAnjalI.N_strInapsu_juhoti.md">
-<details open><summary><h2>०२ उदकाञ्जलीँ स्त्रीनप्सु जुहोति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदकाञ्जलीँ स्त्रीनप्सु जुहोति । समुद्रा य वैणवे नमो वरुणाय धर्मपतये नमो नमः सर्वाभ्यो नदीभ्यः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/14/02_udakAnjalI.N_strInapsu_juhoti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उदकाञ्जलीँ स्त्रीनप्सु जुहोति । समुद्रा य वैणवे नमो वरुणाय धर्मपतये नमो नमः सर्वाभ्यो नदीभ्यः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. He sacrifices thrice with his joined hands full of water into the waters, with the words, 'Adoration to the Sea, the child of the reed! Adoration to Varuṇa, the lord of righteousness! Adoration to all rivers!' - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/14/03_sarvAsAM_pitre_vishvakarmaNe.md">
-<details open><summary><h2>०३ सर्वासां पित्रे विश्वकर्मणे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सर्वासां पित्रे विश्वकर्मणे दत्तं हविर्जुषतामिति जपित्वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/14/03_sarvAsAM_pitre_vishvakarmaNe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सर्वासां पित्रे विश्वकर्मणे दत्तं हविर्जुषतामिति जपित्वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Murmuring, 'May Viśvakarman, the father of them all, relish the food offered.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/14/04_pratIpaM_sravantIbhya_unnIyam.md">
-<details open><summary><h2>०४ प्रतीपं स्रवन्तीभ्य उन्नीयम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रतीपं स्रवन्तीभ्य उन्नीयं स्थावराभ्यस् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/14/04_pratIpaM_sravantIbhya_unnIyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रतीपं स्रवन्तीभ्य उन्नीयं स्थावराभ्यस् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Against the stream for flowing (waters); up into the air for standing ones.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/14/05_tara.N_shchedbhayaM_shankedvAsiShTham.md">
-<details open><summary><h2>०५ तरँ श्चेद्भयं शङ्केद्वासिष्ठम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तरँ श्चेद्भयं शङ्केद्वासिष्ठं सूक्तं जपेत्समुद्र ज्येष्ठा इत्येतत्प्लवम् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/14/05_tara.N_shchedbhayaM_shankedvAsiShTham.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तरँ श्चेद्भयं शङ्केद्वासिष्ठं सूक्तं जपेत्समुद्र ज्येष्ठा इत्येतत्प्लवम् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. Should he while crossing apprehend any danger, let him murmur the hymn of Vasiṣṭha, 'The eldest of which is the sea' (Rig-veda VII, 49); this (will serve to him as) a boat.
 
 </details>
-</div>
