--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/16.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/16.md
@@ -2,70 +2,86 @@
 title = "१६"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/01_AshvayujyAM_paurNamAsyAmaindraH.md">
-<details open><summary><h2>०१ आश्वयुज्यां पौर्णमास्यामैन्द्रः ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+आश्वयुज्यां पौर्णमास्यामैन्द्रः
+</details>
+
+<details><summary>मूलम्</summary>
 
 आश्वयुज्यां पौर्णमास्यामैन्द्रः 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/01_AshvayujyAM_paurNamAsyAmaindraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. On the full moon day of Āśvayuja a milk-rice oblation to Indra.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/02_pAyaso-shvibhyAM_svAhAshvayugbhyAM_svAhAshvayuj.md">
-<details open><summary><h2>०२ पायसोऽश्विभ्यां स्वाहाश्वयुग्भ्यां स्वाहाश्वयुज्यै ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+पायसोऽश्विभ्यां स्वाहाश्वयुग्भ्यां स्वाहाश्वयुज्यै पौर्णमास्यै स्वाहा शरदे स्वाह पशुपतये स्वाहा पिङ्गलाय स्वाहेत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 पायसोऽश्विभ्यां स्वाहाश्वयुग्भ्यां स्वाहाश्वयुज्यै पौर्णमास्यै स्वाहा शरदे स्वाह पशुपतये स्वाहा पिङ्गलाय स्वाहेत्य् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/02_pAyaso-shvibhyAM_svAhAshvayugbhyAM_svAhAshvayuj.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2. Having sacrificed Ājya with (the words), 'To the two Aśvins svāhā! To the two Aśvayuj svāhā! To the full moon of Āśvayuja svāhā! To the autumn svāhā! To Paśupati svāhā! To the tawny one svāhā!' - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/03_Ajyasya_hutvAtha_pRShAtakasyA.md">
-<details open><summary><h2>०३ आज्यस्य हुत्वाथ पृषातकस्या ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आज्यस्य हुत्वाथ पृषातकस्या गावो अग्मन्नित्येतेन सूक्तेन प्रत्यृचं जुहुयान् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/03_Ajyasya_hutvAtha_pRShAtakasyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आज्यस्य हुत्वाथ पृषातकस्या गावो अग्मन्नित्येतेन सूक्तेन प्रत्यृचं जुहुयान् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^1] . He shall sacrifice a mixture of curds and butter with this hymn, 'The cows came hither' (Rig-veda VI, 28), verse by verse.
 
 [^1]:  16, 3. Ghṛtamiśraṃ dadhi pṛṣātakam. Nārāyaṇa. Comp. the Gṛhya-saṃgraha II, 59.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/04_mAtRbhirvatsAntsaMsRjanti_tAM_rAtrIm.md">
-<details open><summary><h2>०४ मातृभिर्वत्सान्त्संसृजन्ति तां रात्रीम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मातृभिर्वत्सान्त्संसृजन्ति तां रात्रीम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/04_mAtRbhirvatsAntsaMsRjanti_tAM_rAtrIm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मातृभिर्वत्सान्त्संसृजन्ति तां रात्रीम् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. That night they let the calves join their mothers.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/16/05_atha_brAhmaNabhojanam.md">
-<details open><summary><h2>०५ अथ ब्राह्मणभोजनम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ ब्राह्मणभोजनम् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/16/05_atha_brAhmaNabhojanam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ ब्राह्मणभोजनम् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. Then feeding of the Brāhmaṇas.
 
 </details>
-</div>
