--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/19.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/19.md
@@ -2,72 +2,88 @@
 title = "१९"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/19/01_chaitryAM_paurNamAsyAm.md">
-<details open><summary><h2>०१ चैत्र्यां पौर्णमास्याम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चैत्र्यां पौर्णमास्यां १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/19/01_chaitryAM_paurNamAsyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+चैत्र्यां पौर्णमास्यां १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. On the full moon day of Caitra,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/19/02_karkandhuparNAni_mithunAnAM_cha.md">
-<details open><summary><h2>०२ कर्कन्धुपर्णानि मिथुनानां च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कर्कन्धुपर्णानि मिथुनानां च यथोपपादं
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/19/02_karkandhuparNAni_mithunAnAM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कर्कन्धुपर्णानि मिथुनानां च यथोपपादं
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . (Taking) jujube leaves, and making of meal (images) of couples of animals as it happens.
 
 [^1]:  19, 2-5. Several points in the translation of these Sūtras are uncertain. See the extracts from the commentary of Nārāyaṇa, pp. 156 seq. of the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/19/03_piShTasya_kRtvaindrAgnas.md">
-<details open><summary><h2>०३ पिष्टस्य कृत्वैन्द्राग्नस् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पिष्टस्य कृत्वैन्द्राग्नस्
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/19/03_piShTasya_kRtvaindrAgnas.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पिष्टस्य कृत्वैन्द्राग्नस्
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. A figure with prominent navel to Indra and Agni.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/19/04_tuNDilo_raudrA_golakA.md">
-<details open><summary><h2>०४ तुण्डिलो रौद्रा गोलका ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तुण्डिलो रौद्रा गोलका ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/19/04_tuNDilo_raudrA_golakA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तुण्डिलो रौद्रा गोलका ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Balls to Rudra.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/19/05_lokato_naxatrANyanvAkRtayashcha_lokato.md">
-<details open><summary><h2>०५ लोकतो नक्षत्राण्यन्वाकृतयश्च लोकतो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लोकतो नक्षत्राण्यन्वाकृतयश्च लोकतो नक्षत्राण्यन्वाकृतयश्च ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/19/05_lokato_naxatrANyanvAkRtayashcha_lokato.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+लोकतो नक्षत्राण्यन्वाकृतयश्च लोकतो नक्षत्राण्यन्वाकृतयश्च ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. According to custom the Nakṣatras and (their?) images (?). According to custom the Nakṣatras and (their?) images (?).
 
 Here ends the Fourth Adhyāya.
 
 </details>
-</div>
