--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/01.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/01.md
@@ -2,131 +2,159 @@
 title = "०१"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/01_parishiShTam_atha_pravatsyannAtmannaraNyoH.md">
-<details open><summary><h2>०१ परिशिष्टम् अथ प्रवत्स्यन्नात्मन्नरण्योः ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+परिशिष्टम् अथ प्रवत्स्यन्नात्मन्नरण्योः समिधि वाग्निं समारोहयत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 परिशिष्टम् अथ प्रवत्स्यन्नात्मन्नरण्योः समिधि वाग्निं समारोहयत्य् 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/01_parishiShTam_atha_pravatsyannAtmannaraNyoH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now when he intends to set out on a journey, he makes (his sacred) fire enter into himself, (or) into the two kindling sticks, or into (an ordinary) log of wood,
 
 [^1]:  1, 1. The ceremony of Samārohaṇa, by which the duties towards the sacred fire are suspended, by causing the fire to 'enter' into the sacrificer's body, or into the two Araṇis, or into another piece of wood, is already mentioned in several passages of the Brāhmaṇa texts; comp. the quotations given by Professor Weber, Indische Studien, IX, 3r 1. Comp. besides Āśvalāyana-Śrauta-sūtra III 10; Sāṅkhāyana-Śraut. II, 17. The Samārohaṇa into the sacrificer's own body is done by warming the hands at the sacred fire; see Āśv., loc. cit., Sūtra 6. In the Sāṅkhāyana-Śrauta-sūtra the corresponding rule, which regards there of course the Āhitāgni, runs thus, 'If he performs the Samārohaṇa, he warms his hands at the Gārhapatya fire, and then touches his Prāṇas with the words, "Come, enter into my Prāṇas."' On the two other cases, see the Sūtras 3 and 4. Sūtras 2, 3, 5 are taken word for word from the Śrauta-sūtra.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/02_ehi_me_prANAnAroheti.md">
-<details open><summary><h2>०२ एहि मे प्राणानारोहेति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एहि मे प्राणानारोहेति सकृत्सकृन्मन्त्रेण द्विर्द्विस्तूष्णीम् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/02_ehi_me_prANAnAroheti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एहि मे प्राणानारोहेति सकृत्सकृन्मन्त्रेण द्विर्द्विस्तूष्णीम् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . Once with (the text), 'Come, enter into my Prāṇas,' twice silently.
 
 [^2]:  This Sūtra refers only to the case where he causes the fire to enter into himself.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/03_ayaM_te_yoniriti.md">
-<details open><summary><h2>०३ अयं ते योनिरिति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयं ते योनिरिति वारणी प्रतितपति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/03_ayaM_te_yoniriti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अयं ते योनिरिति वारणी प्रतितपति ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Or with (the verse), 'This is thy womb' (Rig-veda III, 29, to) he warms the two kindling sticks,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/04_samidhaM_vA.md">
-<details open><summary><h2>०४ समिधं वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+समिधं वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 समिधं वा 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/04_samidhaM_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. Or an (ordinary log of) wood.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/05_anastamite_cha_manthanam.md">
-<details open><summary><h2>०५ अनस्तमिते च मन्थनम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनस्तमिते च मन्थनं ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/05_anastamite_cha_manthanam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनस्तमिते च मन्थनं ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . And before sunset the kindling (by attrition),
 
 [^3]:  Comp. the commentary on Āśv.-Śraut., loc. cit. 8. He makes the fire redescend from his body or from the Araṇis by performing the Manthana (kindling the fire by attrition of the Araṇis).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/06_vaishvadevakAle_cha.md">
-<details open><summary><h2>०६ वैश्वदेवकाले च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वैश्वदेवकाले च
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/06_vaishvadevakAle_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वैश्वदेवकाले च
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. And at the time of the Vaiśvadeva sacrifice.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/07_upalipta_uddhatAvoxite.md">
-<details open><summary><h2>०७ उपलिप्त उद्धतावोक्षिते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपलिप्त उद्धतावोक्षिते लौकिकमग्निमाहृत्योपावरोहेत्युपावरोहणम् ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/07_upalipta_uddhatAvoxite.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उपलिप्त उद्धतावोक्षिते लौकिकमग्निमाहृत्योपावरोहेत्युपावरोहणम् ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7 [^4] . Having carried a common fire to a place that has been smeared (with cowdung), which is elevated, and which has been sprinkled (with water), he makes (the sacred fire) redescend (from its receptacle, with the formula), 'Redescend!'
 
 [^4]:  The Mantra alluded to here is given in the Śrauta-sūtra. It p. 134 runs thus, 'Redescend, O Jātavedas; carry again offerings to the gods, knowing us. Long life, offspring, wealth bestow on us; uninjured shine in our dwelling!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/08_anugate-gnau_sarvaprAyashchittAhutI_hutvA.md">
-<details open><summary><h2>०८ अनुगतेऽग्नौ सर्वप्रायश्चित्ताहुती हुत्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनुगतेऽग्नौ सर्वप्रायश्चित्ताहुती हुत्वा पाहि नो अग्न एधसे स्वाहा पाहि नो विश्ववेदसे स्वाहा यज्ञं पाहि विभावसो स्वाहा सर्वं पाहि शतक्रतो स्वाहेति ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/08_anugate-gnau_sarvaprAyashchittAhutI_hutvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनुगतेऽग्नौ सर्वप्रायश्चित्ताहुती हुत्वा पाहि नो अग्न एधसे स्वाहा पाहि नो विश्ववेदसे स्वाहा यज्ञं पाहि विभावसो स्वाहा सर्वं पाहि शतक्रतो स्वाहेति ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^5] . If the fire goes out, he sacrifices the two Sarvaprāyaścitta oblations (oblations for general expiation) and (other oblations) with (the formulas), 'Protect us, Agni, that we may prosper. Svāhā! Protect us that we may obtain all wealth. Svāhā! The sacrifice protect, O resplendent one! Svāhā! Protect everything, O hundredfold wise one. Svāhā!'
 
 [^5]:  These Sūtras stand in no connection with the Samārohaṇa treated of before.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/01/09_vratahAnA_upoShyAjyasya_hutvA.md">
-<details open><summary><h2>०९ व्रतहाना उपोष्याज्यस्य हुत्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्रतहाना उपोष्याज्यस्य हुत्वा त्वमग्ने व्रतपा इति ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/01/09_vratahAnA_upoShyAjyasya_hutvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+व्रतहाना उपोष्याज्यस्य हुत्वा त्वमग्ने व्रतपा इति ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. In the case of a breach of his vow let him fast and sacrifice (an oblation) of Ājya with (the verse), 'Thou, Agni, art the lord of the vow' (Rig-veda VIII, 11, 1).
 
 </details>
-</div>
