--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/02.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/02.md
@@ -2,124 +2,152 @@
 title = "०२"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/01_atha_puShkariNIkUpataDAgAnAm.md">
-<details open><summary><h2>०१ अथ पुष्करिणीकूपतडागानाम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ पुष्करिणीकूपतडागानां १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/01_atha_puShkariNIkUpataDAgAnAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ पुष्करिणीकूपतडागानां १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now about (the consecration of) ponds, wells, and tanks.
 
 [^1]:  2, 1 seq. Comp. Āśvalāyana-Pariśiṣṭa IV, 9.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/02_shuddhapaxe_puNye_vA.md">
-<details open><summary><h2>०२ शुद्धपक्षे पुण्ये वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शुद्धपक्षे पुण्ये वा तिथौ २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/02_shuddhapaxe_puNye_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शुद्धपक्षे पुण्ये वा तिथौ २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. In the bright fortnight, or on an auspicious Tithi,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/03_payasA_yavamayaM_charum.md">
-<details open><summary><h2>०३ पयसा यवमयं चरुम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पयसा यवमयं चरुं श्रपयित्वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/03_payasA_yavamayaM_charum.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पयसा यवमयं चरुं श्रपयित्वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Having cooked barley-grains with milk,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/04_tvaM_no_agna.md">
-<details open><summary><h2>०४ त्वं नो अग्न ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्वं नो अग्न इति द्वाभ्यामव ते हेळ इमं मे वरुणोदुत्तमं वरुणेमां धियं शिक्षमाणस्य ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/04_tvaM_no_agna.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्वं नो अग्न इति द्वाभ्यामव ते हेळ इमं मे वरुणोदुत्तमं वरुणेमां धियं शिक्षमाणस्य ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. He shall sacrifice with the two (verses), 'Thou hast us, Agni' (Rig-veda IV, 1, 4. 5), (and with the verses), 'We propitiate thy wrath' (I, 24, 14), 'This my prayer, Varuṇa' (I, 25, 19), 'Loosen the highest, Varuṇa' (I, 24, 15), 'This prayer of the man who exercises himself' (VIII, 42, 3),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/05_gRhyo-pagRhyo_mayobhUrAkharo_nikharo.md">
-<details open><summary><h2>०५ गृह्योऽपगृह्यो मयोभूराखरो निखरो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृह्योऽपगृह्यो मयोभूराखरो निखरो निःसरो निकामः सपत्नदूषण इति वारुण्या दिक्प्रभृति प्रदक्षिणं जुहुयान् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/05_gRhyo-pagRhyo_mayobhUrAkharo_nikharo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गृह्योऽपगृह्यो मयोभूराखरो निखरो निःसरो निकामः सपत्नदूषण इति वारुण्या दिक्प्रभृति प्रदक्षिणं जुहुयान् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . (And with the words), 'The domestic one, he who goes away from the house, the refreshing one, he who goes into the kennel, he who dwells in the kennel, he who comes out of it, the greedy one, the destroyer of enemies' - to the different directions (of the horizon), beginning with that belonging to Varuṇa (i.e. the west), from left to right.
 
 [^2]:  These are names of Agni dwelling in the waters; see Pāraskara II, 6, 10; Mantrabrāhmaṇa I, 7, 1. Several of the names are here misspelled; thus Gṛhya, Apagṛhya should be, no doubt, Gohya, Upagohya, which is the reading given in Pāraskara, loc. cit.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/06_madhye_payasA_juhoti.md">
-<details open><summary><h2>०६ मध्ये पयसा जुहोति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मध्ये पयसा जुहोति विश्वतश्चक्षुरिदं विष्णुरिति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/06_madhye_payasA_juhoti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मध्ये पयसा जुहोति विश्वतश्चक्षुरिदं विष्णुरिति ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. in the centre he makes oblations with milk with (the verses), 'Having eyes all around' (Rig-veda X, 81, 3), 'This has Viṣṇu' (Rig-veda I, 22, 17),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/07_yatkiM_chedamiti_majjayitvA.md">
-<details open><summary><h2>०७ यत्किं चेदमिति मज्जयित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यत्किं चेदमिति मज्जयित्वा ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/07_yatkiM_chedamiti_majjayitvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यत्किं चेदमिति मज्जयित्वा ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Plunging (into the water) with (the verse), 'Whatever here' (Rig-veda VII, 89, 5).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/08_dhenurdaxiNA_vastrayugmaM_cha.md">
-<details open><summary><h2>०८ धेनुर्दक्षिणा वस्त्रयुग्मं च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धेनुर्दक्षिणा वस्त्रयुग्मं च
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/08_dhenurdaxiNA_vastrayugmaM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+धेनुर्दक्षिणा वस्त्रयुग्मं च
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. A cow and a pair of clothes is the fee for the sacrifice.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/02/09_ato_brAhmaNabhojanam.md">
-<details open><summary><h2>०९ अतो ब्राह्मणभोजनम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अतो ब्राह्मणभोजनम् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/02/09_ato_brAhmaNabhojanam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अतो ब्राह्मणभोजनम् ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. Then feeding of the Brāhmaṇas.
 
 </details>
-</div>
