--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/04.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/04.md
@@ -2,83 +2,102 @@
 title = "०४"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/01_yadi_pArvaNastvakRto-nyatarastatashcharur.md">
-<details open><summary><h2>०१ यदि पार्वणस्त्वकृतोऽन्यतरस्ततश्चरुर् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+यदि पार्वणस्त्वकृतोऽन्यतरस्ततश्चरुर्
+</details>
+
+<details><summary>मूलम्</summary>
 
 यदि पार्वणस्त्वकृतोऽन्यतरस्ततश्चरुर् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/01_yadi_pArvaNastvakRto-nyatarastatashcharur.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. Now if a half-monthly sacrifice has not been performed, one or the other of them, then a mess of rice (is to be offered as an expiation),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/02_agnaye_vaishvAnarAya_svAhAgnaye.md">
-<details open><summary><h2>०२ अग्नये वैश्वानराय स्वाहाग्नये ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्नये वैश्वानराय स्वाहाग्नये तन्तुमते स्वाहेति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/02_agnaye_vaishvAnarAya_svAhAgnaye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्नये वैश्वानराय स्वाहाग्नये तन्तुमते स्वाहेति २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. With (the words), 'To Agni Vaiśvānara svāhā! To Agni Tantumat svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/03_homAtikrame.md">
-<details open><summary><h2>०३ होमातिक्रमे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 होमातिक्रमे ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/03_homAtikrame.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+होमातिक्रमे ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. In the case of an intermission of the (morning or evening) oblations - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/04_sAyaM_doShAvastarnamaH_svAhA.md">
-<details open><summary><h2>०४ सायं दोषावस्तर्नमः स्वाहा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सायं दोषावस्तर्नमः स्वाहा ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/04_sAyaM_doShAvastarnamaH_svAhA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सायं दोषावस्तर्नमः स्वाहा ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. (He shall make expiatory oblations), in the evening with (the formula), 'Enlightener of the darkness, adoration! Svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/05_prAtaH_prAtarvastarnamaH_svAheti.md">
-<details open><summary><h2>०५ प्रातः प्रातर्वस्तर्नमः स्वाहेति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रातः प्रातर्वस्तर्नमः स्वाहेति ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/05_prAtaH_prAtarvastarnamaH_svAheti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रातः प्रातर्वस्तर्नमः स्वाहेति ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. In the morning with (the formula), 'Enlightener of the morning, adoration! Svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/04/06_yAvanto_homAstAvatIrhutvA_pUrvavaddhomaH.md">
-<details open><summary><h2>०६ यावन्तो होमास्तावतीर्हुत्वा पूर्ववद्धोमः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यावन्तो होमास्तावतीर्हुत्वा पूर्ववद्धोमः ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/04/06_yAvanto_homAstAvatIrhutvA_pUrvavaddhomaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यावन्तो होमास्तावतीर्हुत्वा पूर्ववद्धोमः ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^1] . After he has sacrificed as many oblations as there had been sacrifices (left out), the sacrifice (itself goes on) as (stated) above.
 
 [^1]:  4, 6. Nārāyaṇa: 'After he has thus taken and sacrificed as many Sruvas full of Ājya as there were sacrifices omitted through his guilt, the morning and evening sacrifices have to be performed as (stated) above (I, 3, 10) with oblations of rice or barley.'
 
 </details>
-</div>
