--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/05.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/05.md
@@ -2,173 +2,213 @@
 title = "०५"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/01_kapotolUkAbhyAmupaveshane.md">
-<details open><summary><h2>०१ कपोतोलूकाभ्यामुपवेशने ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कपोतोलूकाभ्यामुपवेशने १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/01_kapotolUkAbhyAmupaveshane.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कपोतोलूकाभ्यामुपवेशने १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. If a dove or an owl sits down (on his house),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/02_devAH_kapota_iti.md">
-<details open><summary><h2>०२ देवाः कपोत इति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 देवाः कपोत इति प्रत्यृचं जुहुयाद् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/02_devAH_kapota_iti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+देवाः कपोत इति प्रत्यृचं जुहुयाद् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. Let him sacrifice with (the hymn), 'O gods, the dove' (Rig-veda X, 165), verse by verse.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/03_duHsvapnadarshane_chAriShTadarshane_cha.md">
-<details open><summary><h2>०३ दुःस्वप्नदर्शने चारिष्टदर्शने च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दुःस्वप्नदर्शने चारिष्टदर्शने च ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/03_duHsvapnadarshane_chAriShTadarshane_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दुःस्वप्नदर्शने चारिष्टदर्शने च ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. If he has seen a bad dream or an occurrence boding misfortune,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/04_nishAyAM_kAkashabdakrAnte_cha.md">
-<details open><summary><h2>०४ निशायां काकशब्दक्रान्ते च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निशायां काकशब्दक्रान्ते च
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/04_nishAyAM_kAkashabdakrAnte_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+निशायां काकशब्दक्रान्ते च
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Or when the cawing of a crow is heard in (the dead of) night,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/05_anyeShu_chAdbhuteShu_cha.md">
-<details open><summary><h2>०५ अन्येषु चाद्भुतेषु च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्येषु चाद्भुतेषु च ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/05_anyeShu_chAdbhuteShu_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अन्येषु चाद्भुतेषु च ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. And in the case of other prodigies,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/06_payasA_charuM_shrapayitvA.md">
-<details open><summary><h2>०६ पयसा चरुं श्रपयित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पयसा चरुं श्रपयित्वा ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/06_payasA_charuM_shrapayitvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पयसा चरुं श्रपयित्वा ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Let him cook rice-grains with milk,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/07_sarUpavatsAyA_goH_payasi.md">
-<details open><summary><h2>०७ सरूपवत्साया गोः पयसि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+सरूपवत्साया गोः पयसि ७
+</details>
+
+<details><summary>मूलम्</summary>
 
 सरूपवत्साया गोः पयसि ७
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/07_sarUpavatsAyA_goH_payasi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. With the milk of a cow that has a calf of the same colour (with her own),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/08_na_tveva_tu.md">
-<details open><summary><h2>०८ न त्वेव तु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न त्वेव तु कृष्णाया ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/08_na_tveva_tu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न त्वेव तु कृष्णाया ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. But in no case of a black (cow),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/09_rAtrIsUktena_pratyRchaM_juhuyAd.md">
-<details open><summary><h2>०९ रात्रीसूक्तेन प्रत्यृचं जुहुयाद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रात्रीसूक्तेन प्रत्यृचं जुहुयाद् ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/09_rAtrIsUktena_pratyRchaM_juhuyAd.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+रात्रीसूक्तेन प्रत्यृचं जुहुयाद् ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. And let him sacrifice with the night-hymn (Rig-veda X, 127), verse by verse.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/10_hutasheShaM_mahAvyAhRtibhiH_prAshya.md">
-<details open><summary><h2>१० हुतशेषं महाव्याहृतिभिः प्राश्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हुतशेषं महाव्याहृतिभिः प्राश्य १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/10_hutasheShaM_mahAvyAhRtibhiH_prAshya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+हुतशेषं महाव्याहृतिभिः प्राश्य १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. Having eaten the remnants of those oblations with the Mahāvyāhṛtis,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/11_bhadraM_karNebhiriti_karNau.md">
-<details open><summary><h2>११ भद्रं कर्णेभिरिति कर्णौ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भद्रं कर्णेभिरिति कर्णौ ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/11_bhadraM_karNebhiriti_karNau.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+भद्रं कर्णेभिरिति कर्णौ ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. And having recited over his ears (the verse), 'Blessing with our ears' (Rig-veda I, 89, 8),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/12_shataminnu_sharado_anti.md">
-<details open><summary><h2>१२ शतमिन्नु शरदो अन्ति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शतमिन्नु शरदो अन्ति देवा इत्यात्मानमभिमन्त्र्य १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/12_shataminnu_sharado_anti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शतमिन्नु शरदो अन्ति देवा इत्यात्मानमभिमन्त्र्य १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. And over himself (the verse), 'May a hundred autumns be before us, ye gods' (ibid. 9),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/05/13_brAhmaNebhyaH_kinchiddadyAt.md">
-<details open><summary><h2>१३ ब्राह्मणेभ्यः किञ्चिद्दद्यात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्राह्मणेभ्यः किञ्चिद्दद्यात् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/05/13_brAhmaNebhyaH_kinchiddadyAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ब्राह्मणेभ्यः किञ्चिद्दद्यात् १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. He shall give something to the Brāhmaṇas.
 
 </details>
-</div>
