--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/06.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/06.md
@@ -2,29 +2,36 @@
 title = "०६"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/06/01_vyAdhau_samutthita.md">
-<details open><summary><h2>०१ व्याधौ समुत्थित ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 व्याधौ समुत्थित १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/06/01_vyAdhau_samutthita.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+व्याधौ समुत्थित १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. When a disease has befallen him,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/06/02_imA_rudrA_ya.md">
-<details open><summary><h2>०२ इमा रुद्रा य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इमा रुद्रा य तवसे कपर्दिन इति प्रत्यृचं गावेधुकं चरुं जुहुयात् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/06/02_imA_rudrA_ya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इमा रुद्रा य तवसे कपर्दिन इति प्रत्यृचं गावेधुकं चरुं जुहुयात् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. Let him offer boiled rice-grains with Gavedhukā-grass with (the hymn), 'These (prayers) to Rudra, the strong one, with braided hair' (Rig-veda I, 114), verse by verse.
 
 </details>
-</div>
