--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/09.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/09.md
@@ -2,57 +2,71 @@
 title = "०९"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/09/01_atha_sapiNDIkaraNam.md">
-<details open><summary><h2>०१ अथ सपिण्डीकरणम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ सपिण्डीकरणं १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/09/01_atha_sapiNDIkaraNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ सपिण्डीकरणं १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now (follows) the Sapiṇḍīkaraṇa.
 
 [^1]:  9, 1 seqq. Comp. above, IV, 3 and the notes there.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/09/02_chatvAryudapAtrANi_pUrayitvA_pituH.md">
-<details open><summary><h2>०२ चत्वार्युदपात्राणि पूरयित्वा पितुः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चत्वार्युदपात्राणि पूरयित्वा पितुः प्रभृति २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/09/02_chatvAryudapAtrANi_pUrayitvA_pituH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+चत्वार्युदपात्राणि पूरयित्वा पितुः प्रभृति २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . Let him fill four water-pots (for the Manes) from the father upwards,
 
 [^2]:  On these four vessels, see IV, 3, 4 seq.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/09/03_tadvatpiNDAnkalpayitvA.md">
-<details open><summary><h2>०३ तद्वत्पिण्डान्कल्पयित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तद्वत्पिण्डान्कल्पयित्वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/09/03_tadvatpiNDAnkalpayitvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तद्वत्पिण्डान्कल्पयित्वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. And prepare in the same way lumps (of flour),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/09/04_ye_samAnAH_samanasaH.md">
-<details open><summary><h2>०४ ये समानाः समनसः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ये समानाः समनसः पितरो यमराज्ये तेषां लोकः स्वधा नमो यज्ञो देवेषु कल्पतां ये समानाः समनसो जीवा जीवेषु मामकाः तेषां श्रीर्मयि कल्पतामस्मिँ लोके शतं समाः समानो मन्त्र इति द्वाभ्यामाद्यं पिण्डं त्रिषु विभजेत् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/09/04_ye_samAnAH_samanasaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ये समानाः समनसः पितरो यमराज्ये तेषां लोकः स्वधा नमो यज्ञो देवेषु कल्पतां ये समानाः समनसो जीवा जीवेषु मामकाः तेषां श्रीर्मयि कल्पतामस्मिँ लोके शतं समाः समानो मन्त्र इति द्वाभ्यामाद्यं पिण्डं त्रिषु विभजेत् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. And let him distribute the first lump on the (other) three with (the verses), They who commonly, concordantly (dwell) in Yama's realm, the fathers: for them be space, freedom, adoration, sacrifice established among the gods.
 
@@ -61,32 +75,37 @@ title = "०९"
 And with the two (verses), 'Equal the design' (Rig-veda X, 191, 3. 4).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/09/05_tathaivArghapAtrANi.md">
-<details open><summary><h2>०५ तथैवार्घपात्राणि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तथैवार्घपात्राणि ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/09/05_tathaivArghapAtrANi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तथैवार्घपात्राणि ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^3] . In the same way the vessels with Argha water.
 
 [^3]:  These are the vessels mentioned in the second Sūtra.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/09/06_evaM_mAturbhrAturbhAryAyAH_pUrvamAriNyA.md">
-<details open><summary><h2>०६ एवं मातुर्भ्रातुर्भार्यायाः पूर्वमारिण्या ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं मातुर्भ्रातुर्भार्यायाः पूर्वमारिण्या एभिः पिण्डैः प्रक्षिप्य ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/09/06_evaM_mAturbhrAturbhAryAyAH_pUrvamAriNyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एवं मातुर्भ्रातुर्भार्यायाः पूर्वमारिण्या एभिः पिण्डैः प्रक्षिप्य ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. In the same way for the mother, for a brother, and for a wife that has died before (her husband), adding (the lump belonging to that person) to those (other) lumps.
 
 </details>
-</div>
