--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/11.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/11.md
@@ -2,29 +2,37 @@
 title = "११"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/11/01_yadi_gRhe_valmIkasambhUtirgRhotsargaH.md">
-<details open><summary><h2>०१ यदि गृहे वल्मीकसम्भूतिर्गृहोत्सर्गः ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+यदि गृहे वल्मीकसम्भूतिर्गृहोत्सर्गः
+</details>
+
+<details><summary>मूलम्</summary>
 
 यदि गृहे वल्मीकसम्भूतिर्गृहोत्सर्गः
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/11/01_yadi_gRhe_valmIkasambhUtirgRhotsargaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. If an anthill arises in his house, the house should be abandoned.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/11/02_atha_trirAtramupoShya_mahAshAntim.md">
-<details open><summary><h2>०२ अथ त्रिरात्रमुपोष्य महाशान्तिम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अथ त्रिरात्रमुपोष्य महाशान्तिं कुर्यान्महाशान्तिं कुर्यात् ११
+</details>
+
+<details><summary>मूलम्</summary>
 
 अथ त्रिरात्रमुपोष्य महाशान्तिं कुर्यान्महाशान्तिं कुर्यात् ११
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/11/02_atha_trirAtramupoShya_mahAshAntim.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . Then, after having fasted three nights (and days), he should perform the great expiation.
 
@@ -33,4 +41,3 @@ title = "११"
 Here ends the Fifth Adhyāya.
 
 </details>
-</div>
