--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/6/01.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/6/01.md
@@ -2,183 +2,223 @@
 title = "०१"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/01_athAto_brahmANaM_brahmaRShim.md">
-<details open><summary><h2>०१ अथातो ब्रह्माणं ब्रह्मऋषिम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अथातो ब्रह्माणं ब्रह्मऋषिं ब्रह्मयोनिमिन्द्रं प्रजापतिं वसिष्ठं वामदेवं कहोलं कौषीतकिं महाकौषीतकिं सुयज्ञं शाङ्खायनमाश्वलायनमैतरेयं महैतरेयं कात्यायनं शाट्यायनं शाकल्यं बभ्रुं बाभ्रव्यं मण्डुं माण्डव्यं सर्वानेव पूर्वाचार्यान्नमस्य स्वाध्यायारण्यकस्य नियमानुदाहरिष्यामः
+</details>
+
+<details><summary>मूलम्</summary>
 
 अथातो ब्रह्माणं ब्रह्मऋषिं ब्रह्मयोनिमिन्द्रं प्रजापतिं वसिष्ठं वामदेवं कहोलं कौषीतकिं महाकौषीतकिं सुयज्ञं शाङ्खायनमाश्वलायनमैतरेयं महैतरेयं कात्यायनं शाट्यायनं शाकल्यं बभ्रुं बाभ्रव्यं मण्डुं माण्डव्यं सर्वानेव पूर्वाचार्यान्नमस्य स्वाध्यायारण्यकस्य नियमानुदाहरिष्यामः
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/01_athAto_brahmANaM_brahmaRShim.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1 [^fn_319]. Now, after having paid reverence to Brahman, to the Brahmar̥shi, to (those who descend from) Brahman's womb, to Indra, Prajāpati, Vasishṭḥa, Vāmadeva, Kahola Kaushītaki, Mahākaushītaki, Suyajña Śāṅkhāyana, Āśvalāyana, Aitareya, Mahaitareya, Kātyāyana, Śāṭyāyana, Śākalya, Babhru, Bābhravya, Maṇḍu, Māṇḍavya, and to all the teachers of the past, we will henceforth explain the rules for the Āraṇyaka as forming the subject of Svādhyāya (private recitation of a text).
 
 [^fn_319]: 1, 1 seqq. Comp. the general remarks on this sixth book in the Introduction, .
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/02_ahorAtraM_brahmacharyamupetyAchAryo-mA.NsAshy.md">
-<details open><summary><h2>०२ अहोरात्रं ब्रह्मचर्यमुपेत्याचार्योऽमाँसाश्य् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अहोरात्रं ब्रह्मचर्यमुपेत्याचार्योऽमाँसाश्य्
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/02_ahorAtraM_brahmacharyamupetyAchAryo-mA.NsAshy.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अहोरात्रं ब्रह्मचर्यमुपेत्याचार्योऽमाँसाश्य्
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^fn_322]. Especially the Śakvarī verses (are concerned by what has been declared). Such are the rules.
 
 [^fn_322]: 2, 2. It seems to me that this Sūtra should be divided into two (after śakvaryaḥ), so that the words iti niyamāḥ would correspond to iti bhāshikam, chap. 2, 13.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/03_AmapishitaM_chaNDAlaM_sUtikAm.md">
-<details open><summary><h2>०३ आमपिशितं चण्डालं सूतिकाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आमपिशितं चण्डालं सूतिकां रजस्वलां तेदन्यपहस्तकदर्शनान्यनध्यायकानि ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/03_AmapishitaM_chaNDAlaM_sUtikAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आमपिशितं चण्डालं सूतिकां रजस्वलां तेदन्यपहस्तकदर्शनान्यनध्यायकानि ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^fn_321]. Raw flesh, a Caṇḍāla, a woman that has lately been confined, or that has her courses, seeing blood or persons whose hands have been cut off: (these persons and things he shall know form) impediments for the study.
 
 [^fn_321]: Comp. II, 12, 10, and the note of Nārāyaṇa, p. 160 of the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/04_shavarUpANAM_cha.md">
-<details open><summary><h2>०४ शवरूपाणां च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शवरूपाणां च ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/04_shavarUpANAM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शवरूपाणां च ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. And of the corpse-like (animals?).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/05_yAnyAsyena_pravisheyur.md">
-<details open><summary><h2>०५ यान्यास्येन प्रविशेयुर् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+यान्यास्येन प्रविशेयुर्
+</details>
+
+<details><summary>मूलम्</summary>
 
 यान्यास्येन प्रविशेयुर् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/05_yAnyAsyena_pravisheyur.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. Those which enter (their dens?) with the mouth first (?).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/06_vAntakRtashmashrukarma.md">
-<details open><summary><h2>०६ वान्तकृतश्मश्रुकर्म ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वान्तकृतश्मश्रुकर्म ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/06_vAntakRtashmashrukarma.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वान्तकृतश्मश्रुकर्म ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^fn_323]. When he has vomited, or when his beard has been shaved,
 
 [^fn_323]: Comp. IV, 7, 42. See also Ait. Âranyaka V, 3, 9.
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/07_mA.NsAshanashrAddhasUtakabhojaneShu.md">
-<details open><summary><h2>०७ माँसाशनश्राद्धसूतकभोजनेषु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 माँसाशनश्राद्धसूतकभोजनेषु ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/07_mA.NsAshanashrAddhasUtakabhojaneShu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+माँसाशनश्राद्धसूतकभोजनेषु ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7 [^fn_324]. When he has eaten flesh or partaken of a Śrāddha or birth dinner,
 
 [^fn_324]: Comp. IV, 7, 5.
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/08_grAmAdhyayanAnantarhitAnyahAni.md">
-<details open><summary><h2>०८ ग्रामाध्ययनानन्तर्हितान्यहानि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ग्रामाध्ययनानन्तर्हितान्यहानि ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/08_grAmAdhyayanAnantarhitAnyahAni.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ग्रामाध्ययनानन्तर्हितान्यहानि ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. During the days that immediately follow on (days of) study in the village,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/09_trirAtro-navakLLiptaH.md">
-<details open><summary><h2>०९ त्रिरात्रोऽनवकॢप्तः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रिरात्रोऽनवकॢप्तः ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/09_trirAtro-navakLLiptaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्रिरात्रोऽनवकॢप्तः ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. Three nights (and days), if (he has been) put out of order,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/10_parAbhimRShTa.md">
-<details open><summary><h2>१० पराभिमृष्ट ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पराभिमृष्ट १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/10_parAbhimRShTa.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पराभिमृष्ट १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. (Or has been violently) seized by others,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/11_upaparvaNAmahna_uttarArdhAni_cha.md">
-<details open><summary><h2>११ उपपर्वणामह्न उत्तरार्धानि च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+उपपर्वणामह्न उत्तरार्धानि च
+</details>
+
+<details><summary>मूलम्</summary>
 
 उपपर्वणामह्न उत्तरार्धानि च
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/11_upaparvaNAmahna_uttarArdhAni_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. And during the second half of the days that precede (?) the Parvan days,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/12_agnividyutstanayitnuvarShAmahAbhraprAdurbhAvAch.md">
-<details open><summary><h2>१२ अग्निविद्युत्स्तनयित्नुवर्षामहाभ्रप्रादुर्भावाच्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अग्निविद्युत्स्तनयित्नुवर्षामहाभ्रप्रादुर्भावाच्च १२
+</details>
+
+<details><summary>मूलम्</summary>
 
 अग्निविद्युत्स्तनयित्नुवर्षामहाभ्रप्रादुर्भावाच्च १२
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/12_agnividyutstanayitnuvarShAmahAbhraprAdurbhAvAch.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 12. And if fire-flames, lightning, thunder, (heavy) rains, and great clouds appear,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/01/13_vAte_cha_sharkarAkarShiNi.md">
-<details open><summary><h2>13 वाते च शर्कराकर्षिणि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वाते च शर्कराकर्षिणि यावत्कालम् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/01/13_vAte_cha_sharkarAkarShiNi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वाते च शर्कराकर्षिणि यावत्कालम् १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. And if a storm (blows) that carries away pebbles, as long as that lasts.
 
 </details>
-</div>
