--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/6/02.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/6/02.md
@@ -2,182 +2,222 @@
 title = "०२"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/01_UrdhvamAShADhyAshchaturo_mAsAnnAdhIyItAtyantam.md">
-<details open><summary><h2>०१ ऊर्ध्वमाषाढ्याश्चतुरो मासान्नाधीयीतात्यन्तम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऊर्ध्वमाषाढ्याश्चतुरो मासान्नाधीयीतात्यन्तं शक्वर्य इति नियमाः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/01_UrdhvamAShADhyAshchaturo_mAsAnnAdhIyItAtyantam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ऊर्ध्वमाषाढ्याश्चतुरो मासान्नाधीयीतात्यन्तं शक्वर्य इति नियमाः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. During four months after the full moon of Âshâdha let him not study.
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/02_shakvarya_iti_niyamAH.md">
-<details open><summary><h2>०२ शक्वर्य इति नियमाः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शक्वर्य इति नियमाः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/02_shakvarya_iti_niyamAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शक्वर्य इति नियमाः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^4] . Especially the Śakvarī verses (are concerned by what has been declared). Such are the rules.
 
 [^4]:  2, 2. It seems to me that this Sūtra should be divided into two (after śakvaryaḥ), so that the words iti niyamāḥ would correspond to iti bhāṣikam, chap. 2, 13.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/03_prAgjyotiShamaparAjitAyAM_dishi_puNyamupagamya.md">
-<details open><summary><h2>०३ प्राग्ज्योतिषमपराजितायां दिशि पुण्यमुपगम्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्राग्ज्योतिषमपराजितायां दिशि पुण्यमुपगम्य देशम् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/03_prAgjyotiShamaparAjitAyAM_dishi_puNyamupagamya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्राग्ज्योतिषमपराजितायां दिशि पुण्यमुपगम्य देशम् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^1] . Let them go to a clean spot in the north-eastern direction, that receives its light from the east.
 
 [^1]:  Comp. II, 12, 11. Perhaps the Petersburg Dictionary is right in proposing for prāgjyotiṣam the translation, vor Anbruch des Lichtes. Nārāyaṇa says, prāk purastāt jyotir yasmin tam . . . pradeśam.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/04_anudita_udakagrahaNam.md">
-<details open><summary><h2>०४ अनुदित उदकग्रहणम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनुदित उदकग्रहणं ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/04_anudita_udakagrahaNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनुदित उदकग्रहणं ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. The drawing of water (should be done) before sunrise,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/05_maNDalapraveshashchAnjanagandhimityetayarchA.md">
-<details open><summary><h2>०५ मण्डलप्रवेशश्चाञ्जनगन्धिमित्येतयर्चा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मण्डलप्रवेशश्चाञ्जनगन्धिमित्येतयर्चा ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/05_maNDalapraveshashchAnjanagandhimityetayarchA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मण्डलप्रवेशश्चाञ्जनगन्धिमित्येतयर्चा ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . And the entering into the circle with this verse, 'She who smells of salve' (Rig-veda X, 146, 6).
 
 [^2]:  The Maṇḍala is a circular space marked by a line of water.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/06_maNDalaM_tu_prAgdvAramudagdvAram.md">
-<details open><summary><h2>०६ मण्डलं तु प्राग्द्वारमुदग्द्वारम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मण्डलं तु प्राग्द्वारमुदग्द्वारं वाजनाग्रीयमसम्प्रमाणमसम्बाधम् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/06_maNDalaM_tu_prAgdvAramudagdvAram.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मण्डलं तु प्राग्द्वारमुदग्द्वारं वाजनाग्रीयमसम्प्रमाणमसम्बाधम् ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^3] . The circle should have its entrance to the east or to the north; it should be (praised as) excellent among the people, not too spacious, not too narrow.
 
 [^3]:  I am doubtful whether we should read vā janāgrīyam and translate as I have done in accordance with the note of Nārāyaṇa, or if the reading should be vāऽjanāgrīyam, 'not in the presence of people,' so that janāgriya would mean janānām agre.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/07_AvAmadevyamuttarashAntiH.md">
-<details open><summary><h2>०७ आवामदेव्यमुत्तरशान्तिः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आवामदेव्यमुत्तरशान्तिः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/07_AvAmadevyamuttarashAntiH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आवामदेव्यमुत्तरशान्तिः ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7 [^4] . The final expiation (should extend) to the Vāmadevya.
 
 [^4]:  On the expiation (śānti) comp. chap. 3, 12.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/08_punaHprAdhyeShaNaM_cha.md">
-<details open><summary><h2>०८ पुनःप्राध्येषणं च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुनःप्राध्येषणं च ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/08_punaHprAdhyeShaNaM_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पुनःप्राध्येषणं च ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. And the invitation to resume the recitation (is done in the following way)
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/09_bahirmaNDalasthAbhirAchamya.md">
-<details open><summary><h2>०९ बहिर्मण्डलस्थाभिराचम्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बहिर्मण्डलस्थाभिराचम्य ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/09_bahirmaNDalasthAbhirAchamya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+बहिर्मण्डलस्थाभिराचम्य ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. After they have sipped water that stands outside the circle,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/10_prAdhIyIrankRtashAntayaH.md">
-<details open><summary><h2>१० प्राधीयीरन्कृतशान्तयः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+प्राधीयीरन्कृतशान्तयः १०
+</details>
+
+<details><summary>मूलम्</summary>
 
 प्राधीयीरन्कृतशान्तयः १०
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/10_prAdhIyIrankRtashAntayaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. Let them resume the recitation, having performed the expiation.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/11_shAntipAtropaghAte_proxaNaM_prAyashchittiH.md">
-<details open><summary><h2>११ शान्तिपात्रोपघाते प्रोक्षणं प्रायश्चित्तिः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शान्तिपात्रोपघाते प्रोक्षणं प्रायश्चित्तिः ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/11_shAntipAtropaghAte_proxaNaM_prAyashchittiH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शान्तिपात्रोपघाते प्रोक्षणं प्रायश्चित्तिः ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. If the vessel used in the expiation is damaged, sprinkling (with water forms) the expiatory act (to be performed for it).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/12_proxaNaM_tu_hiraNyavatA.md">
-<details open><summary><h2>१२ प्रोक्षणं तु हिरण्यवता ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रोक्षणं तु हिरण्यवता पाणिना दर्भपिञ्जूलवता वा १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/12_proxaNaM_tu_hiraNyavatA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रोक्षणं तु हिरण्यवता पाणिना दर्भपिञ्जूलवता वा १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. (That) sprinkling, however, (one should perform) holding gold or a bunch of Darbha grass in his hand.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/6/02/13_iti_bhAShikam.md">
-<details open><summary><h2>१३ इति भाषिकम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इति भाषिकम् १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/6/02/13_iti_bhAShikam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इति भाषिकम् १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. So far what pertains to the general rules.
 
 </details>
-</div>
