--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/02.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/02.md
@@ -2,115 +2,140 @@
 title = "०२"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/02/01_karmApavarge_brAhmaNabhojanam.md">
-<details open><summary><h2>०१ कर्मापवर्गे ब्राह्मणभोजनम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कर्मापवर्गे ब्राह्मणभोजनं १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/02/01_karmApavarge_brAhmaNabhojanam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कर्मापवर्गे ब्राह्मणभोजनं १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. At the end of the sacrificial acts (follows) the distribution of food to Brāhmaṇas.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/02/02_vAgrUpavayaHshrutashIlavRttAni_guNAH.md">
-<details open><summary><h2>०२ वाग्रूपवयःश्रुतशीलवृत्तानि गुणाः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वाग्रूपवयःश्रुतशीलवृत्तानि गुणाः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/02/02_vAgrUpavayaHshrutashIlavRttAni_guNAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वाग्रूपवयःश्रुतशीलवृत्तानि गुणाः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. Voice, (pleasantness of) form, age, learning, moral character, (right) conduct are the qualities (required in the Brāhmaṇas who are to be invited thereto).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/02/03_shrutaM_tu_sarvAnatyeti.md">
-<details open><summary><h2>०३ श्रुतं तु सर्वानत्येति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्रुतं तु सर्वानत्येति ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/02/03_shrutaM_tu_sarvAnatyeti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+श्रुतं तु सर्वानत्येति ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Learning, however, outweighs every (other qualification).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/02/04_na_shrutamatIyAt.md">
-<details open><summary><h2>०४ न श्रुतमतीयात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 न श्रुतमतीयात् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/02/04_na_shrutamatIyAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+न श्रुतमतीयात् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. A learned one should not be passed over.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/02/05_adhidaivamathAdhyAtmamadhiyajnamiti_trayam_mant.md">
-<details open><summary><h2>०५ अधिदैवमथाध्यात्ममधियज्ञमिति त्रयम् मन्त्रेषु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिदैवमथाध्यात्ममधियज्ञमिति त्रयम् मन्त्रेषु ब्राह्मणे चैव श्रुतमित्यभिधीयते ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/02/05_adhidaivamathAdhyAtmamadhiyajnamiti_trayam_mant.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अधिदैवमथाध्यात्ममधियज्ञमिति त्रयम् मन्त्रेषु ब्राह्मणे चैव श्रुतमित्यभिधीयते ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. 'The threefold (knowledge, viz. that) which refers to the deities, that which refers to the Ātman, and that which refers to sacrifice,
 
 '(Handed down) in the Mantras and in the Brāhmaṇa: this is called learning.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/02/06_kriyAvantamadhIyAnaM_shrutavRddhaM_tapasvinam.md">
-<details open><summary><h2>०६ क्रियावन्तमधीयानं श्रुतवृद्धं तपस्विनम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 क्रियावन्तमधीयानं श्रुतवृद्धं तपस्विनम् भोजयेत्तं सकृद्यस्तु न तं भूयः क्षुदश्नुते ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/02/06_kriyAvantamadhIyAnaM_shrutavRddhaM_tapasvinam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+क्रियावन्तमधीयानं श्रुतवृद्धं तपस्विनम् भोजयेत्तं सकृद्यस्तु न तं भूयः क्षुदश्नुते ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. 'A performer of the sacred rights, a man who has studied (the Veda), who is old in learning and devoted to austerities:
 
 'He who gives food (even) once to such (a Brāhmaṇa), hunger will not befall that man any more.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/02/07_yAM_titarpayiShetkAnchiddevatAM_sarvakarmasu.md">
-<details open><summary><h2>०७ यां तितर्पयिषेत्काञ्चिद्देवतां सर्वकर्मसु ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यां तितर्पयिषेत्काञ्चिद्देवतां सर्वकर्मसु तस्या उद्दिश्य मनसा दद्यादेवंविधाय वै ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/02/07_yAM_titarpayiShetkAnchiddevatAM_sarvakarmasu.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यां तितर्पयिषेत्काञ्चिद्देवतां सर्वकर्मसु तस्या उद्दिश्य मनसा दद्यादेवंविधाय वै ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. 'Whatsoever deity he may wish to satiate at any sacrifice,
 
 'Destining it to that (deity) in his mind, he shall give (the food) to a person like that.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/02/08_naivaMvidhe_havirnyastaM_na.md">
-<details open><summary><h2>०८ नैवंविधे हविर्न्यस्तं न ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नैवंविधे हविर्न्यस्तं न गच्छेद्देवतां क्वचित् निधिरेष मनुष्याणां देवानां पात्रमुच्यते ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/02/08_naivaMvidhe_havirnyastaM_na.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नैवंविधे हविर्न्यस्तं न गच्छेद्देवतां क्वचित् निधिरेष मनुष्याणां देवानां पात्रमुच्यते ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. 'An oblation deposited in a person like that will never miss its way to the deity;
 
 'Treasure of men, vessel of gods (in which they receive what is given to them) he is called.'
 
 </details>
-</div>
