--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/05.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/05.md
@@ -2,141 +2,172 @@
 title = "०५"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/01_chatvAraH_pAkayajnA_huto-hutaH.md">
-<details open><summary><h2>०१ चत्वारः पाकयज्ञा हुतोऽहुतः ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चत्वारः पाकयज्ञा हुतोऽहुतः प्रहुतः प्राशित इति १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/01_chatvAraH_pAkayajnA_huto-hutaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+चत्वारः पाकयज्ञा हुतोऽहुतः प्रहुतः प्राशित इति १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . There are four kinds of Pākayajñas, viz. the HUTA, the AHUTA, the PRAHUTA, and the PRĀŚITA.
 
 [^1]:  5, 1. This Sūtra and the following ones down to the fifth are identical with Pāraskara I, 4, 1-5; it seems to me that we have here before us the opening Sūtras of a lost text from which this passage has been copied both by Śāṅkhāyana and Pāraskara. Comp. the preface of the second volume of the Gṛhya-sūtras.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/02_panchasu_bahiHshAlAyAM_vivAhe.md">
-<details open><summary><h2>०२ पञ्चसु बहिःशालायां विवाहे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पञ्चसु बहिःशालायां विवाहे चूडाकरण उपनयने केशान्ते सीमन्तोन्नयन इति
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/02_panchasu_bahiHshAlAyAM_vivAhe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पञ्चसु बहिःशालायां विवाहे चूडाकरण उपनयने केशान्ते सीमन्तोन्नयन इति
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . On the following five occasions, viz. the wedding, the tonsure (of the child's head), the initiation (of the Brahmacārin), the cutting of the beard, and the parting of the hair, (on these occasions) in the outer hall - 
 
 [^2]:  Comp. the Kārikā quoted by Nārāyaṇa, 'vivāhādishu bāhyo ’gnir maṇḍape ca tad iṣyata iti.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/03_upalipta_uddhatAvoxite-gniM_praNIya.md">
-<details open><summary><h2>०३ उपलिप्त उद्धतावोक्षितेऽग्निं प्रणीय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपलिप्त उद्धतावोक्षितेऽग्निं प्रणीय ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/03_upalipta_uddhatAvoxite-gniM_praNIya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उपलिप्त उद्धतावोक्षितेऽग्निं प्रणीय ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^3] . To a place that has been smeared (with cow-dung), which is elevated, and which has been sprinkled (with water), he carries forward the fire,
 
 [^3]:  On the Agni-praṇayana comp. the details given in the Gṛhya-saṃgraha-pariśiṣṭa (Zeitschrift der Deutschen Morgenländischen Gesellschaft, vol. xxxv), I, 64-69.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/04_nirmathyaike_vivAha.md">
-<details open><summary><h2>०४ निर्मथ्यैके विवाह ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 निर्मथ्यैके विवाह ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/04_nirmathyaike_vivAha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+निर्मथ्यैके विवाह ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Having kindled it by rubbing, according to some teachers, at his marriage.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/05_udagayana_ApUryamANapaxe_puNyAhe.md">
-<details open><summary><h2>०५ उदगयन आपूर्यमाणपक्षे पुण्याहे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदगयन आपूर्यमाणपक्षे पुण्याहे कुमार्यै पाणिं गृह्नीयाद् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/05_udagayana_ApUryamANapaxe_puNyAhe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उदगयन आपूर्यमाणपक्षे पुण्याहे कुमार्यै पाणिं गृह्नीयाद् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. During the northern course of the sun, in the time of the increasing moon, on an auspicious day he shall seize the hand of a girl,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/06_yA_laxaNasampannA_syAd.md">
-<details open><summary><h2>०६ या लक्षणसम्पन्ना स्याद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 या लक्षणसम्पन्ना स्याद् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/06_yA_laxaNasampannA_syAd.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+या लक्षणसम्पन्ना स्याद् ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Who should possess (the auspicious) characteristics (required),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/07_yasyA_abhyAtmamangAni_syuH.md">
-<details open><summary><h2>०७ यस्या अभ्यात्ममङ्गानि स्युः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यस्या अभ्यात्ममङ्गानि स्युः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/07_yasyA_abhyAtmamangAni_syuH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यस्या अभ्यात्ममङ्गानि स्युः ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. Whose limbs should be proportionate,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/08_samAH_keshAntA.md">
-<details open><summary><h2>०८ समाः केशान्ता ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समाः केशान्ता ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/08_samAH_keshAntA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+समाः केशान्ता ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. Whose hair should be smooth,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/09_AvartAvapi_yasyai_syAtAm.md">
-<details open><summary><h2>०९ आवर्तावपि यस्यै स्याताम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आवर्तावपि यस्यै स्यातां प्रदक्षिणौ ग्रीवायां ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/09_AvartAvapi_yasyai_syAtAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आवर्तावपि यस्यै स्यातां प्रदक्षिणौ ग्रीवायां ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9 [^4] . Who should also have at her neck two curls turned to the right.
 
 [^4]:  On āvartau comp. the note in the German edition, p. 121.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/05/10_ShaD_vIrAnjanayiShyatIti_vidyAt.md">
-<details open><summary><h2>१० षड् वीराञ्जनयिष्यतीति विद्यात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 षड् वीराञ्जनयिष्यतीति विद्यात् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/05/10_ShaD_vIrAnjanayiShyatIti_vidyAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+षड् वीराञ्जनयिष्यतीति विद्यात् १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. (Of such a girl) he shall know that she will give birth to six men.
 
 </details>
-</div>
