--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/13.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/13.md
@@ -2,54 +2,69 @@
 title = "१३"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/01_samrAjnI_shvashure_bhaveti.md">
-<details open><summary><h2>०१ सम्राज्ञी श्वशुरे भवेति ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्राज्ञी श्वशुरे भवेति पिता भ्राता वास्यग्रेण मूर्धनि जुहोति स्रुवेण वा तिष्ठन्नासीनायाः प्राङ्मुख्याः प्रत्यङ्मुखो १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/01_samrAjnI_shvashure_bhaveti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सम्राज्ञी श्वशुरे भवेति पिता भ्राता वास्यग्रेण मूर्धनि जुहोति स्रुवेण वा तिष्ठन्नासीनायाः प्राङ्मुख्याः प्रत्यङ्मुखो १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. 'Be queen with thy father-in-law,' with this verse (Rig-veda X, 85, 46) her father or brother sacrifices with a sword's point on her head, or with the Sruva, standing while she is sitting, with his face turned to the west, while her face is turned to the east.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/02_gRbhNAmi_te_saubhagatvAya.md">
-<details open><summary><h2>०२ गृभ्णामि ते सौभगत्वाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृभ्णामि ते सौभगत्वाय हस्तमिति दक्षिणेन पाणिना दक्षिणं पाणिं गृह्णाति साङ्गुष्ठमुत्तानेनोत्तानं तिष्ठन्नासीनायाः प्राङ्मुख्याः प्रत्यङ्मुखः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/02_gRbhNAmi_te_saubhagatvAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गृभ्णामि ते सौभगत्वाय हस्तमिति दक्षिणेन पाणिना दक्षिणं पाणिं गृह्णाति साङ्गुष्ठमुत्तानेनोत्तानं तिष्ठन्नासीनायाः प्राङ्मुख्याः प्रत्यङ्मुखः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. 'I seize thy hand for the sake of happiness' (Rig-veda X, 85, 36), with these words (the bridegroom) seizes with his right hand her right hand with the thumb, both hands being turned with the palms upwards, he standing while she is sitting, with his face turned to the west, while her face is turned to the east.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/03_pancha_chottarA_japitvA.md">
-<details open><summary><h2>०३ पञ्च चोत्तरा जपित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पञ्च चोत्तरा जपित्वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/03_pancha_chottarA_japitvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पञ्च चोत्तरा जपित्वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. And when he has murmured the following five verses,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/04_amo-hamasmi_sA_tvam.md">
-<details open><summary><h2>०४ अमोऽहमस्मि सा त्वम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अमोऽहमस्मि सा त्वं सा त्वमस्यमोऽहं द्यौरहं पृथिवी त्वमृक् त्वमसि सामाहं सा मामनुव्रता भव 
+तावेह विवहावहै प्रजां प्रजनयावहै पुत्रान् विन्दावहै बहूँस्ते सन्तु जरदष्टय इति
+</details>
+
+<details><summary>मूलम्</summary>
 
 अमोऽहमस्मि सा त्वं सा त्वमस्यमोऽहं द्यौरहं पृथिवी त्वमृक् त्वमसि सामाहं सा मामनुव्रता भव 
 तावेह विवहावहै प्रजां प्रजनयावहै पुत्रान् विन्दावहै बहूँस्ते सन्तु जरदष्टय इति 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/04_amo-hamasmi_sA_tvam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4 [^1] . (He continues thus,) 'This am I, that art thou; that art thou, this am I; the heaven I, the earth thou; the Ṛc art thou, the Sāman I. So be thou devoted to me.
 
@@ -58,183 +73,221 @@ title = "१३"
 'Well! Let us here marry. Let us beget offspring. Let us acquire many sons who may reach old age.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/05_udakumbhaM_navaM_bhUrbhuvaH.md">
-<details open><summary><h2>०५ उदकुम्भं नवं भूर्भुवः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदकुम्भं नवं भूर्भुवः स्वरिति पूरयित्वा ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/05_udakumbhaM_navaM_bhUrbhuvaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उदकुम्भं नवं भूर्भुवः स्वरिति पूरयित्वा ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. (The Ācārya) fills, with the words bhūr bhuvaḥ svaḥ, a new water-pot,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/06_punnAmno_vRxasya.md">
-<details open><summary><h2>०६ पुन्नाम्नो वृक्षस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुन्नाम्नो वृक्षस्य सक्षीरान्त्सपलाशान्त्सकुशानोप्य ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/06_punnAmno_vRxasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पुन्नाम्नो वृक्षस्य सक्षीरान्त्सपलाशान्त्सकुशानोप्य ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^2] . Throws into it (branches) with milky sap and leaves, of a tree the name of which is masculine, together with Kuśa grass,
 
 [^2]:  Sakṣīrānt sapalāśānt sakuśān. Nārāyaṇa's commentary divides sa kuśān, and refers sa to the ācārya. But this sa would be superfluous, and the substantive to which sakṣīrān and sapalāśān are to be referred, is, as both the nature of the case and the corresponding passages show, śākhān and not kuśān. Comp. the Śrauta-sūtra IV, 17, 5: palāsaśākhāṃ sapalāśāṃ nikhāya, and a passage concerning the very rite here described, Āśvalāyana-pariśiṣṭa I, 24: audumbaryārddhayā. (read, ārdrayā?) śākhayā sapalāśayā sahiraṇyapavitrayā sadūrvāpavitrayā. The MS. of the Śāmbavya-sūtra has sakṣīrān palāśān sakuśān.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/07_hiraNyamiti_chaike.md">
-<details open><summary><h2>०७ हिरण्यमिति चैके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हिरण्यमिति चैके ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/07_hiraNyamiti_chaike.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+हिरण्यमिति चैके ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. And gold, according to some (teachers),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/08_taM_brahmachAriNe_vAgyatAya.md">
-<details open><summary><h2>०८ तं ब्रह्मचारिणे वाग्यताय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तं ब्रह्मचारिणे वाग्यताय प्रदाय ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/08_taM_brahmachAriNe_vAgyatAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तं ब्रह्मचारिणे वाग्यताय प्रदाय ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. And hands it over to a student who observes silence.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/09_prAgudIchyAM_dishi_tAH.md">
-<details open><summary><h2>०९ प्रागुदीच्यां दिशि ताः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+प्रागुदीच्यां दिशि ताः स्थेयाः प्रदक्षिणा भवन्ति
+</details>
+
+<details><summary>मूलम्</summary>
 
 प्रागुदीच्यां दिशि ताः स्थेयाः प्रदक्षिणा भवन्ति
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/09_prAgudIchyAM_dishi_tAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 9 [^3] . They should walk round this Stheyā water, (placed) to the north-east, so that they turn their right sides towards it.
 
 [^3]:  'The Stheyā water has to be so placed that when the bride and the bridegroom walk (their seven steps, see chap. 14, 5 seq.), their right sides are turned towards it.' Nārāyaṇa. Comp., regarding the Stheyā water and its bearer, the Gṛhya-saṃgraha-pariśiṣṭa II, 26. 30. 35.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/10_ashmAnaM_chottarata_upasthApya.md">
-<details open><summary><h2>१० अश्मानं चोत्तरत उपस्थाप्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अश्मानं चोत्तरत उपस्थाप्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 अश्मानं चोत्तरत उपस्थाप्य  
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/10_ashmAnaM_chottarata_upasthApya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. And after (the Ācārya) has placed a stone towards the northern direction,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/11_ehi_sUnarItyutthApya.md">
-<details open><summary><h2>११ एहि सूनरीत्युत्थाप्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+एहि सूनरीत्युत्थाप्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 एहि सूनरीत्युत्थाप्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/11_ehi_sUnarItyutthApya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. (The bridegroom) makes her rise with the words, 'Come, thou joyful one,'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/12_ehyashmAnamAtiShThAshmeva_tvaM_sthirA.md">
-<details open><summary><h2>१२ एह्यश्मानमातिष्ठाश्मेव त्वं स्थिरा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एह्यश्मानमातिष्ठाश्मेव त्वं स्थिरा भव । अभितिष्ठ पृतन्यतः सहस्व पृतनायत इति दक्षिणेन प्रपदेनाश्मानमाक्रमय्य १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/12_ehyashmAnamAtiShThAshmeva_tvaM_sthirA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एह्यश्मानमातिष्ठाश्मेव त्वं स्थिरा भव । अभितिष्ठ पृतन्यतः सहस्व पृतनायत इति दक्षिणेन प्रपदेनाश्मानमाक्रमय्य १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. And makes her tread with the tip of her right foot on the stone, with the words, 'Come, tread on the stone; like a stone be firm. Tread the foes down; overcome the enemies.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/13_pradaxiNamagniM_paryANIya.md">
-<details open><summary><h2>१३ प्रदक्षिणमग्निं पर्याणीय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रदक्षिणमग्निं पर्याणीय १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/13_pradaxiNamagniM_paryANIya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रदक्षिणमग्निं पर्याणीय १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. He then leads her round the fire so that their right sides are turned to it,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/14_tenaiva_mantreNa_dvitIyam.md">
-<details open><summary><h2>१४ तेनैव मन्त्रेण द्वितीयम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तेनैव मन्त्रेण द्वितीयं वसनं प्रदाय १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/14_tenaiva_mantreNa_dvitIyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तेनैव मन्त्रेण द्वितीयं वसनं प्रदाय १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. And gives her a second garment with the same text (chap. 12, § 3).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/15_lAjAnChamIpalAshamishrAnpitA_bhrAtA_vA.md">
-<details open><summary><h2>१५ लाजाञ्छमीपलाशमिश्रान्पिता भ्राता वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+लाजाञ्छमीपलाशमिश्रान्पिता भ्राता वा स्यादञ्जलावावपति
+</details>
+
+<details><summary>मूलम्</summary>
 
 लाजाञ्छमीपलाशमिश्रान्पिता भ्राता वा स्यादञ्जलावावपति
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/15_lAjAnChamIpalAshamishrAnpitA_bhrAtA_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 15. Her father or brother pours out of a basket fried grain mixed with Śamī leaves into her joined hands.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/16_upastaraNAbhighAraNapratyabhighAraNaM_chAjyena.md">
-<details open><summary><h2>१६ उपस्तरणाभिघारणप्रत्यभिघारणं चाज्येन ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उपस्तरणाभिघारणप्रत्यभिघारणं चाज्येन १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/16_upastaraNAbhighAraNapratyabhighAraNaM_chAjyena.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उपस्तरणाभिघारणप्रत्यभिघारणं चाज्येन १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. The spreading under, the sprinkling over, and the second sprinkling over (are done) with Ājya.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/13/17_tAnjuhoti.md">
-<details open><summary><h2>१७ ताञ्जुहोति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ताञ्जुहोति १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/13/17_tAnjuhoti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ताञ्जुहोति १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17 [^4] . She sacrifices those (fried grains).
 
 [^4]:  I believe that the words forming this Sūtra, tāñ juhoti, are taken from the same lost old Gṛhya text which Śāṅkhāyana has followed word for word also in I, 5, 1-5 and elsewhere. This is made probable by the comparison of Pāraskara I, 6, 2. The author of our text, while literally adopting the words of his original, has not quite succeeded in welding them together with his own statements; thus the sacrifice of grains is treated of in this Sūtra and in the first Sūtra of the next chapter, as if there were two different acts, while indeed it is one and the same.
 
 </details>
-</div>
