--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/14.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/14.md
@@ -2,238 +2,290 @@
 title = "१४"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/01_iyaM_nAryupabrUte_lAjAnAvapantikA.md">
-<details open><summary><h2>०१ इयं नार्युपब्रूते लाजानावपन्तिका ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+इयं नार्युपब्रूते लाजानावपन्तिका । शिवा ज्ञातिभ्यो भूयासं चिरं जीवतु मे पतिः स्वाहेति तिष्ठन्ती जुहोति पतिर्मन्त्रं जपत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 इयं नार्युपब्रूते लाजानावपन्तिका । शिवा ज्ञातिभ्यो भूयासं चिरं जीवतु मे पतिः स्वाहेति तिष्ठन्ती जुहोति पतिर्मन्त्रं जपत्य् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/01_iyaM_nAryupabrUte_lAjAnAvapantikA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 1. 'This woman, strewing grains, prays thus, "May I bring bliss to my relations; may my husband live long. Svāhā!"' - while the husband murmurs (this) text, she sacrifices standing.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/02_ashmakramaNAdyevaM_dvitIyam.md">
-<details open><summary><h2>०२ अश्मक्रमणाद्येवं द्वितीयम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अश्मक्रमणाद्येवं द्वितीयम् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/02_ashmakramaNAdyevaM_dvitIyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अश्मक्रमणाद्येवं द्वितीयम् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . (All the ceremonies,) beginning from the treading upon the stone, (are repeated) in the same way for a second time,
 
 [^1]:  14, 2. The treading on the stone is prescribed in chap. 13, 12.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/03_evaM_tRtIyam.md">
-<details open><summary><h2>०३ एवं तृतीयम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं तृतीयं ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/03_evaM_tRtIyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एवं तृतीयं ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. And in the same way a third time.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/04_tUShNIM_kAmena_chaturtham.md">
-<details open><summary><h2>०४ तूष्णीं कामेन चतुर्थम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तूष्णीं कामेन चतुर्थं ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/04_tUShNIM_kAmena_chaturtham.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तूष्णीं कामेन चतुर्थं ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Silently, if they like, a fourth time.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/05_prAgudIchyAM_dishi_sapta.md">
-<details open><summary><h2>०५ प्रागुदीच्यां दिशि सप्त ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+प्रागुदीच्यां दिशि सप्त पदानि प्रक्रमयति
+</details>
+
+<details><summary>मूलम्</summary>
 
 प्रागुदीच्यां दिशि सप्त पदानि प्रक्रमयति 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/05_prAgudIchyAM_dishi_sapta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . (The Ācārya?) makes (them) step forward in a north-eastern direction seven steps (with the words),
 
 [^2]:  5, 7. According to Nārāyaṇa it is the teacher who makes them walk the seven steps; the Paddhati says that the bridegroom or the Ācārya causes her to do so. Comp. Pāraskara I, 8, 1; Āśvalāyana I, 7, 19, &c.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/06_iSha_ekapadyUrje_dvipadI.md">
-<details open><summary><h2>०६ इष एकपद्यूर्जे द्विपदी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इष एकपद्यूर्जे द्विपदी रायस्पोषाय त्रिपद्यायोभव्याय चतुष्पदी पशुभ्यः पञ्चपद्यृतुभ्यः षट्पदी सखा सप्तपदी भवेति ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/06_iSha_ekapadyUrje_dvipadI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+इष एकपद्यूर्जे द्विपदी रायस्पोषाय त्रिपद्यायोभव्याय चतुष्पदी पशुभ्यः पञ्चपद्यृतुभ्यः षट्पदी सखा सप्तपदी भवेति ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. 'For sap with one step, for juice with two steps, for the prospering of wealth with three steps, for comfort with four steps, for cattle with five steps, for the seasons with six steps. Friend be with seven steps.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/07_tAnyadbhiH_shamayaty.md">
-<details open><summary><h2>०७ तान्यद्भिः शमयत्य् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+तान्यद्भिः शमयत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 तान्यद्भिः शमयत्य् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/07_tAnyadbhiH_shamayaty.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. (The Ācārya?) 'appeases' those (foot-steps) with water.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/08_ApohiShThIyAbhistisRbhiH_stheyAbhiradbhirmArjay.md">
-<details open><summary><h2>०८ आपोहिष्ठीयाभिस्तिसृभिः स्थेयाभिरद्भिर्मार्जयित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आपोहिष्ठीयाभिस्तिसृभिः स्थेयाभिरद्भिर्मार्जयित्वा ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/08_ApohiShThIyAbhistisRbhiH_stheyAbhiradbhirmArjay.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आपोहिष्ठीयाभिस्तिसृभिः स्थेयाभिरद्भिर्मार्जयित्वा ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^3] . With the three Āpohiṣṭhīyā verses (Rig-veda X, 9, 1-3) he wipes (them) with the Stheyā water,
 
 [^3]:  Comp. chap. 13, 9.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/09_mUrdhanyabhiShichya.md">
-<details open><summary><h2>०९ मूर्धन्यभिषिच्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मूर्धन्यभिषिच्य ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/09_mUrdhanyabhiShichya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मूर्धन्यभिषिच्य ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9 [^4] . And sprinkles it on their heads.
 
 [^4]:  Probably we should read mūrdhanī (acc. dual.), not mūrdhani. Āśvalāyana has śirasī. Of course the heads of both the bridegroom and the bride were sprinkled with water; comp. Āśvalāyana I, 7, 20, &c.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/10_gAM_dadAnItyAha.md">
-<details open><summary><h2>१० गां ददानीत्याह ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गां ददानीत्याह १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/10_gAM_dadAnItyAha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गां ददानीत्याह १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. (The bridegroom then) says, 'I give you a cow.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/11_brAhmaNebhyaH_kinchiddadyAtsarvatra.md">
-<details open><summary><h2>११ ब्राह्मणेभ्यः किञ्चिद्दद्यात्सर्वत्र ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ब्राह्मणेभ्यः किञ्चिद्दद्यात्सर्वत्र स्थालीपाकादिषु कर्मसु ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/11_brAhmaNebhyaH_kinchiddadyAtsarvatra.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ब्राह्मणेभ्यः किञ्चिद्दद्यात्सर्वत्र स्थालीपाकादिषु कर्मसु ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11. Let him give something to the Brāhmaṇas each time at the Sthālīpākas and other rites;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/12_sUryAM_viduShe_vAdhUyam.md">
-<details open><summary><h2>१२ सूर्यां विदुषे वाधूयम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सूर्यां विदुषे वाधूयं १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/12_sUryAM_viduShe_vAdhUyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सूर्यां विदुषे वाधूयं १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12 [^5] . To him who knows the Sūryā hymn the bride's shift.
 
 [^5]:  The Sūryā hymn is Rig-veda X, 85. Comp. the note above on chap. 13, 4.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/13_gaurbrAhmaNasya_varo.md">
-<details open><summary><h2>१३ गौर्ब्राह्मणस्य वरो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गौर्ब्राह्मणस्य वरो १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/13_gaurbrAhmaNasya_varo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गौर्ब्राह्मणस्य वरो १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13 [^6] . A cow is the optional gift to be given by a Brāhmaṇa,
 
 [^6]:  These Sūtras, treating of the fee for the sacrifice, are identical with Pāraskara I, 8, 15-18. Apparently they are taken from the same lost original from which several identical passages in the Sūtras of Pāraskara and Śāṅkhāyana seem to be derived (see the notes on chap. 5, 1; 13, 7). They stand rather out of place here, for they return to the same subject which had already been treated of in Sūtra 10, though in that Sūtra, as very frequently is the case in our text and in similar ones, only the case of the bridegroom being a Brāhmaṇa has been taken notice of.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/14_grAmo_rAjanyasya.md">
-<details open><summary><h2>१४ ग्रामो राजन्यस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+ग्रामो राजन्यस्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 ग्रामो राजन्यस्य 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/14_grAmo_rAjanyasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 14. A village by a Rājanya,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/15_ashvo_vaishyasya.md">
-<details open><summary><h2>१५ अश्वो वैश्यस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+अश्वो वैश्यस्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 अश्वो वैश्यस्य 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/15_ashvo_vaishyasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 15. A horse by a Vaiśya.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/16_adhirathaM_shataM_duhitRmate.md">
-<details open><summary><h2>१६ अधिरथं शतं दुहितृमते ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधिरथं शतं दुहितृमते १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/16_adhirathaM_shataM_duhitRmate.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अधिरथं शतं दुहितृमते १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16 [^7] . A hundred (cows) with a chariot (he gives to a father) who has only daughters.
 
 [^7]:  Comp. the passages quoted by Professor Stenzler on Pāraskara I, 8, 18. Nārāyaṇa has the following note: 'To a duhitṛmat, i.e. to the father of a girl who has no brother, he shall give a hundred cows and besides a chariot, in order to destroy the guilt brought about by marrying a girl who has no brother.' Possibly we should here emancipate ourselves from the authority of the commentators, and explain duhitṛmat 'he who gives his daughter in marriage,' the bride's father. Comp. Āpastamba II, 11, 18; II, 13, 12; Weber, Indische Studien, V, 343, note 2.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/14/17_yAjnikebhyo-shvaM_dadAti.md">
-<details open><summary><h2>१७ याज्ञिकेभ्योऽश्वं ददाति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 याज्ञिकेभ्योऽश्वं ददाति १७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/14/17_yAjnikebhyo-shvaM_dadAti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+याज्ञिकेभ्योऽश्वं ददाति १७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 17. To those versed in the sacrificial rites he gives a horse.
 
 </details>
-</div>
