--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/20.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/20.md
@@ -2,72 +2,88 @@
 title = "२०"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/20/01_tRtIye_mAsi_pu.N.md">
-<details open><summary><h2>०१ तृतीये मासि पुँ ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तृतीये मासि पुँ सवनं १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/20/01_tRtIye_mAsi_pu.N.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तृतीये मासि पुँ सवनं १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. In the third month the Puṃsavana (i.e. the ceremony to secure the birth of a male child),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/20/02_puShyeNa_shravaNena_vA.md">
-<details open><summary><h2>०२ पुष्येण श्रवणेन वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुष्येण श्रवणेन वा २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/20/02_puShyeNa_shravaNena_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पुष्येण श्रवणेन वा २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. Under (the Nakṣatra) Puṣya or Śravaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/20/03_somA.N_shuM_peShayitvA.md">
-<details open><summary><h2>०३ सोमाँ शुं पेषयित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सोमाँ शुं पेषयित्वा कुशकण्टकं वा न्यग्रोधस्य वा स्कन्धस्यान्त्यां शुङ्गां यूपस्य वाग्निष्ठाम् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/20/03_somA.N_shuM_peShayitvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सोमाँ शुं पेषयित्वा कुशकण्टकं वा न्यग्रोधस्य वा स्कन्धस्यान्त्यां शुङ्गां यूपस्य वाग्निष्ठाम् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^1] . Having pounded a Soma stalk, or a Kuśa needle, or the last shoot of a Nyagrodha trunk, or the part of a sacrificial post which is exposed to the fire,
 
 [^1]:  20, 3. On śuṅgā compare the note of Nārāyaṇa and the verse quoted from the Karmapradīpa, p. 131 of the German edition.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/20/04_saMsthite_vA_yajne.md">
-<details open><summary><h2>०४ संस्थिते वा यज्ञे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संस्थिते वा यज्ञे जुह्वः संस्रावम् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/20/04_saMsthite_vA_yajne.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+संस्थिते वा यज्ञे जुह्वः संस्रावम् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Or (having taken) after the completion of a sacrifice the remnants from the Juhū ladle,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/20/05_agninA_rayiM_tannasturIpam.md">
-<details open><summary><h2>०५ अग्निना रयिं तन्नस्तुरीपम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निना रयिं तन्नस्तुरीपं समिद्धाग्निर्वनवत्पिशङ्गरूप इति चतसृभिरन्तेस्वाहाकाराभिर्नस्तो दक्षिणतो निषिञ्चेत् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/20/05_agninA_rayiM_tannasturIpam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्निना रयिं तन्नस्तुरीपं समिद्धाग्निर्वनवत्पिशङ्गरूप इति चतसृभिरन्तेस्वाहाकाराभिर्नस्तो दक्षिणतो निषिञ्चेत् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . Let him sprinkle it into her right nostril with the four verses, 'By Agni may good' (Rig-veda I, 1, 3), 'That sperm to us' (III, 4, 9), 'May he succeed who lights fire' (V, 37, 2), 'Of tawny shape' (II, 3, 9), with Svāhā at the end (of each verse).
 
 [^2]:  Nasto dakṣiṇataḥ stands here as in chap. 19, 1. Āśvalāyana I, 13, 6 has dakṣiṇasyāṃ nāsikāyām, and so has also p. 47 Pāraskara I, 13. Comp. the natthukamma treated of in the Pāli Buddhist texts (Mahāvagga VI, 13) and in the medical literature.
 
 </details>
-</div>
