--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/23.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/23.md
@@ -2,16 +2,20 @@
 title = "२३"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/23/01_kAkAtanyA_machakachAtanyAH_koshAtakyA.md">
-<details open><summary><h2>०१ काकातन्या मचकचातन्याः कोशातक्या ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 काकातन्या मचकचातन्याः कोशातक्या बृहत्याः कालक्लीतकस्येति मूलानि पेषयित्वोपलेपयेद्देशं यस्मिन्प्रजायेत रक्षसामपहत्यै २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/23/01_kAkAtanyA_machakachAtanyAH_koshAtakyA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+काकातन्या मचकचातन्याः कोशातक्या बृहत्याः कालक्लीतकस्येति मूलानि पेषयित्वोपलेपयेद्देशं यस्मिन्प्रजायेत रक्षसामपहत्यै २३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. Let him pound the roots of the plants kākātanī, macakacātanī, kośātakī, of the egg-plant, and of the indigo plant, and besmear (therewith) the place in which she is going to be confined, in order to drive away the Rakṣas.
 
 </details>
-</div>
