--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/25.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/25.md
@@ -2,157 +2,191 @@
 title = "२५"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/01_dasharAtre_chotthAnam.md">
-<details open><summary><h2>०१ दशरात्रे चोत्थानम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दशरात्रे चोत्थानं १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/01_dasharAtre_chotthAnam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दशरात्रे चोत्थानं १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . After ten days the getting up (of the mother from childbed).
 
 [^1]:  25, 1. After ten days the impurity (aśauca) that falls on the mother at her confinement, ceases; see Gautama XIV, 16; Manu V, 62; Vasiṣṭha IV, 21.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/02_mAtApitarau_shiraHsnAtAvahatavAsasau.md">
-<details open><summary><h2>०२ मातापितरौ शिरःस्नातावहतवाससौ ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मातापितरौ शिरःस्नातावहतवाससौ २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/02_mAtApitarau_shiraHsnAtAvahatavAsasau.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मातापितरौ शिरःस्नातावहतवाससौ २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. Father and mother with washed heads, wearing (new) clothes which have not yet been washed;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/03_kumArashcha.md">
-<details open><summary><h2>०३ कुमारश्च ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+कुमारश्च
+</details>
+
+<details><summary>मूलम्</summary>
 
 कुमारश्च 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/03_kumArashcha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 3. And so also the child.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/04_etasminneva_sUtikAgnau_sthAlIpAkam.md">
-<details open><summary><h2>०४ एतस्मिन्नेव सूतिकाग्नौ स्थालीपाकम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतस्मिन्नेव सूतिकाग्नौ स्थालीपाकं श्रपयित्वा ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/04_etasminneva_sUtikAgnau_sthAlIpAkam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एतस्मिन्नेव सूतिकाग्नौ स्थालीपाकं श्रपयित्वा ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4 [^2] . Let (the father) cook a mess of food in that same fire that has been kept from her confinement,
 
 [^2]:  Comp. the note on chap. 24, 1.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/05_janmatithiM_hutvA_trINi.md">
-<details open><summary><h2>०५ जन्मतिथिं हुत्वा त्रीणि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 जन्मतिथिं हुत्वा त्रीणि च भानि सदैवतानि ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/05_janmatithiM_hutvA_trINi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+जन्मतिथिं हुत्वा त्रीणि च भानि सदैवतानि ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. And let him make oblations to the Tithi of (the child's) birth and to three constellations with their (presiding) deities.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/06_tanmadhye_juhuyAdyasminjAtaH_syAt.md">
-<details open><summary><h2>०६ तन्मध्ये जुहुयाद्यस्मिञ्जातः स्यात् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तन्मध्ये जुहुयाद्यस्मिञ्जातः स्यात् पूर्वं तु दैवतं सर्वत्र ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/06_tanmadhye_juhuyAdyasminjAtaH_syAt.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तन्मध्ये जुहुयाद्यस्मिञ्जातः स्यात् पूर्वं तु दैवतं सर्वत्र ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Let him place in the middle the oblation to that constellation under which (the child) is born; the deity, however, is constantly to precede (the corresponding Nakṣatra).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/07_AyuShTe_adya_gIrbhirayamagnirvareNyaH.md">
-<details open><summary><h2>०७ आयुष्टे अद्य गीर्भिरयमग्निर्वरेण्यः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आयुष्टे अद्य गीर्भिरयमग्निर्वरेण्यः । आयुर्नो देहि जीवसे । आयुर्दा अग्ने हविषा वृधानो घृतप्रतीको घृतयोनिरेधि । घृतं पीत्वा मधु चारु गव्यं पितेव पुत्रमिह रक्षतादिममिति त्वं सोम महे भगमिति दशमी स्थालीपाकस्य ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/07_AyuShTe_adya_gIrbhirayamagnirvareNyaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आयुष्टे अद्य गीर्भिरयमग्निर्वरेण्यः । आयुर्नो देहि जीवसे । आयुर्दा अग्ने हविषा वृधानो घृतप्रतीको घृतयोनिरेधि । घृतं पीत्वा मधु चारु गव्यं पितेव पुत्रमिह रक्षतादिममिति त्वं सोम महे भगमिति दशमी स्थालीपाकस्य ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7 [^3] . (He then makes two other oblations with the verses,) '(May) this Agni, the excellent one, (give) thee to-day life for (our) prayers; give us life that we may live long,' - (and,) 'Life-giving, Agni, be strong by Havis; may thy face and thy seat be full of ghee; drinking ghee, the sweet honey of the cow, protect, as a father (protects) his son, here N.N.' The tenth oblation of the mess of cooked food with the verse, 'Thou, Soma, givest bliss to the old one' (Rig-veda I, 91, 7).
 
 [^3]:  The first Mantra is corrupt; in the Āśvalāyana-Śrauta-sūtra (II, 10, 4) its text runs thus, āyush ṭe viśvato dadhad ayam agnir vareṇyaḥ, &c. Comp. Atharva-veda VII, 53, 6.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/08_nAmadheyaM_prakAshaM_kRtvA.md">
-<details open><summary><h2>०८ नामधेयं प्रकाशं कृत्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नामधेयं प्रकाशं कृत्वा ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/08_nAmadheyaM_prakAshaM_kRtvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नामधेयं प्रकाशं कृत्वा ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. Having pronounced aloud (the child's) name,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/09_brAhmaNAn_svastivAchya.md">
-<details open><summary><h2>०९ ब्राह्मणान् स्वस्तिवाच्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+ब्राह्मणान् स्वस्तिवाच्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 ब्राह्मणान् स्वस्तिवाच्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/09_brAhmaNAn_svastivAchya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. And caused the Brāhmaṇas to say auspicious words,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/10_evameva_mAsimAsi_janmatithim.md">
-<details open><summary><h2>१० एवमेव मासिमासि जन्मतिथिम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+एवमेव मासिमासि जन्मतिथिं हुत्वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 एवमेव मासिमासि जन्मतिथिं हुत्वा 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/10_evameva_mAsimAsi_janmatithim.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 10. And having sacrificed in the same way every month to the Tithi of (the child's) birth,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/25/11_UrdhvaM_saMvatsarAdgRhye-gnau_juhoti.md">
-<details open><summary><h2>११ ऊर्ध्वं संवत्सराद्गृह्येऽग्नौ जुहोति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+ऊर्ध्वं संवत्सराद्गृह्येऽग्नौ जुहोति ११
+</details>
+
+<details><summary>मूलम्</summary>
 
 ऊर्ध्वं संवत्सराद्गृह्येऽग्नौ जुहोति ११
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/25/11_UrdhvaM_saMvatsarAdgRhye-gnau_juhoti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 11 [^4] . He sacrifices, when one year has expired, on the (ordinary) domestic fire.
 
 [^4]:  'The words "every month" (Sūtra 10) retain their value p. 53(here also). Thus the sūtikāgni is to be kept through one year. After the lapse of that year one should sacrifice every month on the domestic fire as long as his life lasts. As it is said "in the domestic fire," the sūtikāgni is not to be kept any longer.' Nārāyaṇa.
 
 </details>
-</div>
