--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/28.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/1/28.md
@@ -2,331 +2,408 @@
 title = "२८"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/01_saMvatsare_chUDAkarma.md">
-<details open><summary><h2>०१ संवत्सरे चूडाकर्म ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संवत्सरे चूडाकर्म १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/01_saMvatsare_chUDAkarma.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+संवत्सरे चूडाकर्म १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . After one year the Cūḍākarman (i.e. the tonsure of the child's head);
 
 [^1]:  28, 1. Cūḷākarman literally means, the preparing of the lock or the locks (left when the rest of the hair is shaven).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/02_tRtIye_vA_varShe.md">
-<details open><summary><h2>०२ तृतीये वा वर्षे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तृतीये वा वर्षे २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/02_tRtIye_vA_varShe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तृतीये वा वर्षे २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. Or in the third year;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/03_panchame_xatriyasya.md">
-<details open><summary><h2>०३ पञ्चमे क्षत्रियस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पञ्चमे क्षत्रियस्य ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/03_panchame_xatriyasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पञ्चमे क्षत्रियस्य ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. In the fifth for a Kṣatriya;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/04_saptame_vaishyasya.md">
-<details open><summary><h2>०४ सप्तमे वैश्यस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+सप्तमे वैश्यस्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 सप्तमे वैश्यस्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/04_saptame_vaishyasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 4. In the seventh for a Vaiśya.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/05_agnimupasamAdhAya.md">
-<details open><summary><h2>०५ अग्निमुपसमाधाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अग्निमुपसमाधाय ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/05_agnimupasamAdhAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अग्निमुपसमाधाय ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. Having placed the fire (in the outer hall; see chap. 5, 2) - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/06_vrIhiyavAnAM_tilamAShANAmiti_pAtrANi.md">
-<details open><summary><h2>०६ व्रीहियवानां तिलमाषाणामिति पात्राणि ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+व्रीहियवानां तिलमाषाणामिति पात्राणि च पूरयित्वा
+</details>
+
+<details><summary>मूलम्</summary>
 
 व्रीहियवानां तिलमाषाणामिति पात्राणि च पूरयित्वा
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/06_vrIhiyavAnAM_tilamAShANAmiti_pAtrANi.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 6. And having filled vessels with rice and barley, sesamum seeds and beans,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/07_anaDuhaM_cha_gomayam.md">
-<details open><summary><h2>०७ अनडुहं च गोमयम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अनडुहं च गोमयं कुशभित्तं च केशप्रतिग्रहणायादर्शं नवनीतं लोहक्षुरं चोत्तरत उपस्थाप्य ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/07_anaDuhaM_cha_gomayam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अनडुहं च गोमयं कुशभित्तं च केशप्रतिग्रहणायादर्शं नवनीतं लोहक्षुरं चोत्तरत उपस्थाप्य ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. And having put down northwards bull-dung and a layer of Kuśa grass for receiving the hair, a mirror, fresh butter, and a razor of copper,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/08_sampRchyadhvamRtAvarIrUrmiNA_madhumattamAH.md">
-<details open><summary><h2>०८ सम्पृच्यध्वमृतावरीरूर्मिणा मधुमत्तमाः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+सम्पृच्यध्वमृतावरीरूर्मिणा मधुमत्तमाः ।  
+पृञ्चतीर्मधुना पयो मन्द्रा धनस्य सातय  
+इत्युष्णास्वप्सु शीता आसिञ्चत्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 सम्पृच्यध्वमृतावरीरूर्मिणा मधुमत्तमाः ।  
 पृञ्चतीर्मधुना पयो मन्द्रा धनस्य सातय  
 इत्युष्णास्वप्सु शीता आसिञ्चत्य् 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/08_sampRchyadhvamRtAvarIrUrmiNA_madhumattamAH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 8. He pours cold water into warm with (the verse), 'Mix yourselves, ye holy ones, with your waves, ye honied ones, mixing milk with honey, ye lovely ones, for the obtaining of wealth.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/09_Apa_undantu_jIvase.md">
-<details open><summary><h2>०९ आप उन्दन्तु जीवसे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आप उन्दन्तु जीवसे दीर्घायुत्वाय वर्चसे । त्र्यायुषं जमदग्नेः कश्यपस्य त्र्यायुषमगस्त्यस्य त्र्यायुषं । यद्देवानां त्र्यायुषं तत्ते करोमि त्र्यायुषमित्यसाविति शीतोष्णाभिरद्भिर्दक्षिणं केशपक्षं त्रिरभ्यनक्ति ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/09_Apa_undantu_jIvase.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आप उन्दन्तु जीवसे दीर्घायुत्वाय वर्चसे । त्र्यायुषं जमदग्नेः कश्यपस्य त्र्यायुषमगस्त्यस्य त्र्यायुषं । यद्देवानां त्र्यायुषं तत्ते करोमि त्र्यायुषमित्यसाविति शीतोष्णाभिरद्भिर्दक्षिणं केशपक्षं त्रिरभ्यनक्ति ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9. 'May the waters moisten thee for life, for old age and splendour. The threefold age of Jamadagni, Kaśyapa's threefold age, the threefold age of Agastya, the threefold age that belongs to the gods, that threefold age I produce for thee! N.N.!' - with these words he sprinkles the right part of his hair three times with lukewarm water.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/10_shalalyaike_vijaTAnkRtvA.md">
-<details open><summary><h2>१० शलल्यैके विजटान्कृत्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 शलल्यैके विजटान्कृत्वा १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/10_shalalyaike_vijaTAnkRtvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+शलल्यैके विजटान्कृत्वा १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. Having loosened the tangled locks, according to some (teachers), with a porcupine's quill,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/11_navanItenAbhyajya.md">
-<details open><summary><h2>११ नवनीतेनाभ्यज्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+नवनीतेनाभ्यज्य
+</details>
+
+<details><summary>मूलम्</summary>
 
 नवनीतेनाभ्यज्य
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/11_navanItenAbhyajya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 11. And having anointed (his hair)with fresh butter,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/12_auShadhe_trAyasvainamiti_kushataruNamantardadhA.md">
-<details open><summary><h2>१२ औषधे त्रायस्वैनमिति कुशतरुणमन्तर्दधाति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 औषधे त्रायस्वैनमिति कुशतरुणमन्तर्दधाति ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/12_auShadhe_trAyasvainamiti_kushataruNamantardadhA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+औषधे त्रायस्वैनमिति कुशतरुणमन्तर्दधाति ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12. He puts a young Kuśa shoot among (the hairs) with the words, 'Herb, protect him!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/13_keshAn_kushataruNaM_chAdarshena.md">
-<details open><summary><h2>१३ केशान् कुशतरुणं चादर्शेन ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 केशान् कुशतरुणं चादर्शेन संस्पृश्य १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/13_keshAn_kushataruNaM_chAdarshena.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+केशान् कुशतरुणं चादर्शेन संस्पृश्य १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13. Having touched the hair and the Kuśa shoot with the mirror,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/14_tejo-si_svadhitiShTe_pitA.md">
-<details open><summary><h2>१४ तेजोऽसि स्वधितिष्टे पिता ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तेजोऽसि स्वधितिष्टे पिता मैनं हिँ सीरिति लोहक्षुरमादत्ते १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/14_tejo-si_svadhitiShTe_pitA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तेजोऽसि स्वधितिष्टे पिता मैनं हिँ सीरिति लोहक्षुरमादत्ते १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14. He takes up the copper razor with the words, Sharpness art thou; the axe is thy father. Do no harm to him!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/15_yenAvapatsavitA_shmashvagre_xureNa.md">
-<details open><summary><h2>१५ येनावपत्सविता श्मश्वग्रे क्षुरेण ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+येनावपत्सविता श्मश्वग्रे क्षुरेण राज्ञो वरुणस्य विद्वान् ।  
+येन धाता बृहस्पतिरिन्द्र स्य चावपच्छिरः ।  
+तेन ब्रह्माणो वपतेदमद्यायुष्मान्दीर्घायुरयमस्तु वीरोऽसाविति केशाग्राणि छिनत्ति कुशतरुणं च
+</details>
+
+<details><summary>मूलम्</summary>
 
 येनावपत्सविता श्मश्वग्रे क्षुरेण राज्ञो वरुणस्य विद्वान् ।  
 येन धाता बृहस्पतिरिन्द्र स्य चावपच्छिरः ।  
 तेन ब्रह्माणो वपतेदमद्यायुष्मान्दीर्घायुरयमस्तु वीरोऽसाविति केशाग्राणि छिनत्ति कुशतरुणं च
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/15_yenAvapatsavitA_shmashvagre_xureNa.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 15 [^2] . With (the words), 'The razor with which in the beginning Savitar, the knowing one, has shaven the beard of king Varuṇa, and with which Dhātar Bṛhaspati has shaven Indra's head, with that, ye Brāhmaṇas, shave this (head) to-day; blessed with long life, with old age be this man N.N.!' he cuts the tips of the hairs and the Kuśa shoot.
 
 [^2]:  The parallel texts show that instead of Bṛhaspatir we have to read Bṛhaspater, instead of adya, asya. So the correct translation would be, '. . . with what Dhātar has shaven Bṛhaspati's and Indra's head, with that do ye Brāhmaṇas shave this head of this (child).'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/16_evaM_dvitIyamevaM_tRtIyam.md">
-<details open><summary><h2>१६ एवं द्वितीयमेवं तृतीयम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवं द्वितीयमेवं तृतीयम् १६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/16_evaM_dvitIyamevaM_tRtIyam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एवं द्वितीयमेवं तृतीयम् १६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 16. In the same way a second time; in the same way a third time.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/17_evaM_dviruttarato.md">
-<details open><summary><h2>१७ एवं द्विरुत्तरतो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+एवं द्विरुत्तरतो
+</details>
+
+<details><summary>मूलम्</summary>
 
 एवं द्विरुत्तरतो 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/17_evaM_dviruttarato.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 17. In the same way twice on the left side.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/18_nikaxayoH_ShaShThasaptame_godAnakarmaNy.md">
-<details open><summary><h2>१८ निकक्षयोः षष्ठसप्तमे गोदानकर्मण्य् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+निकक्षयोः षष्ठसप्तमे गोदानकर्मण्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 निकक्षयोः षष्ठसप्तमे गोदानकर्मण्य् 
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/18_nikaxayoH_ShaShThasaptame_godAnakarmaNy.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 18. Under the armpits a sixth and a seventh time at the Godānakarman (ceremony of shaving the beard).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/19_etadeva_godAnakarma_yachchUDAkarma.md">
-<details open><summary><h2>१९ एतदेव गोदानकर्म यच्चूडाकर्म ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतदेव गोदानकर्म यच्चूडाकर्म १९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/19_etadeva_godAnakarma_yachchUDAkarma.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एतदेव गोदानकर्म यच्चूडाकर्म १९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 19. The Godānakarman is identical with the Cūḍākarman,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/20_ShoLashe_varShe-ShTAdashe_vA.md">
-<details open><summary><h2>२० षोळशे वर्षेऽष्टादशे वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 षोळशे वर्षेऽष्टादशे वा २०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/20_ShoLashe_varShe-ShTAdashe_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+षोळशे वर्षेऽष्टादशे वा २०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 20. (It is to be performed) in the sixteenth or in the eighteenth year.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/21_tRtIye_tu_pravapane.md">
-<details open><summary><h2>२१ तृतीये तु प्रवपने ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तृतीये तु प्रवपने गां ददात्यहतं च वासस् २१
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/21_tRtIye_tu_pravapane.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तृतीये तु प्रवपने गां ददात्यहतं च वासस् २१
+</details>
+
+<details><summary>Oldenberg</summary>
 
 21. At the third turn of shaving, however, he gives a cow and a garment that has not yet been washed.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/22_tUShNImAvRtaH_kanyAnAm.md">
-<details open><summary><h2>२२ तूष्णीमावृतः कन्यानाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तूष्णीमावृतः कन्यानां २२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/22_tUShNImAvRtaH_kanyAnAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तूष्णीमावृतः कन्यानां २२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 22. Silently the rites (are performed) for girls.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/23_prAgudIchyAM_dishi_bahvauShadhike.md">
-<details open><summary><h2>२३ प्रागुदीच्यां दिशि बह्वौषधिके ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रागुदीच्यां दिशि बह्वौषधिके देशेऽपां वा समीपे केशान्निखनन्ति २३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/23_prAgudIchyAM_dishi_bahvauShadhike.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रागुदीच्यां दिशि बह्वौषधिके देशेऽपां वा समीपे केशान्निखनन्ति २३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 23. To the north-east, in a place covered with herbs, or in the neighbourhood of water they bury the hairs in the earth.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/1/28/24_nApitAya_dhAnyapAtrANi_nApitAya.md">
-<details open><summary><h2>२४ नापिताय धान्यपात्राणि नापिताय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नापिताय धान्यपात्राणि नापिताय धान्यपात्राणि २४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/1/28/24_nApitAya_dhAnyapAtrANi_nApitAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नापिताय धान्यपात्राणि नापिताय धान्यपात्राणि २४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 24 [^3] . To the barber the vessels of grain. To the barber the vessels of grain.
 
 [^3]:  See Sūtra 6.
 
 </details>
-</div>
