--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/15.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/2/15.md
@@ -2,157 +2,191 @@
 title = "१५"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/01_ShaNNAM_chedarghyANAmanyatama_AgachChedgopashum.md">
-<details open><summary><h2>०१ षण्णां चेदर्घ्याणामन्यतम आगच्छेद्गोपशुमजमन्नम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 षण्णां चेदर्घ्याणामन्यतम आगच्छेद्गोपशुमजमन्नं वा यत्सामान्यतमं मन्येत तत्कुर्यान् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/01_ShaNNAM_chedarghyANAmanyatama_AgachChedgopashum.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+षण्णां चेदर्घ्याणामन्यतम आगच्छेद्गोपशुमजमन्नं वा यत्सामान्यतमं मन्येत तत्कुर्यान् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Should any one of the six persons (mentioned in the Śrauta-sūtra and in the Sūtras 4-9) to whom the Arghya reception is due, visit (him), let him make (ready) a cow, a goat, or what (sort of food) he thinks most like (thereto).
 
 [^1]:  15, 1. This Sūtra presupposes the Śrauta-sūtra IV, 21, 1: 'To six persons the Argha reception is due, viz. to the teacher, to an officiating priest, to the father-in-law, to a king, to a Snātaka, to a friend.' Here the fourth person mentioned is the śvaśura, while in the Gṛhya text the expression vaivāhya is used. It is difficult not to believe that both words are used in the same sense, and accordingly Nārāyaṇa says vivāhyaḥ śvaśuraḥ. Comp. Professor Stenzler's note on Pāraskara I, 3, 1; Āpastamba II, 8, 7; Gautama V, 27.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/02_nAmA.N_so-rghaH_syAd.md">
-<details open><summary><h2>०२ नामाँ सोऽर्घः स्याद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नामाँ सोऽर्घः स्याद् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/02_nAmA.N_so-rghaH_syAd.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नामाँ सोऽर्घः स्याद् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . Let the Argha not be without flesh.
 
 [^2]:  2, 3. These Sūtras are identical with Pāraskara I, 3, 29. 30. The following Sūtra of Pāraskara stands in the Śāṅkhāyana text as p. 88 Sūtra 10. Probably Pāraskara here represents the text which both Sūtrakāras follow, more exactly, and the enumeration given by Śāṅkhāyana in Sūtras 4-9 of the different categories of Arghyas with the corresponding deities, is an addition to that original stock of rules.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/03_adhiyajnamadhivivAhaM_kurutetyeva_brUyAd.md">
-<details open><summary><h2>०३ अधियज्ञमधिविवाहं कुरुतेत्येव ब्रूयाद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अधियज्ञमधिविवाहं कुरुतेत्येव ब्रूयाद् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/03_adhiyajnamadhivivAhaM_kurutetyeva_brUyAd.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अधियज्ञमधिविवाहं कुरुतेत्येव ब्रूयाद् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. On the occasion of a sacrifice and of a wedding let (the guest) say, 'Make it (ready).'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/04_AchAryAyAgneya.md">
-<details open><summary><h2>०४ आचार्यायाग्नेय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आचार्यायाग्नेय ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/04_AchAryAyAgneya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आचार्यायाग्नेय ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. The animal (offered) to the teacher is sacred to Agni;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/05_Rtvije_bArhaspatyo.md">
-<details open><summary><h2>०५ ऋत्विजे बार्हस्पत्यो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+ऋत्विजे बार्हस्पत्यो
+</details>
+
+<details><summary>मूलम्</summary>
 
 ऋत्विजे बार्हस्पत्यो 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/05_Rtvije_bArhaspatyo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 5. If offered to an officiating priest, to Bṛhaspati;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/06_vaivAhyAya_prAjApatyo.md">
-<details open><summary><h2>०६ वैवाह्याय प्राजापत्यो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+वैवाह्याय प्राजापत्यो
+</details>
+
+<details><summary>मूलम्</summary>
 
 वैवाह्याय प्राजापत्यो
 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/06_vaivAhyAya_prAjApatyo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 6 [^3] . If to the father-in-law, to Prajāpati;
 
 [^3]:  The literal translation of vaivāhya would be 'a person related by marriage.' But comp. the note on Sūtra 1.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/07_rAjna_aindraH.md">
-<details open><summary><h2>०७ राज्ञ ऐन्द्रः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 राज्ञ ऐन्द्रः ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/07_rAjna_aindraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+राज्ञ ऐन्द्रः ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7. If to a king, to Indra;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/08_priyAya_maitraH.md">
-<details open><summary><h2>०८ प्रियाय मैत्रः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रियाय मैत्रः ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/08_priyAya_maitraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रियाय मैत्रः ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8 [^4] . If to a friend, to Mitra;
 
 [^4]:  Priya of course does not mean jāmātar, as is stated in a number of commentaries. Gobhila says, priyoऽtithiḥ.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/09_snAtakAyaindrAgno.md">
-<details open><summary><h2>०९ स्नातकायैन्द्राग्नो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+स्नातकायैन्द्राग्नो
+</details>
+
+<details><summary>मूलम्</summary>
 
 स्नातकायैन्द्राग्नो 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/09_snAtakAyaindrAgno.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 9. If to a Snātaka, to Indra and Agni;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/10_yadyapyasakRtsaMvatsarasya_somena_yajeta.md">
-<details open><summary><h2>१० यद्यप्यसकृत्संवत्सरस्य सोमेन यजेत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यद्यप्यसकृत्संवत्सरस्य सोमेन यजेत कृतार्घ्या एवैनं याजयेयुर्नाकृतार्घ्यास् १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/10_yadyapyasakRtsaMvatsarasya_somena_yajeta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यद्यप्यसकृत्संवत्सरस्य सोमेन यजेत कृतार्घ्या एवैनं याजयेयुर्नाकृतार्घ्यास् १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. Even if he performs more than one Soma sacrifice during a year, let only priests who have received (from him) the Arghya reception officiate for him, not such who have not received it.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/2/15/11_tadapi_bhavati.md">
-<details open><summary><h2>११ तदपि भवति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदपि भवति १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/2/15/11_tadapi_bhavati.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+तदपि भवति १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11 [^5] . Here it is said also:
 
 [^5]:  Other persons, for instance a king, can claim the Argha reception not more than once a year. Comp. Āpastamba II, 8, 7; Gautama V, 28, 29, &c.
 
 </details>
-</div>
