--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/07.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/07.md
@@ -2,27 +2,35 @@
 title = "०७"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/07/01_atha_proShyAyangRhAnsamIxate.md">
-<details open><summary><h2>०१ अथ प्रोष्यायन्गृहान्समीक्षते ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ प्रोष्यायन्गृहान्समीक्षते १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/07/01_atha_proShyAyangRhAnsamIxate.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ प्रोष्यायन्गृहान्समीक्षते १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1. When he then returns from his journey, he looks at his house (and says),
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/07/02_gRhA_mA_bibhIta.md">
-<details open><summary><h2>०२ गृहा मा बिभीत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गृहा मा बिभीत मा वेपध्वमूर्जं बिभ्रत एमसि ऊर्जं बिभ्रद्वः सुमनाः सुमेधा गृहानैमि मनसा मोदमानः येषामध्येति प्रवसन्येषु सौमनसो बहुः गृहानुप ह्वयामहे ते नो जानन्तु जानतः उपहूता इह गाव उपहूता अजावयः अथोऽन्नस्य कीलाल उपहूतो गृहेषु नः २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/07/02_gRhA_mA_bibhIta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+गृहा मा बिभीत मा वेपध्वमूर्जं बिभ्रत एमसि ऊर्जं बिभ्रद्वः सुमनाः सुमेधा गृहानैमि मनसा मोदमानः येषामध्येति प्रवसन्येषु सौमनसो बहुः गृहानुप ह्वयामहे ते नो जानन्तु जानतः उपहूता इह गाव उपहूता अजावयः अथोऽन्नस्य कीलाल उपहूतो गृहेषु नः २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^1] . 'House, do not fear, do not tremble; bringing strength we come back. Bringing strength, joyful and wise, I come back to thee, to the house, rejoicing in my mind.
 
@@ -33,45 +41,53 @@ title = "०७"
 'Hither are called the cows; hither are called goats and sheep; and the sweet essence (?) of food is called hither to our house.'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/07/03_ayaM_no_agnirbhagavAnayam.md">
-<details open><summary><h2>०३ अयं नो अग्निर्भगवानयम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अयं नो अग्निर्भगवानयं नो भगवत्तरः अस्योपसद्ये मा रिषामायं श्रैष्ठ्ये दधातु न इति गृह्यमग्निमुपस्थाय ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/07/03_ayaM_no_agnirbhagavAnayam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अयं नो अग्निर्भगवानयं नो भगवत्तरः अस्योपसद्ये मा रिषामायं श्रैष्ठ्ये दधातु न इति गृह्यमग्निमुपस्थाय ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Having approached the (sacred) domestic fire with the verse, 'This Agni is glorious to us, this is highly glorious. Worshipping him (?) may we suffer no harm; may he bring us to supremity' - 
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/07/04_kalyANIM_vAchaM_prabrUyAd.md">
-<details open><summary><h2>०४ कल्याणीं वाचं प्रब्रूयाद् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कल्याणीं वाचं प्रब्रूयाद् ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/07/04_kalyANIM_vAchaM_prabrUyAd.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+कल्याणीं वाचं प्रब्रूयाद् ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Let him pronounce auspicious words.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/07/05_virAjo_doho-si_virAjo.md">
-<details open><summary><h2>०५ विराजो दोहोऽसि विराजो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विराजो दोहोऽसि विराजो दोहमशीय मयि पद्यायै विराजो दोह इति पाद्यप्रतिग्रहणः ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/07/05_virAjo_doho-si_virAjo.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+विराजो दोहोऽसि विराजो दोहमशीय मयि पद्यायै विराजो दोह इति पाद्यप्रतिग्रहणः ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . When accepting the water for washing the feet he says, 'The milk of Virāj art thou; may I obtain the milk of Virāj; in me (may) the milk of Padyā Virāj (dwell)!'
 
 [^2]:  Padyā virāj is the Virāj metre, so far as it consists of p. 98 Pādas; in this connection, of course, the phrase is intended besides to convey the meaning of 'the splendour which dwells in the feet.' Comp. Pāraskara I, 3, 12 and Professor Stenzler's note there. My German translation of this Sūtra of Śāṅkhāyana rests on a misunderstanding.
 
 </details>
-</div>
