--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/13.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/3/13.md
@@ -2,68 +2,85 @@
 title = "१३"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/13/01_madhyamAyAM_madhyAvarShe_cha.md">
-<details open><summary><h2>०१ मध्यमायां मध्यावर्षे च ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मध्यमायां मध्यावर्षे च १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/13/01_madhyamAyAM_madhyAvarShe_cha.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मध्यमायां मध्यावर्षे च १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . At the middle (Aṣṭakā) and in the middle of the rainy season,
 
 [^1]:  13, 1. On madhyāvarṣa, comp. Weber, loc. cit., pp. 331, 337. Nārāyaṇa understands not 'in the middle of the rainy season,' but 'in the middle of the year' (see his note, p. 146 of the German edition). I cannot help thinking that the word madhyāvarṣe, given by the MSS. here and in Pāraskara III, 3, 13, and explained by Nārāyaṇa, is a corrupt reading which we should correct into māghyavarṣe ('the festival celebrated during the rainy season under the Nakṣatra Maghās'), or something like that. The MSS. of Āśvalāyana-Gṛhya II, 5, 9 have māghyāvarṣaṃ, māghāvarṣaṃ, mādhyāvarṣaṃ. Viṣṇu (LXXVI, 1, comp. LXXVIII, 52, and Professor Jolly's note, Sacred Books of the East, VII, p. 240) mentions 'the three Aṣṭakās, the three Anvaṣṭakās, a Māgha day which falls on the thirteenth of the dark half of the month Prauṣṭhapada.' Comp. Manu III, 273, varṣāsu ca maghāsu ca; Yājñavalkya I, 260.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/13/02_mahAvyAhRtayashchatasro_ye_tAtRShuriti.md">
-<details open><summary><h2>०२ महाव्याहृतयश्चतस्रो ये तातृषुरिति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाव्याहृतयश्चतस्रो ये तातृषुरिति चतस्रोऽनुद्रुत्य वपां जुहुयाद् २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/13/02_mahAvyAhRtayashchatasro_ye_tAtRShuriti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+महाव्याहृतयश्चतस्रो ये तातृषुरिति चतस्रोऽनुद्रुत्य वपां जुहुयाद् २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. The four Mahāvyāhṛtis (and) the four (verses), They who have thirsted' (Rig-veda X, 15, 9 seq.): having quickly recited (these verses) he shall sacrifice the omentum;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/13/03_vaha_vapAM_jAtavedaH.md">
-<details open><summary><h2>०३ वह वपां जातवेदः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वह वपां जातवेदः पितृभ्यो यत्रैनान्वेत्थ सुकृतस्य लोके । मेदसः कुल्या उप तान्स्रवन्तु सत्याः सन्तु यजमानस्य कामाः स्वाहेति वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/13/03_vaha_vapAM_jAtavedaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वह वपां जातवेदः पितृभ्यो यत्रैनान्वेत्थ सुकृतस्य लोके । मेदसः कुल्या उप तान्स्रवन्तु सत्याः सन्तु यजमानस्य कामाः स्वाहेति वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Or (he shall do so) with the verse, 'Carry the omentum, Jātavedas, to the Manes, where thou knowest them in the world of virtue. May streams of fat flow to them; may the wishes of the sacrificer be fulfilled. Svāhā!'
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/13/04_mahAvyAhRtayashchatasro_ye_tAtRShuriti.md">
-<details open><summary><h2>०४ महाव्याहृतयश्चतस्रो ये तातृषुरिति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाव्याहृतयश्चतस्रो ये तातृषुरिति चतस्रो ऽष्टाहुति स्थालीपाकोऽवदानमिश्रः
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/13/04_mahAvyAhRtayashchatasro_ye_tAtRShuriti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+महाव्याहृतयश्चतस्रो ये तातृषुरिति चतस्रो ऽष्टाहुति स्थालीपाकोऽवदानमिश्रः
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. (Then follow) the four Mahāvyāhṛtis (and) the four (verses), 'They who have thirsted' (see Sūtra 2): (thus is offered) an eightfold oblation of cooked food, together with the cut-off portions.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/13/05_antarhitA_girayo-ntarhitA_pRthivI.md">
-<details open><summary><h2>०५ अन्तर्हिता गिरयोऽन्तर्हिता पृथिवी ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्तर्हिता गिरयोऽन्तर्हिता पृथिवी मही मे । दिवा दिग्भिश्च सर्वाभिरन्यमन्तः पितुर्दधेऽमुष्यै स्वाहा अन्तर्हिता म ऋतवोऽहोरात्राश्च सन्धिजाः । मासाश्चार्धमासाश्चान्यमन्तः पितुर्दधेऽमुष्यै स्वाहेति यास्तिष्ठन्ति याः स्रवन्ति या दभ्राः परिसस्रुषीः । अद्भिः सर्वस्य भर्तृभिरन्यमन्तः पितुर्दधेऽमुष्यै स्वाहा यन्मे माता प्रलुलुभे विचरन्त्यपतिव्रता । रेतस्तन्मे पिता वृङ्क्तां मातुरन्योऽवपद्यताममुष्यै स्वाहेति वा महाव्याहृतीनां स्थाने चतस्रोऽन्यत्रकरणस्य ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/13/05_antarhitA_girayo-ntarhitA_pRthivI.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अन्तर्हिता गिरयोऽन्तर्हिता पृथिवी मही मे । दिवा दिग्भिश्च सर्वाभिरन्यमन्तः पितुर्दधेऽमुष्यै स्वाहा अन्तर्हिता म ऋतवोऽहोरात्राश्च सन्धिजाः । मासाश्चार्धमासाश्चान्यमन्तः पितुर्दधेऽमुष्यै स्वाहेति यास्तिष्ठन्ति याः स्रवन्ति या दभ्राः परिसस्रुषीः । अद्भिः सर्वस्य भर्तृभिरन्यमन्तः पितुर्दधेऽमुष्यै स्वाहा यन्मे माता प्रलुलुभे विचरन्त्यपतिव्रता । रेतस्तन्मे पिता वृङ्क्तां मातुरन्योऽवपद्यताममुष्यै स्वाहेति वा महाव्याहृतीनां स्थाने चतस्रोऽन्यत्रकरणस्य ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . Or, 'Interposed are the mountains; interposed is the wide earth to me. With the sky and all the points of the horizon I interpose another one instead of the father. To N.N. svāhā!
 
@@ -76,32 +93,37 @@ title = "१३"
 'Wherein my mother has done amiss, going astray, faithless to her husband, that sperm may my father take as his own; may another one fall off from the mother. To N.N. svāhā!' - these four (verses) instead of the Mahāvyāhṛtis, if (the sacrificer) is an illegitimate child.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/13/06_pAyaso_vA_charuH.md">
-<details open><summary><h2>०६ पायसो वा चरुः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पायसो वा चरुः ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/13/06_pAyaso_vA_charuH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पायसो वा चरुः ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. Or milk-rice (should be offered).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/3/13/07_shvo-nvaShTakyaM_piNDapitRyajnAvRtA.md">
-<details open><summary><h2>०७ श्वोऽन्वष्टक्यं पिण्डपितृयज्ञावृता ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 श्वोऽन्वष्टक्यं पिण्डपितृयज्ञावृता ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/3/13/07_shvo-nvaShTakyaM_piNDapitRyajnAvRtA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+श्वोऽन्वष्टक्यं पिण्डपितृयज्ञावृता ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7 [^3] . On the next day the Anvaṣṭakya ceremony (i.e. ceremony following the Aṣṭakā) in accordance with the rite of the Piṇḍapitṛyajña.
 
 [^3]:  On Anvaṣṭakya, comp. Bühler, S.B.E., XIV, p. 55; Jolly. loc. cit., p. 59.
 
 </details>
-</div>
