--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/03.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/03.md
@@ -2,111 +2,136 @@
 title = "०३"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/03/01_atha_sapiNDIkaraNam.md">
-<details open><summary><h2>०१ अथ सपिण्डीकरणम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ सपिण्डीकरणं १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/03/01_atha_sapiNDIkaraNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथ सपिण्डीकरणं १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now (follows) the Sapiṇḍīkaraṇa (i.e. reception of a dead person into the community of Piṇḍa-offerings with the other Manes).
 
 [^1]:  3, 1. It appears to me that this whole chapter is a later addition to the original text. The last Sūtra of the preceding chapter, treating of the omission of the fourth 'father,' which forms, as shown in the preceding note, a consequence of the Sapiṇḍīkaraṇa, p. 110 supposes this ceremony to be known and to require no special explanation. Had the intention of the author been to treat of the Sapiṇḍīkaraṇa, this would have been the right place for mentioning the caturthavisarga, and not, as we really read it, the end of the chapter treating of the Ekoddiṣṭa. As pointing in the same direction I will mention that the Śāmbavya-Gṛhya, while giving the first, second, and fourth chapter of this Adhyāya, omits the third. Finally it seems decisive to me that the fifth (Pariśiṣṭa) book of the Śāṅkhāyana-Gṛhya treats of the Sapiṇḍīkaraṇa in a whole chapter (V, 9), which shows that the text itself, as the author of the Pariśiṣṭa read it, gave no exposition of this ceremony.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/03/02_saMvatsare_pUrNe_tripaxe.md">
-<details open><summary><h2>०२ संवत्सरे पूर्णे त्रिपक्षे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 संवत्सरे पूर्णे त्रिपक्षे वा २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/03/02_saMvatsare_pUrNe_tripaxe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+संवत्सरे पूर्णे त्रिपक्षे वा २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2 [^2] . When one year has elapsed, or three half-months,
 
 [^2]:  Nārāyaṇa says that tripakṣa means either three pakṣas, i.e. one month and a half, or one pakṣa deficient by three days, i.e. twelve days. We need not say that the latter explanation is inadmissible it evidently rests on a wrong conclusion drawn from a passage of another Sūtra quoted by him, in which it is stated that the Sapiṇḍīkaraṇa should be performed saṃvatsarānte dvādaśāhe vā.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/03/03_yadaharvA_vRddhirApadyeta.md">
-<details open><summary><h2>०३ यदहर्वा वृद्धिरापद्येत ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यदहर्वा वृद्धिरापद्येत ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/03/03_yadaharvA_vRddhirApadyeta.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यदहर्वा वृद्धिरापद्येत ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. Or on a day when something good happens,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/03/04_chatvAryudapAtrANi_satilagandhodakAni_kRtvA.md">
-<details open><summary><h2>०४ चत्वार्युदपात्राणि सतिलगन्धोदकानि कृत्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 चत्वार्युदपात्राणि सतिलगन्धोदकानि कृत्वा ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/03/04_chatvAryudapAtrANi_satilagandhodakAni_kRtvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+चत्वार्युदपात्राणि सतिलगन्धोदकानि कृत्वा ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. He fills four water-pots with sesamum, scents, and water,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/03/05_trINi_pitRRNAmekaM_pretasya.md">
-<details open><summary><h2>०५ त्रीणि पितॄणामेकं प्रेतस्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 त्रीणि पितॄणामेकं प्रेतस्य ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/03/05_trINi_pitRRNAmekaM_pretasya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+त्रीणि पितॄणामेकं प्रेतस्य ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. Three for the fathers, one for the (newly) dead person,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/03/06_pretapAtraM_pitRpAtreShvAsinchati_ye.md">
-<details open><summary><h2>०६ प्रेतपात्रं पितृपात्रेष्वासिञ्चति ये ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रेतपात्रं पितृपात्रेष्वासिञ्चति ये समाना इति द्वाभ्याम् ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/03/06_pretapAtraM_pitRpAtreShvAsinchati_ye.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रेतपात्रं पितृपात्रेष्वासिञ्चति ये समाना इति द्वाभ्याम् ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. And pours the pot that belongs to the (newly) dead person out into the pots of the fathers with the two verses, 'They who commonly' (Vājasaneyi Saṃhitā XIX, 45. 46).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/03/07_evaM_piNDamapy.md">
-<details open><summary><h2>०७ एवं पिण्डमप्य् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+एवं पिण्डमप्य्
+</details>
+
+<details><summary>मूलम्</summary>
 
 एवं पिण्डमप्य् 
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/03/07_evaM_piNDamapy.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>Oldenberg</summary>
 
 7. Thus also the lump (of flour).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/03/08_etatsapiNDIkaraNam.md">
-<details open><summary><h2>०८ एतत्सपिण्डीकरणम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एतत्सपिण्डीकरणम् ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/03/08_etatsapiNDIkaraNam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+एतत्सपिण्डीकरणम् ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. This is the Sapiṇḍīkaraṇa.
 
 </details>
-</div>
