--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/04.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/04.md
@@ -2,216 +2,262 @@
 title = "०४"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/01_athAta_Abhyudayikam.md">
-<details open><summary><h2>०१ अथात आभ्युदयिकम् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथात आभ्युदयिकम् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/01_athAta_Abhyudayikam.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथात आभ्युदयिकम् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now (follows) the Ābhyudayika (i.e. the Śrāddha ceremony referring to good luck).
 
 [^1]:  4, 1. The Ābhyudayika Śrāddha has to be performed on such p. 111 occasions as the birth of a son, the marriage of a son or a daughter, the performance of ceremonies such as the nāmakarman, cūḍākarman, &c. See Yājñavalkya I, 249.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/02_ApUryamANapaxe_puNyAhe.md">
-<details open><summary><h2>०२ आपूर्यमाणपक्षे पुण्याहे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आपूर्यमाणपक्षे पुण्याहे २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/02_ApUryamANapaxe_puNyAhe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आपूर्यमाणपक्षे पुण्याहे २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. In the fortnight of the increasing moon, on an auspicious day,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/03_mAtRyAgaM_kRtvA.md">
-<details open><summary><h2>०३ मातृयागं कृत्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मातृयागं कृत्वा ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/03_mAtRyAgaM_kRtvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मातृयागं कृत्वा ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3 [^2] . After the sacrifice to the mothers has been performed,
 
 [^2]:  A Śrāddha ceremony directed to the mothers here precedes that consecrated to the fathers.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/04_yugmAnvedavida_upaveshya.md">
-<details open><summary><h2>०४ युग्मान्वेदविद उपवेश्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 युग्मान्वेदविद उपवेश्य ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/04_yugmAnvedavida_upaveshya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+युग्मान्वेदविद उपवेश्य ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. And an even number of (Brāhmaṇas) versed in the Veda have been invited to sit down;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/05_pUrvAhNe.md">
-<details open><summary><h2>०५ पूर्वाह्णे ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पूर्वाह्णे ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/05_pUrvAhNe.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पूर्वाह्णे ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. In the forenoon;
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/06_pradaxiNamupachAraH.md">
-<details open><summary><h2>०६ प्रदक्षिणमुपचारः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रदक्षिणमुपचारः ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/06_pradaxiNamupachAraH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रदक्षिणमुपचारः ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6 [^3] . The rite is performed from left to right.
 
 [^3]:  Professor Stenzler's translation of Yājñavalkya, loc. cit. (pradakṣiṇāvṛtka = die Ehrfurcht beobachtend), has to be corrected according to this Sūtra.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/07_pitRmantravarjaM_japa.md">
-<details open><summary><h2>०७ पितृमन्त्रवर्जं जप ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पितृमन्त्रवर्जं जप ७
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/07_pitRmantravarjaM_japa.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+पितृमन्त्रवर्जं जप ७
+</details>
+
+<details><summary>Oldenberg</summary>
 
 7 [^4] . The murmuring with the omission of the verses belonging to the Manes.
 
 [^4]:  See chap. 1, 8.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/08_Rjavo_darbhA.md">
-<details open><summary><h2>०८ ऋजवो दर्भा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ऋजवो दर्भा ८
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/08_Rjavo_darbhA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+ऋजवो दर्भा ८
+</details>
+
+<details><summary>Oldenberg</summary>
 
 8. The Darbha blades are straight.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/09_yavaistilArtho.md">
-<details open><summary><h2>०९ यवैस्तिलार्थो ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 यवैस्तिलार्थो ९
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/09_yavaistilArtho.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+यवैस्तिलार्थो ९
+</details>
+
+<details><summary>Oldenberg</summary>
 
 9 [^5] . Barley is to be used instead of sesamum.
 
 [^5]:  See chap. 1, 3.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/10_dadhibadarAxatamishrAH_piNDA.md">
-<details open><summary><h2>१० दधिबदराक्षतमिश्राः पिण्डा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दधिबदराक्षतमिश्राः पिण्डा १०
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/10_dadhibadarAxatamishrAH_piNDA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+दधिबदराक्षतमिश्राः पिण्डा १०
+</details>
+
+<details><summary>Oldenberg</summary>
 
 10. The lumps are mixed with curds, jujube fruits, fried grain.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/11_nAndImukhAnpitRRnAvAhayiShya_ityAvAhane.md">
-<details open><summary><h2>११ नान्दीमुखान्पितॄनावाहयिष्य इत्यावाहने ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नान्दीमुखान्पितॄनावाहयिष्य इत्यावाहने ११
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/11_nAndImukhAnpitRRnAvAhayiShya_ityAvAhane.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नान्दीमुखान्पितॄनावाहयिष्य इत्यावाहने ११
+</details>
+
+<details><summary>Oldenberg</summary>
 
 11 [^6] . On inviting (the Manes, he should say), 'The Nāndīmukha (glad-faced?) Manes will I invite.'
 
 [^6]:  Concerning the invitation' (āvāhana) see the note on chap. 2, 5.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/12_nAndImukhAH_pitaraH_prIyantAmityaxayyasthAne.md">
-<details open><summary><h2>१२ नान्दीमुखाः पितरः प्रीयन्तामित्यक्षय्यस्थाने ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नान्दीमुखाः पितरः प्रीयन्तामित्यक्षय्यस्थाने १२
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/12_nAndImukhAH_pitaraH_prIyantAmityaxayyasthAne.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नान्दीमुखाः पितरः प्रीयन्तामित्यक्षय्यस्थाने १२
+</details>
+
+<details><summary>Oldenberg</summary>
 
 12 [^7] . 'May the Nāndīmukha Manes be rejoiced,' instead of 'imperishable.'
 
 [^7]:  See chap. 2, 5 and the note there.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/13_nAndImukhAnpitRRnvAchayiShya_iti_vAchane.md">
-<details open><summary><h2>१३ नान्दीमुखान्पितॄन्वाचयिष्य इति वाचने ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 नान्दीमुखान्पितॄन्वाचयिष्य इति वाचने १३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/13_nAndImukhAnpitRRnvAchayiShya_iti_vAchane.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+नान्दीमुखान्पितॄन्वाचयिष्य इति वाचने १३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 13 [^8] . 'The Nāndīmukha Manes will I make speak,' when he makes (the Brāhmaṇas) speak.
 
 [^8]:  'When he causes them to say Svadhā.' Nārāyaṇa. Comp. Āśv.-Gṛhya IV, 7, 30.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/14_sampannamiti_tRptiprashnaH.md">
-<details open><summary><h2>१४ सम्पन्नमिति तृप्तिप्रश्नः ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्पन्नमिति तृप्तिप्रश्नः १४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/14_sampannamiti_tRptiprashnaH.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+सम्पन्नमिति तृप्तिप्रश्नः १४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 14 [^9] . '(Was it) well done?' - thus are they to be asked whether they are satiated.
 
 [^9]:  Comp. chap. 2, 5.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/04/15_samAnamanyadaviruddhamiti.md">
-<details open><summary><h2>१५ समानमन्यदविरुद्धमिति ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 समानमन्यदविरुद्धमिति १५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/04/15_samAnamanyadaviruddhamiti.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+समानमन्यदविरुद्धमिति १५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 15. The rest is the same (as in the other kinds of Śrāddha rites), as far as it is not  (by contrary rules).
 
 </details>
-</div>
