--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/17.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/4/17.md
@@ -2,85 +2,104 @@
 title = "१७"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/17/01_AgrahAyaNyAM_pratyavarohed.md">
-<details open><summary><h2>०१ आग्रहायण्यां प्रत्यवरोहेद् ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आग्रहायण्यां प्रत्यवरोहेद् १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/17/01_AgrahAyaNyAM_pratyavarohed.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+आग्रहायण्यां प्रत्यवरोहेद् १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . On the Āgrahāyaṇī full moon day he shall redescend,
 
 [^1]:  17, 1. The Pratyavarohaṇa (i.e. redescent) here described is the ceremony performed at the end of the time during which sleeping on high bedsteads is prescribed (chap. 15, 22). Beginning from the Śrāvaṇī full moon till the Pratyavarohaṇa, the offerings to the Serpents mentioned above have to be repeated every day (chap. 15, 19); the Pratyavarohaṇa is the concluding ceremony of these rites devoted to the Serpents.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/17/02_rohiNyAM_proShThapadAsu_vA.md">
-<details open><summary><h2>०२ रोहिण्यां प्रोष्ठपदासु वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 रोहिण्यां प्रोष्ठपदासु वा २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/17/02_rohiNyAM_proShThapadAsu_vA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+रोहिण्यां प्रोष्ठपदासु वा २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. (Or) under (the Nakṣatra) Rohiṇī, or under the Proṣṭhapadās.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/17/03_prAtaH_shamIpalAshamadhUkeShIkApAmArgANAm.md">
-<details open><summary><h2>०३ प्रातः शमीपलाशमधूकेषीकापामार्गाणाम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 प्रातः शमीपलाशमधूकेषीकापामार्गाणां शिरीषोदुम्बरकुशतरुणबदरीणां च पूर्णमुष्टिमादाय सीतालोष्टं च
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/17/03_prAtaH_shamIpalAshamadhUkeShIkApAmArgANAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+प्रातः शमीपलाशमधूकेषीकापामार्गाणां शिरीषोदुम्बरकुशतरुणबदरीणां च पूर्णमुष्टिमादाय सीतालोष्टं च
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. In the morning, having taken a handfull of Śamī leaves, Madhūka flowers, reeds, Apāmārga plants, and of Śirīṣa, Udumbara, Kuśa shoots, and jujube fruits, and an earth-clod (taken) out of a furrow,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/17/04_udapAtre-vadhAya.md">
-<details open><summary><h2>०४ उदपात्रेऽवधाय ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 उदपात्रेऽवधाय ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/17/04_udapAtre-vadhAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+उदपात्रेऽवधाय ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. Having put (all that) into a water-pot,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/17/05_mahAvyAhRtIH_sAvitrIM_choddrutyApa.md">
-<details open><summary><h2>०५ महाव्याहृतीः सावित्रीं चोद्द्रुत्याप ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 महाव्याहृतीः सावित्रीं चोद्द्रुत्याप नः शोशु चदघमित्येतेन सूक्तेन तस्मिन्निमज्ज्यनिमज्ज्य प्रदक्षिणं शरण्येभ्यः पाप्मानमपहत्योत्तरतो निनयेन् ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/17/05_mahAvyAhRtIH_sAvitrIM_choddrutyApa.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+महाव्याहृतीः सावित्रीं चोद्द्रुत्याप नः शोशु चदघमित्येतेन सूक्तेन तस्मिन्निमज्ज्यनिमज्ज्य प्रदक्षिणं शरण्येभ्यः पाप्मानमपहत्योत्तरतो निनयेन् ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5 [^2] . And, after he has quickly repeated the Mahāvyāhṛtis and the Sāvitrī, having repeatedly immersed (it) therein with this hymn, 'May he burn away from us pain' (Rig-veda I, 97), he shall drive away the evil from the persons standing under his protection, from left to right, and pour out (the water) to the north.
 
 [^2]:  Saraṇyebhyo gṛhebhyaḥ (read, gṛhyebhyaḥ) sarvebhyaḥ sakāśāt, &c. Nārāyaṇa.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/4/17/06_madhuparko_daxiNA.md">
-<details open><summary><h2>०६ मधुपर्को दक्षिणा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मधुपर्को दक्षिणा ६
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/4/17/06_madhuparko_daxiNA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+मधुपर्को दक्षिणा ६
+</details>
+
+<details><summary>Oldenberg</summary>
 
 6. A Madhuparka is the fee for the sacrifice.
 
 </details>
-</div>
