--- a/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/03.md
+++ b/bAShkalam/shAnkhAyanam/sUtram/gRhyam/sarva-prastutiH/5/03.md
@@ -2,70 +2,86 @@
 title = "०३"
 
 +++
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/03/01_athArAme-gnimupasamAdhAya.md">
-<details open><summary><h2>०१ अथारामेऽग्निमुपसमाधाय ...{Loading}...</h2></summary>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथारामेऽग्निमुपसमाधाय १
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/03/01_athArAme-gnimupasamAdhAya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+अथारामेऽग्निमुपसमाधाय १
+</details>
+
+<details><summary>Oldenberg</summary>
 
 1 [^1] . Now at (the consecration of) a garden: having established the (sacred) fire (in that garden),
 
 [^1]:  3, 1 seqq. Comp. Āśvalāyana-Pariśiṣṭa IV, so. Nārāyaṇa uses for the ceremony here described the expressions Ārāmapratiṣṭhā, Ārāmotsarga.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/03/02_sthAlIpAkaM_shrapayitvA.md">
-<details open><summary><h2>०२ स्थालीपाकं श्रपयित्वा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स्थालीपाकं श्रपयित्वा २
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/03/02_sthAlIpAkaM_shrapayitvA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+स्थालीपाकं श्रपयित्वा २
+</details>
+
+<details><summary>Oldenberg</summary>
 
 2. (And) having prepared a mess of cooked food,
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/03/03_viShNave_svAhendrA_gnibhyAm.md">
-<details open><summary><h2>०३ विष्णवे स्वाहेन्द्रा ग्निभ्याम् ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 विष्णवे स्वाहेन्द्रा ग्निभ्यां स्वाहा विश्वकर्मणे स्वाहेति यान्वो नर इति प्रत्यृचं जुहुयाद् ३
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/03/03_viShNave_svAhendrA_gnibhyAm.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+विष्णवे स्वाहेन्द्रा ग्निभ्यां स्वाहा विश्वकर्मणे स्वाहेति यान्वो नर इति प्रत्यृचं जुहुयाद् ३
+</details>
+
+<details><summary>Oldenberg</summary>
 
 3. He shall sacrifice with (the formulas), 'To Viṣṇu svāhā! To Indra and Agni svāhā! To Viśvakarman svāhā!' (and with the verses), 'Whom the men' (Rig-veda III, 8, 6 seq.), verse by verse.
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/03/04_vanaspate_shatavalsha_ityabhimantrya.md">
-<details open><summary><h2>०४ वनस्पते शतवल्श इत्यभिमन्त्र्य ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वनस्पते शतवल्श इत्यभिमन्त्र्य ४
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/03/04_vanaspate_shatavalsha_ityabhimantrya.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+वनस्पते शतवल्श इत्यभिमन्त्र्य ४
+</details>
+
+<details><summary>Oldenberg</summary>
 
 4. He recites over (the garden), 'O tree with thy hundred branches' (Rig-veda III, 8, 11).
 
 </details>
-</div>
-<div class="js_include" includetitle="true" newlevelforh1="2" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/vishvAsa-prastutiH/5/03/05_hiraNyaM_daxiNA.md">
-<details open><summary><h2>०५ हिरण्यं दक्षिणा ...{Loading}...</h2></summary>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 हिरण्यं दक्षिणा ५
 </details>
-</div>
-<div class="js_include collapsed" newlevelforh1="3" title="Oldenberg" unfilled url="/vedAH_Rk/shAnkhAyanam/sUtram/gRhyam/oldenberg/5/03/05_hiraNyaM_daxiNA.md">
-<details><summary><h3>Oldenberg ...{Loading}...</h3></summary>
+
+<details><summary>मूलम्</summary>
+
+हिरण्यं दक्षिणा ५
+</details>
+
+<details><summary>Oldenberg</summary>
 
 5. The fee for the sacrifice is gold.
 
 </details>
-</div>
